--- a/front_end/core/i18n/locales/zh-HK.json
+++ b/front_end/core/i18n/locales/zh-HK.json
@@ -105,7 +105,7 @@
     "message": "網絡面板"
   },
   "core/common/Revealer.ts | securityPanel": {
-    "message": "Security panel"
+    "message": "安全性面板"
   },
   "core/common/Revealer.ts | sourcesPanel": {
     "message": "原始碼面板"
@@ -2798,9 +2798,6 @@
   "panels/application/BackgroundServiceView.ts | clear": {
     "message": "清除"
   },
-  "panels/application/BackgroundServiceView.ts | clickTheRecordButtonSOrHitSTo": {
-    "message": "按一下記錄按鈕 {PH1} 或按 {PH2} 鍵以開始記錄。"
-  },
   "panels/application/BackgroundServiceView.ts | devtoolsWillRecordAllSActivity": {
     "message": "DevTools 將記錄所有{PH1}活動最多 3 日，即使在關閉時亦然。"
   },
@@ -2812,9 +2809,6 @@
   },
   "panels/application/BackgroundServiceView.ts | instanceId": {
     "message": "例項 ID"
-  },
-  "panels/application/BackgroundServiceView.ts | learnMore": {
-    "message": "瞭解詳情"
   },
   "panels/application/BackgroundServiceView.ts | noMetadataForThisEvent": {
     "message": "此事件沒有元數據"
@@ -2947,9 +2941,6 @@
   },
   "panels/application/IndexedDBViews.ts | objectStores": {
     "message": "物件儲存"
-  },
-  "panels/application/IndexedDBViews.ts | pleaseConfirmDeleteOfSDatabase": {
-    "message": "請確認刪除「{PH1}」資料庫。"
   },
   "panels/application/IndexedDBViews.ts | primaryKey": {
     "message": "主鍵"
@@ -3236,12 +3227,6 @@
   "panels/application/SharedStorageEventsView.ts | clickToDisplayBody": {
     "message": "按一下任何共用儲存空間事件即可顯示事件參數。"
   },
-  "panels/application/SharedStorageItemsView.ts | key": {
-    "message": "鍵"
-  },
-  "panels/application/SharedStorageItemsView.ts | selectAValueToPreview": {
-    "message": "選取要預覽的值"
-  },
   "panels/application/SharedStorageItemsView.ts | sharedStorage": {
     "message": "共用儲存空間"
   },
@@ -3257,17 +3242,8 @@
   "panels/application/SharedStorageItemsView.ts | sharedStorageItemEdited": {
     "message": "編輯咗儲存空間項目。"
   },
-  "panels/application/SharedStorageItemsView.ts | sharedStorageItems": {
-    "message": "共用儲存空間項目"
-  },
   "panels/application/SharedStorageItemsView.ts | sharedStorageItemsCleared": {
     "message": "清除咗共用儲存空間項目"
-  },
-  "panels/application/SharedStorageItemsView.ts | sharedStorageNumberEntries": {
-    "message": "表格入面顯示嘅項目數目：{PH1} 個"
-  },
-  "panels/application/SharedStorageItemsView.ts | value": {
-    "message": "值"
   },
   "panels/application/SharedStorageListTreeElement.ts | sharedStorage": {
     "message": "共用儲存空間"
@@ -4262,9 +4238,6 @@
   "panels/application/components/TrustTokensView.ts | issuer": {
     "message": "發出者"
   },
-  "panels/application/components/TrustTokensView.ts | noTrustTokensStored": {
-    "message": "目前並未儲存任何 Private State Token。"
-  },
   "panels/application/components/TrustTokensView.ts | storedTokenCount": {
     "message": "已儲存的憑證數量"
   },
@@ -4950,7 +4923,7 @@
     "message": "DOM 中斷點清單"
   },
   "panels/browser_debugger/DOMBreakpointsSidebarPane.ts | noBreakpoints": {
-    "message": "No DOM breakpoints set"
+    "message": "未設定 DOM 中斷點"
   },
   "panels/browser_debugger/DOMBreakpointsSidebarPane.ts | nodeRemoved": {
     "message": "已移除節點"
@@ -5067,19 +5040,19 @@
     "message": "{PH1} (來自來源對應)"
   },
   "panels/changes/ChangesView.ts | binaryDataDescription": {
-    "message": "The changes tab doesn't show binary data changes"
+    "message": "「變更」分頁不會顯示二進位資料變更"
   },
   "panels/changes/ChangesView.ts | changesViewDescription": {
-    "message": "On this page you can track code changes made within DevTools."
+    "message": "你可在此頁追蹤透過開發人員工具所作的程式碼變更。"
   },
   "panels/changes/ChangesView.ts | copy": {
     "message": "複製"
   },
   "panels/changes/ChangesView.ts | noChanges": {
-    "message": "No changes yet"
+    "message": "未有任何變更"
   },
   "panels/changes/ChangesView.ts | noTextualDiff": {
-    "message": "No textual diff available"
+    "message": "沒有文字差異比較"
   },
   "panels/changes/ChangesView.ts | sDeletions": {
     "message": "{n,plural, =1{# 行已刪除的程式碼 (-)}other{# 行已刪除的程式碼 (-)}}"
@@ -5298,7 +5271,7 @@
     "message": " M<XX>"
   },
   "panels/console/ConsoleViewMessage.ts | SeeIssueInCookieReport": {
-    "message": "Click to open privacy and security panel and show third-party cookie report"
+    "message": "按一下即可開啟「私隱權和安全性」面板，並顯示第三方 Cookie 報告"
   },
   "panels/console/ConsoleViewMessage.ts | assertionFailed": {
     "message": "聲明失敗： "
@@ -6747,7 +6720,7 @@
     "message": "堆疊追蹤"
   },
   "panels/explain/components/ConsoleInsight.ts | timedOut": {
-    "message": "Generating a response took too long. Please try again."
+    "message": "生成回應的時間太長，請再試一次。"
   },
   "panels/explain/components/ConsoleInsight.ts | turnOnInSettings": {
     "message": "開啟{PH1}即可獲取 AI 協助，瞭解並應對控制台警告和錯誤訊息。"
@@ -7911,7 +7884,7 @@
     "message": "加「{PH1}」"
   },
   "panels/mobile_throttling/ThrottlingManager.ts | calibrate": {
-    "message": "Calibrate…"
+    "message": "校正…"
   },
   "panels/mobile_throttling/ThrottlingManager.ts | cpuThrottling": {
     "message": "CPU 節流"
@@ -7935,7 +7908,7 @@
     "message": "離線"
   },
   "panels/mobile_throttling/ThrottlingManager.ts | recalibrate": {
-    "message": "Recalibrate…"
+    "message": "重新校正…"
   },
   "panels/mobile_throttling/ThrottlingManager.ts | recommendedThrottling": {
     "message": "{PH1} – 建議"
@@ -8895,7 +8868,7 @@
     "message": "此要求沒有 Cookie。"
   },
   "panels/network/RequestInitiatorView.ts | noInitiator": {
-    "message": "No initiator data"
+    "message": "沒有啟動器資料"
   },
   "panels/network/RequestInitiatorView.ts | requestCallStack": {
     "message": "要求呼叫堆疊"
@@ -8961,10 +8934,10 @@
     "message": "無法載入回應資料"
   },
   "panels/network/RequestResponseView.ts | noPreview": {
-    "message": "Nothing to preview"
+    "message": "沒有可預覽的內容"
   },
   "panels/network/RequestResponseView.ts | thisRequestHasNoResponseData": {
-    "message": "This request has no response data available"
+    "message": "此要求沒有可用的回應資料"
   },
   "panels/network/RequestTimingView.ts | cacheStorageCacheNameS": {
     "message": "快取儲存空間快取名稱：{PH1}"
@@ -10139,9 +10112,6 @@
   "panels/profiler/ProfilesPanel.ts | cantLoadProfileWhileAnother": {
     "message": "正在記錄另一個設定檔時，無法載入設定檔。"
   },
-  "panels/profiler/ProfilesPanel.ts | profileLoadingFailedS": {
-    "message": "無法載入設定檔：{PH1}。"
-  },
   "panels/profiler/ProfilesPanel.ts | profiles": {
     "message": "設定檔"
   },
@@ -10251,7 +10221,7 @@
     "message": "儲存"
   },
   "panels/protocol_monitor/ProtocolMonitor.ts | selectAMessageToView": {
-    "message": "Select a message to see its details"
+    "message": "選擇訊息以查看詳情"
   },
   "panels/protocol_monitor/ProtocolMonitor.ts | selectTarget": {
     "message": "選取目標"
@@ -10290,7 +10260,7 @@
     "message": "複製錄製內容或已選取的步驟"
   },
   "panels/recorder/RecorderController.ts | createRecording": {
-    "message": "Create recording"
+    "message": "建立錄製內容"
   },
   "panels/recorder/RecorderController.ts | deleteRecording": {
     "message": "刪除錄製內容"
@@ -10308,13 +10278,13 @@
     "message": "取得擴充程式…"
   },
   "panels/recorder/RecorderController.ts | header": {
-    "message": "Nothing recorded yet"
+    "message": "未錄製任何內容"
   },
   "panels/recorder/RecorderController.ts | importRecording": {
     "message": "匯入錄製內容"
   },
   "panels/recorder/RecorderController.ts | learnMore": {
-    "message": "Learn more"
+    "message": "瞭解詳情"
   },
   "panels/recorder/RecorderController.ts | noRecordings": {
     "message": "(沒有任何記錄內容)"
@@ -10323,7 +10293,7 @@
     "message": "記錄內容"
   },
   "panels/recorder/RecorderController.ts | recordingDescription": {
-    "message": "Use recordings to create automated end-to-end tests or performance traces."
+    "message": "使用錄製內容建立自動端對端測試或效能追蹤記錄。"
   },
   "panels/recorder/RecorderController.ts | replayRecording": {
     "message": "重播錄製內容"
@@ -11496,7 +11466,7 @@
     "message": "控制器訊息、相關堆疊追蹤、相關原始碼及相關網絡標題會傳送至 Google 以生成說明。另外，資料可能會送交人手審查以改善有關功能。"
   },
   "panels/settings/AISettingsTab.ts | consoleInsightsSendsDataNoLogging": {
-    "message": "The console message, associated stack trace, related source code, and the associated network headers are sent to Google to generate explanations. This data will not be used to improve Google’s AI models."
+    "message": "控制器訊息、相關堆疊追蹤、相關原始碼及相關網絡標題會傳送至 Google 以生成說明。有關資料不會用於改善 Google AI 模型。"
   },
   "panels/settings/AISettingsTab.ts | dataCollection": {
     "message": "視乎所在區域而定，Google 可能會停止收集資料"
@@ -11532,7 +11502,7 @@
     "message": "所檢查頁面能透過 Web API、網絡要求、檔案和效能追蹤記錄存取的任何資料會傳送至 Google，以生成剖析。另外，資料可能會送交人手審查以改善有關功能。請勿在包含個人或敏感資料的頁面使用此功能。"
   },
   "panels/settings/AISettingsTab.ts | freestylerSendsDataNoLogging": {
-    "message": "Any data the inspected page can access via Web APIs, network requests, files, and performance traces are sent to Google to generate explanations. This data will not be used to improve Google’s AI models."
+    "message": "所檢查頁面能透過 Web API、網絡要求、檔案和效能追蹤記錄存取的任何資料，都會傳送至 Google 以生成剖析。有關資料不會用於改善 Google AI 模型。"
   },
   "panels/settings/AISettingsTab.ts | helpUnderstandConsole": {
     "message": "助你瞭解和修正控制器警告及錯誤"
@@ -12259,15 +12229,6 @@
   },
   "panels/sources/NavigatorView.ts | actionCannotBeUndone": {
     "message": "此操作無法復原。"
-  },
-  "panels/sources/NavigatorView.ts | areYouSureYouWantToDeleteFolder": {
-    "message": "確定要刪除此資料夾和當中的內容嗎？"
-  },
-  "panels/sources/NavigatorView.ts | areYouSureYouWantToDeleteThis": {
-    "message": "確定要刪除此檔案嗎？"
-  },
-  "panels/sources/NavigatorView.ts | areYouSureYouWantToExcludeThis": {
-    "message": "確定要排除此資料夾嗎？"
   },
   "panels/sources/NavigatorView.ts | areYouSureYouWantToRemoveThis": {
     "message": "要從 Workspace 移除「{PH1}」嗎？"
@@ -13041,7 +13002,7 @@
     "message": "此發佈途徑包含從 Server-Timing 網絡回應標題中提取的時間資料。相應的開始時間只是估算值，未必準確。"
   },
   "panels/timeline/ThirdPartyTreeView.ts | firstOrThirdPartyName": {
-    "message": "1st / 3rd party"
+    "message": "第一方/第三方"
   },
   "panels/timeline/ThirdPartyTreeView.ts | selfTime": {
     "message": "個別時間"
@@ -13254,7 +13215,7 @@
     "message": "描述"
   },
   "panels/timeline/TimelinePanel.ts | dimThirdParties": {
-    "message": "Dim 3rd parties"
+    "message": "校暗第三方元素"
   },
   "panels/timeline/TimelinePanel.ts | disableJavascriptSamples": {
     "message": "停用 JavaScript 範例"
@@ -13374,7 +13335,7 @@
     "message": "正在停止時間軸…"
   },
   "panels/timeline/TimelinePanel.ts | thirdPartiesByThirdPartyWeb": {
-    "message": "3rd parties classified by third-party-web"
+    "message": "按 third-party-web 分類的第三方"
   },
   "panels/timeline/TimelinePanel.ts | time": {
     "message": "時間"
@@ -13653,7 +13614,7 @@
     "message": "{PH1}"
   },
   "panels/timeline/TimelineUIUtils.ts | entity": {
-    "message": "Third party"
+    "message": "第三方"
   },
   "panels/timeline/TimelineUIUtils.ts | entryIsHidden": {
     "message": "(已隱藏項目)"
@@ -13817,9 +13778,6 @@
   "panels/timeline/TimelineUIUtils.ts | selectorStatsTitle": {
     "message": "選取器統計資料"
   },
-  "panels/timeline/TimelineUIUtils.ts | selfTime": {
-    "message": "個別時間"
-  },
   "panels/timeline/TimelineUIUtils.ts | size": {
     "message": "大小"
   },
@@ -13833,7 +13791,7 @@
     "message": "樣式表網址"
   },
   "panels/timeline/TimelineUIUtils.ts | thirdPartyTable": {
-    "message": "1st / 3rd party table"
+    "message": "第一方/第三方表格"
   },
   "panels/timeline/TimelineUIUtils.ts | timeSpentInRendering": {
     "message": "輸出使用時間"
@@ -13849,9 +13807,6 @@
   },
   "panels/timeline/TimelineUIUtils.ts | timestamp": {
     "message": "時間戳記"
-  },
-  "panels/timeline/TimelineUIUtils.ts | totalTime": {
-    "message": "總時間"
   },
   "panels/timeline/TimelineUIUtils.ts | traceEvent": {
     "message": "追蹤事件"
@@ -13920,7 +13875,7 @@
     "message": "移除子導航標示"
   },
   "panels/timeline/components/CPUThrottlingSelector.ts | calibrate": {
-    "message": "Calibrate…"
+    "message": "校正…"
   },
   "panels/timeline/components/CPUThrottlingSelector.ts | cpu": {
     "message": "CPU：{PH1}"
@@ -13932,7 +13887,7 @@
     "message": "已校正的預設值"
   },
   "panels/timeline/components/CPUThrottlingSelector.ts | recalibrate": {
-    "message": "Recalibrate…"
+    "message": "重新校正…"
   },
   "panels/timeline/components/CPUThrottlingSelector.ts | recommendedThrottling": {
     "message": "{PH1} – 建議"
@@ -14424,7 +14379,7 @@
     "message": "已編碼的資料"
   },
   "panels/timeline/components/NetworkRequestDetails.ts | entity": {
-    "message": "Third party"
+    "message": "第三方"
   },
   "panels/timeline/components/NetworkRequestDetails.ts | fromCache": {
     "message": "來自快取"
@@ -14568,16 +14523,16 @@
     "message": "分析資料是實驗版功能，你的意見將有助我們改善使用體驗。"
   },
   "panels/timeline/components/SidebarSingleInsightSet.ts | dismissTitle": {
-    "message": "Dismiss"
+    "message": "關閉"
   },
   "panels/timeline/components/SidebarSingleInsightSet.ts | fieldMismatchNotice": {
-    "message": "There are many reasons why local and field metrics [may not match](https://web.dev/articles/lab-and-field-data-differences). Adjust [throttling settings and device emulation](https://developer.chrome.com/docs/devtools/device-mode) to analyze traces more similar to the average user's environment."
+    "message": "本機和實際數據[不符](https://web.dev/articles/lab-and-field-data-differences)有很多原因。如要分析更貼近一般使用者環境的追蹤記錄，請調整[節流設定和裝置模擬器](https://developer.chrome.com/docs/devtools/device-mode)。"
   },
   "panels/timeline/components/SidebarSingleInsightSet.ts | fieldMismatchTitle": {
-    "message": "Field & local metrics mismatch"
+    "message": "實際和本機數據不符"
   },
   "panels/timeline/components/SidebarSingleInsightSet.ts | fieldScoreLabel": {
-    "message": "Field ({PH1})"
+    "message": "實際 ({PH1})"
   },
   "panels/timeline/components/SidebarSingleInsightSet.ts | metricScore": {
     "message": "{PH1}：{PH2} (分數等級：{PH3})"
@@ -15885,7 +15840,7 @@
     "message": "排序方式"
   },
   "ui/legacy/components/data_grid/DataGrid.ts | sortableColumn": {
-    "message": "Sortable column. Press enter to apply sorting filter"
+    "message": "可排序的資料欄。按 Enter 鍵就可以套用排序篩選器"
   },
   "ui/legacy/components/data_grid/ShowMoreDataGridNode.ts | showAllD": {
     "message": "顯示全部 ({PH1})"
@@ -16221,10 +16176,10 @@
     "message": "尋找"
   },
   "ui/legacy/components/source_frame/PreviewFactory.ts | failedToLoadData": {
-    "message": "Failed to load data"
+    "message": "無法載入資料"
   },
   "ui/legacy/components/source_frame/PreviewFactory.ts | nothingToPreview": {
-    "message": "Nothing to preview"
+    "message": "沒有可預覽的內容"
   },
   "ui/legacy/components/source_frame/ResourceSourceFrame.ts | find": {
     "message": "尋找"
