--- a/front_end/core/i18n/locales/ca.json
+++ b/front_end/core/i18n/locales/ca.json
@@ -105,7 +105,7 @@
     "message": "Tauler Xarxa"
   },
   "core/common/Revealer.ts | securityPanel": {
-    "message": "Security panel"
+    "message": "Tauler de seguretat"
   },
   "core/common/Revealer.ts | sourcesPanel": {
     "message": "Tauler Fonts"
@@ -2798,9 +2798,6 @@
   "panels/application/BackgroundServiceView.ts | clear": {
     "message": "Esborra"
   },
-  "panels/application/BackgroundServiceView.ts | clickTheRecordButtonSOrHitSTo": {
-    "message": "Fes clic al botó de gravació {PH1} o selecciona {PH2} per iniciar una gravació."
-  },
   "panels/application/BackgroundServiceView.ts | devtoolsWillRecordAllSActivity": {
     "message": "DevTools enregistrarà tota l'activitat de {PH1} de fins a 3 dies, fins i tot si l'aplicació està tancada."
   },
@@ -2812,9 +2809,6 @@
   },
   "panels/application/BackgroundServiceView.ts | instanceId": {
     "message": "Identificador d'instància"
-  },
-  "panels/application/BackgroundServiceView.ts | learnMore": {
-    "message": "Més informació"
   },
   "panels/application/BackgroundServiceView.ts | noMetadataForThisEvent": {
     "message": "Aquest esdeveniment no té metadades"
@@ -2947,9 +2941,6 @@
   },
   "panels/application/IndexedDBViews.ts | objectStores": {
     "message": "Emmagatzematges d'objectes"
-  },
-  "panels/application/IndexedDBViews.ts | pleaseConfirmDeleteOfSDatabase": {
-    "message": "Confirma si vols suprimir la base de dades \"{PH1}\"."
   },
   "panels/application/IndexedDBViews.ts | primaryKey": {
     "message": "Clau principal"
@@ -3236,12 +3227,6 @@
   "panels/application/SharedStorageEventsView.ts | clickToDisplayBody": {
     "message": "Fes clic en qualsevol esdeveniment d'emmagatzematge compartit per mostrar els paràmetres de l'esdeveniment."
   },
-  "panels/application/SharedStorageItemsView.ts | key": {
-    "message": "Clau"
-  },
-  "panels/application/SharedStorageItemsView.ts | selectAValueToPreview": {
-    "message": "Selecciona un valor per previsualitzar-lo"
-  },
   "panels/application/SharedStorageItemsView.ts | sharedStorage": {
     "message": "Emmagatzematge compartit"
   },
@@ -3257,17 +3242,8 @@
   "panels/application/SharedStorageItemsView.ts | sharedStorageItemEdited": {
     "message": "L'element d'emmagatzematge s'ha editat."
   },
-  "panels/application/SharedStorageItemsView.ts | sharedStorageItems": {
-    "message": "Elements de l'emmagatzematge compartit"
-  },
   "panels/application/SharedStorageItemsView.ts | sharedStorageItemsCleared": {
     "message": "Els elements de l'emmagatzematge compartit s'han esborrat"
-  },
-  "panels/application/SharedStorageItemsView.ts | sharedStorageNumberEntries": {
-    "message": "Nombre d'entrades que es mostren a la taula: {PH1}"
-  },
-  "panels/application/SharedStorageItemsView.ts | value": {
-    "message": "Valor"
   },
   "panels/application/SharedStorageListTreeElement.ts | sharedStorage": {
     "message": "Emmagatzematge compartit"
@@ -4262,9 +4238,6 @@
   "panels/application/components/TrustTokensView.ts | issuer": {
     "message": "Emissor"
   },
-  "panels/application/components/TrustTokensView.ts | noTrustTokensStored": {
-    "message": "En aquest moment, no s'emmagatzema cap testimoni d'estat privat."
-  },
   "panels/application/components/TrustTokensView.ts | storedTokenCount": {
     "message": "Nombre de testimonis emmagatzemats"
   },
@@ -4950,7 +4923,7 @@
     "message": "Llista dels punts de ruptura de DOM"
   },
   "panels/browser_debugger/DOMBreakpointsSidebarPane.ts | noBreakpoints": {
-    "message": "No DOM breakpoints set"
+    "message": "No s'ha establert cap punt de ruptura del DOM"
   },
   "panels/browser_debugger/DOMBreakpointsSidebarPane.ts | nodeRemoved": {
     "message": "S'ha suprimit el node"
@@ -5067,19 +5040,19 @@
     "message": "{PH1} (del mapa d'origen)"
   },
   "panels/changes/ChangesView.ts | binaryDataDescription": {
-    "message": "The changes tab doesn't show binary data changes"
+    "message": "La pestanya Canvis no mostra els canvis en les dades binàries"
   },
   "panels/changes/ChangesView.ts | changesViewDescription": {
-    "message": "On this page you can track code changes made within DevTools."
+    "message": "En aquesta pàgina pots fer un seguiment dels canvis de codi que s'han fet a DevTools."
   },
   "panels/changes/ChangesView.ts | copy": {
     "message": "Copia"
   },
   "panels/changes/ChangesView.ts | noChanges": {
-    "message": "No changes yet"
+    "message": "Encara no hi ha cap canvi"
   },
   "panels/changes/ChangesView.ts | noTextualDiff": {
-    "message": "No textual diff available"
+    "message": "No hi ha cap diferència textual disponible"
   },
   "panels/changes/ChangesView.ts | sDeletions": {
     "message": "{n,plural, =1{# supressió (-)}other{# supressions (-)}}"
@@ -5298,7 +5271,7 @@
     "message": " M<XX>"
   },
   "panels/console/ConsoleViewMessage.ts | SeeIssueInCookieReport": {
-    "message": "Click to open privacy and security panel and show third-party cookie report"
+    "message": "Fes clic per obrir el tauler de privadesa i seguretat i mostrar l'informe de galetes de tercers"
   },
   "panels/console/ConsoleViewMessage.ts | assertionFailed": {
     "message": "L'asserció ha fallat: "
@@ -6747,7 +6720,7 @@
     "message": "Traça de la pila"
   },
   "panels/explain/components/ConsoleInsight.ts | timedOut": {
-    "message": "Generating a response took too long. Please try again."
+    "message": "La generació d'una resposta ha trigat massa. Torna-ho a provar."
   },
   "panels/explain/components/ConsoleInsight.ts | turnOnInSettings": {
     "message": "Activa {PH1} per rebre assistència d'IA a fi d'entendre i corregir els advertiments i els errors de la consola."
@@ -7911,7 +7884,7 @@
     "message": "Afegeix {PH1}"
   },
   "panels/mobile_throttling/ThrottlingManager.ts | calibrate": {
-    "message": "Calibrate…"
+    "message": "Calibra…"
   },
   "panels/mobile_throttling/ThrottlingManager.ts | cpuThrottling": {
     "message": "Limitació de CPU"
@@ -7935,7 +7908,7 @@
     "message": "Sense connexió"
   },
   "panels/mobile_throttling/ThrottlingManager.ts | recalibrate": {
-    "message": "Recalibrate…"
+    "message": "Torna a calibrar…"
   },
   "panels/mobile_throttling/ThrottlingManager.ts | recommendedThrottling": {
     "message": "{PH1} (opció recomanada)"
@@ -8895,7 +8868,7 @@
     "message": "Aquesta sol·licitud no té cap galeta."
   },
   "panels/network/RequestInitiatorView.ts | noInitiator": {
-    "message": "No initiator data"
+    "message": "No hi ha dades d'iniciador"
   },
   "panels/network/RequestInitiatorView.ts | requestCallStack": {
     "message": "Pila de crides de la sol·licitud"
@@ -8961,10 +8934,10 @@
     "message": "No s'han pogut carregar les dades de resposta"
   },
   "panels/network/RequestResponseView.ts | noPreview": {
-    "message": "Nothing to preview"
+    "message": "No hi ha res per previsualitzar"
   },
   "panels/network/RequestResponseView.ts | thisRequestHasNoResponseData": {
-    "message": "This request has no response data available"
+    "message": "Aquesta sol·licitud no té dades de resposta disponibles"
   },
   "panels/network/RequestTimingView.ts | cacheStorageCacheNameS": {
     "message": "Nom de l'emmagatzemament a la memòria cau: {PH1}"
@@ -10139,9 +10112,6 @@
   "panels/profiler/ProfilesPanel.ts | cantLoadProfileWhileAnother": {
     "message": "No es pot carregar el perfil mentre un altre perfil s'està enregistrant."
   },
-  "panels/profiler/ProfilesPanel.ts | profileLoadingFailedS": {
-    "message": "No s'ha pogut carregar el perfil: {PH1}."
-  },
   "panels/profiler/ProfilesPanel.ts | profiles": {
     "message": "Perfils"
   },
@@ -10251,7 +10221,7 @@
     "message": "Desa"
   },
   "panels/protocol_monitor/ProtocolMonitor.ts | selectAMessageToView": {
-    "message": "Select a message to see its details"
+    "message": "Selecciona un missatge per veure'n els detalls"
   },
   "panels/protocol_monitor/ProtocolMonitor.ts | selectTarget": {
     "message": "Selecciona un objectiu"
@@ -10290,7 +10260,7 @@
     "message": "Copia la gravació o el pas seleccionat"
   },
   "panels/recorder/RecorderController.ts | createRecording": {
-    "message": "Create recording"
+    "message": "Crea un registre"
   },
   "panels/recorder/RecorderController.ts | deleteRecording": {
     "message": "Suprimeix la gravació"
@@ -10308,13 +10278,13 @@
     "message": "Obtén extensions…"
   },
   "panels/recorder/RecorderController.ts | header": {
-    "message": "Nothing recorded yet"
+    "message": "Encara no s'ha registrat res"
   },
   "panels/recorder/RecorderController.ts | importRecording": {
     "message": "Importa una gravació"
   },
   "panels/recorder/RecorderController.ts | learnMore": {
-    "message": "Learn more"
+    "message": "Més informació"
   },
   "panels/recorder/RecorderController.ts | noRecordings": {
     "message": "No hi ha cap gravació"
@@ -10323,7 +10293,7 @@
     "message": "gravacions"
   },
   "panels/recorder/RecorderController.ts | recordingDescription": {
-    "message": "Use recordings to create automated end-to-end tests or performance traces."
+    "message": "Utilitza registres per crear proves d'extrem a extrem automatitzades o traces de rendiment."
   },
   "panels/recorder/RecorderController.ts | replayRecording": {
     "message": "Torna a reproduir la gravació"
@@ -11496,7 +11466,7 @@
     "message": "El missatge de la consola, la traça de la pila associada, el codi font relacionat i els encapçalaments de xarxa associats s'envien a Google per generar explicacions. És possible que revisors humans vegin aquestes dades per millorar aquesta funció."
   },
   "panels/settings/AISettingsTab.ts | consoleInsightsSendsDataNoLogging": {
-    "message": "The console message, associated stack trace, related source code, and the associated network headers are sent to Google to generate explanations. This data will not be used to improve Google’s AI models."
+    "message": "El missatge de la consola, la traça de la pila associada, el codi font relacionat i els encapçalaments de xarxa associats s'envien a Google per generar explicacions. Aquesta informació no s'utilitzarà per millorar els models d'IA de Google."
   },
   "panels/settings/AISettingsTab.ts | dataCollection": {
     "message": "En funció de la teva regió, pot ser que Google s'abstingui de recollir dades"
@@ -11532,7 +11502,7 @@
     "message": "Qualsevol informació a què la pàgina inspeccionada pugui accedir mitjançant les API web, les sol·licituds de xarxa, els fitxers i les traces de rendiment s'envia a Google per generar explicacions. És possible que revisors humans vegin aquestes dades per millorar aquesta funció. No la utilitzis en pàgines amb informació personal o sensible."
   },
   "panels/settings/AISettingsTab.ts | freestylerSendsDataNoLogging": {
-    "message": "Any data the inspected page can access via Web APIs, network requests, files, and performance traces are sent to Google to generate explanations. This data will not be used to improve Google’s AI models."
+    "message": "Qualsevol informació a què la pàgina inspeccionada pugui accedir mitjançant les API web, les sol·licituds de xarxa, els fitxers i les traces de rendiment s'envia a Google per generar explicacions. Aquesta informació no s'utilitzarà per millorar els models d'IA de Google."
   },
   "panels/settings/AISettingsTab.ts | helpUnderstandConsole": {
     "message": "T'ajuda a entendre i corregir els advertiments i els errors de la consola"
@@ -12259,15 +12229,6 @@
   },
   "panels/sources/NavigatorView.ts | actionCannotBeUndone": {
     "message": "Aquesta acció no es pot desfer."
-  },
-  "panels/sources/NavigatorView.ts | areYouSureYouWantToDeleteFolder": {
-    "message": "Confirmes que vols suprimir aquesta carpeta i el seu contingut?"
-  },
-  "panels/sources/NavigatorView.ts | areYouSureYouWantToDeleteThis": {
-    "message": "Confirmes que vols suprimir aquest fitxer?"
-  },
-  "panels/sources/NavigatorView.ts | areYouSureYouWantToExcludeThis": {
-    "message": "Confirmes que vols excloure aquesta carpeta?"
   },
   "panels/sources/NavigatorView.ts | areYouSureYouWantToRemoveThis": {
     "message": "Vols suprimir {PH1} de l'àrea de treball?"
@@ -13041,7 +13002,7 @@
     "message": "Aquesta pista conté els temps de les capçaleres de resposta de la xarxa Temps del servidor. Les hores d'inici corresponents només són estimacions i és possible que no siguin precises."
   },
   "panels/timeline/ThirdPartyTreeView.ts | firstOrThirdPartyName": {
-    "message": "1st / 3rd party"
+    "message": "Pròpies o de tercers"
   },
   "panels/timeline/ThirdPartyTreeView.ts | selfTime": {
     "message": "Temps individual"
@@ -13254,7 +13215,7 @@
     "message": "Descripció"
   },
   "panels/timeline/TimelinePanel.ts | dimThirdParties": {
-    "message": "Dim 3rd parties"
+    "message": "Reduir la visibilitat dels tercers"
   },
   "panels/timeline/TimelinePanel.ts | disableJavascriptSamples": {
     "message": "Desactiva les mostres de JavaScript"
@@ -13374,7 +13335,7 @@
     "message": "S'està aturant la cronologia…"
   },
   "panels/timeline/TimelinePanel.ts | thirdPartiesByThirdPartyWeb": {
-    "message": "3rd parties classified by third-party-web"
+    "message": "Tercers classificats per un lloc web de tercers"
   },
   "panels/timeline/TimelinePanel.ts | time": {
     "message": "Hora"
@@ -13653,7 +13614,7 @@
     "message": "{PH1}"
   },
   "panels/timeline/TimelineUIUtils.ts | entity": {
-    "message": "Third party"
+    "message": "Tercers"
   },
   "panels/timeline/TimelineUIUtils.ts | entryIsHidden": {
     "message": "(l'entrada està amagada)"
@@ -13817,9 +13778,6 @@
   "panels/timeline/TimelineUIUtils.ts | selectorStatsTitle": {
     "message": "Estadístiques del selector"
   },
-  "panels/timeline/TimelineUIUtils.ts | selfTime": {
-    "message": "Temps individual"
-  },
   "panels/timeline/TimelineUIUtils.ts | size": {
     "message": "Mida"
   },
@@ -13833,7 +13791,7 @@
     "message": "URL del full d'estil"
   },
   "panels/timeline/TimelineUIUtils.ts | thirdPartyTable": {
-    "message": "1st / 3rd party table"
+    "message": "Taula de pròpies o de tercers"
   },
   "panels/timeline/TimelineUIUtils.ts | timeSpentInRendering": {
     "message": "Temps dedicat a la renderització"
@@ -13849,9 +13807,6 @@
   },
   "panels/timeline/TimelineUIUtils.ts | timestamp": {
     "message": "Marca de temps"
-  },
-  "panels/timeline/TimelineUIUtils.ts | totalTime": {
-    "message": "Temps total"
   },
   "panels/timeline/TimelineUIUtils.ts | traceEvent": {
     "message": "Esdeveniment de traça"
@@ -13920,7 +13875,7 @@
     "message": "Suprimeix les rutes de navegació secundàries"
   },
   "panels/timeline/components/CPUThrottlingSelector.ts | calibrate": {
-    "message": "Calibrate…"
+    "message": "Calibra…"
   },
   "panels/timeline/components/CPUThrottlingSelector.ts | cpu": {
     "message": "CPU: {PH1}"
@@ -13932,7 +13887,7 @@
     "message": "Valors predefinits calibrats"
   },
   "panels/timeline/components/CPUThrottlingSelector.ts | recalibrate": {
-    "message": "Recalibrate…"
+    "message": "Torna a calibrar…"
   },
   "panels/timeline/components/CPUThrottlingSelector.ts | recommendedThrottling": {
     "message": "{PH1} (opció recomanada)"
@@ -14424,7 +14379,7 @@
     "message": "Dades codificades"
   },
   "panels/timeline/components/NetworkRequestDetails.ts | entity": {
-    "message": "Third party"
+    "message": "Tercers"
   },
   "panels/timeline/components/NetworkRequestDetails.ts | fromCache": {
     "message": "De la memòria cau"
@@ -14568,16 +14523,16 @@
     "message": "Insights és una funció experimental. Els teus suggeriments ens ajudaran a millorar-la."
   },
   "panels/timeline/components/SidebarSingleInsightSet.ts | dismissTitle": {
-    "message": "Dismiss"
+    "message": "Ignora"
   },
   "panels/timeline/components/SidebarSingleInsightSet.ts | fieldMismatchNotice": {
-    "message": "There are many reasons why local and field metrics [may not match](https://web.dev/articles/lab-and-field-data-differences). Adjust [throttling settings and device emulation](https://developer.chrome.com/docs/devtools/device-mode) to analyze traces more similar to the average user's environment."
+    "message": "Hi ha molts motius pels quals [és possible que no coincideixin](https://web.dev/articles/lab-and-field-data-differences) les mètriques locals i de camp. Ajusta la [configuració de la limitació i l'emulació de dispositius](https://developer.chrome.com/docs/devtools/device-mode) per analitzar traces més semblants a l'entorn de l'usuari mitjà."
   },
   "panels/timeline/components/SidebarSingleInsightSet.ts | fieldMismatchTitle": {
-    "message": "Field & local metrics mismatch"
+    "message": "Les mètriques locals i de camp no coincideixen"
   },
   "panels/timeline/components/SidebarSingleInsightSet.ts | fieldScoreLabel": {
-    "message": "Field ({PH1})"
+    "message": "Camp ({PH1})"
   },
   "panels/timeline/components/SidebarSingleInsightSet.ts | metricScore": {
     "message": "{PH1}: puntuació {PH3} ({PH2})"
@@ -15885,7 +15840,7 @@
     "message": "Ordena per"
   },
   "ui/legacy/components/data_grid/DataGrid.ts | sortableColumn": {
-    "message": "Sortable column. Press enter to apply sorting filter"
+    "message": "Columna ordenable. Prem Retorn per aplicar el filtre d'ordenació."
   },
   "ui/legacy/components/data_grid/ShowMoreDataGridNode.ts | showAllD": {
     "message": "Mostra-ho tot ({PH1})"
@@ -16221,10 +16176,10 @@
     "message": "Cerca"
   },
   "ui/legacy/components/source_frame/PreviewFactory.ts | failedToLoadData": {
-    "message": "Failed to load data"
+    "message": "No s'han pogut carregar les dades"
   },
   "ui/legacy/components/source_frame/PreviewFactory.ts | nothingToPreview": {
-    "message": "Nothing to preview"
+    "message": "No hi ha res per previsualitzar"
   },
   "ui/legacy/components/source_frame/ResourceSourceFrame.ts | find": {
     "message": "Cerca"
