--- a/front_end/core/i18n/locales/cy.json
+++ b/front_end/core/i18n/locales/cy.json
@@ -105,7 +105,7 @@
     "message": "Panel rhwydwaith"
   },
   "core/common/Revealer.ts | securityPanel": {
-    "message": "Security panel"
+    "message": "Panel diogelwch"
   },
   "core/common/Revealer.ts | sourcesPanel": {
     "message": "Panel ffynonellau"
@@ -2798,9 +2798,6 @@
   "panels/application/BackgroundServiceView.ts | clear": {
     "message": "Clirio"
   },
-  "panels/application/BackgroundServiceView.ts | clickTheRecordButtonSOrHitSTo": {
-    "message": "Cliciwch y botwm recordio {PH1} neu daro {PH2} i ddechrau recordio."
-  },
   "panels/application/BackgroundServiceView.ts | devtoolsWillRecordAllSActivity": {
     "message": "Bydd DevTools yn cofnodi'r holl weithgarwch {PH1} am hyd at 3 diwrnod, hyd yn oed pan fydd ar gau."
   },
@@ -2812,9 +2809,6 @@
   },
   "panels/application/BackgroundServiceView.ts | instanceId": {
     "message": "Rhif adnabod yr achos"
-  },
-  "panels/application/BackgroundServiceView.ts | learnMore": {
-    "message": "Dysgu rhagor"
   },
   "panels/application/BackgroundServiceView.ts | noMetadataForThisEvent": {
     "message": "Dim metaddata ar gyfer y digwyddiad hwn"
@@ -2947,9 +2941,6 @@
   },
   "panels/application/IndexedDBViews.ts | objectStores": {
     "message": "Storfeydd gwrthrychau"
-  },
-  "panels/application/IndexedDBViews.ts | pleaseConfirmDeleteOfSDatabase": {
-    "message": "Cadarnhau dileu cronfa ddata \"{PH1}\"."
   },
   "panels/application/IndexedDBViews.ts | primaryKey": {
     "message": "Prif allwedd"
@@ -3236,12 +3227,6 @@
   "panels/application/SharedStorageEventsView.ts | clickToDisplayBody": {
     "message": "Cliciwch ar unrhyw ddigwyddiad storio a rennir i arddangos paramedrau'r digwyddiad."
   },
-  "panels/application/SharedStorageItemsView.ts | key": {
-    "message": "Allwedd"
-  },
-  "panels/application/SharedStorageItemsView.ts | selectAValueToPreview": {
-    "message": "Dewiswch werth i'w ragweld"
-  },
   "panels/application/SharedStorageItemsView.ts | sharedStorage": {
     "message": "Storfa a rennir"
   },
@@ -3257,17 +3242,8 @@
   "panels/application/SharedStorageItemsView.ts | sharedStorageItemEdited": {
     "message": "Cafodd yr eitem storfa ei golygu."
   },
-  "panels/application/SharedStorageItemsView.ts | sharedStorageItems": {
-    "message": "Eitemau Storfa a Rennir"
-  },
   "panels/application/SharedStorageItemsView.ts | sharedStorageItemsCleared": {
     "message": "Eitemau Storio a Rennir wedi'u clirio"
-  },
-  "panels/application/SharedStorageItemsView.ts | sharedStorageNumberEntries": {
-    "message": "Nifer y cofnodion a ddangosir yn y dabl: {PH1}"
-  },
-  "panels/application/SharedStorageItemsView.ts | value": {
-    "message": "Gwerth"
   },
   "panels/application/SharedStorageListTreeElement.ts | sharedStorage": {
     "message": "Storfa a rennir"
@@ -4262,9 +4238,6 @@
   "panels/application/components/TrustTokensView.ts | issuer": {
     "message": "Cyhoeddwr"
   },
-  "panels/application/components/TrustTokensView.ts | noTrustTokensStored": {
-    "message": "Nid oes unrhyw docynnau cyflwr preifat sy'n cael eu storio ar hyn o bryd."
-  },
   "panels/application/components/TrustTokensView.ts | storedTokenCount": {
     "message": "Cyfrif tocynnau sydd wedi'i storio"
   },
@@ -4950,7 +4923,7 @@
     "message": "Rhestr Torbwyntiau DOM"
   },
   "panels/browser_debugger/DOMBreakpointsSidebarPane.ts | noBreakpoints": {
-    "message": "No DOM breakpoints set"
+    "message": "Dim torbwyntiau DOM wedi'u gosod"
   },
   "panels/browser_debugger/DOMBreakpointsSidebarPane.ts | nodeRemoved": {
     "message": "Tynnwyd nod"
@@ -5067,19 +5040,19 @@
     "message": "{PH1} (o fap y ffynhonnell)"
   },
   "panels/changes/ChangesView.ts | binaryDataDescription": {
-    "message": "The changes tab doesn't show binary data changes"
+    "message": "Nid yw'r tab newidiadau yn dangos newidiadau data deuaidd"
   },
   "panels/changes/ChangesView.ts | changesViewDescription": {
-    "message": "On this page you can track code changes made within DevTools."
+    "message": "Ar y dudalen hon gallwch olrhain newidiadau cod a wnaed o fewn DevTools."
   },
   "panels/changes/ChangesView.ts | copy": {
     "message": "Copïo"
   },
   "panels/changes/ChangesView.ts | noChanges": {
-    "message": "No changes yet"
+    "message": "Dim newidiadau eto"
   },
   "panels/changes/ChangesView.ts | noTextualDiff": {
-    "message": "No textual diff available"
+    "message": "Dim diff testun ar gael"
   },
   "panels/changes/ChangesView.ts | sDeletions": {
     "message": "{n,plural, =1{# dilead (-)}zero{# dilead (-)}two{# ddilead (-)}few{# dilead (-)}many{# dilead (-)}other{# dilead (-)}}"
@@ -5298,7 +5271,7 @@
     "message": " M<XX>"
   },
   "panels/console/ConsoleViewMessage.ts | SeeIssueInCookieReport": {
-    "message": "Click to open privacy and security panel and show third-party cookie report"
+    "message": "Cliciwch i agor y panel preifatrwydd a diogelwch a dangos adroddiad cwcis trydydd parti"
   },
   "panels/console/ConsoleViewMessage.ts | assertionFailed": {
     "message": "Methodd yr haeriad: "
@@ -6747,7 +6720,7 @@
     "message": "Stacktrace"
   },
   "panels/explain/components/ConsoleInsight.ts | timedOut": {
-    "message": "Generating a response took too long. Please try again."
+    "message": "Roedd cynhyrchu ymateb yn cymryd gormod o amser. Rhowch gynnig arall arni."
   },
   "panels/explain/components/ConsoleInsight.ts | turnOnInSettings": {
     "message": "Trowch {PH1} ymlaen i dderbyn cymorth AI ar gyfer deall a mynd i'r afael â rhybuddion a gwallau consol."
@@ -7911,7 +7884,7 @@
     "message": "Ychwanegu {PH1}"
   },
   "panels/mobile_throttling/ThrottlingManager.ts | calibrate": {
-    "message": "Calibrate…"
+    "message": "Calibradu…"
   },
   "panels/mobile_throttling/ThrottlingManager.ts | cpuThrottling": {
     "message": "Throtlo CPU"
@@ -7935,7 +7908,7 @@
     "message": "All-lein"
   },
   "panels/mobile_throttling/ThrottlingManager.ts | recalibrate": {
-    "message": "Recalibrate…"
+    "message": "Ailgalibradu…"
   },
   "panels/mobile_throttling/ThrottlingManager.ts | recommendedThrottling": {
     "message": "{PH1} – argymhellwyd"
@@ -8895,7 +8868,7 @@
     "message": "Nid oes cwcis yn y cais hwn."
   },
   "panels/network/RequestInitiatorView.ts | noInitiator": {
-    "message": "No initiator data"
+    "message": "Dim data cychwynnwr"
   },
   "panels/network/RequestInitiatorView.ts | requestCallStack": {
     "message": "Gofyn am bentwr galwadau"
@@ -8961,10 +8934,10 @@
     "message": "Wedi methu â llwytho data ymateb"
   },
   "panels/network/RequestResponseView.ts | noPreview": {
-    "message": "Nothing to preview"
+    "message": "Dim i'w ragolygu"
   },
   "panels/network/RequestResponseView.ts | thisRequestHasNoResponseData": {
-    "message": "This request has no response data available"
+    "message": "Nid oes data ymateb ar gael ar gyfer y cais hwn"
   },
   "panels/network/RequestTimingView.ts | cacheStorageCacheNameS": {
     "message": "Enw storfa'r storfa dros dro: {PH1}"
@@ -10139,9 +10112,6 @@
   "panels/profiler/ProfilesPanel.ts | cantLoadProfileWhileAnother": {
     "message": "Methu â llwytho proffil tra bod proffil arall yn cael ei recordio."
   },
-  "panels/profiler/ProfilesPanel.ts | profileLoadingFailedS": {
-    "message": "Methwyd â llwytho proffil: {PH1}."
-  },
   "panels/profiler/ProfilesPanel.ts | profiles": {
     "message": "Proffiliau"
   },
@@ -10251,7 +10221,7 @@
     "message": "Cadw"
   },
   "panels/protocol_monitor/ProtocolMonitor.ts | selectAMessageToView": {
-    "message": "Select a message to see its details"
+    "message": "Dewiswch haen i weld ei manylion"
   },
   "panels/protocol_monitor/ProtocolMonitor.ts | selectTarget": {
     "message": "Dewiswch darged"
@@ -10290,7 +10260,7 @@
     "message": "Copïo recordiad neu'r cam a ddewiswyd"
   },
   "panels/recorder/RecorderController.ts | createRecording": {
-    "message": "Create recording"
+    "message": "Creu cofnod"
   },
   "panels/recorder/RecorderController.ts | deleteRecording": {
     "message": "Dileu'r recordiad"
@@ -10308,13 +10278,13 @@
     "message": "Cael estyniadau…"
   },
   "panels/recorder/RecorderController.ts | header": {
-    "message": "Nothing recorded yet"
+    "message": "Dim wedi ei gofnodi eto"
   },
   "panels/recorder/RecorderController.ts | importRecording": {
     "message": "Recordio allbwn"
   },
   "panels/recorder/RecorderController.ts | learnMore": {
-    "message": "Learn more"
+    "message": "Dysgu rhagor"
   },
   "panels/recorder/RecorderController.ts | noRecordings": {
     "message": "Dim recordiadau"
@@ -10323,7 +10293,7 @@
     "message": "recordiad(au)"
   },
   "panels/recorder/RecorderController.ts | recordingDescription": {
-    "message": "Use recordings to create automated end-to-end tests or performance traces."
+    "message": "Defnyddio recordiadau i greu profion o un pen i'r llall awtomataidd neu olion perfformiad."
   },
   "panels/recorder/RecorderController.ts | replayRecording": {
     "message": "Ailchwarae'r recordiad"
@@ -11496,7 +11466,7 @@
     "message": "Anfonir neges y consol, olrhain pentwr cysylltiedig, cod ffynhonnell cysylltiedig, a'r penawdau rhwydwaith cysylltiedig at Google i gynhyrchu esboniadau. Mae'n bosib y bydd adolygwyr dynol yn gweld y data hyn i wella'r nodwedd hon."
   },
   "panels/settings/AISettingsTab.ts | consoleInsightsSendsDataNoLogging": {
-    "message": "The console message, associated stack trace, related source code, and the associated network headers are sent to Google to generate explanations. This data will not be used to improve Google’s AI models."
+    "message": "Anfonir neges y consol, olrhain pentwr cysylltiedig, cod ffynhonnell cysylltiedig, a'r penawdau rhwydwaith cysylltiedig at Google i gynhyrchu esboniadau. Ni fydd y data hyn yn cael eu defnyddio i wella modelau AI Google."
   },
   "panels/settings/AISettingsTab.ts | dataCollection": {
     "message": "Yn dibynnu ar eich rhanbarth, mae'n bosib y bydd Google yn ymatal rhag casglu data"
@@ -11532,7 +11502,7 @@
     "message": "Anfonir unrhyw ddata y gall y dudalen a archwiliwyd eu cyrchu trwy API Gwe, ceisiadau rhwydwaith, ffeiliau ac olion perfformiad i Google i gynhyrchu esboniadau. Mae'n bosib y bydd adolygwyr dynol yn gweld y data hyn i wella'r nodwedd hon. Peidio â defnyddio ar dudalennau gyda gwybodaeth bersonol neu sensitif."
   },
   "panels/settings/AISettingsTab.ts | freestylerSendsDataNoLogging": {
-    "message": "Any data the inspected page can access via Web APIs, network requests, files, and performance traces are sent to Google to generate explanations. This data will not be used to improve Google’s AI models."
+    "message": "Anfonir unrhyw ddata y gall y dudalen a archwiliwyd eu cyrchu trwy API Gwe, ceisiadau rhwydwaith, ffeiliau ac olion perfformiad i Google i gynhyrchu esboniadau. Ni fydd y data hyn yn cael eu defnyddio i wella modelau AI Google."
   },
   "panels/settings/AISettingsTab.ts | helpUnderstandConsole": {
     "message": "Yn eich helpu i ddeall a thrwsio rhybuddion a gwallau consol"
@@ -12259,15 +12229,6 @@
   },
   "panels/sources/NavigatorView.ts | actionCannotBeUndone": {
     "message": "Ni ellir dadwneud y weithred hon."
-  },
-  "panels/sources/NavigatorView.ts | areYouSureYouWantToDeleteFolder": {
-    "message": "Ydych chi'n siŵr eich bod am ddileu'r ffolder hon a'i chynnwys?"
-  },
-  "panels/sources/NavigatorView.ts | areYouSureYouWantToDeleteThis": {
-    "message": "Ydych chi'n siŵr eich bod am ddileu'r ffeil hon?"
-  },
-  "panels/sources/NavigatorView.ts | areYouSureYouWantToExcludeThis": {
-    "message": "Ydych chi'n siŵr eich bod am eithrio'r ffolder hon?"
   },
   "panels/sources/NavigatorView.ts | areYouSureYouWantToRemoveThis": {
     "message": "Tynnu '{PH1}' o'r Fan Gwaith?"
@@ -13041,7 +13002,7 @@
     "message": "Mae'r trac hwn yn cynnwys amseriadau a gymerwyd o benawdau ymateb rhwydwaith Server-Timing. Amcangyfrifir eu hamseroedd cychwyn priodol ac mae'n bosib na fyddant yn gywir."
   },
   "panels/timeline/ThirdPartyTreeView.ts | firstOrThirdPartyName": {
-    "message": "1st / 3rd party"
+    "message": "Parti 1af / 3ydd parti"
   },
   "panels/timeline/ThirdPartyTreeView.ts | selfTime": {
     "message": "Hunan amser"
@@ -13254,7 +13215,7 @@
     "message": "Disgrifiad"
   },
   "panels/timeline/TimelinePanel.ts | dimThirdParties": {
-    "message": "Dim 3rd parties"
+    "message": "Dim 3ydd partïon"
   },
   "panels/timeline/TimelinePanel.ts | disableJavascriptSamples": {
     "message": "Diffodd samplau JavaScript"
@@ -13374,7 +13335,7 @@
     "message": "Wrthi'n stopio'r llinell amser…"
   },
   "panels/timeline/TimelinePanel.ts | thirdPartiesByThirdPartyWeb": {
-    "message": "3rd parties classified by third-party-web"
+    "message": "3ydd partïon wedi'u dosbarthu yn ôl y we trydydd parti"
   },
   "panels/timeline/TimelinePanel.ts | time": {
     "message": "Amser"
@@ -13653,7 +13614,7 @@
     "message": "{PH1}"
   },
   "panels/timeline/TimelineUIUtils.ts | entity": {
-    "message": "Third party"
+    "message": "Trydydd parti"
   },
   "panels/timeline/TimelineUIUtils.ts | entryIsHidden": {
     "message": "(cofnod wedi'i guddio)"
@@ -13817,9 +13778,6 @@
   "panels/timeline/TimelineUIUtils.ts | selectorStatsTitle": {
     "message": "Ystadegau dewisydd"
   },
-  "panels/timeline/TimelineUIUtils.ts | selfTime": {
-    "message": "Hunan amser"
-  },
   "panels/timeline/TimelineUIUtils.ts | size": {
     "message": "Maint"
   },
@@ -13833,7 +13791,7 @@
     "message": "URL taflen arddulliau"
   },
   "panels/timeline/TimelineUIUtils.ts | thirdPartyTable": {
-    "message": "1st / 3rd party table"
+    "message": "Tabl parti 1af / 3ydd parti"
   },
   "panels/timeline/TimelineUIUtils.ts | timeSpentInRendering": {
     "message": "Amser a dreuliwyd yn rendro"
@@ -13849,9 +13807,6 @@
   },
   "panels/timeline/TimelineUIUtils.ts | timestamp": {
     "message": "Stamp amser"
-  },
-  "panels/timeline/TimelineUIUtils.ts | totalTime": {
-    "message": "Cyfanswm yr amser"
   },
   "panels/timeline/TimelineUIUtils.ts | traceEvent": {
     "message": "Digwyddiad olrhain"
@@ -13920,7 +13875,7 @@
     "message": "Tynnu briwsion bara plant"
   },
   "panels/timeline/components/CPUThrottlingSelector.ts | calibrate": {
-    "message": "Calibrate…"
+    "message": "Calibradu…"
   },
   "panels/timeline/components/CPUThrottlingSelector.ts | cpu": {
     "message": "CPU: {PH1}"
@@ -13932,7 +13887,7 @@
     "message": "Rhagosodiadau wedi'u calibradu"
   },
   "panels/timeline/components/CPUThrottlingSelector.ts | recalibrate": {
-    "message": "Recalibrate…"
+    "message": "Ailgalibradu…"
   },
   "panels/timeline/components/CPUThrottlingSelector.ts | recommendedThrottling": {
     "message": "{PH1} – argymhellwyd"
@@ -14424,7 +14379,7 @@
     "message": "Data wedi'u hamgodio"
   },
   "panels/timeline/components/NetworkRequestDetails.ts | entity": {
-    "message": "Third party"
+    "message": "Trydydd parti"
   },
   "panels/timeline/components/NetworkRequestDetails.ts | fromCache": {
     "message": "O storfa dros dro"
@@ -14568,16 +14523,16 @@
     "message": "Mae Insights yn nodwedd arbrofol. Bydd eich adborth yn ein helpu i'w wella."
   },
   "panels/timeline/components/SidebarSingleInsightSet.ts | dismissTitle": {
-    "message": "Dismiss"
+    "message": "Diystyru"
   },
   "panels/timeline/components/SidebarSingleInsightSet.ts | fieldMismatchNotice": {
-    "message": "There are many reasons why local and field metrics [may not match](https://web.dev/articles/lab-and-field-data-differences). Adjust [throttling settings and device emulation](https://developer.chrome.com/docs/devtools/device-mode) to analyze traces more similar to the average user's environment."
+    "message": "Mae yna lawer o resymau pam efallai bod metrigau lleol a maes [ddim yn cyfateb](https://web.dev/articles/lab-and-field-data-differences). Addaswch y [gosodiadau throtlo a dynwared dyfais](https://developer.chrome.com/docs/devtools/device-mode) i ddadansoddi olion sy'n debycach i amgylchedd y defnyddiwr cyffredin."
   },
   "panels/timeline/components/SidebarSingleInsightSet.ts | fieldMismatchTitle": {
-    "message": "Field & local metrics mismatch"
+    "message": "Cam-gyfatebiaeth metrigau maes a lleol"
   },
   "panels/timeline/components/SidebarSingleInsightSet.ts | fieldScoreLabel": {
-    "message": "Field ({PH1})"
+    "message": "Maes ({PH1})"
   },
   "panels/timeline/components/SidebarSingleInsightSet.ts | metricScore": {
     "message": "{PH1}: {PH2} sgôr {PH3}"
@@ -15885,7 +15840,7 @@
     "message": "Trefnu yn ôl"
   },
   "ui/legacy/components/data_grid/DataGrid.ts | sortableColumn": {
-    "message": "Sortable column. Press enter to apply sorting filter"
+    "message": "Colofn y gellir ei threfnu. Pwyswch Enter i gymhwyso'r hidlydd didoli"
   },
   "ui/legacy/components/data_grid/ShowMoreDataGridNode.ts | showAllD": {
     "message": "Dangos pob {PH1}"
@@ -16221,10 +16176,10 @@
     "message": "Chwilio"
   },
   "ui/legacy/components/source_frame/PreviewFactory.ts | failedToLoadData": {
-    "message": "Failed to load data"
+    "message": "Wedi methu llwytho data"
   },
   "ui/legacy/components/source_frame/PreviewFactory.ts | nothingToPreview": {
-    "message": "Nothing to preview"
+    "message": "Dim i'w ragolygu"
   },
   "ui/legacy/components/source_frame/ResourceSourceFrame.ts | find": {
     "message": "Chwilio"
