--- a/front_end/core/i18n/locales/da.json
+++ b/front_end/core/i18n/locales/da.json
@@ -105,7 +105,7 @@
     "message": "Netværkspanel"
   },
   "core/common/Revealer.ts | securityPanel": {
-    "message": "Security panel"
+    "message": "Sikkerhedspanel"
   },
   "core/common/Revealer.ts | sourcesPanel": {
     "message": "Panelet Kilder"
@@ -2798,9 +2798,6 @@
   "panels/application/BackgroundServiceView.ts | clear": {
     "message": "Ryd"
   },
-  "panels/application/BackgroundServiceView.ts | clickTheRecordButtonSOrHitSTo": {
-    "message": "Klik på optageknappen {PH1}, eller tryk {PH2} for at starte optagelsen."
-  },
   "panels/application/BackgroundServiceView.ts | devtoolsWillRecordAllSActivity": {
     "message": "Udviklerværktøjer registrerer al aktivitet i forbindelse med {PH1} i op til 3 dage, også selvom det er lukket."
   },
@@ -2812,9 +2809,6 @@
   },
   "panels/application/BackgroundServiceView.ts | instanceId": {
     "message": "Forekomst-id"
-  },
-  "panels/application/BackgroundServiceView.ts | learnMore": {
-    "message": "Få flere oplysninger"
   },
   "panels/application/BackgroundServiceView.ts | noMetadataForThisEvent": {
     "message": "Ingen metadata for denne hændelse"
@@ -2947,9 +2941,6 @@
   },
   "panels/application/IndexedDBViews.ts | objectStores": {
     "message": "Objektlagre"
-  },
-  "panels/application/IndexedDBViews.ts | pleaseConfirmDeleteOfSDatabase": {
-    "message": "Bekræft sletning af databasen \"{PH1}\"."
   },
   "panels/application/IndexedDBViews.ts | primaryKey": {
     "message": "Primær nøgle"
@@ -3236,12 +3227,6 @@
   "panels/application/SharedStorageEventsView.ts | clickToDisplayBody": {
     "message": "Klik på en hvilken som helst hændelse for delt lagerplads for at vise hændelsesparametrene."
   },
-  "panels/application/SharedStorageItemsView.ts | key": {
-    "message": "Nøgle"
-  },
-  "panels/application/SharedStorageItemsView.ts | selectAValueToPreview": {
-    "message": "Vælg en værdi, du vil se en forhåndsvisning af"
-  },
   "panels/application/SharedStorageItemsView.ts | sharedStorage": {
     "message": "Delt hukommelse"
   },
@@ -3257,17 +3242,8 @@
   "panels/application/SharedStorageItemsView.ts | sharedStorageItemEdited": {
     "message": "Lagerelementet blev redigeret."
   },
-  "panels/application/SharedStorageItemsView.ts | sharedStorageItems": {
-    "message": "Elementer i delt lagerplads"
-  },
   "panels/application/SharedStorageItemsView.ts | sharedStorageItemsCleared": {
     "message": "Elementerne i delt lagerplads blev ryddet"
-  },
-  "panels/application/SharedStorageItemsView.ts | sharedStorageNumberEntries": {
-    "message": "Antal poster, der vises i tabellen: {PH1}"
-  },
-  "panels/application/SharedStorageItemsView.ts | value": {
-    "message": "Værdi"
   },
   "panels/application/SharedStorageListTreeElement.ts | sharedStorage": {
     "message": "Delt hukommelse"
@@ -4262,9 +4238,6 @@
   "panels/application/components/TrustTokensView.ts | issuer": {
     "message": "Udsteder"
   },
-  "panels/application/components/TrustTokensView.ts | noTrustTokensStored": {
-    "message": "Der er i øjeblikket ikke gemt nogen private state tokens."
-  },
   "panels/application/components/TrustTokensView.ts | storedTokenCount": {
     "message": "Antal lagrede tokens"
   },
@@ -4950,7 +4923,7 @@
     "message": "Liste over DOM-skillepunkter"
   },
   "panels/browser_debugger/DOMBreakpointsSidebarPane.ts | noBreakpoints": {
-    "message": "No DOM breakpoints set"
+    "message": "Der er ikke indstillet nogen DOM-stoppunkter"
   },
   "panels/browser_debugger/DOMBreakpointsSidebarPane.ts | nodeRemoved": {
     "message": "Node er fjernet"
@@ -5067,19 +5040,19 @@
     "message": "{PH1} (fra kildekort)"
   },
   "panels/changes/ChangesView.ts | binaryDataDescription": {
-    "message": "The changes tab doesn't show binary data changes"
+    "message": "Fanen med ændringer viser ikke ændringer af binære data"
   },
   "panels/changes/ChangesView.ts | changesViewDescription": {
-    "message": "On this page you can track code changes made within DevTools."
+    "message": "På denne side kan du spore kodeændringer, der er foretaget i Udviklerværktøjer."
   },
   "panels/changes/ChangesView.ts | copy": {
     "message": "Kopiér"
   },
   "panels/changes/ChangesView.ts | noChanges": {
-    "message": "No changes yet"
+    "message": "Der er ingen ændringer endnu"
   },
   "panels/changes/ChangesView.ts | noTextualDiff": {
-    "message": "No textual diff available"
+    "message": "Der er ingen tilgængelig tekstuel forskel"
   },
   "panels/changes/ChangesView.ts | sDeletions": {
     "message": "{n,plural, =1{# sletning (-)}one{# sletning (-)}other{# sletninger (-)}}"
@@ -5298,7 +5271,7 @@
     "message": " M<XX>"
   },
   "panels/console/ConsoleViewMessage.ts | SeeIssueInCookieReport": {
-    "message": "Click to open privacy and security panel and show third-party cookie report"
+    "message": "Klik for at åbne panelet for privatliv og sikkerhed og se rapporten om tredjepartscookies"
   },
   "panels/console/ConsoleViewMessage.ts | assertionFailed": {
     "message": "Påstanden mislykkedes: "
@@ -6747,7 +6720,7 @@
     "message": "Staksporing"
   },
   "panels/explain/components/ConsoleInsight.ts | timedOut": {
-    "message": "Generating a response took too long. Please try again."
+    "message": "Det tog for lang tid at generere et svar. Prøv igen."
   },
   "panels/explain/components/ConsoleInsight.ts | turnOnInSettings": {
     "message": "Aktivér {PH1} for at få AI-hjælp til at forstå og løse problemer med konsoladvarsler og -fejl."
@@ -7911,7 +7884,7 @@
     "message": "Tilføj {PH1}"
   },
   "panels/mobile_throttling/ThrottlingManager.ts | calibrate": {
-    "message": "Calibrate…"
+    "message": "Kalibrer…"
   },
   "panels/mobile_throttling/ThrottlingManager.ts | cpuThrottling": {
     "message": "CPU-begrænsning"
@@ -7935,7 +7908,7 @@
     "message": "Offline"
   },
   "panels/mobile_throttling/ThrottlingManager.ts | recalibrate": {
-    "message": "Recalibrate…"
+    "message": "Kalibrer igen…"
   },
   "panels/mobile_throttling/ThrottlingManager.ts | recommendedThrottling": {
     "message": "{PH1} – anbefalet"
@@ -8895,7 +8868,7 @@
     "message": "Denne anmodning har ingen cookies."
   },
   "panels/network/RequestInitiatorView.ts | noInitiator": {
-    "message": "No initiator data"
+    "message": "Ingen iværksætterdata"
   },
   "panels/network/RequestInitiatorView.ts | requestCallStack": {
     "message": "Anmod om kaldestak"
@@ -8961,10 +8934,10 @@
     "message": "Svardata kunne ikke indlæses"
   },
   "panels/network/RequestResponseView.ts | noPreview": {
-    "message": "Nothing to preview"
+    "message": "Der er intet at forhåndsvise"
   },
   "panels/network/RequestResponseView.ts | thisRequestHasNoResponseData": {
-    "message": "This request has no response data available"
+    "message": "Denne anmodning har ingen tilgængelige svardata"
   },
   "panels/network/RequestTimingView.ts | cacheStorageCacheNameS": {
     "message": "Navn på cachelager: {PH1}"
@@ -10139,9 +10112,6 @@
   "panels/profiler/ProfilesPanel.ts | cantLoadProfileWhileAnother": {
     "message": "Profil kan ikke indlæses, mens en anden profil optages."
   },
-  "panels/profiler/ProfilesPanel.ts | profileLoadingFailedS": {
-    "message": "Profilen kunne ikke indlæses: {PH1}."
-  },
   "panels/profiler/ProfilesPanel.ts | profiles": {
     "message": "Profiler"
   },
@@ -10251,7 +10221,7 @@
     "message": "Gem"
   },
   "panels/protocol_monitor/ProtocolMonitor.ts | selectAMessageToView": {
-    "message": "Select a message to see its details"
+    "message": "Vælg en meddelelse for at se oplysninger om den"
   },
   "panels/protocol_monitor/ProtocolMonitor.ts | selectTarget": {
     "message": "Vælg et mål"
@@ -10290,7 +10260,7 @@
     "message": "Kopiér optagelsen eller det valgte trin"
   },
   "panels/recorder/RecorderController.ts | createRecording": {
-    "message": "Create recording"
+    "message": "Opret optagelse"
   },
   "panels/recorder/RecorderController.ts | deleteRecording": {
     "message": "Slet optagelse"
@@ -10308,13 +10278,13 @@
     "message": "Få udvidelser…"
   },
   "panels/recorder/RecorderController.ts | header": {
-    "message": "Nothing recorded yet"
+    "message": "Der er ikke registreret noget endnu"
   },
   "panels/recorder/RecorderController.ts | importRecording": {
     "message": "Importér optagelse"
   },
   "panels/recorder/RecorderController.ts | learnMore": {
-    "message": "Learn more"
+    "message": "Få flere oplysninger"
   },
   "panels/recorder/RecorderController.ts | noRecordings": {
     "message": "Ingen optagelser"
@@ -10323,7 +10293,7 @@
     "message": "optagelser"
   },
   "panels/recorder/RecorderController.ts | recordingDescription": {
-    "message": "Use recordings to create automated end-to-end tests or performance traces."
+    "message": "Brug optagelser til at oprette automatiske end-to-end-test eller sporinger af ydeevnen."
   },
   "panels/recorder/RecorderController.ts | replayRecording": {
     "message": "Afspil optagelse igen"
@@ -11496,7 +11466,7 @@
     "message": "Konsolmeddelelsen, den tilknyttede staksporing, den relaterede kildekode og de tilknyttede netværksheadere sendes til Google for at generere forklaringer. Disse data kan blive set af menneskelige kontrollanter med henblik på at forbedre denne funktion."
   },
   "panels/settings/AISettingsTab.ts | consoleInsightsSendsDataNoLogging": {
-    "message": "The console message, associated stack trace, related source code, and the associated network headers are sent to Google to generate explanations. This data will not be used to improve Google’s AI models."
+    "message": "Konsolmeddelelsen, den tilknyttede staksporing, den relaterede kildekode og de tilknyttede netværksheadere sendes til Google for at generere forklaringer. Disse data bruges ikke til at forbedre Google AI-modeller."
   },
   "panels/settings/AISettingsTab.ts | dataCollection": {
     "message": "Google kan undlade at indsamle data afhængigt af din region"
@@ -11532,7 +11502,7 @@
     "message": "Alle data, som den undersøgte side har adgang til via web-API'er, netværksanmodninger, filer og effektivitetsspor sendes til Google for at generere forklaringer. Disse data kan blive gennemgået af menneskelige kontrollanter med henblik på at forbedre denne funktion. Brug ikke funktionen på sider med personlige eller følsomme oplysninger."
   },
   "panels/settings/AISettingsTab.ts | freestylerSendsDataNoLogging": {
-    "message": "Any data the inspected page can access via Web APIs, network requests, files, and performance traces are sent to Google to generate explanations. This data will not be used to improve Google’s AI models."
+    "message": "Alle data, som den undersøgte side har adgang til via web-API'er, netværksanmodninger, filer og effektivitetsspor sendes til Google for at generere forklaringer. Disse data bruges ikke til at forbedre Google AI-modeller."
   },
   "panels/settings/AISettingsTab.ts | helpUnderstandConsole": {
     "message": "Hjælper dig med at forstå og løse problemer med konsoladvarsler og -fejl"
@@ -12259,15 +12229,6 @@
   },
   "panels/sources/NavigatorView.ts | actionCannotBeUndone": {
     "message": "Denne handling kan ikke fortrydes."
-  },
-  "panels/sources/NavigatorView.ts | areYouSureYouWantToDeleteFolder": {
-    "message": "Er du sikker på, at du vil slette denne mappe og dens indhold?"
-  },
-  "panels/sources/NavigatorView.ts | areYouSureYouWantToDeleteThis": {
-    "message": "Er du sikker på, at du vil slette denne fil?"
-  },
-  "panels/sources/NavigatorView.ts | areYouSureYouWantToExcludeThis": {
-    "message": "Er du sikker på, at du vil udelukke denne mappe?"
   },
   "panels/sources/NavigatorView.ts | areYouSureYouWantToRemoveThis": {
     "message": "Vil du fjerne \"{PH1}\" fra arbejdsområdet?"
@@ -13041,7 +13002,7 @@
     "message": "Dette spor indeholder tidsangivelser, der er hentet fra Server-Timing-netværkets svarheadere. Deres respektive starttidspunkter er kun estimerede og er muligvis ikke nøjagtige."
   },
   "panels/timeline/ThirdPartyTreeView.ts | firstOrThirdPartyName": {
-    "message": "1st / 3rd party"
+    "message": "Første-/tredjepart"
   },
   "panels/timeline/ThirdPartyTreeView.ts | selfTime": {
     "message": "Egen tid"
@@ -13254,7 +13215,7 @@
     "message": "Beskrivelse"
   },
   "panels/timeline/TimelinePanel.ts | dimThirdParties": {
-    "message": "Dim 3rd parties"
+    "message": "Reducer tredjeparters synlighed"
   },
   "panels/timeline/TimelinePanel.ts | disableJavascriptSamples": {
     "message": "Deaktiver JavaScript-eksempler"
@@ -13374,7 +13335,7 @@
     "message": "Stopper tidslinje…"
   },
   "panels/timeline/TimelinePanel.ts | thirdPartiesByThirdPartyWeb": {
-    "message": "3rd parties classified by third-party-web"
+    "message": "Tredjeparter klassificeret efter tredjepartswebsite"
   },
   "panels/timeline/TimelinePanel.ts | time": {
     "message": "Tidspunkt"
@@ -13653,7 +13614,7 @@
     "message": "{PH1}"
   },
   "panels/timeline/TimelineUIUtils.ts | entity": {
-    "message": "Third party"
+    "message": "Tredjepart"
   },
   "panels/timeline/TimelineUIUtils.ts | entryIsHidden": {
     "message": "(posten er skjult)"
@@ -13817,9 +13778,6 @@
   "panels/timeline/TimelineUIUtils.ts | selectorStatsTitle": {
     "message": "Statistik for vælger"
   },
-  "panels/timeline/TimelineUIUtils.ts | selfTime": {
-    "message": "Egen tid"
-  },
   "panels/timeline/TimelineUIUtils.ts | size": {
     "message": "Størrelse"
   },
@@ -13833,7 +13791,7 @@
     "message": "Typografiarkets webadresse"
   },
   "panels/timeline/TimelineUIUtils.ts | thirdPartyTable": {
-    "message": "1st / 3rd party table"
+    "message": "Tabel med første-/tredjepartsdata"
   },
   "panels/timeline/TimelineUIUtils.ts | timeSpentInRendering": {
     "message": "Tid brugt på gengivelse"
@@ -13849,9 +13807,6 @@
   },
   "panels/timeline/TimelineUIUtils.ts | timestamp": {
     "message": "Tidsstempel"
-  },
-  "panels/timeline/TimelineUIUtils.ts | totalTime": {
-    "message": "Tid i alt"
   },
   "panels/timeline/TimelineUIUtils.ts | traceEvent": {
     "message": "Sporingshændelse"
@@ -13920,7 +13875,7 @@
     "message": "Fjern underordnede brødkrummer"
   },
   "panels/timeline/components/CPUThrottlingSelector.ts | calibrate": {
-    "message": "Calibrate…"
+    "message": "Kalibrer…"
   },
   "panels/timeline/components/CPUThrottlingSelector.ts | cpu": {
     "message": "CPU: {PH1}"
@@ -13932,7 +13887,7 @@
     "message": "Kalibrerede forindstillinger"
   },
   "panels/timeline/components/CPUThrottlingSelector.ts | recalibrate": {
-    "message": "Recalibrate…"
+    "message": "Kalibrer igen…"
   },
   "panels/timeline/components/CPUThrottlingSelector.ts | recommendedThrottling": {
     "message": "{PH1} – anbefalet"
@@ -14424,7 +14379,7 @@
     "message": "Indkodede data"
   },
   "panels/timeline/components/NetworkRequestDetails.ts | entity": {
-    "message": "Third party"
+    "message": "Tredjepart"
   },
   "panels/timeline/components/NetworkRequestDetails.ts | fromCache": {
     "message": "Fra cache"
@@ -14568,16 +14523,16 @@
     "message": "Insights er en eksperimentel funktion. Din feedback hjælper os med at forbedre den."
   },
   "panels/timeline/components/SidebarSingleInsightSet.ts | dismissTitle": {
-    "message": "Dismiss"
+    "message": "Luk"
   },
   "panels/timeline/components/SidebarSingleInsightSet.ts | fieldMismatchNotice": {
-    "message": "There are many reasons why local and field metrics [may not match](https://web.dev/articles/lab-and-field-data-differences). Adjust [throttling settings and device emulation](https://developer.chrome.com/docs/devtools/device-mode) to analyze traces more similar to the average user's environment."
+    "message": "Der kan være mange årsager til, at lokale metrics og metrics for feltet [ikke stemmer overens](https://web.dev/articles/lab-and-field-data-differences). Juster [indstillingerne for begrænsning og enhedsemuleringen](https://developer.chrome.com/docs/devtools/device-mode) for at analysere spor, der ligner den gennemsnitlige brugers miljø."
   },
   "panels/timeline/components/SidebarSingleInsightSet.ts | fieldMismatchTitle": {
-    "message": "Field & local metrics mismatch"
+    "message": "Uoverensstemmelse mellem lokale metrics og metrics for feltet"
   },
   "panels/timeline/components/SidebarSingleInsightSet.ts | fieldScoreLabel": {
-    "message": "Field ({PH1})"
+    "message": "Felt ({PH1})"
   },
   "panels/timeline/components/SidebarSingleInsightSet.ts | metricScore": {
     "message": "{PH1}: {PH2} {PH3} (resultat)"
@@ -15885,7 +15840,7 @@
     "message": "Sortér efter"
   },
   "ui/legacy/components/data_grid/DataGrid.ts | sortableColumn": {
-    "message": "Sortable column. Press enter to apply sorting filter"
+    "message": "Sorterbar kolonne. Tryk på Enter for at anvende sorteringsfilteret"
   },
   "ui/legacy/components/data_grid/ShowMoreDataGridNode.ts | showAllD": {
     "message": "Vis alle {PH1}"
@@ -16221,10 +16176,10 @@
     "message": "Find"
   },
   "ui/legacy/components/source_frame/PreviewFactory.ts | failedToLoadData": {
-    "message": "Failed to load data"
+    "message": "Indlæsning af data mislykkedes"
   },
   "ui/legacy/components/source_frame/PreviewFactory.ts | nothingToPreview": {
-    "message": "Nothing to preview"
+    "message": "Der er intet at forhåndsvise"
   },
   "ui/legacy/components/source_frame/ResourceSourceFrame.ts | find": {
     "message": "Find"
