--- a/front_end/core/i18n/locales/et.json
+++ b/front_end/core/i18n/locales/et.json
@@ -105,7 +105,7 @@
     "message": "Võrgupaneel"
   },
   "core/common/Revealer.ts | securityPanel": {
-    "message": "Security panel"
+    "message": "Turvapaneel"
   },
   "core/common/Revealer.ts | sourcesPanel": {
     "message": "Allikate paneel"
@@ -2798,9 +2798,6 @@
   "panels/application/BackgroundServiceView.ts | clear": {
     "message": "Kustuta"
   },
-  "panels/application/BackgroundServiceView.ts | clickTheRecordButtonSOrHitSTo": {
-    "message": "Salvestamise alustamiseks klõpsake salvestamisnupul {PH1} või vajutage klahvikombinatsiooni {PH2}."
-  },
   "panels/application/BackgroundServiceView.ts | devtoolsWillRecordAllSActivity": {
     "message": "DevTools salvestab toimingu {PH1} kõik tegevused kuni 3 päeva jooksul, isegi kui see on suletud."
   },
@@ -2812,9 +2809,6 @@
   },
   "panels/application/BackgroundServiceView.ts | instanceId": {
     "message": "Eksemplari ID"
-  },
-  "panels/application/BackgroundServiceView.ts | learnMore": {
-    "message": "Lisateave"
   },
   "panels/application/BackgroundServiceView.ts | noMetadataForThisEvent": {
     "message": "Sellel sündmusel ei ole metaandmeid"
@@ -2947,9 +2941,6 @@
   },
   "panels/application/IndexedDBViews.ts | objectStores": {
     "message": "Objektisalved"
-  },
-  "panels/application/IndexedDBViews.ts | pleaseConfirmDeleteOfSDatabase": {
-    "message": "Kinnitage „{PH1}“ andmebaasi kustutamine."
   },
   "panels/application/IndexedDBViews.ts | primaryKey": {
     "message": "Primaarvõti"
@@ -3236,12 +3227,6 @@
   "panels/application/SharedStorageEventsView.ts | clickToDisplayBody": {
     "message": "Sündmuse parameetrite kuvamiseks klõpsake ükskõik millisel jagatud salvestusruumi sündmusel."
   },
-  "panels/application/SharedStorageItemsView.ts | key": {
-    "message": "Võti"
-  },
-  "panels/application/SharedStorageItemsView.ts | selectAValueToPreview": {
-    "message": "Valige väärtus selle eelvaate kuvamiseks"
-  },
   "panels/application/SharedStorageItemsView.ts | sharedStorage": {
     "message": "Shared storage"
   },
@@ -3257,17 +3242,8 @@
   "panels/application/SharedStorageItemsView.ts | sharedStorageItemEdited": {
     "message": "Salvestusruumi üksust muudeti."
   },
-  "panels/application/SharedStorageItemsView.ts | sharedStorageItems": {
-    "message": "Jagatud salvestusruumi üksused"
-  },
   "panels/application/SharedStorageItemsView.ts | sharedStorageItemsCleared": {
     "message": "Jagatud salvestusruumi üksused kustutati"
-  },
-  "panels/application/SharedStorageItemsView.ts | sharedStorageNumberEntries": {
-    "message": "Tabelis kuvatud kirjete arv: {PH1}"
-  },
-  "panels/application/SharedStorageItemsView.ts | value": {
-    "message": "Väärtus"
   },
   "panels/application/SharedStorageListTreeElement.ts | sharedStorage": {
     "message": "Shared storage"
@@ -4262,9 +4238,6 @@
   "panels/application/components/TrustTokensView.ts | issuer": {
     "message": "Väljastaja"
   },
-  "panels/application/components/TrustTokensView.ts | noTrustTokensStored": {
-    "message": "Ühtegi privaatse oleku märki pole praegu salvestatud."
-  },
   "panels/application/components/TrustTokensView.ts | storedTokenCount": {
     "message": "Salvestatud märkide arv"
   },
@@ -4950,7 +4923,7 @@
     "message": "DOM-i murdepunktide loend"
   },
   "panels/browser_debugger/DOMBreakpointsSidebarPane.ts | noBreakpoints": {
-    "message": "No DOM breakpoints set"
+    "message": "DOM-i murdepunkte pole määratud"
   },
   "panels/browser_debugger/DOMBreakpointsSidebarPane.ts | nodeRemoved": {
     "message": "Sõlm on eemaldatud"
@@ -5067,19 +5040,19 @@
     "message": "{PH1} (lähtekoodi kaardist)"
   },
   "panels/changes/ChangesView.ts | binaryDataDescription": {
-    "message": "The changes tab doesn't show binary data changes"
+    "message": "Muudatuste vahekaart ei näita binaarandmete muudatusi"
   },
   "panels/changes/ChangesView.ts | changesViewDescription": {
-    "message": "On this page you can track code changes made within DevTools."
+    "message": "Sellel lehel saate jälgida arendaja tööriistades tehtud koodimuudatusi."
   },
   "panels/changes/ChangesView.ts | copy": {
     "message": "Kopeeri"
   },
   "panels/changes/ChangesView.ts | noChanges": {
-    "message": "No changes yet"
+    "message": "Muudatusi pole veel"
   },
   "panels/changes/ChangesView.ts | noTextualDiff": {
-    "message": "No textual diff available"
+    "message": "Erinevusi tekstis ei ole"
   },
   "panels/changes/ChangesView.ts | sDeletions": {
     "message": "{n,plural, =1{# kustutamine (-)}other{# kustutamist (-)}}"
@@ -5298,7 +5271,7 @@
     "message": " M<XX>"
   },
   "panels/console/ConsoleViewMessage.ts | SeeIssueInCookieReport": {
-    "message": "Click to open privacy and security panel and show third-party cookie report"
+    "message": "Klõpsake privaatsuse ja turvalisuse paneeli avamiseks ning kolmanda osapoole küpsisefailide aruande kuvamiseks"
   },
   "panels/console/ConsoleViewMessage.ts | assertionFailed": {
     "message": "Kinnitamine nurjus: "
@@ -6747,7 +6720,7 @@
     "message": "Virna jälg"
   },
   "panels/explain/components/ConsoleInsight.ts | timedOut": {
-    "message": "Generating a response took too long. Please try again."
+    "message": "Vastuse genereerimiseks kulus liiga palju aega. Proovige uuesti."
   },
   "panels/explain/components/ConsoleInsight.ts | turnOnInSettings": {
     "message": "Lülitage sisse {PH1}, et saada AI abi konsooli hoiatuste ja veateadete mõistmiseks ja lahendamiseks."
@@ -7911,7 +7884,7 @@
     "message": "Lisa {PH1}"
   },
   "panels/mobile_throttling/ThrottlingManager.ts | calibrate": {
-    "message": "Calibrate…"
+    "message": "Kalibreeri…"
   },
   "panels/mobile_throttling/ThrottlingManager.ts | cpuThrottling": {
     "message": "Protsessori piiramine"
@@ -7935,7 +7908,7 @@
     "message": "Võrguühenduseta"
   },
   "panels/mobile_throttling/ThrottlingManager.ts | recalibrate": {
-    "message": "Recalibrate…"
+    "message": "Kalibreeri uuesti…"
   },
   "panels/mobile_throttling/ThrottlingManager.ts | recommendedThrottling": {
     "message": "{PH1} – soovitatud"
@@ -8895,7 +8868,7 @@
     "message": "Sellel taotlusel ei ole küpsisefaile."
   },
   "panels/network/RequestInitiatorView.ts | noInitiator": {
-    "message": "No initiator data"
+    "message": "Andmeid algataja kohta ei ole"
   },
   "panels/network/RequestInitiatorView.ts | requestCallStack": {
     "message": "Taotluse kutse virn"
@@ -8961,10 +8934,10 @@
     "message": "Vastuse andmete laadimine nurjus"
   },
   "panels/network/RequestResponseView.ts | noPreview": {
-    "message": "Nothing to preview"
+    "message": "Eelvaatena kuvatav üksus puudub"
   },
   "panels/network/RequestResponseView.ts | thisRequestHasNoResponseData": {
-    "message": "This request has no response data available"
+    "message": "Sellel päringul puuduvad vastuse andmed"
   },
   "panels/network/RequestTimingView.ts | cacheStorageCacheNameS": {
     "message": "Vahemälu salvestusruumi vahemälu nimi: {PH1}"
@@ -10139,9 +10112,6 @@
   "panels/profiler/ProfilesPanel.ts | cantLoadProfileWhileAnother": {
     "message": "Profiili ei saa teise profiili salvestamise ajal laadida."
   },
-  "panels/profiler/ProfilesPanel.ts | profileLoadingFailedS": {
-    "message": "Profiili laadimine nurjus: {PH1}."
-  },
   "panels/profiler/ProfilesPanel.ts | profiles": {
     "message": "Profiilid"
   },
@@ -10251,7 +10221,7 @@
     "message": "Salvesta"
   },
   "panels/protocol_monitor/ProtocolMonitor.ts | selectAMessageToView": {
-    "message": "Select a message to see its details"
+    "message": "Valige sõnum, et näha selle üksikasju"
   },
   "panels/protocol_monitor/ProtocolMonitor.ts | selectTarget": {
     "message": "Valige sihtmärk"
@@ -10290,7 +10260,7 @@
     "message": "Salvestise või valitud toimingu kopeerimine"
   },
   "panels/recorder/RecorderController.ts | createRecording": {
-    "message": "Create recording"
+    "message": "Salvestise loomine"
   },
   "panels/recorder/RecorderController.ts | deleteRecording": {
     "message": "Kustuta salvestis"
@@ -10308,13 +10278,13 @@
     "message": "Laienduste hankimine …"
   },
   "panels/recorder/RecorderController.ts | header": {
-    "message": "Nothing recorded yet"
+    "message": "Midagi pole veel salvestatud"
   },
   "panels/recorder/RecorderController.ts | importRecording": {
     "message": "Impordi salvestis"
   },
   "panels/recorder/RecorderController.ts | learnMore": {
-    "message": "Learn more"
+    "message": "Lisateave"
   },
   "panels/recorder/RecorderController.ts | noRecordings": {
     "message": "Salvestisi pole"
@@ -10323,7 +10293,7 @@
     "message": "salvestis(t)"
   },
   "panels/recorder/RecorderController.ts | recordingDescription": {
-    "message": "Use recordings to create automated end-to-end tests or performance traces."
+    "message": "Kasutage salvestisi, et luua automaatsed täielikud testid või toimivusjäljed."
   },
   "panels/recorder/RecorderController.ts | replayRecording": {
     "message": "Esita salvestis uuesti"
@@ -11496,7 +11466,7 @@
     "message": "Konsooli sõnum, seotud virnajälg, seotud lähtekood ja seotud võrgupäised saadetakse Google'ile, et genereerida selgitused. Ülevaatajad võivad neid andmeid näha, et seda funktsiooni täiustada."
   },
   "panels/settings/AISettingsTab.ts | consoleInsightsSendsDataNoLogging": {
-    "message": "The console message, associated stack trace, related source code, and the associated network headers are sent to Google to generate explanations. This data will not be used to improve Google’s AI models."
+    "message": "Konsooli sõnum, seotud virnajälg, seotud lähtekood ja seotud võrgupäised saadetakse Google'ile, et genereerida selgitused. Neid andmeid ei kasutata Google'i AI-mudelite täiustamiseks."
   },
   "panels/settings/AISettingsTab.ts | dataCollection": {
     "message": "Olenevalt teie piirkonnast võib Google andmete kogumisest loobuda"
@@ -11532,7 +11502,7 @@
     "message": "Mis tahes andmed, millele kontrollitud leht veebi API-de kaudu juurde pääseb, võrgupäringud, failid ja toimivusjäljed saadetakse selgituste loomiseks Google'ile. Ülevaatajad võivad neid andmeid näha, et seda funktsiooni täiustada. Ärge kasutage isikliku või delikaatse teabega lehtedel."
   },
   "panels/settings/AISettingsTab.ts | freestylerSendsDataNoLogging": {
-    "message": "Any data the inspected page can access via Web APIs, network requests, files, and performance traces are sent to Google to generate explanations. This data will not be used to improve Google’s AI models."
+    "message": "Mis tahes andmed, millele kontrollitud leht veebi API-de kaudu juurde pääseb, võrgupäringud, failid ja toimivusjäljed saadetakse selgituste genereerimiseks Google'ile. Neid andmeid ei kasutata Google'i AI-mudelite täiustamiseks."
   },
   "panels/settings/AISettingsTab.ts | helpUnderstandConsole": {
     "message": "Aitab teil mõista ja lahendada konsooliga seotud hoiatusi ja vigu"
@@ -12259,15 +12229,6 @@
   },
   "panels/sources/NavigatorView.ts | actionCannotBeUndone": {
     "message": "Seda toimingut ei saa tagasi võtta."
-  },
-  "panels/sources/NavigatorView.ts | areYouSureYouWantToDeleteFolder": {
-    "message": "Kas olete kindel, et soovite selle kausta ja selle sisu kustutada?"
-  },
-  "panels/sources/NavigatorView.ts | areYouSureYouWantToDeleteThis": {
-    "message": "Kas soovite kindlasti selle faili kustutada?"
-  },
-  "panels/sources/NavigatorView.ts | areYouSureYouWantToExcludeThis": {
-    "message": "Kas soovite kindlasti selle kausta välistada?"
   },
   "panels/sources/NavigatorView.ts | areYouSureYouWantToRemoveThis": {
     "message": "Kas eemaldada ‘{PH1}’ Workspace'ist?"
@@ -13041,7 +13002,7 @@
     "message": "See rada sisaldab ajastusi, mis pärinevad serveri ajastuse võrguvastuste päistest. Nende vastavad algusajad on hinnangulised ega pruugi olla täpsed."
   },
   "panels/timeline/ThirdPartyTreeView.ts | firstOrThirdPartyName": {
-    "message": "1st / 3rd party"
+    "message": "Esimene/kolmas osapool"
   },
   "panels/timeline/ThirdPartyTreeView.ts | selfTime": {
     "message": "Enda aeg"
@@ -13254,7 +13215,7 @@
     "message": "Kirjeldus"
   },
   "panels/timeline/TimelinePanel.ts | dimThirdParties": {
-    "message": "Dim 3rd parties"
+    "message": "Kolmandate osapoolte sisu nähtavuse vähendamine"
   },
   "panels/timeline/TimelinePanel.ts | disableJavascriptSamples": {
     "message": "Keela JavaScripti näidised"
@@ -13374,7 +13335,7 @@
     "message": "Ajaskaala katkestamine …"
   },
   "panels/timeline/TimelinePanel.ts | thirdPartiesByThirdPartyWeb": {
-    "message": "3rd parties classified by third-party-web"
+    "message": "Kolmandad osapooled on liigitatud kolmanda osapoole veebi järgi"
   },
   "panels/timeline/TimelinePanel.ts | time": {
     "message": "Aeg"
@@ -13653,7 +13614,7 @@
     "message": "{PH1}"
   },
   "panels/timeline/TimelineUIUtils.ts | entity": {
-    "message": "Third party"
+    "message": "Kolmas osapool"
   },
   "panels/timeline/TimelineUIUtils.ts | entryIsHidden": {
     "message": "(sisestus on peidetud)"
@@ -13817,9 +13778,6 @@
   "panels/timeline/TimelineUIUtils.ts | selectorStatsTitle": {
     "message": "Valija statistika"
   },
-  "panels/timeline/TimelineUIUtils.ts | selfTime": {
-    "message": "Enda aeg"
-  },
   "panels/timeline/TimelineUIUtils.ts | size": {
     "message": "Suurus"
   },
@@ -13833,7 +13791,7 @@
     "message": "Stiililehe URL"
   },
   "panels/timeline/TimelineUIUtils.ts | thirdPartyTable": {
-    "message": "1st / 3rd party table"
+    "message": "Esimese/kolmanda osapoole tabel"
   },
   "panels/timeline/TimelineUIUtils.ts | timeSpentInRendering": {
     "message": "Renderdamiseks kulunud aeg"
@@ -13849,9 +13807,6 @@
   },
   "panels/timeline/TimelineUIUtils.ts | timestamp": {
     "message": "Ajatempel"
-  },
-  "panels/timeline/TimelineUIUtils.ts | totalTime": {
-    "message": "Aeg kokku"
   },
   "panels/timeline/TimelineUIUtils.ts | traceEvent": {
     "message": "Jälgimissündmus"
@@ -13920,7 +13875,7 @@
     "message": "Eemalda alamjäljeread"
   },
   "panels/timeline/components/CPUThrottlingSelector.ts | calibrate": {
-    "message": "Calibrate…"
+    "message": "Kalibreeri…"
   },
   "panels/timeline/components/CPUThrottlingSelector.ts | cpu": {
     "message": "Protsessor: {PH1}"
@@ -13932,7 +13887,7 @@
     "message": "Kalibreeritud eelseadistused"
   },
   "panels/timeline/components/CPUThrottlingSelector.ts | recalibrate": {
-    "message": "Recalibrate…"
+    "message": "Kalibreeri uuesti…"
   },
   "panels/timeline/components/CPUThrottlingSelector.ts | recommendedThrottling": {
     "message": "{PH1} – soovitatud"
@@ -14424,7 +14379,7 @@
     "message": "Kodeeritud andmed"
   },
   "panels/timeline/components/NetworkRequestDetails.ts | entity": {
-    "message": "Third party"
+    "message": "Kolmas osapool"
   },
   "panels/timeline/components/NetworkRequestDetails.ts | fromCache": {
     "message": "Vahemälust"
@@ -14568,16 +14523,16 @@
     "message": "Insights on katsejärgus funktsioon. Teie tagasiside aitab meil seda täiustada."
   },
   "panels/timeline/components/SidebarSingleInsightSet.ts | dismissTitle": {
-    "message": "Dismiss"
+    "message": "Loobu"
   },
   "panels/timeline/components/SidebarSingleInsightSet.ts | fieldMismatchNotice": {
-    "message": "There are many reasons why local and field metrics [may not match](https://web.dev/articles/lab-and-field-data-differences). Adjust [throttling settings and device emulation](https://developer.chrome.com/docs/devtools/device-mode) to analyze traces more similar to the average user's environment."
+    "message": "On mitmeid põhjuseid, miks kohalikud ja kasutajatelt kogutud andmed [ei pruugi ühtida](https://web.dev/articles/lab-and-field-data-differences). Kohandage [piiramise seadeid ja seadme emuleerimist](https://developer.chrome.com/docs/devtools/device-mode), et analüüsida jälgi, mis on sarnasemad keskmise kasutaja keskkonnale."
   },
   "panels/timeline/components/SidebarSingleInsightSet.ts | fieldMismatchTitle": {
-    "message": "Field & local metrics mismatch"
+    "message": "Kasutajatelt kogutud ja kohalike andmete erinevus"
   },
   "panels/timeline/components/SidebarSingleInsightSet.ts | fieldScoreLabel": {
-    "message": "Field ({PH1})"
+    "message": "Väli ({PH1})"
   },
   "panels/timeline/components/SidebarSingleInsightSet.ts | metricScore": {
     "message": "{PH1}: {PH2} {PH3} tulemus"
@@ -15885,7 +15840,7 @@
     "message": "Sortimisalus:"
   },
   "ui/legacy/components/data_grid/DataGrid.ts | sortableColumn": {
-    "message": "Sortable column. Press enter to apply sorting filter"
+    "message": "Sorditav veerg. Sortimisfiltri rakendamiseks vajutage sisestusklahvi."
   },
   "ui/legacy/components/data_grid/ShowMoreDataGridNode.ts | showAllD": {
     "message": "Kuva kõik {PH1}"
@@ -16221,10 +16176,10 @@
     "message": "Otsi"
   },
   "ui/legacy/components/source_frame/PreviewFactory.ts | failedToLoadData": {
-    "message": "Failed to load data"
+    "message": "Andmete laadimine ebaõnnestus"
   },
   "ui/legacy/components/source_frame/PreviewFactory.ts | nothingToPreview": {
-    "message": "Nothing to preview"
+    "message": "Eelvaatena kuvatav üksus puudub"
   },
   "ui/legacy/components/source_frame/ResourceSourceFrame.ts | find": {
     "message": "Otsi"
