--- a/front_end/core/i18n/locales/eu.json
+++ b/front_end/core/i18n/locales/eu.json
@@ -105,7 +105,7 @@
     "message": "Sare-panela"
   },
   "core/common/Revealer.ts | securityPanel": {
-    "message": "Security panel"
+    "message": "Segurtasun-panela"
   },
   "core/common/Revealer.ts | sourcesPanel": {
     "message": "Iturburuen panela"
@@ -2798,9 +2798,6 @@
   "panels/application/BackgroundServiceView.ts | clear": {
     "message": "Garbitu"
   },
-  "panels/application/BackgroundServiceView.ts | clickTheRecordButtonSOrHitSTo": {
-    "message": "Sakatu grabatzeko botoia {PH1} edo sakatu {PH2} grabatzen hasteko."
-  },
   "panels/application/BackgroundServiceView.ts | devtoolsWillRecordAllSActivity": {
     "message": "DevTools-ek hiru egin emango ditu {PH1} jarduerak erregistratzen, baita itxita dagoenean ere."
   },
@@ -2812,9 +2809,6 @@
   },
   "panels/application/BackgroundServiceView.ts | instanceId": {
     "message": "Instantzia-identifikatzailea"
-  },
-  "panels/application/BackgroundServiceView.ts | learnMore": {
-    "message": "Lortu informazio gehiago"
   },
   "panels/application/BackgroundServiceView.ts | noMetadataForThisEvent": {
     "message": "Ez dago gertaera honi buruzko metadaturik"
@@ -2947,9 +2941,6 @@
   },
   "panels/application/IndexedDBViews.ts | objectStores": {
     "message": "Objektu-biltegiak"
-  },
-  "panels/application/IndexedDBViews.ts | pleaseConfirmDeleteOfSDatabase": {
-    "message": "Berretsi \"{PH1}\" ezabatu nahi duzula datu-basetik."
   },
   "panels/application/IndexedDBViews.ts | primaryKey": {
     "message": "Gako nagusia"
@@ -3236,12 +3227,6 @@
   "panels/application/SharedStorageEventsView.ts | clickToDisplayBody": {
     "message": "Sakatu biltegi partekatuko edozein gertaera, haren xehetasunak bistaratzeko."
   },
-  "panels/application/SharedStorageItemsView.ts | key": {
-    "message": "Gakoa"
-  },
-  "panels/application/SharedStorageItemsView.ts | selectAValueToPreview": {
-    "message": "Hautatu aurreikusi nahi duzun balioa"
-  },
   "panels/application/SharedStorageItemsView.ts | sharedStorage": {
     "message": "Biltegi partekatua"
   },
@@ -3257,17 +3242,8 @@
   "panels/application/SharedStorageItemsView.ts | sharedStorageItemEdited": {
     "message": "Biltegiko elementua editatu egin da."
   },
-  "panels/application/SharedStorageItemsView.ts | sharedStorageItems": {
-    "message": "Biltegi partekatuko elementuak"
-  },
   "panels/application/SharedStorageItemsView.ts | sharedStorageItemsCleared": {
     "message": "Biltegi partekatuko elementuak garbitu egin dira"
-  },
-  "panels/application/SharedStorageItemsView.ts | sharedStorageNumberEntries": {
-    "message": "Taulan erakusten den sarrera kopurua: {PH1}"
-  },
-  "panels/application/SharedStorageItemsView.ts | value": {
-    "message": "Balioa"
   },
   "panels/application/SharedStorageListTreeElement.ts | sharedStorage": {
     "message": "Biltegi partekatua"
@@ -4262,9 +4238,6 @@
   "panels/application/components/TrustTokensView.ts | issuer": {
     "message": "Jaulkitzailea"
   },
-  "panels/application/components/TrustTokensView.ts | noTrustTokensStored": {
-    "message": "Ez dago egoeraren token pribaturik gordeta."
-  },
   "panels/application/components/TrustTokensView.ts | storedTokenCount": {
     "message": "Gordetako tokenen kopurua"
   },
@@ -4950,7 +4923,7 @@
     "message": "DOMaren aldatze-puntuen zerrenda"
   },
   "panels/browser_debugger/DOMBreakpointsSidebarPane.ts | noBreakpoints": {
-    "message": "No DOM breakpoints set"
+    "message": "Ez dago DOMaren eten-punturik ezarrita"
   },
   "panels/browser_debugger/DOMBreakpointsSidebarPane.ts | nodeRemoved": {
     "message": "Nodoa kendu da"
@@ -5067,19 +5040,19 @@
     "message": "{PH1} (iturburu-mapakoa)"
   },
   "panels/changes/ChangesView.ts | binaryDataDescription": {
-    "message": "The changes tab doesn't show binary data changes"
+    "message": "Aldaketen fitxan ez dira erakusten datu bitarretan egindako aldaketak"
   },
   "panels/changes/ChangesView.ts | changesViewDescription": {
-    "message": "On this page you can track code changes made within DevTools."
+    "message": "Orri honetan, garatzaileentzako tresnen barneko kodean egindako aldaketen jarraipena egin dezakezu."
   },
   "panels/changes/ChangesView.ts | copy": {
     "message": "Kopiatu"
   },
   "panels/changes/ChangesView.ts | noChanges": {
-    "message": "No changes yet"
+    "message": "Oraindik ez da aldaketarik egin"
   },
   "panels/changes/ChangesView.ts | noTextualDiff": {
-    "message": "No textual diff available"
+    "message": "Ez dago desberdintasun testualik"
   },
   "panels/changes/ChangesView.ts | sDeletions": {
     "message": "{n,plural, =1{# ezabatze (-)}other{# ezabatze (-)}}"
@@ -5298,7 +5271,7 @@
     "message": " M<XX>"
   },
   "panels/console/ConsoleViewMessage.ts | SeeIssueInCookieReport": {
-    "message": "Click to open privacy and security panel and show third-party cookie report"
+    "message": "Egin klik pribatutasun- eta segurtasun-panela irekitzeko eta hirugarrenen cookieen txostena erakusteko"
   },
   "panels/console/ConsoleViewMessage.ts | assertionFailed": {
     "message": "Baieztapenak huts egin du: "
@@ -6747,7 +6720,7 @@
     "message": "Pilaren arrastoa"
   },
   "panels/explain/components/ConsoleInsight.ts | timedOut": {
-    "message": "Generating a response took too long. Please try again."
+    "message": "Denbora gehiegi behar izan da erantzun bat sortzeko. Saiatu berriro."
   },
   "panels/explain/components/ConsoleInsight.ts | turnOnInSettings": {
     "message": "Aktibatu {PH1} AAk kontsolako abisuak eta erroreak ulertzen eta kudeatzen lagun diezazun."
@@ -7911,7 +7884,7 @@
     "message": "Gehitu {PH1}"
   },
   "panels/mobile_throttling/ThrottlingManager.ts | calibrate": {
-    "message": "Calibrate…"
+    "message": "Kalibratu…"
   },
   "panels/mobile_throttling/ThrottlingManager.ts | cpuThrottling": {
     "message": "PUZa moteltzea"
@@ -7935,7 +7908,7 @@
     "message": "Deskonektatuta"
   },
   "panels/mobile_throttling/ThrottlingManager.ts | recalibrate": {
-    "message": "Recalibrate…"
+    "message": "Kalibratu berriro…"
   },
   "panels/mobile_throttling/ThrottlingManager.ts | recommendedThrottling": {
     "message": "{PH1}: gomendatua"
@@ -8895,7 +8868,7 @@
     "message": "Eskaerak ez du cookierik."
   },
   "panels/network/RequestInitiatorView.ts | noInitiator": {
-    "message": "No initiator data"
+    "message": "Ez dago abiarazlearen daturik"
   },
   "panels/network/RequestInitiatorView.ts | requestCallStack": {
     "message": "Eskaeren dei-pilatzea"
@@ -8961,10 +8934,10 @@
     "message": "Ezin izan dira kargatu erantzunen datuak"
   },
   "panels/network/RequestResponseView.ts | noPreview": {
-    "message": "Nothing to preview"
+    "message": "Ez dago aurreikusteko ezer"
   },
   "panels/network/RequestResponseView.ts | thisRequestHasNoResponseData": {
-    "message": "This request has no response data available"
+    "message": "Eskaera honek ez du erantzun-daturik erabilgarri"
   },
   "panels/network/RequestTimingView.ts | cacheStorageCacheNameS": {
     "message": "Cache-biltegiratzearen izena: {PH1}"
@@ -10139,9 +10112,6 @@
   "panels/profiler/ProfilesPanel.ts | cantLoadProfileWhileAnother": {
     "message": "Ezin da kargatu profila beste profil bat erregistratzen ari den bitartean."
   },
-  "panels/profiler/ProfilesPanel.ts | profileLoadingFailedS": {
-    "message": "Ezin izan da kargatu profila: {PH1}."
-  },
   "panels/profiler/ProfilesPanel.ts | profiles": {
     "message": "Profilak"
   },
@@ -10251,7 +10221,7 @@
     "message": "Gorde"
   },
   "panels/protocol_monitor/ProtocolMonitor.ts | selectAMessageToView": {
-    "message": "Select a message to see its details"
+    "message": "Hautatu mezu bat haren xehetasunak ikusteko"
   },
   "panels/protocol_monitor/ProtocolMonitor.ts | selectTarget": {
     "message": "Hautatu helburu bat"
@@ -10290,7 +10260,7 @@
     "message": "Kopiatu grabaketa edo hautatutako urratsa"
   },
   "panels/recorder/RecorderController.ts | createRecording": {
-    "message": "Create recording"
+    "message": "Sortu grabaketa bat"
   },
   "panels/recorder/RecorderController.ts | deleteRecording": {
     "message": "Ezabatu grabaketa"
@@ -10308,13 +10278,13 @@
     "message": "Lortu luzapenak…"
   },
   "panels/recorder/RecorderController.ts | header": {
-    "message": "Nothing recorded yet"
+    "message": "Oraindik ez da grabatu ezer"
   },
   "panels/recorder/RecorderController.ts | importRecording": {
     "message": "Inportatu grabaketa"
   },
   "panels/recorder/RecorderController.ts | learnMore": {
-    "message": "Learn more"
+    "message": "Lortu informazio gehiago"
   },
   "panels/recorder/RecorderController.ts | noRecordings": {
     "message": "Ez dago grabaketarik"
@@ -10323,7 +10293,7 @@
     "message": "grabaketa"
   },
   "panels/recorder/RecorderController.ts | recordingDescription": {
-    "message": "Use recordings to create automated end-to-end tests or performance traces."
+    "message": "Erabili grabaketak muturretik muturrerako proba edo errendimendu-arrasto automatizatuak sortzeko."
   },
   "panels/recorder/RecorderController.ts | replayRecording": {
     "message": "Erreproduzitu grabaketa berriro"
@@ -11496,7 +11466,7 @@
     "message": "Kontsolako mezua, lotutako pilaren arrastoa, erlazionatutako iturburu-kodea eta lotutako sareko goiburuak Google-ra bidaltzen dira azalpenak sortzeko. Baliteke datu horiek gizakiak diren berrikusleek ikustea, eginbidea hobetzeko."
   },
   "panels/settings/AISettingsTab.ts | consoleInsightsSendsDataNoLogging": {
-    "message": "The console message, associated stack trace, related source code, and the associated network headers are sent to Google to generate explanations. This data will not be used to improve Google’s AI models."
+    "message": "Kontsolako mezua, lotutako pilaren arrastoa, erlazionatutako iturburu-kodea eta lotutako sareko goiburuak Google-ra bidaltzen dira azalpenak sortzeko. Datuok ez dira erabiliko Google-ren AAko ereduak hobetzeko."
   },
   "panels/settings/AISettingsTab.ts | dataCollection": {
     "message": "Zure lurraldearen arabera, baliteke Google-k daturik ez biltzea"
@@ -11532,7 +11502,7 @@
     "message": "Ikuskatutako orriak sareko APIen bidez atzi ditzakeen sareko eskaerak, fitxategiak eta errendimenduaren arrastoak Google-ra bidaliko dira azalpenak sortzeko. Baliteke datu horiek gizakiak diren berrikusleek ikustea, eginbidea hobetzeko. Ez erabili aukera informazio pertsonala edo kontuzko informazioa duten orrietan."
   },
   "panels/settings/AISettingsTab.ts | freestylerSendsDataNoLogging": {
-    "message": "Any data the inspected page can access via Web APIs, network requests, files, and performance traces are sent to Google to generate explanations. This data will not be used to improve Google’s AI models."
+    "message": "Ikuskatutako orriak sareko APIen bidez atzi ditzakeen sareko eskaerak, fitxategiak eta errendimenduaren arrastoak Google-ra bidaliko dira azalpenak sortzeko. Datuok ez dira erabiliko Google-ren AAko ereduak hobetzeko."
   },
   "panels/settings/AISettingsTab.ts | helpUnderstandConsole": {
     "message": "Kontsolako abisuak eta erroreak ulertzen eta konpontzen laguntzen dizu"
@@ -12259,15 +12229,6 @@
   },
   "panels/sources/NavigatorView.ts | actionCannotBeUndone": {
     "message": "Ezin da desegin ekintza."
-  },
-  "panels/sources/NavigatorView.ts | areYouSureYouWantToDeleteFolder": {
-    "message": "Ziur karpeta hau eta haren edukia ezabatu nahi dituzula?"
-  },
-  "panels/sources/NavigatorView.ts | areYouSureYouWantToDeleteThis": {
-    "message": "Ziur fitxategia ezabatu nahi duzula?"
-  },
-  "panels/sources/NavigatorView.ts | areYouSureYouWantToExcludeThis": {
-    "message": "Ziur zaude karpeta hau kanpoan utzi nahi duzula?"
   },
   "panels/sources/NavigatorView.ts | areYouSureYouWantToRemoveThis": {
     "message": "\"{PH1}\" lan-eremutik kendu nahi duzu?"
@@ -13041,7 +13002,7 @@
     "message": "Pista honek Server-Timing sareko erantzun-goiburuetatik hartutako epeak ditu. Bakoitzaren hasiera-ordua estimatu egiten da; beraz, baliteke zuzenak ez izatea."
   },
   "panels/timeline/ThirdPartyTreeView.ts | firstOrThirdPartyName": {
-    "message": "1st / 3rd party"
+    "message": "Propioa/Hirugarrenena"
   },
   "panels/timeline/ThirdPartyTreeView.ts | selfTime": {
     "message": "Jarduera bakar baten denbora"
@@ -13254,7 +13215,7 @@
     "message": "Azalpena"
   },
   "panels/timeline/TimelinePanel.ts | dimThirdParties": {
-    "message": "Dim 3rd parties"
+    "message": "Murriztu hirugarrenen ikusgaitasuna"
   },
   "panels/timeline/TimelinePanel.ts | disableJavascriptSamples": {
     "message": "Desgaitu JavaScript-eko laginak"
@@ -13374,7 +13335,7 @@
     "message": "Kronologia geldiarazten…"
   },
   "panels/timeline/TimelinePanel.ts | thirdPartiesByThirdPartyWeb": {
-    "message": "3rd parties classified by third-party-web"
+    "message": "Hirugarrenen webgune batek sailkatutako hirugarrenak"
   },
   "panels/timeline/TimelinePanel.ts | time": {
     "message": "Ordua"
@@ -13653,7 +13614,7 @@
     "message": "{PH1}"
   },
   "panels/timeline/TimelineUIUtils.ts | entity": {
-    "message": "Third party"
+    "message": "Hirugarrena"
   },
   "panels/timeline/TimelineUIUtils.ts | entryIsHidden": {
     "message": "(datua ezkutatuta dago)"
@@ -13817,9 +13778,6 @@
   "panels/timeline/TimelineUIUtils.ts | selectorStatsTitle": {
     "message": "Hautatzailearen estatistikak"
   },
-  "panels/timeline/TimelineUIUtils.ts | selfTime": {
-    "message": "Jarduera bakar baten denbora"
-  },
   "panels/timeline/TimelineUIUtils.ts | size": {
     "message": "Tamaina"
   },
@@ -13833,7 +13791,7 @@
     "message": "Estilo-orriaren URLa"
   },
   "panels/timeline/TimelineUIUtils.ts | thirdPartyTable": {
-    "message": "1st / 3rd party table"
+    "message": "Taula propioa/hirugarrenena"
   },
   "panels/timeline/TimelineUIUtils.ts | timeSpentInRendering": {
     "message": "Errendatzen igarotako denbora"
@@ -13849,9 +13807,6 @@
   },
   "panels/timeline/TimelineUIUtils.ts | timestamp": {
     "message": "Denbora-zigilua"
-  },
-  "panels/timeline/TimelineUIUtils.ts | totalTime": {
-    "message": "Iraupena, guztira"
   },
   "panels/timeline/TimelineUIUtils.ts | traceEvent": {
     "message": "Arrasto-gertaera"
@@ -13920,7 +13875,7 @@
     "message": "Kendu bigarren mailako nabigazio-bideak"
   },
   "panels/timeline/components/CPUThrottlingSelector.ts | calibrate": {
-    "message": "Calibrate…"
+    "message": "Kalibratu…"
   },
   "panels/timeline/components/CPUThrottlingSelector.ts | cpu": {
     "message": "PUZa: {PH1}"
@@ -13932,7 +13887,7 @@
     "message": "Kalibratutako aurrezarpenak"
   },
   "panels/timeline/components/CPUThrottlingSelector.ts | recalibrate": {
-    "message": "Recalibrate…"
+    "message": "Kalibratu berriro…"
   },
   "panels/timeline/components/CPUThrottlingSelector.ts | recommendedThrottling": {
     "message": "{PH1}: gomendatua"
@@ -14424,7 +14379,7 @@
     "message": "Kodetutako datuak"
   },
   "panels/timeline/components/NetworkRequestDetails.ts | entity": {
-    "message": "Third party"
+    "message": "Hirugarrena"
   },
   "panels/timeline/components/NetworkRequestDetails.ts | fromCache": {
     "message": "Cachetik"
@@ -14568,16 +14523,16 @@
     "message": "Insights eginbide esperimentala da. Zure iritziak hobetzen lagunduko digu."
   },
   "panels/timeline/components/SidebarSingleInsightSet.ts | dismissTitle": {
-    "message": "Dismiss"
+    "message": "Baztertu"
   },
   "panels/timeline/components/SidebarSingleInsightSet.ts | fieldMismatchNotice": {
-    "message": "There are many reasons why local and field metrics [may not match](https://web.dev/articles/lab-and-field-data-differences). Adjust [throttling settings and device emulation](https://developer.chrome.com/docs/devtools/device-mode) to analyze traces more similar to the average user's environment."
+    "message": "Arrazoi asko direla eta, neurketa lokalak eta eremukoak [agian ez dira bat etorriko](https://web.dev/articles/lab-and-field-data-differences). Doitu [moteltze-ezarpenak eta gailuaren emulazioa](https://developer.chrome.com/docs/devtools/device-mode) batez besteko erabiltzailearen ingurunearen antzekoagoak diren arrastoak analizatzeko."
   },
   "panels/timeline/components/SidebarSingleInsightSet.ts | fieldMismatchTitle": {
-    "message": "Field & local metrics mismatch"
+    "message": "Eremuko neurketak eta neurketa lokalak ez datoz bat"
   },
   "panels/timeline/components/SidebarSingleInsightSet.ts | fieldScoreLabel": {
-    "message": "Field ({PH1})"
+    "message": "Eremua ({PH1})"
   },
   "panels/timeline/components/SidebarSingleInsightSet.ts | metricScore": {
     "message": "{PH1}: {PH2} {PH3} puntuazioa"
@@ -15885,7 +15840,7 @@
     "message": "Ordenatzeko irizpidea"
   },
   "ui/legacy/components/data_grid/DataGrid.ts | sortableColumn": {
-    "message": "Sortable column. Press enter to apply sorting filter"
+    "message": "Ordena daitekeen zutabea. Ordenatzeko iragazkia aplikatzeko, sakatu Sartu"
   },
   "ui/legacy/components/data_grid/ShowMoreDataGridNode.ts | showAllD": {
     "message": "Erakutsi guztiak ({PH1})"
@@ -16221,10 +16176,10 @@
     "message": "Bilatu"
   },
   "ui/legacy/components/source_frame/PreviewFactory.ts | failedToLoadData": {
-    "message": "Failed to load data"
+    "message": "Ezin izan dira kargatu datuak"
   },
   "ui/legacy/components/source_frame/PreviewFactory.ts | nothingToPreview": {
-    "message": "Nothing to preview"
+    "message": "Ez dago aurreikusteko ezer"
   },
   "ui/legacy/components/source_frame/ResourceSourceFrame.ts | find": {
     "message": "Bilatu"
