--- a/front_end/core/i18n/locales/fi.json
+++ b/front_end/core/i18n/locales/fi.json
@@ -105,7 +105,7 @@
     "message": "Verkko-paneeli"
   },
   "core/common/Revealer.ts | securityPanel": {
-    "message": "Security panel"
+    "message": "Turvapaneeli"
   },
   "core/common/Revealer.ts | sourcesPanel": {
     "message": "Lähdepaneeli"
@@ -2798,9 +2798,6 @@
   "panels/application/BackgroundServiceView.ts | clear": {
     "message": "Poista"
   },
-  "panels/application/BackgroundServiceView.ts | clickTheRecordButtonSOrHitSTo": {
-    "message": "Aloita tallennus klikkaamalla tallennuspainiketta {PH1} tai painamalla {PH2}."
-  },
   "panels/application/BackgroundServiceView.ts | devtoolsWillRecordAllSActivity": {
     "message": "DevTools tallentaa kaikki tapahtumat ({PH1}) enintään kolmen päivän ajaksi, vaikka ne olisivat päättyneet."
   },
@@ -2812,9 +2809,6 @@
   },
   "panels/application/BackgroundServiceView.ts | instanceId": {
     "message": "Instanssin tunnus"
-  },
-  "panels/application/BackgroundServiceView.ts | learnMore": {
-    "message": "Lue lisää"
   },
   "panels/application/BackgroundServiceView.ts | noMetadataForThisEvent": {
     "message": "Ei metadataa tälle tapahtumalle"
@@ -2947,9 +2941,6 @@
   },
   "panels/application/IndexedDBViews.ts | objectStores": {
     "message": "Kohdesäilöt"
-  },
-  "panels/application/IndexedDBViews.ts | pleaseConfirmDeleteOfSDatabase": {
-    "message": "Vahvista, että \"{PH1}\" poistetaan tietokannasta."
   },
   "panels/application/IndexedDBViews.ts | primaryKey": {
     "message": "Ensisijainen avain"
@@ -3236,12 +3227,6 @@
   "panels/application/SharedStorageEventsView.ts | clickToDisplayBody": {
     "message": "Klikkaa mitä tahansa jaetun tallennustilan tapahtumaa, niin näet tapahtumaparametrit."
   },
-  "panels/application/SharedStorageItemsView.ts | key": {
-    "message": "Avain"
-  },
-  "panels/application/SharedStorageItemsView.ts | selectAValueToPreview": {
-    "message": "Valitse esikatseltava arvo"
-  },
   "panels/application/SharedStorageItemsView.ts | sharedStorage": {
     "message": "Shared Storage"
   },
@@ -3257,17 +3242,8 @@
   "panels/application/SharedStorageItemsView.ts | sharedStorageItemEdited": {
     "message": "Tallennustilan kohdetta on muokattu."
   },
-  "panels/application/SharedStorageItemsView.ts | sharedStorageItems": {
-    "message": "Jaetut tallennustilan kohteet"
-  },
   "panels/application/SharedStorageItemsView.ts | sharedStorageItemsCleared": {
     "message": "Jaetun tallennustilan kohteet tyhjennetty"
-  },
-  "panels/application/SharedStorageItemsView.ts | sharedStorageNumberEntries": {
-    "message": "Taulukossa näkyvien kohteiden määrä: {PH1}"
-  },
-  "panels/application/SharedStorageItemsView.ts | value": {
-    "message": "Arvo"
   },
   "panels/application/SharedStorageListTreeElement.ts | sharedStorage": {
     "message": "Shared Storage"
@@ -4262,9 +4238,6 @@
   "panels/application/components/TrustTokensView.ts | issuer": {
     "message": "Myöntäjä"
   },
-  "panels/application/components/TrustTokensView.ts | noTrustTokensStored": {
-    "message": "Yksityisiä tilamerkkejä ei ole tallennettu."
-  },
   "panels/application/components/TrustTokensView.ts | storedTokenCount": {
     "message": "Tallennettujen tunnusten lukumäärä"
   },
@@ -4950,7 +4923,7 @@
     "message": "DOM-raja-arvot"
   },
   "panels/browser_debugger/DOMBreakpointsSidebarPane.ts | noBreakpoints": {
-    "message": "No DOM breakpoints set"
+    "message": "DOM-pysäytyspisteitä ei ole asetettu"
   },
   "panels/browser_debugger/DOMBreakpointsSidebarPane.ts | nodeRemoved": {
     "message": "Noodi poistettu"
@@ -5067,19 +5040,19 @@
     "message": "{PH1} (lähdekartasta)"
   },
   "panels/changes/ChangesView.ts | binaryDataDescription": {
-    "message": "The changes tab doesn't show binary data changes"
+    "message": "Muutokset-välilehdellä ei näy binääridatan muutoksia"
   },
   "panels/changes/ChangesView.ts | changesViewDescription": {
-    "message": "On this page you can track code changes made within DevTools."
+    "message": "Tällä sivulla voit seurata DevToolsissa tehtyjä koodin muutoksia."
   },
   "panels/changes/ChangesView.ts | copy": {
     "message": "Kopioi"
   },
   "panels/changes/ChangesView.ts | noChanges": {
-    "message": "No changes yet"
+    "message": "Ei vielä muutoksia"
   },
   "panels/changes/ChangesView.ts | noTextualDiff": {
-    "message": "No textual diff available"
+    "message": "Tekstin erotusprosentti ei ole saatavilla"
   },
   "panels/changes/ChangesView.ts | sDeletions": {
     "message": "{n,plural, =1{# poisto (-)}other{# poistoa (-)}}"
@@ -5298,7 +5271,7 @@
     "message": " M<XX>"
   },
   "panels/console/ConsoleViewMessage.ts | SeeIssueInCookieReport": {
-    "message": "Click to open privacy and security panel and show third-party cookie report"
+    "message": "Avaa yksityisyys- ja turvallisuuspaneeli ja klikkaa nähdäksesi kolmannen osapuolen evästeistä kertovan raportin"
   },
   "panels/console/ConsoleViewMessage.ts | assertionFailed": {
     "message": "Väittämä epäonnistui: "
@@ -6747,7 +6720,7 @@
     "message": "Jäljityslista"
   },
   "panels/explain/components/ConsoleInsight.ts | timedOut": {
-    "message": "Generating a response took too long. Please try again."
+    "message": "Vastauksen luominen kesti liian kauan. Yritä uudelleen."
   },
   "panels/explain/components/ConsoleInsight.ts | turnOnInSettings": {
     "message": "Laita {PH1} päälle, niin saat tekoälyapua konsolin varoitusten ja virheiden ymmärtämiseen ja korjaamiseen."
@@ -7911,7 +7884,7 @@
     "message": "Lisää {PH1}"
   },
   "panels/mobile_throttling/ThrottlingManager.ts | calibrate": {
-    "message": "Calibrate…"
+    "message": "Kalibroi…"
   },
   "panels/mobile_throttling/ThrottlingManager.ts | cpuThrottling": {
     "message": "Suorittimen rajoittaminen"
@@ -7935,7 +7908,7 @@
     "message": "Offline-tila"
   },
   "panels/mobile_throttling/ThrottlingManager.ts | recalibrate": {
-    "message": "Recalibrate…"
+    "message": "Uudelleenkalibroidaan…"
   },
   "panels/mobile_throttling/ThrottlingManager.ts | recommendedThrottling": {
     "message": "{PH1} – suositus"
@@ -8895,7 +8868,7 @@
     "message": "Tällä pyynnöllä ei ole evästeitä."
   },
   "panels/network/RequestInitiatorView.ts | noInitiator": {
-    "message": "No initiator data"
+    "message": "Ei aloittajadataa"
   },
   "panels/network/RequestInitiatorView.ts | requestCallStack": {
     "message": "Pyynnön kutsupino"
@@ -8961,10 +8934,10 @@
     "message": "Vastausdatan lataaminen epäonnistui"
   },
   "panels/network/RequestResponseView.ts | noPreview": {
-    "message": "Nothing to preview"
+    "message": "Ei esikatseltavaa"
   },
   "panels/network/RequestResponseView.ts | thisRequestHasNoResponseData": {
-    "message": "This request has no response data available"
+    "message": "Tälle pyynnölle ei ole vastausdataa"
   },
   "panels/network/RequestTimingView.ts | cacheStorageCacheNameS": {
     "message": "Välimuistin tallennustilan nimi: {PH1}"
@@ -10139,9 +10112,6 @@
   "panels/profiler/ProfilesPanel.ts | cantLoadProfileWhileAnother": {
     "message": "Profiilia ei voi ladata, kun toista profiilia tallennetaan."
   },
-  "panels/profiler/ProfilesPanel.ts | profileLoadingFailedS": {
-    "message": "Profiilin lataus epäonnistui: {PH1}."
-  },
   "panels/profiler/ProfilesPanel.ts | profiles": {
     "message": "Profiilit"
   },
@@ -10251,7 +10221,7 @@
     "message": "Tallenna"
   },
   "panels/protocol_monitor/ProtocolMonitor.ts | selectAMessageToView": {
-    "message": "Select a message to see its details"
+    "message": "Valitse viesti nähdäksesi sen lisätiedot"
   },
   "panels/protocol_monitor/ProtocolMonitor.ts | selectTarget": {
     "message": "Valitse kohde"
@@ -10290,7 +10260,7 @@
     "message": "Tallenteen tai valitun vaiheen kopioiminen"
   },
   "panels/recorder/RecorderController.ts | createRecording": {
-    "message": "Create recording"
+    "message": "Luo tallenne"
   },
   "panels/recorder/RecorderController.ts | deleteRecording": {
     "message": "Poista tallenne"
@@ -10308,13 +10278,13 @@
     "message": "Lataa laajennuksia…"
   },
   "panels/recorder/RecorderController.ts | header": {
-    "message": "Nothing recorded yet"
+    "message": "Ei vielä tallennuksia"
   },
   "panels/recorder/RecorderController.ts | importRecording": {
     "message": "Tuo tallenne"
   },
   "panels/recorder/RecorderController.ts | learnMore": {
-    "message": "Learn more"
+    "message": "Lue lisää"
   },
   "panels/recorder/RecorderController.ts | noRecordings": {
     "message": "Ei tallenteita"
@@ -10323,7 +10293,7 @@
     "message": "tallenne(tta)"
   },
   "panels/recorder/RecorderController.ts | recordingDescription": {
-    "message": "Use recordings to create automated end-to-end tests or performance traces."
+    "message": "Luo tallenteiden avulla automaattisia päästä päähän -testejä tai tulosten jäljityksiä."
   },
   "panels/recorder/RecorderController.ts | replayRecording": {
     "message": "Tallenteen toisto"
@@ -11496,7 +11466,7 @@
     "message": "Konsoliviesti ja jäljityslista, niihin liittyvät lähdekoodi ja verkko-otsikot lähetetään Googlelle selitysten luomista varten. Tarkastajat voivat nähdä tämän datan ominaisuuden kehittämiseksi."
   },
   "panels/settings/AISettingsTab.ts | consoleInsightsSendsDataNoLogging": {
-    "message": "The console message, associated stack trace, related source code, and the associated network headers are sent to Google to generate explanations. This data will not be used to improve Google’s AI models."
+    "message": "Konsoliviesti ja jäljityslista, niihin liittyvät lähdekoodi ja verkko-otsikot lähetetään Googlelle selitysten luomista varten. Dataa ei käytetä Googlen tekoälymallien parantamiseen."
   },
   "panels/settings/AISettingsTab.ts | dataCollection": {
     "message": "Alueestasi riippuen Google voi jättää datan keräämättä"
@@ -11532,7 +11502,7 @@
     "message": "Mikä tahansa data, jolle tarkasteltavalla sivulla on pääsy verkkorajapintojen, verkkopyyntöjen tiedostojen ja suorituskyvyn jäljityksen kautta, voidaan lähettää Googlelle selitysten luomista varten. Tarkastajat voivat nähdä tämän datan ominaisuuden kehittämiseksi. Älä käytä sivuilla, joilla on henkilökohtaisia tai arkaluontoisia tietoja."
   },
   "panels/settings/AISettingsTab.ts | freestylerSendsDataNoLogging": {
-    "message": "Any data the inspected page can access via Web APIs, network requests, files, and performance traces are sent to Google to generate explanations. This data will not be used to improve Google’s AI models."
+    "message": "Mikä tahansa data, jolle tarkasteltavalla sivulla on pääsy verkkorajapintojen, verkkopyyntöjen tiedostojen ja suorituskyvyn jäljityksen kautta, voidaan lähettää Googlelle selitysten luomista varten. Dataa ei käytetä Googlen tekoälymallien parantamiseen."
   },
   "panels/settings/AISettingsTab.ts | helpUnderstandConsole": {
     "message": "Auttaa ymmärtämään ja korjaamaan konsolin varoituksia ja virheitä"
@@ -12259,15 +12229,6 @@
   },
   "panels/sources/NavigatorView.ts | actionCannotBeUndone": {
     "message": "Tätä toimintoa ei voi kumota."
-  },
-  "panels/sources/NavigatorView.ts | areYouSureYouWantToDeleteFolder": {
-    "message": "Haluatko varmasti poistaa tämän kansion ja sen sisällön?"
-  },
-  "panels/sources/NavigatorView.ts | areYouSureYouWantToDeleteThis": {
-    "message": "Haluatko varmasti poistaa tämän tiedoston?"
-  },
-  "panels/sources/NavigatorView.ts | areYouSureYouWantToExcludeThis": {
-    "message": "Haluatko varmasti suorittaa tämän kansion?"
   },
   "panels/sources/NavigatorView.ts | areYouSureYouWantToRemoveThis": {
     "message": "Poistetaanko {PH1} työtilasta?"
@@ -13041,7 +13002,7 @@
     "message": "Seuranta sisältää ajoituksia Server-Timing-verkkovastauksen otsikoista. Alkamisajat ovat vain arvioita, eivätkä ne välttämättä ole tarkkoja."
   },
   "panels/timeline/ThirdPartyTreeView.ts | firstOrThirdPartyName": {
-    "message": "1st / 3rd party"
+    "message": "Ensimmäinen / kolmas osapuoli"
   },
   "panels/timeline/ThirdPartyTreeView.ts | selfTime": {
     "message": "Yhden tapahtuman aika"
@@ -13254,7 +13215,7 @@
     "message": "Kuvaus"
   },
   "panels/timeline/TimelinePanel.ts | dimThirdParties": {
-    "message": "Dim 3rd parties"
+    "message": "Himmennä kolmannet osapuolet"
   },
   "panels/timeline/TimelinePanel.ts | disableJavascriptSamples": {
     "message": "Poista JavaScript-näytteet käytöstä"
@@ -13374,7 +13335,7 @@
     "message": "Pysäytetään aikajanaa…"
   },
   "panels/timeline/TimelinePanel.ts | thirdPartiesByThirdPartyWeb": {
-    "message": "3rd parties classified by third-party-web"
+    "message": "Kolmannet osapuolet, luokiteltu kolmannen osapuolen verkkosivujen mukaan"
   },
   "panels/timeline/TimelinePanel.ts | time": {
     "message": "Aika"
@@ -13653,7 +13614,7 @@
     "message": "{PH1}"
   },
   "panels/timeline/TimelineUIUtils.ts | entity": {
-    "message": "Third party"
+    "message": "Kolmas osapuoli"
   },
   "panels/timeline/TimelineUIUtils.ts | entryIsHidden": {
     "message": "(kohta on piilotettu)"
@@ -13817,9 +13778,6 @@
   "panels/timeline/TimelineUIUtils.ts | selectorStatsTitle": {
     "message": "Valitsimen tilastot"
   },
-  "panels/timeline/TimelineUIUtils.ts | selfTime": {
-    "message": "Yhden tapahtuman aika"
-  },
   "panels/timeline/TimelineUIUtils.ts | size": {
     "message": "Koko"
   },
@@ -13833,7 +13791,7 @@
     "message": "Tyyliarkin URL"
   },
   "panels/timeline/TimelineUIUtils.ts | thirdPartyTable": {
-    "message": "1st / 3rd party table"
+    "message": "Ensimmäisen / kolmannen osapuolen taulukko"
   },
   "panels/timeline/TimelineUIUtils.ts | timeSpentInRendering": {
     "message": "Renderöintiin käytetty aika"
@@ -13849,9 +13807,6 @@
   },
   "panels/timeline/TimelineUIUtils.ts | timestamp": {
     "message": "Aikaleima"
-  },
-  "panels/timeline/TimelineUIUtils.ts | totalTime": {
-    "message": "Kokonaisaika"
   },
   "panels/timeline/TimelineUIUtils.ts | traceEvent": {
     "message": "Jälkitapahtuma"
@@ -13920,7 +13875,7 @@
     "message": "Poista alatason navigointipolut"
   },
   "panels/timeline/components/CPUThrottlingSelector.ts | calibrate": {
-    "message": "Calibrate…"
+    "message": "Kalibroi…"
   },
   "panels/timeline/components/CPUThrottlingSelector.ts | cpu": {
     "message": "CPU: {PH1}"
@@ -13932,7 +13887,7 @@
     "message": "Kalibroidut esiasetukset"
   },
   "panels/timeline/components/CPUThrottlingSelector.ts | recalibrate": {
-    "message": "Recalibrate…"
+    "message": "Uudelleenkalibroidaan…"
   },
   "panels/timeline/components/CPUThrottlingSelector.ts | recommendedThrottling": {
     "message": "{PH1} – suositus"
@@ -14424,7 +14379,7 @@
     "message": "Koodattu data"
   },
   "panels/timeline/components/NetworkRequestDetails.ts | entity": {
-    "message": "Third party"
+    "message": "Kolmas osapuoli"
   },
   "panels/timeline/components/NetworkRequestDetails.ts | fromCache": {
     "message": "Välimuistista"
@@ -14568,16 +14523,16 @@
     "message": "Insights on kokeellinen ominaisuus. Palaute auttaa meitä kehittämään sitä."
   },
   "panels/timeline/components/SidebarSingleInsightSet.ts | dismissTitle": {
-    "message": "Dismiss"
+    "message": "Ohita"
   },
   "panels/timeline/components/SidebarSingleInsightSet.ts | fieldMismatchNotice": {
-    "message": "There are many reasons why local and field metrics [may not match](https://web.dev/articles/lab-and-field-data-differences). Adjust [throttling settings and device emulation](https://developer.chrome.com/docs/devtools/device-mode) to analyze traces more similar to the average user's environment."
+    "message": "Paikalliset ja kenttämittarit [eivät välttämättä täsmää useista eri syistä](https://web.dev/articles/lab-and-field-data-differences). Muokkaa [rajoitusasetuksia ja laitteen emulointia](https://developer.chrome.com/docs/devtools/device-mode), jotta voit analysoida jälkiä, jotka muistuttavat keskimääräisen käyttäjän ympäristöä."
   },
   "panels/timeline/components/SidebarSingleInsightSet.ts | fieldMismatchTitle": {
-    "message": "Field & local metrics mismatch"
+    "message": "Kenttä- ja paikalliset mittarit eivät täsmää"
   },
   "panels/timeline/components/SidebarSingleInsightSet.ts | fieldScoreLabel": {
-    "message": "Field ({PH1})"
+    "message": "Kenttä ({PH1})"
   },
   "panels/timeline/components/SidebarSingleInsightSet.ts | metricScore": {
     "message": "{PH1}: {PH2} {PH3} tulos"
@@ -15885,7 +15840,7 @@
     "message": "Lajitteluperuste"
   },
   "ui/legacy/components/data_grid/DataGrid.ts | sortableColumn": {
-    "message": "Sortable column. Press enter to apply sorting filter"
+    "message": "Lajiteltava sarake. Ota lajittelusuodatin käyttöön painamalla Enter"
   },
   "ui/legacy/components/data_grid/ShowMoreDataGridNode.ts | showAllD": {
     "message": "Näytä kaikki {PH1}"
@@ -16221,10 +16176,10 @@
     "message": "Hae"
   },
   "ui/legacy/components/source_frame/PreviewFactory.ts | failedToLoadData": {
-    "message": "Failed to load data"
+    "message": "Datan lataaminen epäonnistui"
   },
   "ui/legacy/components/source_frame/PreviewFactory.ts | nothingToPreview": {
-    "message": "Nothing to preview"
+    "message": "Ei esikatseltavaa"
   },
   "ui/legacy/components/source_frame/ResourceSourceFrame.ts | find": {
     "message": "Hae"
