--- a/front_end/core/i18n/locales/fil.json
+++ b/front_end/core/i18n/locales/fil.json
@@ -105,7 +105,7 @@
     "message": "Panel na Network"
   },
   "core/common/Revealer.ts | securityPanel": {
-    "message": "Security panel"
+    "message": "Panel ng seguridad"
   },
   "core/common/Revealer.ts | sourcesPanel": {
     "message": "Panel ng Mga Source"
@@ -2798,9 +2798,6 @@
   "panels/application/BackgroundServiceView.ts | clear": {
     "message": "I-clear"
   },
-  "panels/application/BackgroundServiceView.ts | clickTheRecordButtonSOrHitSTo": {
-    "message": "I-click ang button na i-record {PH1} o pindutin ang {PH2} para magsimulang mag-record."
-  },
   "panels/application/BackgroundServiceView.ts | devtoolsWillRecordAllSActivity": {
     "message": "Ire-record ng DevTools ang lahat ng aktibidad sa {PH1} sa loob ng hanggang 3 araw, kahit na nakasara."
   },
@@ -2812,9 +2809,6 @@
   },
   "panels/application/BackgroundServiceView.ts | instanceId": {
     "message": "Instance ID"
-  },
-  "panels/application/BackgroundServiceView.ts | learnMore": {
-    "message": "Matuto pa"
   },
   "panels/application/BackgroundServiceView.ts | noMetadataForThisEvent": {
     "message": "Walang metadata para sa event na ito"
@@ -2947,9 +2941,6 @@
   },
   "panels/application/IndexedDBViews.ts | objectStores": {
     "message": "Mga store ng object"
-  },
-  "panels/application/IndexedDBViews.ts | pleaseConfirmDeleteOfSDatabase": {
-    "message": "Pakikumpirma ang pag-delete ng database ng \"{PH1}.\""
   },
   "panels/application/IndexedDBViews.ts | primaryKey": {
     "message": "Pangunahing key"
@@ -3236,12 +3227,6 @@
   "panels/application/SharedStorageEventsView.ts | clickToDisplayBody": {
     "message": "I-click ang anumang event ng naka-share na storage para ipakita ang mga parameter ng event."
   },
-  "panels/application/SharedStorageItemsView.ts | key": {
-    "message": "Key"
-  },
-  "panels/application/SharedStorageItemsView.ts | selectAValueToPreview": {
-    "message": "Pumili ng value para i-preview"
-  },
   "panels/application/SharedStorageItemsView.ts | sharedStorage": {
     "message": "Naka-share na storage"
   },
@@ -3257,17 +3242,8 @@
   "panels/application/SharedStorageItemsView.ts | sharedStorageItemEdited": {
     "message": "Na-edit ang item sa storage."
   },
-  "panels/application/SharedStorageItemsView.ts | sharedStorageItems": {
-    "message": "Mga Naka-share na Item sa Storage"
-  },
   "panels/application/SharedStorageItemsView.ts | sharedStorageItemsCleared": {
     "message": "Na-clear ang mga item sa Naka-share na Storage"
-  },
-  "panels/application/SharedStorageItemsView.ts | sharedStorageNumberEntries": {
-    "message": "Bilang ng mga entry na ipinapakita sa talahanayan: {PH1}"
-  },
-  "panels/application/SharedStorageItemsView.ts | value": {
-    "message": "Value"
   },
   "panels/application/SharedStorageListTreeElement.ts | sharedStorage": {
     "message": "Naka-share na storage"
@@ -4262,9 +4238,6 @@
   "panels/application/components/TrustTokensView.ts | issuer": {
     "message": "Nagbigay"
   },
-  "panels/application/components/TrustTokensView.ts | noTrustTokensStored": {
-    "message": "Walang naka-store na private state token sa kasalukuyan."
-  },
   "panels/application/components/TrustTokensView.ts | storedTokenCount": {
     "message": "Bilang ng naka-store na token"
   },
@@ -4950,7 +4923,7 @@
     "message": "listahan ng Mga Breakpoint ng DOM"
   },
   "panels/browser_debugger/DOMBreakpointsSidebarPane.ts | noBreakpoints": {
-    "message": "No DOM breakpoints set"
+    "message": "Walang nakatakdang DOM breakpoint"
   },
   "panels/browser_debugger/DOMBreakpointsSidebarPane.ts | nodeRemoved": {
     "message": "Inalis ang node"
@@ -5067,19 +5040,19 @@
     "message": "{PH1} (mula sa source map)"
   },
   "panels/changes/ChangesView.ts | binaryDataDescription": {
-    "message": "The changes tab doesn't show binary data changes"
+    "message": "Hindi nagpapakita ng mga pagbabago sa binary na data ang tab ng mga pagbabago"
   },
   "panels/changes/ChangesView.ts | changesViewDescription": {
-    "message": "On this page you can track code changes made within DevTools."
+    "message": "Sa page na ito, puwede mong subaybayan ang mga pagbabago sa code na ginawa sa loob ng DevTools."
   },
   "panels/changes/ChangesView.ts | copy": {
     "message": "Kopyahin"
   },
   "panels/changes/ChangesView.ts | noChanges": {
-    "message": "No changes yet"
+    "message": "Wala pang pagbabago"
   },
   "panels/changes/ChangesView.ts | noTextualDiff": {
-    "message": "No textual diff available"
+    "message": "Walang available na textual na pagkakaiba"
   },
   "panels/changes/ChangesView.ts | sDeletions": {
     "message": "{n,plural, =1{# pag-delete (-)}one{# pag-delete (-)}other{# na pag-delete (-)}}"
@@ -5298,7 +5271,7 @@
     "message": " M<XX>"
   },
   "panels/console/ConsoleViewMessage.ts | SeeIssueInCookieReport": {
-    "message": "Click to open privacy and security panel and show third-party cookie report"
+    "message": "I-click para buksan ang panel ng privacy at seguridad at ipakita ang ulat sa third-party na cookie"
   },
   "panels/console/ConsoleViewMessage.ts | assertionFailed": {
     "message": "Hindi nagtagumpay ang assertion: "
@@ -6747,7 +6720,7 @@
     "message": "Stacktrace"
   },
   "panels/explain/components/ConsoleInsight.ts | timedOut": {
-    "message": "Generating a response took too long. Please try again."
+    "message": "Masyadong natagalan ang pagbuo ng sagot. Pakisubukan ulit."
   },
   "panels/explain/components/ConsoleInsight.ts | turnOnInSettings": {
     "message": "I-on ang {PH1} para makatanggap ng tulong ng AI para sa pag-unawa at pagtugon sa mga babala at error sa console."
@@ -7911,7 +7884,7 @@
     "message": "Idagdag ang {PH1}"
   },
   "panels/mobile_throttling/ThrottlingManager.ts | calibrate": {
-    "message": "Calibrate…"
+    "message": "I-calibrate…"
   },
   "panels/mobile_throttling/ThrottlingManager.ts | cpuThrottling": {
     "message": "Pag-throttle ng CPU"
@@ -7935,7 +7908,7 @@
     "message": "Offline"
   },
   "panels/mobile_throttling/ThrottlingManager.ts | recalibrate": {
-    "message": "Recalibrate…"
+    "message": "Mag-recalibrate…"
   },
   "panels/mobile_throttling/ThrottlingManager.ts | recommendedThrottling": {
     "message": "{PH1} – inirerekomenda"
@@ -8895,7 +8868,7 @@
     "message": "Walang cookies ang kahilingang ito."
   },
   "panels/network/RequestInitiatorView.ts | noInitiator": {
-    "message": "No initiator data"
+    "message": "Walang data ng initiator"
   },
   "panels/network/RequestInitiatorView.ts | requestCallStack": {
     "message": "Call stack ng kahilingan"
@@ -8961,10 +8934,10 @@
     "message": "Hindi na-load ang data ng sagot"
   },
   "panels/network/RequestResponseView.ts | noPreview": {
-    "message": "Nothing to preview"
+    "message": "Walang ipi-preview"
   },
   "panels/network/RequestResponseView.ts | thisRequestHasNoResponseData": {
-    "message": "This request has no response data available"
+    "message": "Walang available na data ng sagot ang request na ito"
   },
   "panels/network/RequestTimingView.ts | cacheStorageCacheNameS": {
     "message": "Pangalan ng cache ng storage: {PH1}"
@@ -10139,9 +10112,6 @@
   "panels/profiler/ProfilesPanel.ts | cantLoadProfileWhileAnother": {
     "message": "Hindi makakapag-load ng profile habang may inire-record na ibang profile."
   },
-  "panels/profiler/ProfilesPanel.ts | profileLoadingFailedS": {
-    "message": "Hindi na-load ang profile: {PH1}."
-  },
   "panels/profiler/ProfilesPanel.ts | profiles": {
     "message": "Mga Profile"
   },
@@ -10251,7 +10221,7 @@
     "message": "I-save"
   },
   "panels/protocol_monitor/ProtocolMonitor.ts | selectAMessageToView": {
-    "message": "Select a message to see its details"
+    "message": "Pumili ng mensahe para makita ang mga detalye nito"
   },
   "panels/protocol_monitor/ProtocolMonitor.ts | selectTarget": {
     "message": "Pumili ng target"
@@ -10290,7 +10260,7 @@
     "message": "Kopyahin ang recording o napiling hakbang"
   },
   "panels/recorder/RecorderController.ts | createRecording": {
-    "message": "Create recording"
+    "message": "Bumuo ng recording"
   },
   "panels/recorder/RecorderController.ts | deleteRecording": {
     "message": "I-delete ang recording"
@@ -10308,13 +10278,13 @@
     "message": "Kumuha ng mga extension…"
   },
   "panels/recorder/RecorderController.ts | header": {
-    "message": "Nothing recorded yet"
+    "message": "Wala pang na-record"
   },
   "panels/recorder/RecorderController.ts | importRecording": {
     "message": "I-import ang recording"
   },
   "panels/recorder/RecorderController.ts | learnMore": {
-    "message": "Learn more"
+    "message": "Matuto pa"
   },
   "panels/recorder/RecorderController.ts | noRecordings": {
     "message": "Walang recording"
@@ -10323,7 +10293,7 @@
     "message": "(mga) recording"
   },
   "panels/recorder/RecorderController.ts | recordingDescription": {
-    "message": "Use recordings to create automated end-to-end tests or performance traces."
+    "message": "Gumamit ng mga recording para gumawa ng mga naka-automate na end-to-end na test o trace ng performance."
   },
   "panels/recorder/RecorderController.ts | replayRecording": {
     "message": "I-replay ang pag-record"
@@ -11496,7 +11466,7 @@
     "message": "Ipinadala sa Google ang mensahe sa console, nauugnay na stack trace, nauugnay na source code, at mga nauugnay na header ng network para bumuo ng mga paliwanag. Puwedeng makita ng mga taong tagasuri ang data na ito para mapahusay ang feature na ito."
   },
   "panels/settings/AISettingsTab.ts | consoleInsightsSendsDataNoLogging": {
-    "message": "The console message, associated stack trace, related source code, and the associated network headers are sent to Google to generate explanations. This data will not be used to improve Google’s AI models."
+    "message": "Ipinapadala sa Google ang mensahe sa console, nauugnay na stack trace, nauugnay na source code, at mga nauugnay na header ng network para bumuo ng mga paliwanag. Hindi gagamitin ang data na ito para pahusayin ang mga modelo ng AI ng Google."
   },
   "panels/settings/AISettingsTab.ts | dataCollection": {
     "message": "Posibleng hindi mangolekta ng data ang Google depende sa iyong rehiyon"
@@ -11532,7 +11502,7 @@
     "message": "Ipinapadala sa Google ang anumang data na puwedeng ma-access ng siniyasat na page sa pamamagitan ng mga Web API, request sa network, file, at trace ng performance para bumuo ng mga paliwanag. Puwedeng makita ng mga taong tagasuri ang data na ito para mapahusay ang feature na ito. Huwag gamitin sa mga page na may personal o sensitibong impormasyon."
   },
   "panels/settings/AISettingsTab.ts | freestylerSendsDataNoLogging": {
-    "message": "Any data the inspected page can access via Web APIs, network requests, files, and performance traces are sent to Google to generate explanations. This data will not be used to improve Google’s AI models."
+    "message": "Ipinapadala sa Google ang anumang data na puwedeng ma-access ng siniyasat na page sa pamamagitan ng mga Web API, request sa network, file, at trace ng performance para bumuo ng mga paliwanag. Hindi gagamitin ang data na ito para pahusayin ang mga modelo ng AI ng Google."
   },
   "panels/settings/AISettingsTab.ts | helpUnderstandConsole": {
     "message": "Tinutulungan kang maunawaan at ayusin ang mga babala at error sa console"
@@ -12259,15 +12229,6 @@
   },
   "panels/sources/NavigatorView.ts | actionCannotBeUndone": {
     "message": "Hindi maa-undo ang pagkilos na ito."
-  },
-  "panels/sources/NavigatorView.ts | areYouSureYouWantToDeleteFolder": {
-    "message": "Sigurado ka bang gusto mong i-delete ang folder na ito at ang mga content nito?"
-  },
-  "panels/sources/NavigatorView.ts | areYouSureYouWantToDeleteThis": {
-    "message": "Sigurado ka bang gusto mong i-delete ang file na ito?"
-  },
-  "panels/sources/NavigatorView.ts | areYouSureYouWantToExcludeThis": {
-    "message": "Sigurado ka bang gusto mong ibukod ang folder na ito?"
   },
   "panels/sources/NavigatorView.ts | areYouSureYouWantToRemoveThis": {
     "message": "Alisin ang ‘{PH1}’ sa Workspace?"
@@ -13254,7 +13215,7 @@
     "message": "Paglalarawan"
   },
   "panels/timeline/TimelinePanel.ts | dimThirdParties": {
-    "message": "Dim 3rd parties"
+    "message": "I-dim ang mga 3rd party"
   },
   "panels/timeline/TimelinePanel.ts | disableJavascriptSamples": {
     "message": "I-disable ang mga sample ng JavaScript"
@@ -13374,7 +13335,7 @@
     "message": "Ihinihinto ang timeline…"
   },
   "panels/timeline/TimelinePanel.ts | thirdPartiesByThirdPartyWeb": {
-    "message": "3rd parties classified by third-party-web"
+    "message": "Mga 3rd party na inuuri ayon sa third-party na web"
   },
   "panels/timeline/TimelinePanel.ts | time": {
     "message": "Oras"
@@ -13817,9 +13778,6 @@
   "panels/timeline/TimelineUIUtils.ts | selectorStatsTitle": {
     "message": "Mga istatistika ng selector"
   },
-  "panels/timeline/TimelineUIUtils.ts | selfTime": {
-    "message": "Oras ng aktibidad"
-  },
   "panels/timeline/TimelineUIUtils.ts | size": {
     "message": "Laki"
   },
@@ -13833,7 +13791,7 @@
     "message": "URL ng Stylesheet"
   },
   "panels/timeline/TimelineUIUtils.ts | thirdPartyTable": {
-    "message": "1st / 3rd party table"
+    "message": "Talahanayan ng 1st / 3rd party"
   },
   "panels/timeline/TimelineUIUtils.ts | timeSpentInRendering": {
     "message": "Oras na ginugol sa pag-render"
@@ -13849,9 +13807,6 @@
   },
   "panels/timeline/TimelineUIUtils.ts | timestamp": {
     "message": "Timestamp"
-  },
-  "panels/timeline/TimelineUIUtils.ts | totalTime": {
-    "message": "Kabuuang oras"
   },
   "panels/timeline/TimelineUIUtils.ts | traceEvent": {
     "message": "Event ng pag-trace"
@@ -13920,7 +13875,7 @@
     "message": "Alisin ang mga child breadcrumb"
   },
   "panels/timeline/components/CPUThrottlingSelector.ts | calibrate": {
-    "message": "Calibrate…"
+    "message": "I-calibrate…"
   },
   "panels/timeline/components/CPUThrottlingSelector.ts | cpu": {
     "message": "CPU: {PH1}"
@@ -13932,7 +13887,7 @@
     "message": "Mga na-calibrate na preset"
   },
   "panels/timeline/components/CPUThrottlingSelector.ts | recalibrate": {
-    "message": "Recalibrate…"
+    "message": "Mag-recalibrate…"
   },
   "panels/timeline/components/CPUThrottlingSelector.ts | recommendedThrottling": {
     "message": "{PH1} – inirerekomenda"
@@ -14568,13 +14523,13 @@
     "message": "Ang Insights ay pang-eksperimentong feature. Makakatulong ang iyong feedback para pahusayin namin ito."
   },
   "panels/timeline/components/SidebarSingleInsightSet.ts | dismissTitle": {
-    "message": "Dismiss"
+    "message": "I-dismiss"
   },
   "panels/timeline/components/SidebarSingleInsightSet.ts | fieldMismatchNotice": {
-    "message": "There are many reasons why local and field metrics [may not match](https://web.dev/articles/lab-and-field-data-differences). Adjust [throttling settings and device emulation](https://developer.chrome.com/docs/devtools/device-mode) to analyze traces more similar to the average user's environment."
+    "message": "Maraming dahilan kung bakit [posibleng hindi tumugma](https://web.dev/articles/lab-and-field-data-differences) ang mga lokal na sukatan at sukatan ng field. I-adjust ang [mga setting ng pag-throttle at pag-emulate ng device](https://developer.chrome.com/docs/devtools/device-mode) para masuri ang mga trace na mas katulad ng environment ng average na user."
   },
   "panels/timeline/components/SidebarSingleInsightSet.ts | fieldMismatchTitle": {
-    "message": "Field & local metrics mismatch"
+    "message": "Hindi magkatugma ang mga sukatan ng field at lokal na sukatan"
   },
   "panels/timeline/components/SidebarSingleInsightSet.ts | fieldScoreLabel": {
     "message": "Field ({PH1})"
@@ -15885,7 +15840,7 @@
     "message": "Pagbukud-bukurin Ayon sa"
   },
   "ui/legacy/components/data_grid/DataGrid.ts | sortableColumn": {
-    "message": "Sortable column. Press enter to apply sorting filter"
+    "message": "Napagbubukod-bukod na column. Pindutin ang enter para i-apply ang filter ng pagbubukod-bukod"
   },
   "ui/legacy/components/data_grid/ShowMoreDataGridNode.ts | showAllD": {
     "message": "Ipakita ang lahat ng {PH1}"
@@ -16221,10 +16176,10 @@
     "message": "Maghanap"
   },
   "ui/legacy/components/source_frame/PreviewFactory.ts | failedToLoadData": {
-    "message": "Failed to load data"
+    "message": "Hindi na-load ang data"
   },
   "ui/legacy/components/source_frame/PreviewFactory.ts | nothingToPreview": {
-    "message": "Nothing to preview"
+    "message": "Walang ipi-preview"
   },
   "ui/legacy/components/source_frame/ResourceSourceFrame.ts | find": {
     "message": "Maghanap"
