--- a/front_end/core/i18n/locales/fr.json
+++ b/front_end/core/i18n/locales/fr.json
@@ -105,7 +105,7 @@
     "message": "Panneau \"Network\""
   },
   "core/common/Revealer.ts | securityPanel": {
-    "message": "Security panel"
+    "message": "Panneau de sécurité"
   },
   "core/common/Revealer.ts | sourcesPanel": {
     "message": "Panneau \"Sources\""
@@ -2798,9 +2798,6 @@
   "panels/application/BackgroundServiceView.ts | clear": {
     "message": "Effacer"
   },
-  "panels/application/BackgroundServiceView.ts | clickTheRecordButtonSOrHitSTo": {
-    "message": "Cliquez sur le bouton d'enregistrement {PH1} ou appuyez sur {PH2} pour commencer l'enregistrement."
-  },
   "panels/application/BackgroundServiceView.ts | devtoolsWillRecordAllSActivity": {
     "message": "Les outils de développement enregistreront toutes les activités {PH1} pendant un maximum de 3 jours, même fermés."
   },
@@ -2812,9 +2809,6 @@
   },
   "panels/application/BackgroundServiceView.ts | instanceId": {
     "message": "ID d'instance"
-  },
-  "panels/application/BackgroundServiceView.ts | learnMore": {
-    "message": "En savoir plus"
   },
   "panels/application/BackgroundServiceView.ts | noMetadataForThisEvent": {
     "message": "Aucune métadonnée pour cet événement"
@@ -2947,9 +2941,6 @@
   },
   "panels/application/IndexedDBViews.ts | objectStores": {
     "message": "Store  d'objets"
-  },
-  "panels/application/IndexedDBViews.ts | pleaseConfirmDeleteOfSDatabase": {
-    "message": "Veuillez confirmer la suppression de la base de données \"{PH1}\"."
   },
   "panels/application/IndexedDBViews.ts | primaryKey": {
     "message": "Clé primaire"
@@ -3236,12 +3227,6 @@
   "panels/application/SharedStorageEventsView.ts | clickToDisplayBody": {
     "message": "Cliquez sur un événement de stockage partagé pour afficher ses paramètres."
   },
-  "panels/application/SharedStorageItemsView.ts | key": {
-    "message": "Clé"
-  },
-  "panels/application/SharedStorageItemsView.ts | selectAValueToPreview": {
-    "message": "Sélectionnez une valeur à prévisualiser"
-  },
   "panels/application/SharedStorageItemsView.ts | sharedStorage": {
     "message": "Stockage partagé"
   },
@@ -3257,17 +3242,8 @@
   "panels/application/SharedStorageItemsView.ts | sharedStorageItemEdited": {
     "message": "L'élément dans l'espace de stockage a été modifié."
   },
-  "panels/application/SharedStorageItemsView.ts | sharedStorageItems": {
-    "message": "Éléments de stockage partagé"
-  },
   "panels/application/SharedStorageItemsView.ts | sharedStorageItemsCleared": {
     "message": "Éléments de stockage partagé effacés"
-  },
-  "panels/application/SharedStorageItemsView.ts | sharedStorageNumberEntries": {
-    "message": "Nombre d'entrées affichées dans le tableau : {PH1}"
-  },
-  "panels/application/SharedStorageItemsView.ts | value": {
-    "message": "Valeur"
   },
   "panels/application/SharedStorageListTreeElement.ts | sharedStorage": {
     "message": "Stockage partagé"
@@ -4262,9 +4238,6 @@
   "panels/application/components/TrustTokensView.ts | issuer": {
     "message": "Émetteur"
   },
-  "panels/application/components/TrustTokensView.ts | noTrustTokensStored": {
-    "message": "Aucun jeton d'état privé n'est actuellement stocké."
-  },
   "panels/application/components/TrustTokensView.ts | storedTokenCount": {
     "message": "Nombre de jetons stockés"
   },
@@ -4950,7 +4923,7 @@
     "message": "Liste des points d'arrêt DOM"
   },
   "panels/browser_debugger/DOMBreakpointsSidebarPane.ts | noBreakpoints": {
-    "message": "No DOM breakpoints set"
+    "message": "Aucun point d'arrêt DOM défini"
   },
   "panels/browser_debugger/DOMBreakpointsSidebarPane.ts | nodeRemoved": {
     "message": "Nœud supprimé"
@@ -5067,19 +5040,19 @@
     "message": "{PH1} (de la carte source)"
   },
   "panels/changes/ChangesView.ts | binaryDataDescription": {
-    "message": "The changes tab doesn't show binary data changes"
+    "message": "L'onglet \"Modifications\" n'affiche pas les modifications apportées aux données binaires"
   },
   "panels/changes/ChangesView.ts | changesViewDescription": {
-    "message": "On this page you can track code changes made within DevTools."
+    "message": "Sur cette page, vous pouvez suivre les modifications de code effectuées dans les Outils de développement."
   },
   "panels/changes/ChangesView.ts | copy": {
     "message": "Copier"
   },
   "panels/changes/ChangesView.ts | noChanges": {
-    "message": "No changes yet"
+    "message": "Aucune modification pour l'instant"
   },
   "panels/changes/ChangesView.ts | noTextualDiff": {
-    "message": "No textual diff available"
+    "message": "Aucune différence textuelle disponible"
   },
   "panels/changes/ChangesView.ts | sDeletions": {
     "message": "{n,plural, =1{# suppression (-)}one{# suppression (-)}other{# suppressions (-)}}"
@@ -5298,7 +5271,7 @@
     "message": " M<XX>"
   },
   "panels/console/ConsoleViewMessage.ts | SeeIssueInCookieReport": {
-    "message": "Click to open privacy and security panel and show third-party cookie report"
+    "message": "Cliquer pour ouvrir le panneau de confidentialité et de sécurité et pour afficher le rapport sur les cookies tiers"
   },
   "panels/console/ConsoleViewMessage.ts | assertionFailed": {
     "message": "Échec de l'assertion : "
@@ -6747,7 +6720,7 @@
     "message": "Trace de la pile"
   },
   "panels/explain/components/ConsoleInsight.ts | timedOut": {
-    "message": "Generating a response took too long. Please try again."
+    "message": "La génération d'une réponse a pris trop de temps. Veuillez réessayer."
   },
   "panels/explain/components/ConsoleInsight.ts | turnOnInSettings": {
     "message": "Activez les {PH1} pour recevoir l'aide de l'IA afin de comprendre et traiter les erreurs et les avertissements de la console."
@@ -7911,7 +7884,7 @@
     "message": "Ajouter {PH1}"
   },
   "panels/mobile_throttling/ThrottlingManager.ts | calibrate": {
-    "message": "Calibrate…"
+    "message": "Calibrez…"
   },
   "panels/mobile_throttling/ThrottlingManager.ts | cpuThrottling": {
     "message": "Limitation du processeur"
@@ -7935,7 +7908,7 @@
     "message": "Hors connexion"
   },
   "panels/mobile_throttling/ThrottlingManager.ts | recalibrate": {
-    "message": "Recalibrate…"
+    "message": "Recalibrez…"
   },
   "panels/mobile_throttling/ThrottlingManager.ts | recommendedThrottling": {
     "message": "{PH1} – recommandé"
@@ -8895,7 +8868,7 @@
     "message": "Cette requête ne contient aucun cookie."
   },
   "panels/network/RequestInitiatorView.ts | noInitiator": {
-    "message": "No initiator data"
+    "message": "Aucune donnée d'initiateur"
   },
   "panels/network/RequestInitiatorView.ts | requestCallStack": {
     "message": "Pile d'appel de requête"
@@ -8961,10 +8934,10 @@
     "message": "Échec du chargement des données de la réponse"
   },
   "panels/network/RequestResponseView.ts | noPreview": {
-    "message": "Nothing to preview"
+    "message": "Rien à prévisualiser"
   },
   "panels/network/RequestResponseView.ts | thisRequestHasNoResponseData": {
-    "message": "This request has no response data available"
+    "message": "Aucune donnée de réponse disponible pour cette requête"
   },
   "panels/network/RequestTimingView.ts | cacheStorageCacheNameS": {
     "message": "Nom du cache de l'espace de stockage : {PH1}"
@@ -10139,9 +10112,6 @@
   "panels/profiler/ProfilesPanel.ts | cantLoadProfileWhileAnother": {
     "message": "Impossible de charger un profil quand un autre est en cours d'enregistrement."
   },
-  "panels/profiler/ProfilesPanel.ts | profileLoadingFailedS": {
-    "message": "Échec du chargement du profil : {PH1}."
-  },
   "panels/profiler/ProfilesPanel.ts | profiles": {
     "message": "Profils"
   },
@@ -10251,7 +10221,7 @@
     "message": "Enregistrer"
   },
   "panels/protocol_monitor/ProtocolMonitor.ts | selectAMessageToView": {
-    "message": "Select a message to see its details"
+    "message": "Sélectionnez un message pour voir ses détails"
   },
   "panels/protocol_monitor/ProtocolMonitor.ts | selectTarget": {
     "message": "Sélectionnez une cible"
@@ -10290,7 +10260,7 @@
     "message": "Copier l'enregistrement ou l'étape sélectionnée"
   },
   "panels/recorder/RecorderController.ts | createRecording": {
-    "message": "Create recording"
+    "message": "Créer un enregistrement"
   },
   "panels/recorder/RecorderController.ts | deleteRecording": {
     "message": "Supprimer l'enregistrement"
@@ -10308,13 +10278,13 @@
     "message": "Obtenir des extensions…"
   },
   "panels/recorder/RecorderController.ts | header": {
-    "message": "Nothing recorded yet"
+    "message": "Aucun enregistrement pour l'instant"
   },
   "panels/recorder/RecorderController.ts | importRecording": {
     "message": "Importer l'enregistrement"
   },
   "panels/recorder/RecorderController.ts | learnMore": {
-    "message": "Learn more"
+    "message": "En savoir plus"
   },
   "panels/recorder/RecorderController.ts | noRecordings": {
     "message": "Aucun enregistrement"
@@ -10323,7 +10293,7 @@
     "message": "enregistrement(s)"
   },
   "panels/recorder/RecorderController.ts | recordingDescription": {
-    "message": "Use recordings to create automated end-to-end tests or performance traces."
+    "message": "Utilisez des enregistrements pour créer des tests automatisés de bout en bout ou des traces de performances."
   },
   "panels/recorder/RecorderController.ts | replayRecording": {
     "message": "Rediffuser l'enregistrement"
@@ -11496,7 +11466,7 @@
     "message": "Le message de la console, et la trace de la pile, le code source et les en-têtes réseau associés sont envoyés à Google pour générer des explications. Ces données peuvent être consultées par des réviseurs humains afin d'améliorer cette fonctionnalité."
   },
   "panels/settings/AISettingsTab.ts | consoleInsightsSendsDataNoLogging": {
-    "message": "The console message, associated stack trace, related source code, and the associated network headers are sent to Google to generate explanations. This data will not be used to improve Google’s AI models."
+    "message": "Le message de la console et la trace de la pile, le code source et les en-têtes réseau associés sont envoyés à Google pour générer des explications. Ces données ne seront pas utilisées pour améliorer les modèles d'IA de Google."
   },
   "panels/settings/AISettingsTab.ts | dataCollection": {
     "message": "En fonction de votre région, il est possible que Google ne collecte pas de données"
@@ -11532,7 +11502,7 @@
     "message": "Toutes les données auxquelles la page inspectée peut accéder via les API Web, les requêtes réseau, les fichiers et les traces de performances sont envoyées à Google pour générer des explications. Ces données peuvent être consultées par des réviseurs humains afin d'améliorer cette fonctionnalité. Ne l'utilisez pas sur des pages contenant des informations personnelles ou sensibles."
   },
   "panels/settings/AISettingsTab.ts | freestylerSendsDataNoLogging": {
-    "message": "Any data the inspected page can access via Web APIs, network requests, files, and performance traces are sent to Google to generate explanations. This data will not be used to improve Google’s AI models."
+    "message": "Toutes les données auxquelles la page inspectée peut accéder via les API Web, les requêtes réseau, les fichiers et les traces de performances sont envoyées à Google pour générer des explications. Ces données ne seront pas utilisées pour améliorer les modèles d'IA de Google."
   },
   "panels/settings/AISettingsTab.ts | helpUnderstandConsole": {
     "message": "Vous aide à comprendre et à corriger les erreurs et les avertissements dans la console"
@@ -12259,15 +12229,6 @@
   },
   "panels/sources/NavigatorView.ts | actionCannotBeUndone": {
     "message": "Cette action est irréversible."
-  },
-  "panels/sources/NavigatorView.ts | areYouSureYouWantToDeleteFolder": {
-    "message": "Voulez-vous vraiment supprimer ce dossier et son contenu ?"
-  },
-  "panels/sources/NavigatorView.ts | areYouSureYouWantToDeleteThis": {
-    "message": "Voulez-vous vraiment supprimer ce fichier ?"
-  },
-  "panels/sources/NavigatorView.ts | areYouSureYouWantToExcludeThis": {
-    "message": "Voulez-vous vraiment exclure ce dossier ?"
   },
   "panels/sources/NavigatorView.ts | areYouSureYouWantToRemoveThis": {
     "message": "Supprimer \"{PH1}\" de l'espace de travail ?"
@@ -13041,7 +13002,7 @@
     "message": "Ce canal contient des codes temporels issus des en-têtes de réponse réseau Server-Timing. Les heures de début respectives ne sont que des estimations et peuvent être inexactes."
   },
   "panels/timeline/ThirdPartyTreeView.ts | firstOrThirdPartyName": {
-    "message": "1st / 3rd party"
+    "message": "Propriétaires/Tiers"
   },
   "panels/timeline/ThirdPartyTreeView.ts | selfTime": {
     "message": "Durée individuelle"
@@ -13254,7 +13215,7 @@
     "message": "Description"
   },
   "panels/timeline/TimelinePanel.ts | dimThirdParties": {
-    "message": "Dim 3rd parties"
+    "message": "Restreindre les tiers"
   },
   "panels/timeline/TimelinePanel.ts | disableJavascriptSamples": {
     "message": "Désactiver les échantillons JavaScript"
@@ -13374,7 +13335,7 @@
     "message": "Arrêt de la chronologie…"
   },
   "panels/timeline/TimelinePanel.ts | thirdPartiesByThirdPartyWeb": {
-    "message": "3rd parties classified by third-party-web"
+    "message": "Tiers classés par \"third-party-web\""
   },
   "panels/timeline/TimelinePanel.ts | time": {
     "message": "Durée"
@@ -13653,7 +13614,7 @@
     "message": "{PH1}"
   },
   "panels/timeline/TimelineUIUtils.ts | entity": {
-    "message": "Third party"
+    "message": "Tiers"
   },
   "panels/timeline/TimelineUIUtils.ts | entryIsHidden": {
     "message": "(entrée masquée)"
@@ -13817,9 +13778,6 @@
   "panels/timeline/TimelineUIUtils.ts | selectorStatsTitle": {
     "message": "Statistiques du sélecteur"
   },
-  "panels/timeline/TimelineUIUtils.ts | selfTime": {
-    "message": "Durée individuelle"
-  },
   "panels/timeline/TimelineUIUtils.ts | size": {
     "message": "Taille"
   },
@@ -13833,7 +13791,7 @@
     "message": "URL de la feuille de style"
   },
   "panels/timeline/TimelineUIUtils.ts | thirdPartyTable": {
-    "message": "1st / 3rd party table"
+    "message": "Tableau des propriétaires et tiers"
   },
   "panels/timeline/TimelineUIUtils.ts | timeSpentInRendering": {
     "message": "Temps passé à afficher"
@@ -13849,9 +13807,6 @@
   },
   "panels/timeline/TimelineUIUtils.ts | timestamp": {
     "message": "Horodatage"
-  },
-  "panels/timeline/TimelineUIUtils.ts | totalTime": {
-    "message": "Durée totale"
   },
   "panels/timeline/TimelineUIUtils.ts | traceEvent": {
     "message": "Événement de trace"
@@ -13920,7 +13875,7 @@
     "message": "Supprimer les fils d'Ariane enfants"
   },
   "panels/timeline/components/CPUThrottlingSelector.ts | calibrate": {
-    "message": "Calibrate…"
+    "message": "Calibrez…"
   },
   "panels/timeline/components/CPUThrottlingSelector.ts | cpu": {
     "message": "Processeur : {PH1}"
@@ -13932,7 +13887,7 @@
     "message": "Préréglages calibrés"
   },
   "panels/timeline/components/CPUThrottlingSelector.ts | recalibrate": {
-    "message": "Recalibrate…"
+    "message": "Recalibrez…"
   },
   "panels/timeline/components/CPUThrottlingSelector.ts | recommendedThrottling": {
     "message": "{PH1} – recommandé"
@@ -14424,7 +14379,7 @@
     "message": "Données encodées"
   },
   "panels/timeline/components/NetworkRequestDetails.ts | entity": {
-    "message": "Third party"
+    "message": "Tiers"
   },
   "panels/timeline/components/NetworkRequestDetails.ts | fromCache": {
     "message": "Depuis le cache"
@@ -14568,16 +14523,16 @@
     "message": "Insights est une fonctionnalité expérimentale. Vos commentaires nous aideront à l'améliorer."
   },
   "panels/timeline/components/SidebarSingleInsightSet.ts | dismissTitle": {
-    "message": "Dismiss"
+    "message": "Fermer"
   },
   "panels/timeline/components/SidebarSingleInsightSet.ts | fieldMismatchNotice": {
-    "message": "There are many reasons why local and field metrics [may not match](https://web.dev/articles/lab-and-field-data-differences). Adjust [throttling settings and device emulation](https://developer.chrome.com/docs/devtools/device-mode) to analyze traces more similar to the average user's environment."
+    "message": "Il est possible que les métriques locales et réelles [ne correspondent pas](https://web.dev/articles/lab-and-field-data-differences) pour plusieurs raisons. Ajustez les [paramètres de limitation et l'émulation de l'appareil](https://developer.chrome.com/docs/devtools/device-mode) pour analyser des traces plus semblables à l'environnement de l'utilisateur moyen."
   },
   "panels/timeline/components/SidebarSingleInsightSet.ts | fieldMismatchTitle": {
-    "message": "Field & local metrics mismatch"
+    "message": "Les métriques réelles et locales ne correspondent pas"
   },
   "panels/timeline/components/SidebarSingleInsightSet.ts | fieldScoreLabel": {
-    "message": "Field ({PH1})"
+    "message": "Réelles ({PH1})"
   },
   "panels/timeline/components/SidebarSingleInsightSet.ts | metricScore": {
     "message": "{PH1} : score {PH3} ({PH2})"
@@ -15885,7 +15840,7 @@
     "message": "Trier par"
   },
   "ui/legacy/components/data_grid/DataGrid.ts | sortableColumn": {
-    "message": "Sortable column. Press enter to apply sorting filter"
+    "message": "Colonne triable. Appuyez sur Entrée pour appliquer le filtre de tri."
   },
   "ui/legacy/components/data_grid/ShowMoreDataGridNode.ts | showAllD": {
     "message": "Tout afficher ({PH1})"
@@ -16221,10 +16176,10 @@
     "message": "Rechercher"
   },
   "ui/legacy/components/source_frame/PreviewFactory.ts | failedToLoadData": {
-    "message": "Failed to load data"
+    "message": "Échec du chargement des données"
   },
   "ui/legacy/components/source_frame/PreviewFactory.ts | nothingToPreview": {
-    "message": "Nothing to preview"
+    "message": "Rien à prévisualiser"
   },
   "ui/legacy/components/source_frame/ResourceSourceFrame.ts | find": {
     "message": "Rechercher"
