--- a/front_end/core/i18n/locales/ja.json
+++ b/front_end/core/i18n/locales/ja.json
@@ -105,7 +105,7 @@
     "message": "ネットワーク パネル"
   },
   "core/common/Revealer.ts | securityPanel": {
-    "message": "Security panel"
+    "message": "セキュリティ パネル"
   },
   "core/common/Revealer.ts | sourcesPanel": {
     "message": "[ソース] パネル"
@@ -2798,9 +2798,6 @@
   "panels/application/BackgroundServiceView.ts | clear": {
     "message": "消去"
   },
-  "panels/application/BackgroundServiceView.ts | clickTheRecordButtonSOrHitSTo": {
-    "message": "記録ボタン {PH1} をクリックするか {PH2} を押すと、記録が開始されます。"
-  },
   "panels/application/BackgroundServiceView.ts | devtoolsWillRecordAllSActivity": {
     "message": "DevTools を終了しても、すべての {PH1} アクティビティが最大 3 日間記録されます。"
   },
@@ -2812,9 +2809,6 @@
   },
   "panels/application/BackgroundServiceView.ts | instanceId": {
     "message": "インスタンス ID"
-  },
-  "panels/application/BackgroundServiceView.ts | learnMore": {
-    "message": "詳細"
   },
   "panels/application/BackgroundServiceView.ts | noMetadataForThisEvent": {
     "message": "このイベントのメタデータはありません"
@@ -2947,9 +2941,6 @@
   },
   "panels/application/IndexedDBViews.ts | objectStores": {
     "message": "オブジェクト記憶領域"
-  },
-  "panels/application/IndexedDBViews.ts | pleaseConfirmDeleteOfSDatabase": {
-    "message": "「{PH1}」データベースの削除を確認してください。"
   },
   "panels/application/IndexedDBViews.ts | primaryKey": {
     "message": "主キー"
@@ -3236,12 +3227,6 @@
   "panels/application/SharedStorageEventsView.ts | clickToDisplayBody": {
     "message": "イベント パラメータを表示するには、共有ストレージ イベントをクリックします。"
   },
-  "panels/application/SharedStorageItemsView.ts | key": {
-    "message": "キー"
-  },
-  "panels/application/SharedStorageItemsView.ts | selectAValueToPreview": {
-    "message": "プレビューする値を選択してください"
-  },
   "panels/application/SharedStorageItemsView.ts | sharedStorage": {
     "message": "共有ストレージ"
   },
@@ -3257,17 +3242,8 @@
   "panels/application/SharedStorageItemsView.ts | sharedStorageItemEdited": {
     "message": "ストレージのアイテムが編集されました。"
   },
-  "panels/application/SharedStorageItemsView.ts | sharedStorageItems": {
-    "message": "共有ストレージのアイテム"
-  },
   "panels/application/SharedStorageItemsView.ts | sharedStorageItemsCleared": {
     "message": "共有ストレージのアイテムが消去されました"
-  },
-  "panels/application/SharedStorageItemsView.ts | sharedStorageNumberEntries": {
-    "message": "表に表示されているエントリの数: {PH1}"
-  },
-  "panels/application/SharedStorageItemsView.ts | value": {
-    "message": "値"
   },
   "panels/application/SharedStorageListTreeElement.ts | sharedStorage": {
     "message": "共有ストレージ"
@@ -4262,9 +4238,6 @@
   "panels/application/components/TrustTokensView.ts | issuer": {
     "message": "発行元"
   },
-  "panels/application/components/TrustTokensView.ts | noTrustTokensStored": {
-    "message": "現在保存されているプライベート ステート トークンはありません。"
-  },
   "panels/application/components/TrustTokensView.ts | storedTokenCount": {
     "message": "保存済みのトークン数"
   },
@@ -4950,7 +4923,7 @@
     "message": "DOM ブレークポイント リスト"
   },
   "panels/browser_debugger/DOMBreakpointsSidebarPane.ts | noBreakpoints": {
-    "message": "No DOM breakpoints set"
+    "message": "DOM ブレークポイントが設定されていません"
   },
   "panels/browser_debugger/DOMBreakpointsSidebarPane.ts | nodeRemoved": {
     "message": "ノードが削除されました"
@@ -5067,19 +5040,19 @@
     "message": "{PH1}（ソースマップから）"
   },
   "panels/changes/ChangesView.ts | binaryDataDescription": {
-    "message": "The changes tab doesn't show binary data changes"
+    "message": "バイナリデータの変更は [変更] タブに表示されません"
   },
   "panels/changes/ChangesView.ts | changesViewDescription": {
-    "message": "On this page you can track code changes made within DevTools."
+    "message": "このページでは、DevTools で加えられたコードの変更を追跡できます。"
   },
   "panels/changes/ChangesView.ts | copy": {
     "message": "コピー"
   },
   "panels/changes/ChangesView.ts | noChanges": {
-    "message": "No changes yet"
+    "message": "まだ変更はありません"
   },
   "panels/changes/ChangesView.ts | noTextualDiff": {
-    "message": "No textual diff available"
+    "message": "テキストの差異を確認できません"
   },
   "panels/changes/ChangesView.ts | sDeletions": {
     "message": "{n,plural, =1{# 行削除（-）}other{# 行削除（-）}}"
@@ -5298,7 +5271,7 @@
     "message": " M<XX>"
   },
   "panels/console/ConsoleViewMessage.ts | SeeIssueInCookieReport": {
-    "message": "Click to open privacy and security panel and show third-party cookie report"
+    "message": "クリックすると、[プライバシーとセキュリティ] パネルが開き、サードパーティ Cookie のレポートが表示されます"
   },
   "panels/console/ConsoleViewMessage.ts | assertionFailed": {
     "message": "アサーションが失敗しました: "
@@ -6747,7 +6720,7 @@
     "message": "スタックトレース"
   },
   "panels/explain/components/ConsoleInsight.ts | timedOut": {
-    "message": "Generating a response took too long. Please try again."
+    "message": "応答の生成に時間がかかりすぎました。もう一度お試しください。"
   },
   "panels/explain/components/ConsoleInsight.ts | turnOnInSettings": {
     "message": "{PH1} をオンにすると、AI アシスタンスのサポートのもとでコンソールの警告とエラーを検証して解決できます。"
@@ -7911,7 +7884,7 @@
     "message": "{PH1} を追加"
   },
   "panels/mobile_throttling/ThrottlingManager.ts | calibrate": {
-    "message": "Calibrate…"
+    "message": "調整…"
   },
   "panels/mobile_throttling/ThrottlingManager.ts | cpuThrottling": {
     "message": "CPU スロットリング"
@@ -7935,7 +7908,7 @@
     "message": "オフライン"
   },
   "panels/mobile_throttling/ThrottlingManager.ts | recalibrate": {
-    "message": "Recalibrate…"
+    "message": "再調整…"
   },
   "panels/mobile_throttling/ThrottlingManager.ts | recommendedThrottling": {
     "message": "{PH1} - 推奨"
@@ -8895,7 +8868,7 @@
     "message": "このリクエストには Cookie がありりません。"
   },
   "panels/network/RequestInitiatorView.ts | noInitiator": {
-    "message": "No initiator data"
+    "message": "イニシエータ データがありません"
   },
   "panels/network/RequestInitiatorView.ts | requestCallStack": {
     "message": "コールスタックをリクエスト"
@@ -8961,10 +8934,10 @@
     "message": "レスポンス データの読み込みに失敗しました"
   },
   "panels/network/RequestResponseView.ts | noPreview": {
-    "message": "Nothing to preview"
+    "message": "プレビューするものはありません"
   },
   "panels/network/RequestResponseView.ts | thisRequestHasNoResponseData": {
-    "message": "This request has no response data available"
+    "message": "このリクエストにはレスポンス データがありません"
   },
   "panels/network/RequestTimingView.ts | cacheStorageCacheNameS": {
     "message": "キャッシュ ストレージのキャッシュ名: {PH1}"
@@ -10139,9 +10112,6 @@
   "panels/profiler/ProfilesPanel.ts | cantLoadProfileWhileAnother": {
     "message": "別のプロファイルの記録中であるため、プロファイルを読み込めません。"
   },
-  "panels/profiler/ProfilesPanel.ts | profileLoadingFailedS": {
-    "message": "プロファイルを読み込めませんでした: {PH1}"
-  },
   "panels/profiler/ProfilesPanel.ts | profiles": {
     "message": "プロファイル"
   },
@@ -10251,7 +10221,7 @@
     "message": "保存"
   },
   "panels/protocol_monitor/ProtocolMonitor.ts | selectAMessageToView": {
-    "message": "Select a message to see its details"
+    "message": "詳細を確認するにはメッセージを選択してください"
   },
   "panels/protocol_monitor/ProtocolMonitor.ts | selectTarget": {
     "message": "ターゲットを選択"
@@ -10290,7 +10260,7 @@
     "message": "記録または選択したステップをコピー"
   },
   "panels/recorder/RecorderController.ts | createRecording": {
-    "message": "Create recording"
+    "message": "録画を作成"
   },
   "panels/recorder/RecorderController.ts | deleteRecording": {
     "message": "記録を削除"
@@ -10308,13 +10278,13 @@
     "message": "拡張機能を取得…"
   },
   "panels/recorder/RecorderController.ts | header": {
-    "message": "Nothing recorded yet"
+    "message": "まだ何も記録されていません"
   },
   "panels/recorder/RecorderController.ts | importRecording": {
     "message": "記録をインポート"
   },
   "panels/recorder/RecorderController.ts | learnMore": {
-    "message": "Learn more"
+    "message": "詳細"
   },
   "panels/recorder/RecorderController.ts | noRecordings": {
     "message": "記録なし"
@@ -10323,7 +10293,7 @@
     "message": "件の録音"
   },
   "panels/recorder/RecorderController.ts | recordingDescription": {
-    "message": "Use recordings to create automated end-to-end tests or performance traces."
+    "message": "録画を使用して、エンドツーエンドの自動テストやパフォーマンス トレースを作成できます。"
   },
   "panels/recorder/RecorderController.ts | replayRecording": {
     "message": "記録を再生"
@@ -11496,7 +11466,7 @@
     "message": "コンソール メッセージ、関連するスタック トレース、関連するソースコード、関連するネットワーク ヘッダーは、Google に送信され、説明の生成に使用されます。このデータは、該当の機能の改善のために人間のレビュアーによって確認される場合があります。"
   },
   "panels/settings/AISettingsTab.ts | consoleInsightsSendsDataNoLogging": {
-    "message": "The console message, associated stack trace, related source code, and the associated network headers are sent to Google to generate explanations. This data will not be used to improve Google’s AI models."
+    "message": "コンソール メッセージ、関連するスタック トレース、関連するソースコード、関連するネットワーク ヘッダーは、Google に送信され、説明の生成に使用されます。このデータは Google AI モデルの改善には使用されません。"
   },
   "panels/settings/AISettingsTab.ts | dataCollection": {
     "message": "地域によっては、データの収集が行われない場合があります"
@@ -11532,7 +11502,7 @@
     "message": "検証したページが Web API、ネットワーク リクエスト、ファイル、パフォーマンス トレースを介してアクセスできるデータは、Google に送信され、説明の生成に使用されます。このデータは、該当の機能の改善のために人間のレビュアーによって確認される場合があります。個人情報や機密情報を含むページでは使用しないでください。"
   },
   "panels/settings/AISettingsTab.ts | freestylerSendsDataNoLogging": {
-    "message": "Any data the inspected page can access via Web APIs, network requests, files, and performance traces are sent to Google to generate explanations. This data will not be used to improve Google’s AI models."
+    "message": "検証したページが Web API、ネットワーク リクエスト、ファイル、パフォーマンス トレースを介してアクセスできるデータは、Google に送信され、説明の生成に使用されます。このデータは Google AI モデルの改善には使用されません。"
   },
   "panels/settings/AISettingsTab.ts | helpUnderstandConsole": {
     "message": "コンソールの警告とエラーを理解し修正する助けとなります"
@@ -12259,15 +12229,6 @@
   },
   "panels/sources/NavigatorView.ts | actionCannotBeUndone": {
     "message": "この操作は元に戻せません。"
-  },
-  "panels/sources/NavigatorView.ts | areYouSureYouWantToDeleteFolder": {
-    "message": "このフォルダとコンテンツを削除してもよろしいですか？"
-  },
-  "panels/sources/NavigatorView.ts | areYouSureYouWantToDeleteThis": {
-    "message": "このファイルを削除してもよろしいですか？"
-  },
-  "panels/sources/NavigatorView.ts | areYouSureYouWantToExcludeThis": {
-    "message": "このフォルダを除外してもよろしいですか？"
   },
   "panels/sources/NavigatorView.ts | areYouSureYouWantToRemoveThis": {
     "message": "「{PH1}」をワークスペースから削除しますか？"
@@ -13041,7 +13002,7 @@
     "message": "このトラックには、Server-Timing ネットワーク レスポンス ヘッダーから取得したタイミング情報が含まれています。それぞれの開始時間は推定値であり、正確でない可能性があります。"
   },
   "panels/timeline/ThirdPartyTreeView.ts | firstOrThirdPartyName": {
-    "message": "1st / 3rd party"
+    "message": "ファースト / サードパーティ"
   },
   "panels/timeline/ThirdPartyTreeView.ts | selfTime": {
     "message": "セルフ時間"
@@ -13254,7 +13215,7 @@
     "message": "説明"
   },
   "panels/timeline/TimelinePanel.ts | dimThirdParties": {
-    "message": "Dim 3rd parties"
+    "message": "サードパーティを暗く表示する"
   },
   "panels/timeline/TimelinePanel.ts | disableJavascriptSamples": {
     "message": "JavaScript のサンプルを無効にする"
@@ -13374,7 +13335,7 @@
     "message": "タイムラインを停止しています…"
   },
   "panels/timeline/TimelinePanel.ts | thirdPartiesByThirdPartyWeb": {
-    "message": "3rd parties classified by third-party-web"
+    "message": "サードパーティは third-party-web によって分類されます"
   },
   "panels/timeline/TimelinePanel.ts | time": {
     "message": "時間"
@@ -13653,7 +13614,7 @@
     "message": "{PH1}"
   },
   "panels/timeline/TimelineUIUtils.ts | entity": {
-    "message": "Third party"
+    "message": "サードパーティ"
   },
   "panels/timeline/TimelineUIUtils.ts | entryIsHidden": {
     "message": "（エントリは非表示です）"
@@ -13817,9 +13778,6 @@
   "panels/timeline/TimelineUIUtils.ts | selectorStatsTitle": {
     "message": "セレクタの統計データ"
   },
-  "panels/timeline/TimelineUIUtils.ts | selfTime": {
-    "message": "セルフ時間"
-  },
   "panels/timeline/TimelineUIUtils.ts | size": {
     "message": "サイズ"
   },
@@ -13833,7 +13791,7 @@
     "message": "スタイルシートの URL"
   },
   "panels/timeline/TimelineUIUtils.ts | thirdPartyTable": {
-    "message": "1st / 3rd party table"
+    "message": "ファースト / サードパーティの表"
   },
   "panels/timeline/TimelineUIUtils.ts | timeSpentInRendering": {
     "message": "レンダリングの所要時間"
@@ -13849,9 +13807,6 @@
   },
   "panels/timeline/TimelineUIUtils.ts | timestamp": {
     "message": "タイムスタンプ"
-  },
-  "panels/timeline/TimelineUIUtils.ts | totalTime": {
-    "message": "合計時間"
   },
   "panels/timeline/TimelineUIUtils.ts | traceEvent": {
     "message": "トレース イベント"
@@ -13920,7 +13875,7 @@
     "message": "子パンくずリストを削除"
   },
   "panels/timeline/components/CPUThrottlingSelector.ts | calibrate": {
-    "message": "Calibrate…"
+    "message": "調整…"
   },
   "panels/timeline/components/CPUThrottlingSelector.ts | cpu": {
     "message": "CPU: {PH1}"
@@ -13932,7 +13887,7 @@
     "message": "調整済みのプリセット"
   },
   "panels/timeline/components/CPUThrottlingSelector.ts | recalibrate": {
-    "message": "Recalibrate…"
+    "message": "再調整…"
   },
   "panels/timeline/components/CPUThrottlingSelector.ts | recommendedThrottling": {
     "message": "{PH1} - 推奨"
@@ -14424,7 +14379,7 @@
     "message": "エンコードされたデータ"
   },
   "panels/timeline/components/NetworkRequestDetails.ts | entity": {
-    "message": "Third party"
+    "message": "サードパーティ"
   },
   "panels/timeline/components/NetworkRequestDetails.ts | fromCache": {
     "message": "キャッシュから"
@@ -14568,16 +14523,16 @@
     "message": "Insights は試験運用版の機能です。お寄せいただいたフィードバックは、機能の改善に役立てさせていただきます。"
   },
   "panels/timeline/components/SidebarSingleInsightSet.ts | dismissTitle": {
-    "message": "Dismiss"
+    "message": "閉じる"
   },
   "panels/timeline/components/SidebarSingleInsightSet.ts | fieldMismatchNotice": {
-    "message": "There are many reasons why local and field metrics [may not match](https://web.dev/articles/lab-and-field-data-differences). Adjust [throttling settings and device emulation](https://developer.chrome.com/docs/devtools/device-mode) to analyze traces more similar to the average user's environment."
+    "message": "ローカルとフィールドの指標が[一致しない](https://web.dev/articles/lab-and-field-data-differences)理由はさまざまです。[スロットリング設定とデバイス エミュレーション](https://developer.chrome.com/docs/devtools/device-mode)を調整して、平均的なユーザーの環境に近いトレースを分析してください。"
   },
   "panels/timeline/components/SidebarSingleInsightSet.ts | fieldMismatchTitle": {
-    "message": "Field & local metrics mismatch"
+    "message": "フィールドとローカルの指標が一致しません"
   },
   "panels/timeline/components/SidebarSingleInsightSet.ts | fieldScoreLabel": {
-    "message": "Field ({PH1})"
+    "message": "フィールド（{PH1}）"
   },
   "panels/timeline/components/SidebarSingleInsightSet.ts | metricScore": {
     "message": "{PH1}: {PH2} {PH3} スコア"
@@ -15885,7 +15840,7 @@
     "message": "並べ替え:"
   },
   "ui/legacy/components/data_grid/DataGrid.ts | sortableColumn": {
-    "message": "Sortable column. Press enter to apply sorting filter"
+    "message": "並べ替え可能な列。並べ替えフィルタを適用するには Enter キーを押してください"
   },
   "ui/legacy/components/data_grid/ShowMoreDataGridNode.ts | showAllD": {
     "message": "{PH1} 件をすべて表示"
@@ -16221,10 +16176,10 @@
     "message": "検索"
   },
   "ui/legacy/components/source_frame/PreviewFactory.ts | failedToLoadData": {
-    "message": "Failed to load data"
+    "message": "データを読み込めませんでした"
   },
   "ui/legacy/components/source_frame/PreviewFactory.ts | nothingToPreview": {
-    "message": "Nothing to preview"
+    "message": "プレビューするものはありません"
   },
   "ui/legacy/components/source_frame/ResourceSourceFrame.ts | find": {
     "message": "検索"
