--- a/front_end/core/i18n/locales/ko.json
+++ b/front_end/core/i18n/locales/ko.json
@@ -105,7 +105,7 @@
     "message": "네트워크 패널"
   },
   "core/common/Revealer.ts | securityPanel": {
-    "message": "Security panel"
+    "message": "보안 패널"
   },
   "core/common/Revealer.ts | sourcesPanel": {
     "message": "소스 패널"
@@ -2798,9 +2798,6 @@
   "panels/application/BackgroundServiceView.ts | clear": {
     "message": "삭제"
   },
-  "panels/application/BackgroundServiceView.ts | clickTheRecordButtonSOrHitSTo": {
-    "message": "기록 버튼 {PH1}을 클릭하거나 {PH2} 버튼을 눌러 기록을 시작하세요."
-  },
   "panels/application/BackgroundServiceView.ts | devtoolsWillRecordAllSActivity": {
     "message": "DevTools에서 닫혀 있을 때도 최대 3일간 모든 {PH1} 활동을 기록합니다."
   },
@@ -2812,9 +2809,6 @@
   },
   "panels/application/BackgroundServiceView.ts | instanceId": {
     "message": "인스턴스 ID"
-  },
-  "panels/application/BackgroundServiceView.ts | learnMore": {
-    "message": "자세히 알아보기"
   },
   "panels/application/BackgroundServiceView.ts | noMetadataForThisEvent": {
     "message": "이 이벤트에 메타데이터 없음"
@@ -2947,9 +2941,6 @@
   },
   "panels/application/IndexedDBViews.ts | objectStores": {
     "message": "객체 저장"
-  },
-  "panels/application/IndexedDBViews.ts | pleaseConfirmDeleteOfSDatabase": {
-    "message": "'{PH1}' 데이터베이스 삭제를 확인해 주세요."
   },
   "panels/application/IndexedDBViews.ts | primaryKey": {
     "message": "기본 키"
@@ -3236,12 +3227,6 @@
   "panels/application/SharedStorageEventsView.ts | clickToDisplayBody": {
     "message": "공유 저장소 이벤트를 클릭하여 이벤트 매개변수를 표시합니다."
   },
-  "panels/application/SharedStorageItemsView.ts | key": {
-    "message": "키"
-  },
-  "panels/application/SharedStorageItemsView.ts | selectAValueToPreview": {
-    "message": "미리 볼 값 선택"
-  },
   "panels/application/SharedStorageItemsView.ts | sharedStorage": {
     "message": "Shared Storage"
   },
@@ -3257,17 +3242,8 @@
   "panels/application/SharedStorageItemsView.ts | sharedStorageItemEdited": {
     "message": "저장용량 항목이 수정되었습니다."
   },
-  "panels/application/SharedStorageItemsView.ts | sharedStorageItems": {
-    "message": "공유 저장소 항목"
-  },
   "panels/application/SharedStorageItemsView.ts | sharedStorageItemsCleared": {
     "message": "공유 저장소 항목 삭제됨"
-  },
-  "panels/application/SharedStorageItemsView.ts | sharedStorageNumberEntries": {
-    "message": "표에 표시되는 항목 수: {PH1}개"
-  },
-  "panels/application/SharedStorageItemsView.ts | value": {
-    "message": "값"
   },
   "panels/application/SharedStorageListTreeElement.ts | sharedStorage": {
     "message": "Shared Storage"
@@ -4262,9 +4238,6 @@
   "panels/application/components/TrustTokensView.ts | issuer": {
     "message": "발행자"
   },
-  "panels/application/components/TrustTokensView.ts | noTrustTokensStored": {
-    "message": "현재 저장된 비공개 상태 토큰이 없습니다."
-  },
   "panels/application/components/TrustTokensView.ts | storedTokenCount": {
     "message": "저장된 토큰 수"
   },
@@ -4950,7 +4923,7 @@
     "message": "DOM 중단점 목록"
   },
   "panels/browser_debugger/DOMBreakpointsSidebarPane.ts | noBreakpoints": {
-    "message": "No DOM breakpoints set"
+    "message": "설정된 DOM 중단점 없음"
   },
   "panels/browser_debugger/DOMBreakpointsSidebarPane.ts | nodeRemoved": {
     "message": "노드 삭제됨"
@@ -5067,19 +5040,19 @@
     "message": "{PH1}(소스 맵에서)"
   },
   "panels/changes/ChangesView.ts | binaryDataDescription": {
-    "message": "The changes tab doesn't show binary data changes"
+    "message": "변경사항 탭에 바이너리 데이터 변경사항이 표시되지 않습니다."
   },
   "panels/changes/ChangesView.ts | changesViewDescription": {
-    "message": "On this page you can track code changes made within DevTools."
+    "message": "이 페이지에서 DevTools 내에서 변경된 코드를 추적할 수 있습니다."
   },
   "panels/changes/ChangesView.ts | copy": {
     "message": "복사"
   },
   "panels/changes/ChangesView.ts | noChanges": {
-    "message": "No changes yet"
+    "message": "아직 변경사항 없음"
   },
   "panels/changes/ChangesView.ts | noTextualDiff": {
-    "message": "No textual diff available"
+    "message": "텍스트 차이가 없습니다."
   },
   "panels/changes/ChangesView.ts | sDeletions": {
     "message": "{n,plural, =1{삭제 #건(-)}other{삭제 #건(-)}}"
@@ -5298,7 +5271,7 @@
     "message": " M<XX>"
   },
   "panels/console/ConsoleViewMessage.ts | SeeIssueInCookieReport": {
-    "message": "Click to open privacy and security panel and show third-party cookie report"
+    "message": "클릭하여 개인 정보 보호 및 보안 패널을 열고 서드 파티 쿠키 보고서를 표시합니다."
   },
   "panels/console/ConsoleViewMessage.ts | assertionFailed": {
     "message": "어설션에 실패함: "
@@ -6747,7 +6720,7 @@
     "message": "스택 트레이스"
   },
   "panels/explain/components/ConsoleInsight.ts | timedOut": {
-    "message": "Generating a response took too long. Please try again."
+    "message": "응답을 생성하는 데 시간이 너무 오래 걸렸습니다. 다시 시도해 주세요."
   },
   "panels/explain/components/ConsoleInsight.ts | turnOnInSettings": {
     "message": "{PH1}를 사용 설정하여 콘솔 경고 및 오류를 이해하고 해결하는 데 도움이 되는 AI 지원을 받으세요."
@@ -7911,7 +7884,7 @@
     "message": "{PH1} 추가"
   },
   "panels/mobile_throttling/ThrottlingManager.ts | calibrate": {
-    "message": "Calibrate…"
+    "message": "보정…"
   },
   "panels/mobile_throttling/ThrottlingManager.ts | cpuThrottling": {
     "message": "CPU 제한"
@@ -7935,7 +7908,7 @@
     "message": "오프라인"
   },
   "panels/mobile_throttling/ThrottlingManager.ts | recalibrate": {
-    "message": "Recalibrate…"
+    "message": "재보정…"
   },
   "panels/mobile_throttling/ThrottlingManager.ts | recommendedThrottling": {
     "message": "{PH1} - 추천"
@@ -8895,7 +8868,7 @@
     "message": "이 요청에 쿠키가 없습니다."
   },
   "panels/network/RequestInitiatorView.ts | noInitiator": {
-    "message": "No initiator data"
+    "message": "개시자 데이터 없음"
   },
   "panels/network/RequestInitiatorView.ts | requestCallStack": {
     "message": "호출 스택 요청"
@@ -8961,10 +8934,10 @@
     "message": "응답 데이터를 로드할 수 없음"
   },
   "panels/network/RequestResponseView.ts | noPreview": {
-    "message": "Nothing to preview"
+    "message": "미리 볼 항목 없음"
   },
   "panels/network/RequestResponseView.ts | thisRequestHasNoResponseData": {
-    "message": "This request has no response data available"
+    "message": "이 요청에 사용할 수 있는 응답 데이터가 없음"
   },
   "panels/network/RequestTimingView.ts | cacheStorageCacheNameS": {
     "message": "캐시 저장공간 캐시 이름: {PH1}"
@@ -10139,9 +10112,6 @@
   "panels/profiler/ProfilesPanel.ts | cantLoadProfileWhileAnother": {
     "message": "다른 프로필이 기록되고 있는 중에는 프로필을 로드할 수 없습니다."
   },
-  "panels/profiler/ProfilesPanel.ts | profileLoadingFailedS": {
-    "message": "프로필을 로드하지 못함: {PH1}"
-  },
   "panels/profiler/ProfilesPanel.ts | profiles": {
     "message": "프로필"
   },
@@ -10251,7 +10221,7 @@
     "message": "저장"
   },
   "panels/protocol_monitor/ProtocolMonitor.ts | selectAMessageToView": {
-    "message": "Select a message to see its details"
+    "message": "메시지를 선택하여 세부정보 확인"
   },
   "panels/protocol_monitor/ProtocolMonitor.ts | selectTarget": {
     "message": "대상 선택"
@@ -10290,7 +10260,7 @@
     "message": "녹음 파일 또는 선택한 단계 복사"
   },
   "panels/recorder/RecorderController.ts | createRecording": {
-    "message": "Create recording"
+    "message": "녹화 파일 만들기"
   },
   "panels/recorder/RecorderController.ts | deleteRecording": {
     "message": "녹음 파일 삭제"
@@ -10308,13 +10278,13 @@
     "message": "확장 프로그램 가져오기…"
   },
   "panels/recorder/RecorderController.ts | header": {
-    "message": "Nothing recorded yet"
+    "message": "아직 녹화된 항목 없음"
   },
   "panels/recorder/RecorderController.ts | importRecording": {
     "message": "녹음 파일 가져오기"
   },
   "panels/recorder/RecorderController.ts | learnMore": {
-    "message": "Learn more"
+    "message": "자세히 알아보기"
   },
   "panels/recorder/RecorderController.ts | noRecordings": {
     "message": "기록 없음"
@@ -10323,7 +10293,7 @@
     "message": "기록"
   },
   "panels/recorder/RecorderController.ts | recordingDescription": {
-    "message": "Use recordings to create automated end-to-end tests or performance traces."
+    "message": "녹화 파일을 사용하여 자동 엔드 투 엔드 테스트 또는 성능 트레이스를 만드세요."
   },
   "panels/recorder/RecorderController.ts | replayRecording": {
     "message": "녹음 파일 다시 재생"
@@ -11496,7 +11466,7 @@
     "message": "설명을 생성할 수 있도록 콘솔 메시지, 관련 스택 트레이스, 관련 소스 코드, 관련 네트워크 헤더가 Google로 전송됩니다. 이 기능의 개선을 위해 인적 검토자가 데이터를 확인할 수도 있습니다."
   },
   "panels/settings/AISettingsTab.ts | consoleInsightsSendsDataNoLogging": {
-    "message": "The console message, associated stack trace, related source code, and the associated network headers are sent to Google to generate explanations. This data will not be used to improve Google’s AI models."
+    "message": "설명을 생성할 수 있도록 콘솔 메시지, 관련 스택 트레이스, 관련 소스 코드, 관련 네트워크 헤더가 Google로 전송됩니다. 이 데이터는 Google의 AI 모델을 개선하는 데 사용되지 않습니다."
   },
   "panels/settings/AISettingsTab.ts | dataCollection": {
     "message": "거주 지역에 따라 Google에서 데이터를 수집하지 않을 수 있습니다"
@@ -11532,7 +11502,7 @@
     "message": "검사된 페이지가 웹 API, 네트워크 요청, 파일, 성능 트레이스를 통해 액세스할 수 있는 모든 데이터는 설명을 생성하기 위해 Google로 전송됩니다. 이 기능의 개선을 위해 인적 검토자가 데이터를 확인할 수도 있습니다. 개인 정보 또는 민감한 정보가 포함된 페이지에서는 사용하지 마세요."
   },
   "panels/settings/AISettingsTab.ts | freestylerSendsDataNoLogging": {
-    "message": "Any data the inspected page can access via Web APIs, network requests, files, and performance traces are sent to Google to generate explanations. This data will not be used to improve Google’s AI models."
+    "message": "검사된 페이지가 웹 API, 네트워크 요청, 파일, 성능 트레이스를 통해 액세스할 수 있는 모든 데이터는 설명을 생성하기 위해 Google로 전송됩니다. 이 데이터는 Google의 AI 모델을 개선하는 데 사용되지 않습니다."
   },
   "panels/settings/AISettingsTab.ts | helpUnderstandConsole": {
     "message": "콘솔 경고 및 오류를 이해하고 수정하는 데 도움이 됩니다"
@@ -12259,15 +12229,6 @@
   },
   "panels/sources/NavigatorView.ts | actionCannotBeUndone": {
     "message": "이 작업은 취소할 수 없습니다."
-  },
-  "panels/sources/NavigatorView.ts | areYouSureYouWantToDeleteFolder": {
-    "message": "폴더와 폴더에 포함된 콘텐츠를 삭제하시겠습니까?"
-  },
-  "panels/sources/NavigatorView.ts | areYouSureYouWantToDeleteThis": {
-    "message": "이 파일을 삭제하시겠습니까?"
-  },
-  "panels/sources/NavigatorView.ts | areYouSureYouWantToExcludeThis": {
-    "message": "이 폴더를 제외하시겠습니까?"
   },
   "panels/sources/NavigatorView.ts | areYouSureYouWantToRemoveThis": {
     "message": "작업공간에서 ‘{PH1}’을(를) 삭제하시겠습니까?"
@@ -13041,7 +13002,7 @@
     "message": "이 트랙에는 서버 타이밍 네트워크 응답 헤더에서 가져온 타이밍이 포함되어 있습니다. 각 시작 시간은 추정치이며 정확하지 않을 수 있습니다."
   },
   "panels/timeline/ThirdPartyTreeView.ts | firstOrThirdPartyName": {
-    "message": "1st / 3rd party"
+    "message": "퍼스트 파티/서드 파티"
   },
   "panels/timeline/ThirdPartyTreeView.ts | selfTime": {
     "message": "자체 시간"
@@ -13254,7 +13215,7 @@
     "message": "설명"
   },
   "panels/timeline/TimelinePanel.ts | dimThirdParties": {
-    "message": "Dim 3rd parties"
+    "message": "서드 파티 흐리게 표시"
   },
   "panels/timeline/TimelinePanel.ts | disableJavascriptSamples": {
     "message": "자바스크립트 샘플 사용 중지"
@@ -13374,7 +13335,7 @@
     "message": "타임라인 중지 중…"
   },
   "panels/timeline/TimelinePanel.ts | thirdPartiesByThirdPartyWeb": {
-    "message": "3rd parties classified by third-party-web"
+    "message": "서드 파티 웹으로 분류된 서드 파티"
   },
   "panels/timeline/TimelinePanel.ts | time": {
     "message": "시간"
@@ -13653,7 +13614,7 @@
     "message": "{PH1}"
   },
   "panels/timeline/TimelineUIUtils.ts | entity": {
-    "message": "Third party"
+    "message": "서드 파티"
   },
   "panels/timeline/TimelineUIUtils.ts | entryIsHidden": {
     "message": "(항목이 숨겨짐)"
@@ -13817,9 +13778,6 @@
   "panels/timeline/TimelineUIUtils.ts | selectorStatsTitle": {
     "message": "선택자 통계"
   },
-  "panels/timeline/TimelineUIUtils.ts | selfTime": {
-    "message": "자체 시간"
-  },
   "panels/timeline/TimelineUIUtils.ts | size": {
     "message": "크기"
   },
@@ -13833,7 +13791,7 @@
     "message": "스타일시트 URL"
   },
   "panels/timeline/TimelineUIUtils.ts | thirdPartyTable": {
-    "message": "1st / 3rd party table"
+    "message": "퍼스트 파티/서드 파티 테이블"
   },
   "panels/timeline/TimelineUIUtils.ts | timeSpentInRendering": {
     "message": "렌더링 소요 시간"
@@ -13849,9 +13807,6 @@
   },
   "panels/timeline/TimelineUIUtils.ts | timestamp": {
     "message": "타임스탬프"
-  },
-  "panels/timeline/TimelineUIUtils.ts | totalTime": {
-    "message": "총시간"
   },
   "panels/timeline/TimelineUIUtils.ts | traceEvent": {
     "message": "트레이스 이벤트"
@@ -13920,7 +13875,7 @@
     "message": "하위 요소 탐색경로 삭제"
   },
   "panels/timeline/components/CPUThrottlingSelector.ts | calibrate": {
-    "message": "Calibrate…"
+    "message": "보정…"
   },
   "panels/timeline/components/CPUThrottlingSelector.ts | cpu": {
     "message": "CPU: {PH1}"
@@ -13932,7 +13887,7 @@
     "message": "보정된 사전 설정"
   },
   "panels/timeline/components/CPUThrottlingSelector.ts | recalibrate": {
-    "message": "Recalibrate…"
+    "message": "재보정…"
   },
   "panels/timeline/components/CPUThrottlingSelector.ts | recommendedThrottling": {
     "message": "{PH1} - 추천"
@@ -14424,7 +14379,7 @@
     "message": "인코딩된 데이터"
   },
   "panels/timeline/components/NetworkRequestDetails.ts | entity": {
-    "message": "Third party"
+    "message": "서드 파티"
   },
   "panels/timeline/components/NetworkRequestDetails.ts | fromCache": {
     "message": "캐시에서"
@@ -14568,16 +14523,16 @@
     "message": "통계는 실험 기능입니다. 보내주신 의견은 서비스를 개선하는 데 도움이 됩니다."
   },
   "panels/timeline/components/SidebarSingleInsightSet.ts | dismissTitle": {
-    "message": "Dismiss"
+    "message": "닫기"
   },
   "panels/timeline/components/SidebarSingleInsightSet.ts | fieldMismatchNotice": {
-    "message": "There are many reasons why local and field metrics [may not match](https://web.dev/articles/lab-and-field-data-differences). Adjust [throttling settings and device emulation](https://developer.chrome.com/docs/devtools/device-mode) to analyze traces more similar to the average user's environment."
+    "message": "로컬 및 필드 측정항목이 [일치하지 않을 수 있는](https://web.dev/articles/lab-and-field-data-differences) 이유는 다양합니다. [제한 설정 및 기기 에뮬레이션](https://developer.chrome.com/docs/devtools/device-mode)을 조정하여 평균 사용자 환경과 더 유사한 트레이스를 분석하세요."
   },
   "panels/timeline/components/SidebarSingleInsightSet.ts | fieldMismatchTitle": {
-    "message": "Field & local metrics mismatch"
+    "message": "필드 및 로컬 측정항목 불일치"
   },
   "panels/timeline/components/SidebarSingleInsightSet.ts | fieldScoreLabel": {
-    "message": "Field ({PH1})"
+    "message": "필드({PH1})"
   },
   "panels/timeline/components/SidebarSingleInsightSet.ts | metricScore": {
     "message": "{PH1}: {PH2} {PH3} 점수"
@@ -15885,7 +15840,7 @@
     "message": "정렬 기준"
   },
   "ui/legacy/components/data_grid/DataGrid.ts | sortableColumn": {
-    "message": "Sortable column. Press enter to apply sorting filter"
+    "message": "정렬 가능한 열입니다. 정렬 필터를 적용하려면 Enter를 누르세요"
   },
   "ui/legacy/components/data_grid/ShowMoreDataGridNode.ts | showAllD": {
     "message": "{PH1} 모두 표시"
@@ -16221,10 +16176,10 @@
     "message": "찾기"
   },
   "ui/legacy/components/source_frame/PreviewFactory.ts | failedToLoadData": {
-    "message": "Failed to load data"
+    "message": "데이터를 로드할 수 없습니다."
   },
   "ui/legacy/components/source_frame/PreviewFactory.ts | nothingToPreview": {
-    "message": "Nothing to preview"
+    "message": "미리 볼 항목 없음"
   },
   "ui/legacy/components/source_frame/ResourceSourceFrame.ts | find": {
     "message": "찾기"
