--- a/front_end/core/i18n/locales/lv.json
+++ b/front_end/core/i18n/locales/lv.json
@@ -105,7 +105,7 @@
     "message": "Panelis Tīkls"
   },
   "core/common/Revealer.ts | securityPanel": {
-    "message": "Security panel"
+    "message": "Drošības panelis"
   },
   "core/common/Revealer.ts | sourcesPanel": {
     "message": "Panelis Avoti"
@@ -2798,9 +2798,6 @@
   "panels/application/BackgroundServiceView.ts | clear": {
     "message": "Notīrīt"
   },
-  "panels/application/BackgroundServiceView.ts | clickTheRecordButtonSOrHitSTo": {
-    "message": "Lai sāktu ierakstīšanu, noklikšķiniet uz ierakstīšanas pogas {PH1} vai nospiediet taustiņus {PH2}."
-  },
   "panels/application/BackgroundServiceView.ts | devtoolsWillRecordAllSActivity": {
     "message": "Pat ja Izstrādātāja rīki būs aizvērti, tiks ierakstītas visas {PH1} darbības (maksimāli 3 dienas)."
   },
@@ -2812,9 +2809,6 @@
   },
   "panels/application/BackgroundServiceView.ts | instanceId": {
     "message": "Instances ID"
-  },
-  "panels/application/BackgroundServiceView.ts | learnMore": {
-    "message": "Uzzināt vairāk"
   },
   "panels/application/BackgroundServiceView.ts | noMetadataForThisEvent": {
     "message": "Šim notikumam nav metadatu"
@@ -2947,9 +2941,6 @@
   },
   "panels/application/IndexedDBViews.ts | objectStores": {
     "message": "Objektu krātuves"
-  },
-  "panels/application/IndexedDBViews.ts | pleaseConfirmDeleteOfSDatabase": {
-    "message": "Lūdzu, apstipriniet, ka vēlaties dzēst datu bāzi “{PH1}”."
   },
   "panels/application/IndexedDBViews.ts | primaryKey": {
     "message": "Galvenā atslēga"
@@ -3236,12 +3227,6 @@
   "panels/application/SharedStorageEventsView.ts | clickToDisplayBody": {
     "message": "Noklikšķiniet uz jebkura kopīgās krātuves notikuma, lai skatītu notikuma parametrus."
   },
-  "panels/application/SharedStorageItemsView.ts | key": {
-    "message": "Atslēga"
-  },
-  "panels/application/SharedStorageItemsView.ts | selectAValueToPreview": {
-    "message": "Atlasiet vērtību, kuru priekšskatīt"
-  },
   "panels/application/SharedStorageItemsView.ts | sharedStorage": {
     "message": "Kopīga krātuve"
   },
@@ -3257,17 +3242,8 @@
   "panels/application/SharedStorageItemsView.ts | sharedStorageItemEdited": {
     "message": "Krātuves vienums tika rediģēts."
   },
-  "panels/application/SharedStorageItemsView.ts | sharedStorageItems": {
-    "message": "Kopīgās krātuves vienumi"
-  },
   "panels/application/SharedStorageItemsView.ts | sharedStorageItemsCleared": {
     "message": "Kopīgās krātuves vienumi ir notīrīti."
-  },
-  "panels/application/SharedStorageItemsView.ts | sharedStorageNumberEntries": {
-    "message": "Tabulā parādīto ierakstu skaits: {PH1}"
-  },
-  "panels/application/SharedStorageItemsView.ts | value": {
-    "message": "Vērtība"
   },
   "panels/application/SharedStorageListTreeElement.ts | sharedStorage": {
     "message": "Kopīga krātuve"
@@ -4262,9 +4238,6 @@
   "panels/application/components/TrustTokensView.ts | issuer": {
     "message": "Izdevējs"
   },
-  "panels/application/components/TrustTokensView.ts | noTrustTokensStored": {
-    "message": "Pašlaik nav saglabāta neviena privāta stāvokļa pilnvara."
-  },
   "panels/application/components/TrustTokensView.ts | storedTokenCount": {
     "message": "Glabāto marķieru skaits"
   },
@@ -4950,7 +4923,7 @@
     "message": "DOM robežvērtību saraksts"
   },
   "panels/browser_debugger/DOMBreakpointsSidebarPane.ts | noBreakpoints": {
-    "message": "No DOM breakpoints set"
+    "message": "Nav iestatīts neviens DOM pārtraukumpunkts"
   },
   "panels/browser_debugger/DOMBreakpointsSidebarPane.ts | nodeRemoved": {
     "message": "Mezgls noņemts"
@@ -5067,19 +5040,19 @@
     "message": "{PH1} (no avota kartes)"
   },
   "panels/changes/ChangesView.ts | binaryDataDescription": {
-    "message": "The changes tab doesn't show binary data changes"
+    "message": "Izmaiņu cilnē netiek rādītas bināro datu izmaiņas"
   },
   "panels/changes/ChangesView.ts | changesViewDescription": {
-    "message": "On this page you can track code changes made within DevTools."
+    "message": "Šajā lapā varat izsekot izstrādātāja rīkos veiktajām koda izmaiņām."
   },
   "panels/changes/ChangesView.ts | copy": {
     "message": "Kopēt"
   },
   "panels/changes/ChangesView.ts | noChanges": {
-    "message": "No changes yet"
+    "message": "Vēl nav nekādu izmaiņu"
   },
   "panels/changes/ChangesView.ts | noTextualDiff": {
-    "message": "No textual diff available"
+    "message": "Nav tekstuālu atšķirību"
   },
   "panels/changes/ChangesView.ts | sDeletions": {
     "message": "{n,plural, =1{# dzēsta rinda (-)}zero{# dzēstas rindas (-)}one{# dzēsta rinda (-)}other{# dzēstas rindas (-)}}"
@@ -5298,7 +5271,7 @@
     "message": " M<XX>"
   },
   "panels/console/ConsoleViewMessage.ts | SeeIssueInCookieReport": {
-    "message": "Click to open privacy and security panel and show third-party cookie report"
+    "message": "Noklikšķiniet, lai atvērtu konfidencialitātes un drošības paneli un parādītu trešo pušu sīkfailu pārskatu."
   },
   "panels/console/ConsoleViewMessage.ts | assertionFailed": {
     "message": "Apliecināšana neizdevās: "
@@ -6747,7 +6720,7 @@
     "message": "Steka trasējums"
   },
   "panels/explain/components/ConsoleInsight.ts | timedOut": {
-    "message": "Generating a response took too long. Please try again."
+    "message": "Atbildes ģenerēšanai bija nepieciešams pārāk ilgs laiks. Lūdzu, mēģiniet vēlreiz."
   },
   "panels/explain/components/ConsoleInsight.ts | turnOnInSettings": {
     "message": "Ieslēdziet iestatījumu “{PH1}”, lai MI palīdzētu izprast un novērst ar konsoli saistītos brīdinājumus un kļūdas."
@@ -7911,7 +7884,7 @@
     "message": "Pievienot: {PH1}"
   },
   "panels/mobile_throttling/ThrottlingManager.ts | calibrate": {
-    "message": "Calibrate…"
+    "message": "Kalibrēt…"
   },
   "panels/mobile_throttling/ThrottlingManager.ts | cpuThrottling": {
     "message": "Centrālā procesora ierobežošana"
@@ -7935,7 +7908,7 @@
     "message": "Bezsaistē"
   },
   "panels/mobile_throttling/ThrottlingManager.ts | recalibrate": {
-    "message": "Recalibrate…"
+    "message": "Pārkalibrēt…"
   },
   "panels/mobile_throttling/ThrottlingManager.ts | recommendedThrottling": {
     "message": "{PH1} (ieteicams)"
@@ -8895,7 +8868,7 @@
     "message": "Šim pieprasījumam nav sīkfailu."
   },
   "panels/network/RequestInitiatorView.ts | noInitiator": {
-    "message": "No initiator data"
+    "message": "Nav datu par ierosinātāju"
   },
   "panels/network/RequestInitiatorView.ts | requestCallStack": {
     "message": "Pieprasījumu izsaukumu grēda"
@@ -8961,10 +8934,10 @@
     "message": "Neizdevās ielādēt atbildes datus"
   },
   "panels/network/RequestResponseView.ts | noPreview": {
-    "message": "Nothing to preview"
+    "message": "Nav nekā, ko priekšskatīt"
   },
   "panels/network/RequestResponseView.ts | thisRequestHasNoResponseData": {
-    "message": "This request has no response data available"
+    "message": "Šim pieprasījumam nav pieejamu atbildes datu."
   },
   "panels/network/RequestTimingView.ts | cacheStorageCacheNameS": {
     "message": "Kešatmiņas krātuves kešatmiņas nosaukums: {PH1}"
@@ -10139,9 +10112,6 @@
   "panels/profiler/ProfilesPanel.ts | cantLoadProfileWhileAnother": {
     "message": "Nevar ielādēt profilu, kamēr notiek cita profila ierakstīšana."
   },
-  "panels/profiler/ProfilesPanel.ts | profileLoadingFailedS": {
-    "message": "Neizdevās ielādēt profilu: {PH1}."
-  },
   "panels/profiler/ProfilesPanel.ts | profiles": {
     "message": "Profili"
   },
@@ -10251,7 +10221,7 @@
     "message": "Saglabāt"
   },
   "panels/protocol_monitor/ProtocolMonitor.ts | selectAMessageToView": {
-    "message": "Select a message to see its details"
+    "message": "Atlasiet ziņojumu, lai skatītu detalizētu informāciju par to."
   },
   "panels/protocol_monitor/ProtocolMonitor.ts | selectTarget": {
     "message": "Atlasiet mērķi"
@@ -10290,7 +10260,7 @@
     "message": "Kopēt ierakstu vai atlasīto darbību"
   },
   "panels/recorder/RecorderController.ts | createRecording": {
-    "message": "Create recording"
+    "message": "Izveidot ierakstu"
   },
   "panels/recorder/RecorderController.ts | deleteRecording": {
     "message": "Dzēst ierakstu"
@@ -10308,13 +10278,13 @@
     "message": "Iegūt paplašinājumus…"
   },
   "panels/recorder/RecorderController.ts | header": {
-    "message": "Nothing recorded yet"
+    "message": "Vēl nekas nav ierakstīts"
   },
   "panels/recorder/RecorderController.ts | importRecording": {
     "message": "Importēt ierakstu"
   },
   "panels/recorder/RecorderController.ts | learnMore": {
-    "message": "Learn more"
+    "message": "Uzzināt vairāk"
   },
   "panels/recorder/RecorderController.ts | noRecordings": {
     "message": "Nav ierakstu"
@@ -10323,7 +10293,7 @@
     "message": "ieraksts(-i)"
   },
   "panels/recorder/RecorderController.ts | recordingDescription": {
-    "message": "Use recordings to create automated end-to-end tests or performance traces."
+    "message": "Izmantojiet ierakstus, lai izveidotu automatizētas vispārīgas pārbaudes vai veiktspējas izsekošanas datus."
   },
   "panels/recorder/RecorderController.ts | replayRecording": {
     "message": "Atskaņot ierakstu vēlreiz"
@@ -11496,7 +11466,7 @@
     "message": "Konsoles ziņojums, saistītais steka trasējums, pirmkods un tīkla galvenes tiek nosūtītas uzņēmumam Google skaidrojumu ģenerēšanai. Šos datus var skatīt pārskatītāji, lai uzlabotu šo funkciju."
   },
   "panels/settings/AISettingsTab.ts | consoleInsightsSendsDataNoLogging": {
-    "message": "The console message, associated stack trace, related source code, and the associated network headers are sent to Google to generate explanations. This data will not be used to improve Google’s AI models."
+    "message": "Konsoles ziņojums, saistītais steka trasējums, pirmkods un tīkla galvenes tiek nosūtītas uzņēmumam Google skaidrojumu ģenerēšanai. Šie dati netiks izmantoti, lai uzlabotu Google MI modeļus."
   },
   "panels/settings/AISettingsTab.ts | dataCollection": {
     "message": "Atkarībā no jūsu reģiona Google var atturēties no datu vākšanas"
@@ -11532,7 +11502,7 @@
     "message": "Visi dati, kuriem pārbaudītā lapa var piekļūt, izmantojot tīmekļa API, tīkla pieprasījumus, failus un veiktspējas izsekošanas datus, tiek nosūtīti uzņēmumam Google, lai ģenerētu skaidrojumus. Šos datus var skatīt pārskatītāji, lai uzlabotu šo funkciju. Neizmantojiet šo funkciju lapās, kurās ir personas dati vai sensitīva informācija."
   },
   "panels/settings/AISettingsTab.ts | freestylerSendsDataNoLogging": {
-    "message": "Any data the inspected page can access via Web APIs, network requests, files, and performance traces are sent to Google to generate explanations. This data will not be used to improve Google’s AI models."
+    "message": "Visi dati, kuriem pārbaudītā lapa var piekļūt, izmantojot tīmekļa API, tīkla pieprasījumus, failus un veiktspējas izsekošanas datus, tiek nosūtīti uzņēmumam Google, lai ģenerētu skaidrojumus. Šie dati netiks izmantoti, lai uzlabotu Google MI modeļus."
   },
   "panels/settings/AISettingsTab.ts | helpUnderstandConsole": {
     "message": "Palīdz izprast un novērst konsoles brīdinājumus un kļūdas"
@@ -12259,15 +12229,6 @@
   },
   "panels/sources/NavigatorView.ts | actionCannotBeUndone": {
     "message": "Šo darbību nevar atsaukt."
-  },
-  "panels/sources/NavigatorView.ts | areYouSureYouWantToDeleteFolder": {
-    "message": "Vai tiešām vēlaties dzēst šo mapi un tās saturu?"
-  },
-  "panels/sources/NavigatorView.ts | areYouSureYouWantToDeleteThis": {
-    "message": "Vai tiešām vēlaties dzēst šo failu?"
-  },
-  "panels/sources/NavigatorView.ts | areYouSureYouWantToExcludeThis": {
-    "message": "Vai tiešām vēlaties izslēgt šo mapi?"
   },
   "panels/sources/NavigatorView.ts | areYouSureYouWantToRemoveThis": {
     "message": "Vai noņemt “{PH1}” no darbvietas?"
@@ -13041,7 +13002,7 @@
     "message": "Šajā ierakstā ir ietverti laika dati, kas iegūti no servera atbildes laika tīkla atbilžu galvenēm. Attiecīgie sākuma laika dati ir tikai aptuveni un var nebūt precīzi."
   },
   "panels/timeline/ThirdPartyTreeView.ts | firstOrThirdPartyName": {
-    "message": "1st / 3rd party"
+    "message": "Pirmā/trešā puse"
   },
   "panels/timeline/ThirdPartyTreeView.ts | selfTime": {
     "message": "Vienas darbības laiks"
@@ -13254,7 +13215,7 @@
     "message": "Apraksts"
   },
   "panels/timeline/TimelinePanel.ts | dimThirdParties": {
-    "message": "Dim 3rd parties"
+    "message": "Aptumšot trešo pušu saturu"
   },
   "panels/timeline/TimelinePanel.ts | disableJavascriptSamples": {
     "message": "Atspējot JavaScript paraugus"
@@ -13374,7 +13335,7 @@
     "message": "Notiek laika grafika apturēšana…"
   },
   "panels/timeline/TimelinePanel.ts | thirdPartiesByThirdPartyWeb": {
-    "message": "3rd parties classified by third-party-web"
+    "message": "Trešās puses, kas klasificētas pēc trešās puses tīmekļa"
   },
   "panels/timeline/TimelinePanel.ts | time": {
     "message": "Laiks"
@@ -13653,7 +13614,7 @@
     "message": "{PH1}"
   },
   "panels/timeline/TimelineUIUtils.ts | entity": {
-    "message": "Third party"
+    "message": "Trešā puse"
   },
   "panels/timeline/TimelineUIUtils.ts | entryIsHidden": {
     "message": "(ieraksts ir paslēpts)"
@@ -13817,9 +13778,6 @@
   "panels/timeline/TimelineUIUtils.ts | selectorStatsTitle": {
     "message": "Atlasītāja statistika"
   },
-  "panels/timeline/TimelineUIUtils.ts | selfTime": {
-    "message": "Vienas darbības laiks"
-  },
   "panels/timeline/TimelineUIUtils.ts | size": {
     "message": "Lielums"
   },
@@ -13833,7 +13791,7 @@
     "message": "Stila lapas URL"
   },
   "panels/timeline/TimelineUIUtils.ts | thirdPartyTable": {
-    "message": "1st / 3rd party table"
+    "message": "Pirmās/trešās puses tabula"
   },
   "panels/timeline/TimelineUIUtils.ts | timeSpentInRendering": {
     "message": "Atveides ilgums"
@@ -13849,9 +13807,6 @@
   },
   "panels/timeline/TimelineUIUtils.ts | timestamp": {
     "message": "Laikspiedols"
-  },
-  "panels/timeline/TimelineUIUtils.ts | totalTime": {
-    "message": "Kopējais laiks"
   },
   "panels/timeline/TimelineUIUtils.ts | traceEvent": {
     "message": "Izsekošanas notikums"
@@ -13920,7 +13875,7 @@
     "message": "Noņemt pakārtoto hierarhisko navigāciju"
   },
   "panels/timeline/components/CPUThrottlingSelector.ts | calibrate": {
-    "message": "Calibrate…"
+    "message": "Kalibrēt…"
   },
   "panels/timeline/components/CPUThrottlingSelector.ts | cpu": {
     "message": "Centrālais procesors: {PH1}"
@@ -13932,7 +13887,7 @@
     "message": "Kalibrētie pirmiestatījumi"
   },
   "panels/timeline/components/CPUThrottlingSelector.ts | recalibrate": {
-    "message": "Recalibrate…"
+    "message": "Pārkalibrēt…"
   },
   "panels/timeline/components/CPUThrottlingSelector.ts | recommendedThrottling": {
     "message": "{PH1} (ieteicams)"
@@ -14424,7 +14379,7 @@
     "message": "Kodētie dati"
   },
   "panels/timeline/components/NetworkRequestDetails.ts | entity": {
-    "message": "Third party"
+    "message": "Trešā puse"
   },
   "panels/timeline/components/NetworkRequestDetails.ts | fromCache": {
     "message": "No kešatmiņas"
@@ -14568,16 +14523,16 @@
     "message": "Ieskati ir eksperimentāla funkcija. Jūsu atsauksmes palīdzēs to uzlabot."
   },
   "panels/timeline/components/SidebarSingleInsightSet.ts | dismissTitle": {
-    "message": "Dismiss"
+    "message": "Nerādīt"
   },
   "panels/timeline/components/SidebarSingleInsightSet.ts | fieldMismatchNotice": {
-    "message": "There are many reasons why local and field metrics [may not match](https://web.dev/articles/lab-and-field-data-differences). Adjust [throttling settings and device emulation](https://developer.chrome.com/docs/devtools/device-mode) to analyze traces more similar to the average user's environment."
+    "message": "Lokālo un ievākto datu rādītāji [var neatbilst](https://web.dev/articles/lab-and-field-data-differences) vairāku iemeslu dēļ. Pielāgojiet [ierobežošanas iestatījumus un ierīces emulāciju](https://developer.chrome.com/docs/devtools/device-mode), lai analizētu izsekošanas datus, kas ir līdzīgāki parasta lietotāja videi."
   },
   "panels/timeline/components/SidebarSingleInsightSet.ts | fieldMismatchTitle": {
-    "message": "Field & local metrics mismatch"
+    "message": "Ievākto un vietējo rādītāju neatbilstība"
   },
   "panels/timeline/components/SidebarSingleInsightSet.ts | fieldScoreLabel": {
-    "message": "Field ({PH1})"
+    "message": "Ievāktie rādītāji ({PH1})"
   },
   "panels/timeline/components/SidebarSingleInsightSet.ts | metricScore": {
     "message": "{PH1}: {PH2} ({PH3} rezultāts)"
@@ -15885,7 +15840,7 @@
     "message": "Kārtot pēc"
   },
   "ui/legacy/components/data_grid/DataGrid.ts | sortableColumn": {
-    "message": "Sortable column. Press enter to apply sorting filter"
+    "message": "Kārtojama sleja. Lai lietotu kārtošanas filtru, nospiediet taustiņu Enter."
   },
   "ui/legacy/components/data_grid/ShowMoreDataGridNode.ts | showAllD": {
     "message": "Rādīt visus (kopā {PH1})"
@@ -16221,10 +16176,10 @@
     "message": "Atrast"
   },
   "ui/legacy/components/source_frame/PreviewFactory.ts | failedToLoadData": {
-    "message": "Failed to load data"
+    "message": "Neizdevās ielādēt datus"
   },
   "ui/legacy/components/source_frame/PreviewFactory.ts | nothingToPreview": {
-    "message": "Nothing to preview"
+    "message": "Nav nekā, ko priekšskatīt"
   },
   "ui/legacy/components/source_frame/ResourceSourceFrame.ts | find": {
     "message": "Atrast"
