--- a/front_end/core/i18n/locales/nl.json
+++ b/front_end/core/i18n/locales/nl.json
@@ -105,7 +105,7 @@
     "message": "Deelvenster Netwerk"
   },
   "core/common/Revealer.ts | securityPanel": {
-    "message": "Security panel"
+    "message": "Beveiligingsdeelvenster"
   },
   "core/common/Revealer.ts | sourcesPanel": {
     "message": "Deelvenster Bronnen"
@@ -2798,9 +2798,6 @@
   "panels/application/BackgroundServiceView.ts | clear": {
     "message": "Wissen"
   },
-  "panels/application/BackgroundServiceView.ts | clickTheRecordButtonSOrHitSTo": {
-    "message": "Klik op de opnameknop {PH1} of op {PH2} om de opname te starten."
-  },
   "panels/application/BackgroundServiceView.ts | devtoolsWillRecordAllSActivity": {
     "message": "DevTools registreert alle activiteiten van {PH1} gedurende maximaal 3 dagen, zelfs wanneer de tools zijn gesloten."
   },
@@ -2812,9 +2809,6 @@
   },
   "panels/application/BackgroundServiceView.ts | instanceId": {
     "message": "Instantie-ID"
-  },
-  "panels/application/BackgroundServiceView.ts | learnMore": {
-    "message": "Meer informatie"
   },
   "panels/application/BackgroundServiceView.ts | noMetadataForThisEvent": {
     "message": "Geen metadata voor deze gebeurtenis"
@@ -2947,9 +2941,6 @@
   },
   "panels/application/IndexedDBViews.ts | objectStores": {
     "message": "Objectopslag"
-  },
-  "panels/application/IndexedDBViews.ts | pleaseConfirmDeleteOfSDatabase": {
-    "message": "Bevestig de verwijdering van {PH1}-database."
   },
   "panels/application/IndexedDBViews.ts | primaryKey": {
     "message": "Primaire sleutel"
@@ -3236,12 +3227,6 @@
   "panels/application/SharedStorageEventsView.ts | clickToDisplayBody": {
     "message": "Klik op een gebeurtenis voor gedeelde opslag om de gebeurtenisparameters te tonen."
   },
-  "panels/application/SharedStorageItemsView.ts | key": {
-    "message": "Sleutel"
-  },
-  "panels/application/SharedStorageItemsView.ts | selectAValueToPreview": {
-    "message": "Selecteer een waarde om een voorbeeld te bekijken"
-  },
   "panels/application/SharedStorageItemsView.ts | sharedStorage": {
     "message": "Gedeelde opslag"
   },
@@ -3257,17 +3242,8 @@
   "panels/application/SharedStorageItemsView.ts | sharedStorageItemEdited": {
     "message": "Het opslagitem is bewerkt."
   },
-  "panels/application/SharedStorageItemsView.ts | sharedStorageItems": {
-    "message": "Items in gedeelde opslag"
-  },
   "panels/application/SharedStorageItemsView.ts | sharedStorageItemsCleared": {
     "message": "Items in gedeelde opslag gewist"
-  },
-  "panels/application/SharedStorageItemsView.ts | sharedStorageNumberEntries": {
-    "message": "Aantal items getoond in de tabel: {PH1}"
-  },
-  "panels/application/SharedStorageItemsView.ts | value": {
-    "message": "Waarde"
   },
   "panels/application/SharedStorageListTreeElement.ts | sharedStorage": {
     "message": "Gedeelde opslag"
@@ -4262,9 +4238,6 @@
   "panels/application/components/TrustTokensView.ts | issuer": {
     "message": "Uitgever"
   },
-  "panels/application/components/TrustTokensView.ts | noTrustTokensStored": {
-    "message": "Er zijn op dit moment geen privéstatustokens opgeslagen."
-  },
   "panels/application/components/TrustTokensView.ts | storedTokenCount": {
     "message": "Aantal tokens opgeslagen"
   },
@@ -4950,7 +4923,7 @@
     "message": "Lijst met DOM-breakpoints"
   },
   "panels/browser_debugger/DOMBreakpointsSidebarPane.ts | noBreakpoints": {
-    "message": "No DOM breakpoints set"
+    "message": "Geen DOM-breakpoints ingesteld"
   },
   "panels/browser_debugger/DOMBreakpointsSidebarPane.ts | nodeRemoved": {
     "message": "Node verwijderd"
@@ -5067,19 +5040,19 @@
     "message": "{PH1} (van bronkaart)"
   },
   "panels/changes/ChangesView.ts | binaryDataDescription": {
-    "message": "The changes tab doesn't show binary data changes"
+    "message": "Het tabblad Wijzigingen toont geen wijzigingen in binaire gegevens"
   },
   "panels/changes/ChangesView.ts | changesViewDescription": {
-    "message": "On this page you can track code changes made within DevTools."
+    "message": "Op deze pagina kun je codewijzigingen bijhouden die zijn aangebracht in DevTools."
   },
   "panels/changes/ChangesView.ts | copy": {
     "message": "Kopiëren"
   },
   "panels/changes/ChangesView.ts | noChanges": {
-    "message": "No changes yet"
+    "message": "Nog geen wijzigingen"
   },
   "panels/changes/ChangesView.ts | noTextualDiff": {
-    "message": "No textual diff available"
+    "message": "Geen tekstverschil beschikbaar"
   },
   "panels/changes/ChangesView.ts | sDeletions": {
     "message": "{n,plural, =1{# verwijdering (-)}other{# verwijderingen (-)}}"
@@ -5298,7 +5271,7 @@
     "message": " M<XX>"
   },
   "panels/console/ConsoleViewMessage.ts | SeeIssueInCookieReport": {
-    "message": "Click to open privacy and security panel and show third-party cookie report"
+    "message": "Klik om het deelvenster Privacy en beveiliging te openen en het rapport over cookies van derden te tonen"
   },
   "panels/console/ConsoleViewMessage.ts | assertionFailed": {
     "message": "Assertie mislukt: "
@@ -6747,7 +6720,7 @@
     "message": "Stacktrace"
   },
   "panels/explain/components/ConsoleInsight.ts | timedOut": {
-    "message": "Generating a response took too long. Please try again."
+    "message": "Het genereren van een reactie duurde te lang. Probeer het opnieuw."
   },
   "panels/explain/components/ConsoleInsight.ts | turnOnInSettings": {
     "message": "Zet {PH1} aan om AI-ondersteuning te krijgen voor het begrijpen en oplossen van waarschuwingen en fouten in de console."
@@ -7911,7 +7884,7 @@
     "message": "{PH1} toevoegen"
   },
   "panels/mobile_throttling/ThrottlingManager.ts | calibrate": {
-    "message": "Calibrate…"
+    "message": "Kalibreren…"
   },
   "panels/mobile_throttling/ThrottlingManager.ts | cpuThrottling": {
     "message": "CPU-throttling"
@@ -7935,7 +7908,7 @@
     "message": "Offline"
   },
   "panels/mobile_throttling/ThrottlingManager.ts | recalibrate": {
-    "message": "Recalibrate…"
+    "message": "Opnieuw kalibreren…"
   },
   "panels/mobile_throttling/ThrottlingManager.ts | recommendedThrottling": {
     "message": "{PH1} – aanbevolen"
@@ -8895,7 +8868,7 @@
     "message": "Dit verzoek bevat geen cookies."
   },
   "panels/network/RequestInitiatorView.ts | noInitiator": {
-    "message": "No initiator data"
+    "message": "Geen initiator-gegevens"
   },
   "panels/network/RequestInitiatorView.ts | requestCallStack": {
     "message": "Aanroepstack opvragen"
@@ -8961,10 +8934,10 @@
     "message": "Kan reactiegegevens niet laden"
   },
   "panels/network/RequestResponseView.ts | noPreview": {
-    "message": "Nothing to preview"
+    "message": "Geen voorbeeld om weer te geven"
   },
   "panels/network/RequestResponseView.ts | thisRequestHasNoResponseData": {
-    "message": "This request has no response data available"
+    "message": "Voor dit verzoek zijn geen reactiegegevens beschikbaar"
   },
   "panels/network/RequestTimingView.ts | cacheStorageCacheNameS": {
     "message": "Cachenaam van cache-opslag: {PH1}"
@@ -10139,9 +10112,6 @@
   "panels/profiler/ProfilesPanel.ts | cantLoadProfileWhileAnother": {
     "message": "Kan profiel niet laden terwijl een ander profiel wordt vastgelegd."
   },
-  "panels/profiler/ProfilesPanel.ts | profileLoadingFailedS": {
-    "message": "Profiel laden is mislukt: {PH1}."
-  },
   "panels/profiler/ProfilesPanel.ts | profiles": {
     "message": "Profielen"
   },
@@ -10251,7 +10221,7 @@
     "message": "Opslaan"
   },
   "panels/protocol_monitor/ProtocolMonitor.ts | selectAMessageToView": {
-    "message": "Select a message to see its details"
+    "message": "Selecteer een bericht om de details te bekijken"
   },
   "panels/protocol_monitor/ProtocolMonitor.ts | selectTarget": {
     "message": "Selecteer een doel"
@@ -10290,7 +10260,7 @@
     "message": "Opname of geselecteerde stap kopiëren"
   },
   "panels/recorder/RecorderController.ts | createRecording": {
-    "message": "Create recording"
+    "message": "Opname maken"
   },
   "panels/recorder/RecorderController.ts | deleteRecording": {
     "message": "Opname verwijderen"
@@ -10308,13 +10278,13 @@
     "message": "Extensies ophalen…"
   },
   "panels/recorder/RecorderController.ts | header": {
-    "message": "Nothing recorded yet"
+    "message": "Nog niets opgenomen"
   },
   "panels/recorder/RecorderController.ts | importRecording": {
     "message": "Opname importeren"
   },
   "panels/recorder/RecorderController.ts | learnMore": {
-    "message": "Learn more"
+    "message": "Meer informatie"
   },
   "panels/recorder/RecorderController.ts | noRecordings": {
     "message": "Geen opnamen"
@@ -10323,7 +10293,7 @@
     "message": "opname(n)"
   },
   "panels/recorder/RecorderController.ts | recordingDescription": {
-    "message": "Use recordings to create automated end-to-end tests or performance traces."
+    "message": "Gebruik opnamen om geautomatiseerde end-to-end tests of prestatietracering te maken."
   },
   "panels/recorder/RecorderController.ts | replayRecording": {
     "message": "Opname opnieuw afspelen"
@@ -11496,7 +11466,7 @@
     "message": "Het consolebericht, de bijbehorende stacktrace, de gerelateerde broncode en de bijbehorende netwerkheaders worden naar Google gestuurd om uitleg te genereren. Deze gegevens kunnen door menselijke reviewers worden bekeken om deze functie te verbeteren."
   },
   "panels/settings/AISettingsTab.ts | consoleInsightsSendsDataNoLogging": {
-    "message": "The console message, associated stack trace, related source code, and the associated network headers are sent to Google to generate explanations. This data will not be used to improve Google’s AI models."
+    "message": "Het consolebericht, de bijbehorende stacktrace, de gerelateerde broncode en de bijbehorende netwerkheaders worden naar Google gestuurd om uitleg te genereren. Deze gegevens worden niet gebruikt om de AI-modellen van Google te verbeteren."
   },
   "panels/settings/AISettingsTab.ts | dataCollection": {
     "message": "Afhankelijk van je regio kan Google besluiten de gegevensverzameling te stoppen"
@@ -11532,7 +11502,7 @@
     "message": "Gegevens waartoe de geïnspecteerde pagina via web-API's, netwerkverzoeken, bestanden en prestatietracering toegang heeft, worden naar Google gestuurd om uitleg te genereren. Deze gegevens kunnen door menselijke reviewers worden bekeken om deze functie te verbeteren. Gebruik deze niet op pagina's met persoonlijke of gevoelige informatie."
   },
   "panels/settings/AISettingsTab.ts | freestylerSendsDataNoLogging": {
-    "message": "Any data the inspected page can access via Web APIs, network requests, files, and performance traces are sent to Google to generate explanations. This data will not be used to improve Google’s AI models."
+    "message": "Gegevens waartoe de geïnspecteerde pagina via web-API's, netwerkverzoeken, bestanden en prestatietracering toegang heeft, worden naar Google gestuurd om uitleg te genereren. Deze gegevens worden niet gebruikt om de AI-modellen van Google te verbeteren."
   },
   "panels/settings/AISettingsTab.ts | helpUnderstandConsole": {
     "message": "Hiermee krijg je inzicht in waarschuwingen en fouten in de console en kun je deze oplossen"
@@ -12259,15 +12229,6 @@
   },
   "panels/sources/NavigatorView.ts | actionCannotBeUndone": {
     "message": "Je kunt deze actie niet ongedaan maken."
-  },
-  "panels/sources/NavigatorView.ts | areYouSureYouWantToDeleteFolder": {
-    "message": "Weet je zeker dat je deze map en de inhoud ervan wilt verwijderen?"
-  },
-  "panels/sources/NavigatorView.ts | areYouSureYouWantToDeleteThis": {
-    "message": "Weet je zeker dat je dit bestand wilt verwijderen?"
-  },
-  "panels/sources/NavigatorView.ts | areYouSureYouWantToExcludeThis": {
-    "message": "Weet je zeker dat je deze map wilt uitsluiten?"
   },
   "panels/sources/NavigatorView.ts | areYouSureYouWantToRemoveThis": {
     "message": "'{PH1}' uit werkruimte verwijderen?"
@@ -13041,7 +13002,7 @@
     "message": "Deze track bevat timings die zijn overgenomen uit headers voor netwerkreacties voor servertiming. De bijbehorende begintijden zijn slechts schattingen en zijn misschien niet nauwkeurig."
   },
   "panels/timeline/ThirdPartyTreeView.ts | firstOrThirdPartyName": {
-    "message": "1st / 3rd party"
+    "message": "Eerste/derde partij"
   },
   "panels/timeline/ThirdPartyTreeView.ts | selfTime": {
     "message": "Zelftijd"
@@ -13254,7 +13215,7 @@
     "message": "Beschrijving"
   },
   "panels/timeline/TimelinePanel.ts | dimThirdParties": {
-    "message": "Dim 3rd parties"
+    "message": "Derden dimmen"
   },
   "panels/timeline/TimelinePanel.ts | disableJavascriptSamples": {
     "message": "JavaScript-voorbeelden uitzetten"
@@ -13374,7 +13335,7 @@
     "message": "Tijdlijn stoppen…"
   },
   "panels/timeline/TimelinePanel.ts | thirdPartiesByThirdPartyWeb": {
-    "message": "3rd parties classified by third-party-web"
+    "message": "Derden geclassificeerd op basis van externe websites"
   },
   "panels/timeline/TimelinePanel.ts | time": {
     "message": "Tijd"
@@ -13653,7 +13614,7 @@
     "message": "{PH1}"
   },
   "panels/timeline/TimelineUIUtils.ts | entity": {
-    "message": "Third party"
+    "message": "Derden"
   },
   "panels/timeline/TimelineUIUtils.ts | entryIsHidden": {
     "message": "(vermelding is verborgen)"
@@ -13817,9 +13778,6 @@
   "panels/timeline/TimelineUIUtils.ts | selectorStatsTitle": {
     "message": "Kiezerstatistieken"
   },
-  "panels/timeline/TimelineUIUtils.ts | selfTime": {
-    "message": "Zelftijd"
-  },
   "panels/timeline/TimelineUIUtils.ts | size": {
     "message": "Grootte"
   },
@@ -13833,7 +13791,7 @@
     "message": "Stylesheet-URL"
   },
   "panels/timeline/TimelineUIUtils.ts | thirdPartyTable": {
-    "message": "1st / 3rd party table"
+    "message": "Tabel voor eerst/derde partij"
   },
   "panels/timeline/TimelineUIUtils.ts | timeSpentInRendering": {
     "message": "Tijd besteed aan renderen"
@@ -13849,9 +13807,6 @@
   },
   "panels/timeline/TimelineUIUtils.ts | timestamp": {
     "message": "Tijdstempel"
-  },
-  "panels/timeline/TimelineUIUtils.ts | totalTime": {
-    "message": "Totale tijd"
   },
   "panels/timeline/TimelineUIUtils.ts | traceEvent": {
     "message": "Traceringsgebeurtenis"
@@ -13920,7 +13875,7 @@
     "message": "Broodkruimels voor subpagina's verwijderen"
   },
   "panels/timeline/components/CPUThrottlingSelector.ts | calibrate": {
-    "message": "Calibrate…"
+    "message": "Kalibreren…"
   },
   "panels/timeline/components/CPUThrottlingSelector.ts | cpu": {
     "message": "CPU: {PH1}"
@@ -13932,7 +13887,7 @@
     "message": "Gekalibreerde voorinstellingen"
   },
   "panels/timeline/components/CPUThrottlingSelector.ts | recalibrate": {
-    "message": "Recalibrate…"
+    "message": "Opnieuw kalibreren…"
   },
   "panels/timeline/components/CPUThrottlingSelector.ts | recommendedThrottling": {
     "message": "{PH1} – aanbevolen"
@@ -14424,7 +14379,7 @@
     "message": "Gecodeerde gegevens"
   },
   "panels/timeline/components/NetworkRequestDetails.ts | entity": {
-    "message": "Third party"
+    "message": "Derden"
   },
   "panels/timeline/components/NetworkRequestDetails.ts | fromCache": {
     "message": "Uit cachegeheugen"
@@ -14568,16 +14523,16 @@
     "message": "Insights is een experimentele functie. Aan de hand van je feedback kunnen we de functie verbeteren."
   },
   "panels/timeline/components/SidebarSingleInsightSet.ts | dismissTitle": {
-    "message": "Dismiss"
+    "message": "Sluiten"
   },
   "panels/timeline/components/SidebarSingleInsightSet.ts | fieldMismatchNotice": {
-    "message": "There are many reasons why local and field metrics [may not match](https://web.dev/articles/lab-and-field-data-differences). Adjust [throttling settings and device emulation](https://developer.chrome.com/docs/devtools/device-mode) to analyze traces more similar to the average user's environment."
+    "message": "Er zijn veel redenen waarom lokale en veldstatistieken [misschien niet overeenkomen](https://web.dev/articles/lab-and-field-data-differences). Pas [instellingen voor throttling en apparaatemulatie](https://developer.chrome.com/docs/devtools/device-mode) aan om tracering te analyseren die meer lijkt op de omgeving van de gemiddelde gebruiker."
   },
   "panels/timeline/components/SidebarSingleInsightSet.ts | fieldMismatchTitle": {
-    "message": "Field & local metrics mismatch"
+    "message": "Lokale en veldstatistieken komen niet overeen"
   },
   "panels/timeline/components/SidebarSingleInsightSet.ts | fieldScoreLabel": {
-    "message": "Field ({PH1})"
+    "message": "Veld ({PH1})"
   },
   "panels/timeline/components/SidebarSingleInsightSet.ts | metricScore": {
     "message": "{PH1}: {PH2} {PH3} score"
@@ -15885,7 +15840,7 @@
     "message": "Sorteren op"
   },
   "ui/legacy/components/data_grid/DataGrid.ts | sortableColumn": {
-    "message": "Sortable column. Press enter to apply sorting filter"
+    "message": "Sorteerbare kolom. Druk op Enter om het filter voor sorteren toe te passen."
   },
   "ui/legacy/components/data_grid/ShowMoreDataGridNode.ts | showAllD": {
     "message": "Alle {PH1} bekijken"
@@ -16221,10 +16176,10 @@
     "message": "Zoeken"
   },
   "ui/legacy/components/source_frame/PreviewFactory.ts | failedToLoadData": {
-    "message": "Failed to load data"
+    "message": "Datagebruik kan niet worden geladen"
   },
   "ui/legacy/components/source_frame/PreviewFactory.ts | nothingToPreview": {
-    "message": "Nothing to preview"
+    "message": "Geen voorbeeld om weer te geven"
   },
   "ui/legacy/components/source_frame/ResourceSourceFrame.ts | find": {
     "message": "Zoeken"
