--- a/front_end/core/i18n/locales/no.json
+++ b/front_end/core/i18n/locales/no.json
@@ -105,7 +105,7 @@
     "message": "Nettverkspanel"
   },
   "core/common/Revealer.ts | securityPanel": {
-    "message": "Security panel"
+    "message": "Sikkerhetspanel"
   },
   "core/common/Revealer.ts | sourcesPanel": {
     "message": "Panel over kilder"
@@ -2798,9 +2798,6 @@
   "panels/application/BackgroundServiceView.ts | clear": {
     "message": "Tøm"
   },
-  "panels/application/BackgroundServiceView.ts | clickTheRecordButtonSOrHitSTo": {
-    "message": "Klikk på opptaksknappen {PH1} eller trykk på {PH2} for å starte opptaket."
-  },
   "panels/application/BackgroundServiceView.ts | devtoolsWillRecordAllSActivity": {
     "message": "Utviklerverktøy tar opp all {PH1}-aktivitet i opptil tre dager, selv når de er lukket."
   },
@@ -2812,9 +2809,6 @@
   },
   "panels/application/BackgroundServiceView.ts | instanceId": {
     "message": "Forekomst-ID"
-  },
-  "panels/application/BackgroundServiceView.ts | learnMore": {
-    "message": "Finn ut mer"
   },
   "panels/application/BackgroundServiceView.ts | noMetadataForThisEvent": {
     "message": "Ingen metadata for denne hendelsen"
@@ -2947,9 +2941,6 @@
   },
   "panels/application/IndexedDBViews.ts | objectStores": {
     "message": "Objektlagre"
-  },
-  "panels/application/IndexedDBViews.ts | pleaseConfirmDeleteOfSDatabase": {
-    "message": "Bekreft sletting av «{PH1}»-databasen."
   },
   "panels/application/IndexedDBViews.ts | primaryKey": {
     "message": "Primærnøkkel"
@@ -3236,12 +3227,6 @@
   "panels/application/SharedStorageEventsView.ts | clickToDisplayBody": {
     "message": "Klikk på en hendelse for delt lagring for å vise hendelsesparameterne."
   },
-  "panels/application/SharedStorageItemsView.ts | key": {
-    "message": "Nøkkel"
-  },
-  "panels/application/SharedStorageItemsView.ts | selectAValueToPreview": {
-    "message": "Velg verdien du vil forhåndsvise"
-  },
   "panels/application/SharedStorageItemsView.ts | sharedStorage": {
     "message": "Delt lagring"
   },
@@ -3257,17 +3242,8 @@
   "panels/application/SharedStorageItemsView.ts | sharedStorageItemEdited": {
     "message": "Lagringselementet ble redigert."
   },
-  "panels/application/SharedStorageItemsView.ts | sharedStorageItems": {
-    "message": "Elementer i delt lagring"
-  },
   "panels/application/SharedStorageItemsView.ts | sharedStorageItemsCleared": {
     "message": "Elementene i delt lagring er slettet"
-  },
-  "panels/application/SharedStorageItemsView.ts | sharedStorageNumberEntries": {
-    "message": "Antall oppføringer som vises i tabellen: {PH1}"
-  },
-  "panels/application/SharedStorageItemsView.ts | value": {
-    "message": "Verdi"
   },
   "panels/application/SharedStorageListTreeElement.ts | sharedStorage": {
     "message": "Delt lagring"
@@ -4262,9 +4238,6 @@
   "panels/application/components/TrustTokensView.ts | issuer": {
     "message": "Utsteder"
   },
-  "panels/application/components/TrustTokensView.ts | noTrustTokensStored": {
-    "message": "Ingen private tilstandstokener er lagret for øyeblikket."
-  },
   "panels/application/components/TrustTokensView.ts | storedTokenCount": {
     "message": "Lagret tokenantall"
   },
@@ -4950,7 +4923,7 @@
     "message": "Liste over DOM-stoppunkter"
   },
   "panels/browser_debugger/DOMBreakpointsSidebarPane.ts | noBreakpoints": {
-    "message": "No DOM breakpoints set"
+    "message": "Ingen DOM-stoppunkter er angitt"
   },
   "panels/browser_debugger/DOMBreakpointsSidebarPane.ts | nodeRemoved": {
     "message": "Noden er fjernet"
@@ -5067,19 +5040,19 @@
     "message": "{PH1} (fra kildekart)"
   },
   "panels/changes/ChangesView.ts | binaryDataDescription": {
-    "message": "The changes tab doesn't show binary data changes"
+    "message": "Endringer-fanen viser ikke endringer i binære data"
   },
   "panels/changes/ChangesView.ts | changesViewDescription": {
-    "message": "On this page you can track code changes made within DevTools."
+    "message": "På denne siden kan du spore kodeendringer som er gjort i Utviklerverktøy."
   },
   "panels/changes/ChangesView.ts | copy": {
     "message": "Kopiér"
   },
   "panels/changes/ChangesView.ts | noChanges": {
-    "message": "No changes yet"
+    "message": "Ingen endringer ennå"
   },
   "panels/changes/ChangesView.ts | noTextualDiff": {
-    "message": "No textual diff available"
+    "message": "Ingen tekst-diff er tilgjengelig"
   },
   "panels/changes/ChangesView.ts | sDeletions": {
     "message": "{n,plural, =1{# sletting (-)}other{# slettinger (-)}}"
@@ -5298,7 +5271,7 @@
     "message": " M<XX>"
   },
   "panels/console/ConsoleViewMessage.ts | SeeIssueInCookieReport": {
-    "message": "Click to open privacy and security panel and show third-party cookie report"
+    "message": "Klikk for å åpne personvern- og sikkerhetspanelet og vise rapporten om informasjonskapsler fra tredjeparter"
   },
   "panels/console/ConsoleViewMessage.ts | assertionFailed": {
     "message": "Deklarasjon mislyktes: "
@@ -6747,7 +6720,7 @@
     "message": "Stabelspor"
   },
   "panels/explain/components/ConsoleInsight.ts | timedOut": {
-    "message": "Generating a response took too long. Please try again."
+    "message": "Det tok for lang tid å generere et svar. Prøv på nytt."
   },
   "panels/explain/components/ConsoleInsight.ts | turnOnInSettings": {
     "message": "Slå på {PH1} for å få hjelp av AI til å forstå og løse konsolladvarsler og -feil."
@@ -7911,7 +7884,7 @@
     "message": "Legg til {PH1}"
   },
   "panels/mobile_throttling/ThrottlingManager.ts | calibrate": {
-    "message": "Calibrate…"
+    "message": "Kalibrer…"
   },
   "panels/mobile_throttling/ThrottlingManager.ts | cpuThrottling": {
     "message": "Prosessorstruping"
@@ -7935,7 +7908,7 @@
     "message": "Uten nett"
   },
   "panels/mobile_throttling/ThrottlingManager.ts | recalibrate": {
-    "message": "Recalibrate…"
+    "message": "Rekalibrer…"
   },
   "panels/mobile_throttling/ThrottlingManager.ts | recommendedThrottling": {
     "message": "{PH1} – anbefalt"
@@ -8895,7 +8868,7 @@
     "message": "Denne forespørselen har ingen informasjonskapsler"
   },
   "panels/network/RequestInitiatorView.ts | noInitiator": {
-    "message": "No initiator data"
+    "message": "Ingen data om igangsetter"
   },
   "panels/network/RequestInitiatorView.ts | requestCallStack": {
     "message": "Kallstabel for forespørsler"
@@ -8961,10 +8934,10 @@
     "message": "Kunne ikke laste inn responsdata"
   },
   "panels/network/RequestResponseView.ts | noPreview": {
-    "message": "Nothing to preview"
+    "message": "Ingenting å forhåndsvise"
   },
   "panels/network/RequestResponseView.ts | thisRequestHasNoResponseData": {
-    "message": "This request has no response data available"
+    "message": "Denne forespørselen har ingen tilgjengelige responsdata"
   },
   "panels/network/RequestTimingView.ts | cacheStorageCacheNameS": {
     "message": "Buffernavn for bufferlagring: {PH1}"
@@ -10139,9 +10112,6 @@
   "panels/profiler/ProfilesPanel.ts | cantLoadProfileWhileAnother": {
     "message": "Kan ikke laste inn profilen mens en annen profil tas opp."
   },
-  "panels/profiler/ProfilesPanel.ts | profileLoadingFailedS": {
-    "message": "Profilinnlasting mislyktes: {PH1}."
-  },
   "panels/profiler/ProfilesPanel.ts | profiles": {
     "message": "Profiler"
   },
@@ -10251,7 +10221,7 @@
     "message": "Lagre"
   },
   "panels/protocol_monitor/ProtocolMonitor.ts | selectAMessageToView": {
-    "message": "Select a message to see its details"
+    "message": "Velg en melding for å vise detaljer om den"
   },
   "panels/protocol_monitor/ProtocolMonitor.ts | selectTarget": {
     "message": "Velg et mål"
@@ -10290,7 +10260,7 @@
     "message": "Kopier opptaket eller valgt trinn"
   },
   "panels/recorder/RecorderController.ts | createRecording": {
-    "message": "Create recording"
+    "message": "Opprett opptak"
   },
   "panels/recorder/RecorderController.ts | deleteRecording": {
     "message": "Slett opptaket"
@@ -10308,13 +10278,13 @@
     "message": "Skaff utvidelser…"
   },
   "panels/recorder/RecorderController.ts | header": {
-    "message": "Nothing recorded yet"
+    "message": "Ingenting er tatt opp ennå"
   },
   "panels/recorder/RecorderController.ts | importRecording": {
     "message": "Importer opptaket"
   },
   "panels/recorder/RecorderController.ts | learnMore": {
-    "message": "Learn more"
+    "message": "Finn ut mer"
   },
   "panels/recorder/RecorderController.ts | noRecordings": {
     "message": "Ingen opptak"
@@ -10323,7 +10293,7 @@
     "message": "opptak"
   },
   "panels/recorder/RecorderController.ts | recordingDescription": {
-    "message": "Use recordings to create automated end-to-end tests or performance traces."
+    "message": "Bruk opptak til å lage automatiserte ende-til-ende-tester eller ytelsesspor."
   },
   "panels/recorder/RecorderController.ts | replayRecording": {
     "message": "Spill av opptaket på nytt"
@@ -11496,7 +11466,7 @@
     "message": "Konsollmeldingen, det tilknyttede stabelsporet, den relaterte kildekoden og de tilknyttede nettverkshodene sendes til Google for å generere forklaringer. Disse dataene kan bli sett av menneskelige evaluerere som jobber med å gjøre denne funksjonen bedre."
   },
   "panels/settings/AISettingsTab.ts | consoleInsightsSendsDataNoLogging": {
-    "message": "The console message, associated stack trace, related source code, and the associated network headers are sent to Google to generate explanations. This data will not be used to improve Google’s AI models."
+    "message": "Konsollmeldingen, det tilknyttede stabelsporet, den relaterte kildekoden og de tilknyttede nettverkshodene sendes til Google for å generere forklaringer. Disse dataene brukes ikke til å forbedre Googles AI-modeller."
   },
   "panels/settings/AISettingsTab.ts | dataCollection": {
     "message": "Google kan avstå fra datainnsamling, avhengig av regionen du er i"
@@ -11532,7 +11502,7 @@
     "message": "Data som den inspiserte siden har tilgang til via Web-API-er, nettverksforespørsler, filer og ytelsesspor, sendes til Google for generering av forklaringer. Disse dataene kan bli sett av menneskelige evaluerere som jobber med å gjøre denne funksjonen bedre. Ikke bruk funksjonen på sider med personlig eller sensitiv informasjon."
   },
   "panels/settings/AISettingsTab.ts | freestylerSendsDataNoLogging": {
-    "message": "Any data the inspected page can access via Web APIs, network requests, files, and performance traces are sent to Google to generate explanations. This data will not be used to improve Google’s AI models."
+    "message": "Data som den inspiserte siden har tilgang til via Web-API-er, nettverksforespørsler, filer og ytelsesspor, sendes til Google for generering av forklaringer. Disse dataene brukes ikke til å forbedre Googles AI-modeller."
   },
   "panels/settings/AISettingsTab.ts | helpUnderstandConsole": {
     "message": "Hjelper deg med å forstå og løse konsolladvarsler og -feil"
@@ -12259,15 +12229,6 @@
   },
   "panels/sources/NavigatorView.ts | actionCannotBeUndone": {
     "message": "Denne handlingen kan ikke angres."
-  },
-  "panels/sources/NavigatorView.ts | areYouSureYouWantToDeleteFolder": {
-    "message": "Er du sikker på at du vil slette denne mappen og innholdet i den?"
-  },
-  "panels/sources/NavigatorView.ts | areYouSureYouWantToDeleteThis": {
-    "message": "Er du sikker på at du vil slette denne filen?"
-  },
-  "panels/sources/NavigatorView.ts | areYouSureYouWantToExcludeThis": {
-    "message": "Er du sikker på at du vil ekskludere denne mappen?"
   },
   "panels/sources/NavigatorView.ts | areYouSureYouWantToRemoveThis": {
     "message": "Vil du fjerne «{PH1}» fra arbeidsområdet?"
@@ -13041,7 +13002,7 @@
     "message": "Dette sporet inneholder tidsregistreringer fra «Server-Timing»-nettverkssvarhodene. De respektive starttidene er bare anslag og kan være unøyaktige."
   },
   "panels/timeline/ThirdPartyTreeView.ts | firstOrThirdPartyName": {
-    "message": "1st / 3rd party"
+    "message": "Første-/tredjepart"
   },
   "panels/timeline/ThirdPartyTreeView.ts | selfTime": {
     "message": "Egentid"
@@ -13254,7 +13215,7 @@
     "message": "Beskrivelse"
   },
   "panels/timeline/TimelinePanel.ts | dimThirdParties": {
-    "message": "Dim 3rd parties"
+    "message": "Ton ned tredjeparter"
   },
   "panels/timeline/TimelinePanel.ts | disableJavascriptSamples": {
     "message": "Deaktiver JavaScript-prøver"
@@ -13374,7 +13335,7 @@
     "message": "Stopper tidslinje …"
   },
   "panels/timeline/TimelinePanel.ts | thirdPartiesByThirdPartyWeb": {
-    "message": "3rd parties classified by third-party-web"
+    "message": "Tredjeparter klassifisert etter tredjeparts-nett"
   },
   "panels/timeline/TimelinePanel.ts | time": {
     "message": "Tid"
@@ -13653,7 +13614,7 @@
     "message": "{PH1}"
   },
   "panels/timeline/TimelineUIUtils.ts | entity": {
-    "message": "Third party"
+    "message": "Tredjepart"
   },
   "panels/timeline/TimelineUIUtils.ts | entryIsHidden": {
     "message": "(oppføringen er skjult)"
@@ -13817,9 +13778,6 @@
   "panels/timeline/TimelineUIUtils.ts | selectorStatsTitle": {
     "message": "Velgerstatistikk"
   },
-  "panels/timeline/TimelineUIUtils.ts | selfTime": {
-    "message": "Egentid"
-  },
   "panels/timeline/TimelineUIUtils.ts | size": {
     "message": "Størrelse"
   },
@@ -13833,7 +13791,7 @@
     "message": "Stilark-URL"
   },
   "panels/timeline/TimelineUIUtils.ts | thirdPartyTable": {
-    "message": "1st / 3rd party table"
+    "message": "Første-/tredjepartstabell"
   },
   "panels/timeline/TimelineUIUtils.ts | timeSpentInRendering": {
     "message": "Tid brukt for gjengivelse"
@@ -13849,9 +13807,6 @@
   },
   "panels/timeline/TimelineUIUtils.ts | timestamp": {
     "message": "Tidsstempel"
-  },
-  "panels/timeline/TimelineUIUtils.ts | totalTime": {
-    "message": "Total tid"
   },
   "panels/timeline/TimelineUIUtils.ts | traceEvent": {
     "message": "Sporingshendelse"
@@ -13920,7 +13875,7 @@
     "message": "Fjern underordnede navigeringsnivåer"
   },
   "panels/timeline/components/CPUThrottlingSelector.ts | calibrate": {
-    "message": "Calibrate…"
+    "message": "Kalibrer…"
   },
   "panels/timeline/components/CPUThrottlingSelector.ts | cpu": {
     "message": "Prosessor: {PH1}"
@@ -13932,7 +13887,7 @@
     "message": "Kalibrerte forhåndsinnstillinger"
   },
   "panels/timeline/components/CPUThrottlingSelector.ts | recalibrate": {
-    "message": "Recalibrate…"
+    "message": "Rekalibrer…"
   },
   "panels/timeline/components/CPUThrottlingSelector.ts | recommendedThrottling": {
     "message": "{PH1} – anbefalt"
@@ -14424,7 +14379,7 @@
     "message": "Kodede data"
   },
   "panels/timeline/components/NetworkRequestDetails.ts | entity": {
-    "message": "Third party"
+    "message": "Tredjepart"
   },
   "panels/timeline/components/NetworkRequestDetails.ts | fromCache": {
     "message": "Fra bufferen"
@@ -14568,16 +14523,16 @@
     "message": "Insights er en funksjon på forsøksstadiet. Tilbakemeldinger hjelper oss å gjøre den bedre."
   },
   "panels/timeline/components/SidebarSingleInsightSet.ts | dismissTitle": {
-    "message": "Dismiss"
+    "message": "Lukk"
   },
   "panels/timeline/components/SidebarSingleInsightSet.ts | fieldMismatchNotice": {
-    "message": "There are many reasons why local and field metrics [may not match](https://web.dev/articles/lab-and-field-data-differences). Adjust [throttling settings and device emulation](https://developer.chrome.com/docs/devtools/device-mode) to analyze traces more similar to the average user's environment."
+    "message": "Det kan være mange grunner til at lokale verdier og verdier fra felten [ikke samsvarer](https://web.dev/articles/lab-and-field-data-differences). Juster [innstillinger for struping og enhetsemulering](https://developer.chrome.com/docs/devtools/device-mode) for å analysere spor som ligner mer på miljøet til den gjennomsnittlige brukeren."
   },
   "panels/timeline/components/SidebarSingleInsightSet.ts | fieldMismatchTitle": {
-    "message": "Field & local metrics mismatch"
+    "message": "Verdier fra felten og lokale verdier samsvarer ikke"
   },
   "panels/timeline/components/SidebarSingleInsightSet.ts | fieldScoreLabel": {
-    "message": "Field ({PH1})"
+    "message": "Felten ({PH1})"
   },
   "panels/timeline/components/SidebarSingleInsightSet.ts | metricScore": {
     "message": "{PH1}: {PH2} – {PH3} poengsum"
@@ -15885,7 +15840,7 @@
     "message": "Sorter etter"
   },
   "ui/legacy/components/data_grid/DataGrid.ts | sortableColumn": {
-    "message": "Sortable column. Press enter to apply sorting filter"
+    "message": "Sorterbar kolonne. Trykk på Enter for å bruke sorteringsfilter"
   },
   "ui/legacy/components/data_grid/ShowMoreDataGridNode.ts | showAllD": {
     "message": "Vis alle {PH1}"
@@ -16221,10 +16176,10 @@
     "message": "Finn"
   },
   "ui/legacy/components/source_frame/PreviewFactory.ts | failedToLoadData": {
-    "message": "Failed to load data"
+    "message": "Kunne ikke laste inn data"
   },
   "ui/legacy/components/source_frame/PreviewFactory.ts | nothingToPreview": {
-    "message": "Nothing to preview"
+    "message": "Ingenting å forhåndsvise"
   },
   "ui/legacy/components/source_frame/ResourceSourceFrame.ts | find": {
     "message": "Finn"
