--- a/front_end/core/i18n/locales/or.json
+++ b/front_end/core/i18n/locales/or.json
@@ -105,7 +105,7 @@
     "message": "ନେଟୱାର୍କ ପ୍ୟାନେଲ୍"
   },
   "core/common/Revealer.ts | securityPanel": {
-    "message": "Security panel"
+    "message": "ସୁରକ୍ଷା ପେନେଲ"
   },
   "core/common/Revealer.ts | sourcesPanel": {
     "message": "ସୋର୍ସ ପ୍ୟାନେଲ୍"
@@ -2798,9 +2798,6 @@
   "panels/application/BackgroundServiceView.ts | clear": {
     "message": "ଖାଲି କରନ୍ତୁ"
   },
-  "panels/application/BackgroundServiceView.ts | clickTheRecordButtonSOrHitSTo": {
-    "message": "ରେକର୍ଡିଂ ଆରମ୍ଭ କରିବାକୁ ରେକର୍ଡ ବଟନ୍ {PH1}ରେ କ୍ଲିକ୍ କରନ୍ତୁ କିମ୍ବା {PH2} ଦବାନ୍ତୁ।"
-  },
   "panels/application/BackgroundServiceView.ts | devtoolsWillRecordAllSActivity": {
     "message": "DevTools ସମସ୍ତ {PH1} କାର୍ଯ୍ୟକଳାପକୁ 3 ଦିନ ପର୍ଯ୍ୟନ୍ତ ରେକର୍ଡ କରିବ, ଏପରିକି ଏହା ବନ୍ଦ ଥିଲେ ମଧ୍ୟ।"
   },
@@ -2812,9 +2809,6 @@
   },
   "panels/application/BackgroundServiceView.ts | instanceId": {
     "message": "ଇନଷ୍ଟାନ୍ସ ID"
-  },
-  "panels/application/BackgroundServiceView.ts | learnMore": {
-    "message": "ଅଧିକ ଜାଣନ୍ତୁ"
   },
   "panels/application/BackgroundServiceView.ts | noMetadataForThisEvent": {
     "message": "ଏହି ଇଭେଣ୍ଟ ପାଇଁ କୌଣସି ମେଟାଡାଟା ନାହିଁ"
@@ -2947,9 +2941,6 @@
   },
   "panels/application/IndexedDBViews.ts | objectStores": {
     "message": "ଅବଜେକ୍ଟ ଷ୍ଟୋରଗୁଡ଼ିକ"
-  },
-  "panels/application/IndexedDBViews.ts | pleaseConfirmDeleteOfSDatabase": {
-    "message": "ଦୟାକରି \"{PH1}\" ଡାଟାବେସର ଡିଲିଟ୍ କରିବାକୁ ସୁନିଶ୍ଚିତ କରନ୍ତୁ।"
   },
   "panels/application/IndexedDBViews.ts | primaryKey": {
     "message": "ପ୍ରାଥମିକ କୀ"
@@ -3236,12 +3227,6 @@
   "panels/application/SharedStorageEventsView.ts | clickToDisplayBody": {
     "message": "ଇଭେଣ୍ଟ ପାରାମିଟରଗୁଡ଼ିକ ଦେଖାଇବା ପାଇଁ ଯେ କୌଣସି ସେୟାର କରାଯାଇଥିବା ଷ୍ଟୋରେଜ ଇଭେଣ୍ଟରେ କ୍ଲିକ କରନ୍ତୁ।"
   },
-  "panels/application/SharedStorageItemsView.ts | key": {
-    "message": "କୀ"
-  },
-  "panels/application/SharedStorageItemsView.ts | selectAValueToPreview": {
-    "message": "ପ୍ରିଭ୍ୟୁ କରିବାକୁ ଏକ ମୂଲ୍ୟ ଚୟନ କରନ୍ତୁ"
-  },
   "panels/application/SharedStorageItemsView.ts | sharedStorage": {
     "message": "ସେୟାର ହୋଇଥିବା ଷ୍ଟୋରେଜ"
   },
@@ -3257,17 +3242,8 @@
   "panels/application/SharedStorageItemsView.ts | sharedStorageItemEdited": {
     "message": "ଷ୍ଟୋରେଜ ଆଇଟମ ଏଡିଟ କରାଯାଇଛି।"
   },
-  "panels/application/SharedStorageItemsView.ts | sharedStorageItems": {
-    "message": "ସେୟାର କରାଯାଇଥିବା ଷ୍ଟୋରେଜ ଆଇଟମ"
-  },
   "panels/application/SharedStorageItemsView.ts | sharedStorageItemsCleared": {
     "message": "ସେୟାର କରାଯାଇଥିବା ଷ୍ଟୋରେଜ ଆଇଟମଗୁଡ଼ିକୁ ଖାଲି କରାଯାଇଛି"
-  },
-  "panels/application/SharedStorageItemsView.ts | sharedStorageNumberEntries": {
-    "message": "ଟେବୁଲରେ ଦେଖାଯାଇଥିବା ଏଣ୍ଟ୍ରିଗୁଡ଼ିକର ସଂଖ୍ୟା: {PH1}"
-  },
-  "panels/application/SharedStorageItemsView.ts | value": {
-    "message": "ମୂଲ୍ୟ"
   },
   "panels/application/SharedStorageListTreeElement.ts | sharedStorage": {
     "message": "ସେୟାର ହୋଇଥିବା ଷ୍ଟୋରେଜ"
@@ -4262,9 +4238,6 @@
   "panels/application/components/TrustTokensView.ts | issuer": {
     "message": "ପ୍ରଦାନକାରୀ"
   },
-  "panels/application/components/TrustTokensView.ts | noTrustTokensStored": {
-    "message": "ବର୍ତ୍ତମାନ କୌଣସି ପ୍ରାଇଭେଟ ଷ୍ଟେଟ ଟୋକନ ଷ୍ଟୋର କରାଯାଇନାହିଁ।"
-  },
   "panels/application/components/TrustTokensView.ts | storedTokenCount": {
     "message": "ଷ୍ଟୋର୍ କରାଯାଇଥିବା ଟୋକନ୍ ଗଣନା"
   },
@@ -4950,7 +4923,7 @@
     "message": "DOM ବ୍ରେକପଏଣ୍ଟ ତାଲିକା"
   },
   "panels/browser_debugger/DOMBreakpointsSidebarPane.ts | noBreakpoints": {
-    "message": "No DOM breakpoints set"
+    "message": "କୌଣସି DOM ବ୍ରେକପଏଣ୍ଟ ସେଟ କରାଯାଇନାହିଁ"
   },
   "panels/browser_debugger/DOMBreakpointsSidebarPane.ts | nodeRemoved": {
     "message": "ନୋଡ୍ କାଢ଼ି ଦିଆଯାଇଛି"
@@ -5067,19 +5040,19 @@
     "message": "{PH1} (ସୋର୍ସ ମ୍ୟାପରୁ)"
   },
   "panels/changes/ChangesView.ts | binaryDataDescription": {
-    "message": "The changes tab doesn't show binary data changes"
+    "message": "ପରିବର୍ତ୍ତନ ଟାବ ବାଇନେରୀ ଡାଟା ପରିବର୍ତ୍ତନଗୁଡ଼ିକୁ ଦେଖାଏ ନାହିଁ"
   },
   "panels/changes/ChangesView.ts | changesViewDescription": {
-    "message": "On this page you can track code changes made within DevTools."
+    "message": "ଏହି ପୃଷ୍ଠାରେ ଆପଣ DevTools ମଧ୍ୟରେ କରାଯାଇଥିବା କୋଡ ପରିବର୍ତ୍ତନଗୁଡ଼ିକୁ ଟ୍ରାକ କରିପାରିବେ।"
   },
   "panels/changes/ChangesView.ts | copy": {
     "message": "କପି କରନ୍ତୁ"
   },
   "panels/changes/ChangesView.ts | noChanges": {
-    "message": "No changes yet"
+    "message": "ଏପର୍ଯ୍ୟନ୍ତ କୌଣସି ପରିବର୍ତ୍ତନ କରାଯାଇନାହିଁ"
   },
   "panels/changes/ChangesView.ts | noTextualDiff": {
-    "message": "No textual diff available"
+    "message": "କୌଣସି ଟେକ୍ସଚୁଆଲ ପାର୍ଥକ୍ୟ ଉପଲବ୍ଧ ନାହିଁ"
   },
   "panels/changes/ChangesView.ts | sDeletions": {
     "message": "{n,plural, =1{#ଟି ଡିଲିଟ୍ କରିବା କାର୍ଯ୍ୟ (-)}other{#ଟି ଡିଲିଟ୍ କରିବା କାର୍ଯ୍ୟ (-)}}"
@@ -5298,7 +5271,7 @@
     "message": " M<XX>"
   },
   "panels/console/ConsoleViewMessage.ts | SeeIssueInCookieReport": {
-    "message": "Click to open privacy and security panel and show third-party cookie report"
+    "message": "ଗୋପନୀୟତା ଓ ସୁରକ୍ଷା ପେନେଲ ଖୋଲିବାକୁ ଏବଂ ତୃତୀୟ-ପକ୍ଷ କୁକୀ ରିପୋର୍ଟ ଦେଖାଇବାକୁ କ୍ଲିକ କରନ୍ତୁ"
   },
   "panels/console/ConsoleViewMessage.ts | assertionFailed": {
     "message": "ଆସେର୍ସନ୍ ବିଫଳ ହୋଇଛି: "
@@ -6492,7 +6465,7 @@
     "message": "ଆଇ ଡ୍ରପରକୁ ଟୋଗଲ କରନ୍ତୁ"
   },
   "panels/elements/elements-meta.ts | undo": {
-    "message": "ପୂର୍ବବତ୍ କରନ୍ତୁ"
+    "message": "ଅନଡୁ କରନ୍ତୁ"
   },
   "panels/elements/elements-meta.ts | wordWrap": {
     "message": "ୱାର୍ଡ ରାପ୍"
@@ -6747,7 +6720,7 @@
     "message": "ଷ୍ଟାକ୍ ଟ୍ରେସ୍:"
   },
   "panels/explain/components/ConsoleInsight.ts | timedOut": {
-    "message": "Generating a response took too long. Please try again."
+    "message": "ଏକ ଉତ୍ତର ଜେନେରେଟ କରିବା ପାଇଁ ବହୁତ ସମୟ ଲାଗୁଛି। ଦୟାକରି ପୁଣି ଚେଷ୍ଟା କରନ୍ତୁ।"
   },
   "panels/explain/components/ConsoleInsight.ts | turnOnInSettings": {
     "message": "କନସୋଲ ଚେତାବନୀ ଓ ତ୍ରୁଟିଗୁଡ଼ିକୁ ବୁଝିବା ଏବଂ ସେଗୁଡ଼ିକର ସମାଧାନ କରିବା ପାଇଁ AI ସହାୟତା ପାଇବାକୁ {PH1}କୁ ଚାଲୁ କରନ୍ତୁ।"
@@ -7911,7 +7884,7 @@
     "message": "{PH1} ଯୋଗ କରନ୍ତୁ"
   },
   "panels/mobile_throttling/ThrottlingManager.ts | calibrate": {
-    "message": "Calibrate…"
+    "message": "କାଲିବ୍ରେଟ କରନ୍ତୁ…"
   },
   "panels/mobile_throttling/ThrottlingManager.ts | cpuThrottling": {
     "message": "CPU ଥ୍ରଟଲିଂ"
@@ -7935,7 +7908,7 @@
     "message": "ଅଫଲାଇନ୍"
   },
   "panels/mobile_throttling/ThrottlingManager.ts | recalibrate": {
-    "message": "Recalibrate…"
+    "message": "ପୁଣି କାଲିବ୍ରେଟ କରନ୍ତୁ…"
   },
   "panels/mobile_throttling/ThrottlingManager.ts | recommendedThrottling": {
     "message": "{PH1} - ସୁପାରିଶ କରାଯାଇଛି"
@@ -8895,7 +8868,7 @@
     "message": "ଏହି ଅନୁରୋଧରେ କୌଣସି କୁକୀ ନାହିଁ।"
   },
   "panels/network/RequestInitiatorView.ts | noInitiator": {
-    "message": "No initiator data"
+    "message": "କୌଣସି ଇନିସିଏଟର ଡାଟା ନାହିଁ"
   },
   "panels/network/RequestInitiatorView.ts | requestCallStack": {
     "message": "କଲ୍ ଷ୍ଟାକ୍ ଅନୁରୋଧ"
@@ -8961,10 +8934,10 @@
     "message": "ଉତ୍ତର ଡାଟା ଲୋଡ୍ କରିବାରେ ବିଫଳ ହୋଇଛି"
   },
   "panels/network/RequestResponseView.ts | noPreview": {
-    "message": "Nothing to preview"
+    "message": "ପ୍ରିଭ୍ୟୁ କରିବାକୁ କିଛି ନାହିଁ"
   },
   "panels/network/RequestResponseView.ts | thisRequestHasNoResponseData": {
-    "message": "This request has no response data available"
+    "message": "ଏହି ଅନୁରୋଧରେ କୌଣସି ଉତ୍ତର ଡାଟା ଉପଲବ୍ଧ ନାହିଁ"
   },
   "panels/network/RequestTimingView.ts | cacheStorageCacheNameS": {
     "message": "କ୍ୟାଶ୍ ଷ୍ଟୋରେଜ୍ କ୍ୟାଶର ନାମ: {PH1}"
@@ -10139,9 +10112,6 @@
   "panels/profiler/ProfilesPanel.ts | cantLoadProfileWhileAnother": {
     "message": "ଅନ୍ୟ ଏକ ପ୍ରୋଫାଇଲ୍ ରେକର୍ଡ ହେଉଥିବା ବେଳେ ପ୍ରୋଫାଇଲ୍ ଲୋଡ୍ କରାଯାଇପାରିବ ନାହିଁ।"
   },
-  "panels/profiler/ProfilesPanel.ts | profileLoadingFailedS": {
-    "message": "ପ୍ରୋଫାଇଲ ଲୋଡ୍ ହେବା ବିଫଳ ହୋଇଛି: {PH1}।"
-  },
   "panels/profiler/ProfilesPanel.ts | profiles": {
     "message": "ପ୍ରୋଫାଇଲଗୁଡ଼ିକ"
   },
@@ -10251,7 +10221,7 @@
     "message": "ସେଭ୍ କରନ୍ତୁ"
   },
   "panels/protocol_monitor/ProtocolMonitor.ts | selectAMessageToView": {
-    "message": "Select a message to see its details"
+    "message": "ଏହାର ବିବରଣୀ ଦେଖିବା ପାଇଁ ଏକ ମେସେଜକୁ ଚୟନ କରନ୍ତୁ"
   },
   "panels/protocol_monitor/ProtocolMonitor.ts | selectTarget": {
     "message": "ଏକ ଟାର୍ଗେଟ ଚୟନ କରନ୍ତୁ"
@@ -10290,7 +10260,7 @@
     "message": "ରେକର୍ଡିଂ କିମ୍ବା ଚୟନିତ ଷ୍ଟେପକୁ କପି କରନ୍ତୁ"
   },
   "panels/recorder/RecorderController.ts | createRecording": {
-    "message": "Create recording"
+    "message": "ରେକର୍ଡିଂ ତିଆରି କରନ୍ତୁ"
   },
   "panels/recorder/RecorderController.ts | deleteRecording": {
     "message": "ରେକର୍ଡିଂ ଡିଲିଟ କରନ୍ତୁ"
@@ -10308,13 +10278,13 @@
     "message": "ଏକ୍ସଟେନସନଗୁଡ଼ିକ ପାଆନ୍ତୁ…"
   },
   "panels/recorder/RecorderController.ts | header": {
-    "message": "Nothing recorded yet"
+    "message": "ଏପର୍ଯ୍ୟନ୍ତ କିଛି ରେକର୍ଡ କରାଯାଇନାହିଁ"
   },
   "panels/recorder/RecorderController.ts | importRecording": {
     "message": "ରେକର୍ଡିଂକୁ ଇମ୍ପୋର୍ଟ କରନ୍ତୁ"
   },
   "panels/recorder/RecorderController.ts | learnMore": {
-    "message": "Learn more"
+    "message": "ଅଧିକ ଜାଣନ୍ତୁ"
   },
   "panels/recorder/RecorderController.ts | noRecordings": {
     "message": "(କୌଣସି ରେକର୍ଡିଂ ନାହିଁ)"
@@ -10323,7 +10293,7 @@
     "message": "ରେକର୍ଡିଂଗୁଡ଼ିକ"
   },
   "panels/recorder/RecorderController.ts | recordingDescription": {
-    "message": "Use recordings to create automated end-to-end tests or performance traces."
+    "message": "ସ୍ୱତଃ ଏଣ୍ଡ-ଟୁ-ଏଣ୍ଡ ଟେଷ୍ଟ କିମ୍ବା ପରଫରମାନ୍ସ ଟ୍ରେସ ତିଆରି କରିବାକୁ ରେକର୍ଡିଂଗୁଡ଼ିକୁ ବ୍ୟବହାର କରନ୍ତୁ।"
   },
   "panels/recorder/RecorderController.ts | replayRecording": {
     "message": "ରେକର୍ଡିଂକୁ ରିପ୍ଲେ କରନ୍ତୁ"
@@ -11496,7 +11466,7 @@
     "message": "ବର୍ଣ୍ଣନାଗୁଡ଼ିକ ଜେନେରେଟ କରିବା ପାଇଁ କନସୋଲ ମେସେଜ, ସମ୍ବନ୍ଧିତ ଷ୍ଟାକ ଟ୍ରେସ, ସମ୍ବନ୍ଧିତ ସୋର୍ସ କୋଡ ଏବଂ ସମ୍ବନ୍ଧିତ ନେଟୱାର୍କ ହେଡରଗୁଡ଼ିକୁ Googleକୁ ପଠାଯାଏ। ଏହି ଫିଚରକୁ ଉନ୍ନତ କରିବା ପାଇଁ ଏହି ଡାଟାକୁ ମାନବ ସମୀକ୍ଷକମାନଙ୍କ ଦ୍ୱାରା ଦେଖାଯାଇପାରେ।"
   },
   "panels/settings/AISettingsTab.ts | consoleInsightsSendsDataNoLogging": {
-    "message": "The console message, associated stack trace, related source code, and the associated network headers are sent to Google to generate explanations. This data will not be used to improve Google’s AI models."
+    "message": "ବର୍ଣ୍ଣନାଗୁଡ଼ିକ ଜେନେରେଟ କରିବା ପାଇଁ କନସୋଲ ମେସେଜ, ସମ୍ବନ୍ଧିତ ଷ୍ଟାକ ଟ୍ରେସ, ସମ୍ବନ୍ଧିତ ସୋର୍ସ କୋଡ ଏବଂ ସମ୍ବନ୍ଧିତ ନେଟୱାର୍କ ହେଡରଗୁଡ଼ିକୁ Googleକୁ ପଠାଯାଏ। Googleର AI ମଡେଲଗୁଡ଼ିକୁ ଉନ୍ନତ କରିବା ପାଇଁ ଏହି ଡାଟାକୁ ବ୍ୟବହାର କରାଯିବ ନାହିଁ।"
   },
   "panels/settings/AISettingsTab.ts | dataCollection": {
     "message": "ଆପଣଙ୍କ ଅଞ୍ଚଳ ଉପରେ ନିର୍ଭର କରି Google ଡାଟା ସଂଗ୍ରହ କରିବାରୁ ଦୂରେଇ ରହିପାରେ"
@@ -11532,7 +11502,7 @@
     "message": "ଯାଞ୍ଚ କରାଯାଇଥିବା ପୃଷ୍ଠା Web API, ନେଟୱାର୍କ ଅନୁରୋଧ, ଫାଇଲ ଏବଂ ପରଫରମାନ୍ସ ଟ୍ରେସ ମାଧ୍ୟମରେ ଆକ୍ସେସ କରିପାରୁଥିବା ଯେ କୌଣସି ଡାଟାକୁ ଏକ୍ସପ୍ଲାନେସନ ତିଆରି କରିବାକୁ Googleକୁ ପଠାଯାଏ। ଏହି ଫିଚରକୁ ଉନ୍ନତ କରିବା ପାଇଁ ଏହି ଡାଟାକୁ ମାନବ ସମୀକ୍ଷକମାନଙ୍କ ଦ୍ୱାରା ଦେଖାଯାଇପାରେ। ବ୍ୟକ୍ତିଗତ କିମ୍ବା ସମ୍ବେଦନଶୀଳ ସୂଚନା ଥିବା ପୃଷ୍ଠାଗୁଡ଼ିକୁ ବ୍ୟବହାର କରନ୍ତୁ ନାହିଁ।"
   },
   "panels/settings/AISettingsTab.ts | freestylerSendsDataNoLogging": {
-    "message": "Any data the inspected page can access via Web APIs, network requests, files, and performance traces are sent to Google to generate explanations. This data will not be used to improve Google’s AI models."
+    "message": "ଯାଞ୍ଚ କରାଯାଇଥିବା ପୃଷ୍ଠା Web API, ନେଟୱାର୍କ ଅନୁରୋଧ, ଫାଇଲ ଏବଂ ପରଫରମାନ୍ସ ଟ୍ରେସ ମାଧ୍ୟମରେ ଆକ୍ସେସ କରିପାରୁଥିବା ଯେ କୌଣସି ଡାଟାକୁ ଏକ୍ସପ୍ଲାନେସନ ଜେନେରେଟ କରିବାକୁ Googleକୁ ପଠାଯାଏ। Googleର AI ମଡେଲଗୁଡ଼ିକୁ ଉନ୍ନତ କରିବା ପାଇଁ ଏହି ଡାଟାକୁ ବ୍ୟବହାର କରାଯିବ ନାହିଁ।"
   },
   "panels/settings/AISettingsTab.ts | helpUnderstandConsole": {
     "message": "କନସୋଲ ଚେତାବନୀ ଏବଂ ତ୍ରୁଟିଗୁଡ଼ିକୁ ବୁଝିବା ଏବଂ ଠିକ କରିବାରେ ଆପଣଙ୍କୁ ସାହାଯ୍ୟ କରେ"
@@ -12259,15 +12229,6 @@
   },
   "panels/sources/NavigatorView.ts | actionCannotBeUndone": {
     "message": "ଏହି କାର୍ଯ୍ୟକୁ ପୂର୍ବବତ କରାଯାଇପାରିବ ନାହିଁ।"
-  },
-  "panels/sources/NavigatorView.ts | areYouSureYouWantToDeleteFolder": {
-    "message": "ଆପଣ ଏହି ଫୋଲ୍ଡର ଏବଂ ଏହାର ବିଷୟବସ୍ତୁକୁ ଡିଲିଟ କରିବାକୁ ଚାହୁଁଥିବା ନିଶ୍ଚିତ?"
-  },
-  "panels/sources/NavigatorView.ts | areYouSureYouWantToDeleteThis": {
-    "message": "ଏହି ଫାଇଲକୁ ଆପଣ ଡିଲିଟ୍ କରିବାକୁ ଚାହୁଁଥିବା ନିଶ୍ଚିତ କି?"
-  },
-  "panels/sources/NavigatorView.ts | areYouSureYouWantToExcludeThis": {
-    "message": "ଆପଣ ଏହି ଫୋଲ୍ଡରକୁ ବାଦ୍ ଦେବାକୁ ଚାହୁଁଥିବା ନିଶ୍ଚିତ କି?"
   },
   "panels/sources/NavigatorView.ts | areYouSureYouWantToRemoveThis": {
     "message": "Workspaceରୁ ‘{PH1}’କୁ କାଢ଼ି ଦେବେ?"
@@ -13041,7 +13002,7 @@
     "message": "ଏହି ଟ୍ରାକରେ ସର୍ଭର-ଟାଇମିଂ ନେଟୱାର୍କର ଉତ୍ତର ହେଡରରୁ ନିଆଯାଇଥିବା ସମୟ ଅନ୍ତର୍ଭୁକ୍ତ। ସେଗୁଡ଼ିକର ଆପେକ୍ଷିକ ଆରମ୍ଭ ସମୟ କେବଳ ଆକଳନ କରାଯାଏ ଏବଂ ସେଗୁଡ଼ିକ ସଠିକ ହୋଇନପାରେ।"
   },
   "panels/timeline/ThirdPartyTreeView.ts | firstOrThirdPartyName": {
-    "message": "1st / 3rd party"
+    "message": "1ମ / 3ୟ ପକ୍ଷ"
   },
   "panels/timeline/ThirdPartyTreeView.ts | selfTime": {
     "message": "ସେଲ୍ଫ ସମୟ"
@@ -13254,7 +13215,7 @@
     "message": "ବର୍ଣ୍ଣନା"
   },
   "panels/timeline/TimelinePanel.ts | dimThirdParties": {
-    "message": "Dim 3rd parties"
+    "message": "3ୟ ପକ୍ଷ ଚେକବକ୍ସକୁ ଡିମ କରନ୍ତୁ"
   },
   "panels/timeline/TimelinePanel.ts | disableJavascriptSamples": {
     "message": "JavaScript ସାମ୍ପଲଗୁଡ଼ିକୁ ଅକ୍ଷମ କରନ୍ତୁ"
@@ -13374,7 +13335,7 @@
     "message": "ଟାଇମଲାଇନ୍ ବନ୍ଦ କରାଯାଉଛି…"
   },
   "panels/timeline/TimelinePanel.ts | thirdPartiesByThirdPartyWeb": {
-    "message": "3rd parties classified by third-party-web"
+    "message": "ତୃତୀୟ-ପକ୍ଷ-ୱେବ ଦ୍ଵାରା ବର୍ଗୀକୃତ 3ୟ ପକ୍ଷ"
   },
   "panels/timeline/TimelinePanel.ts | time": {
     "message": "ସମୟ"
@@ -13653,7 +13614,7 @@
     "message": "{PH1}"
   },
   "panels/timeline/TimelineUIUtils.ts | entity": {
-    "message": "Third party"
+    "message": "ତୃତୀୟ ପକ୍ଷ"
   },
   "panels/timeline/TimelineUIUtils.ts | entryIsHidden": {
     "message": "(ଏଣ୍ଟ୍ରି ଲୁକ୍କାୟିତ ଅଛି)"
@@ -13817,9 +13778,6 @@
   "panels/timeline/TimelineUIUtils.ts | selectorStatsTitle": {
     "message": "ଚୟନକାରୀ ପରିସଂଖ୍ୟାନ"
   },
-  "panels/timeline/TimelineUIUtils.ts | selfTime": {
-    "message": "ସେଲ୍ଫ ସମୟ"
-  },
   "panels/timeline/TimelineUIUtils.ts | size": {
     "message": "ଆକାର"
   },
@@ -13833,7 +13791,7 @@
     "message": "ଷ୍ଟାଇଲସିଟ୍ URL"
   },
   "panels/timeline/TimelineUIUtils.ts | thirdPartyTable": {
-    "message": "1st / 3rd party table"
+    "message": "1ମ / 3ୟ ପକ୍ଷ"
   },
   "panels/timeline/TimelineUIUtils.ts | timeSpentInRendering": {
     "message": "ରେଣ୍ଡରିଂରେ ଅତିବାହିତ କରାଯାଇଥିବା ସମୟ"
@@ -13849,9 +13807,6 @@
   },
   "panels/timeline/TimelineUIUtils.ts | timestamp": {
     "message": "ଟାଇମଷ୍ଟାମ୍ପ୍"
-  },
-  "panels/timeline/TimelineUIUtils.ts | totalTime": {
-    "message": "ମୋଟ ସମୟ"
   },
   "panels/timeline/TimelineUIUtils.ts | traceEvent": {
     "message": "ଇଭେଣ୍ଟ ଟ୍ରେସ କରନ୍ତୁ"
@@ -13920,7 +13875,7 @@
     "message": "ଚାଇଲ୍ଡ ବ୍ରେଡକ୍ରମ୍ବକୁ କାଢ଼ି ଦିଅନ୍ତୁ"
   },
   "panels/timeline/components/CPUThrottlingSelector.ts | calibrate": {
-    "message": "Calibrate…"
+    "message": "କାଲିବ୍ରେଟ କରନ୍ତୁ…"
   },
   "panels/timeline/components/CPUThrottlingSelector.ts | cpu": {
     "message": "CPU: {PH1}"
@@ -13932,7 +13887,7 @@
     "message": "କାଲିବ୍ରେଟ ହୋଇଥିବା ପ୍ରିସେଟ"
   },
   "panels/timeline/components/CPUThrottlingSelector.ts | recalibrate": {
-    "message": "Recalibrate…"
+    "message": "ପୁଣି କାଲିବ୍ରେଟ କରନ୍ତୁ…"
   },
   "panels/timeline/components/CPUThrottlingSelector.ts | recommendedThrottling": {
     "message": "{PH1} - ସୁପାରିଶ କରାଯାଇଛି"
@@ -14424,7 +14379,7 @@
     "message": "ଏନକୋଡ କରାଯାଇଥିବା ଡାଟା"
   },
   "panels/timeline/components/NetworkRequestDetails.ts | entity": {
-    "message": "Third party"
+    "message": "ତୃତୀୟ ପକ୍ଷ"
   },
   "panels/timeline/components/NetworkRequestDetails.ts | fromCache": {
     "message": "କେଶେରୁ"
@@ -14568,16 +14523,16 @@
     "message": "ଇନସାଇଟଗୁଡ଼ିକ ହେଉଛି ଏକ ପରୀକ୍ଷାମୂଳକ ଫିଚର। ଆପଣଙ୍କ ମତାମତ ଆମକୁ ଏହା ଉନ୍ନତ କରିବାରେ ସାହାଯ୍ୟ କରିବ।"
   },
   "panels/timeline/components/SidebarSingleInsightSet.ts | dismissTitle": {
-    "message": "Dismiss"
+    "message": "ଖାରଜ କରନ୍ତୁ"
   },
   "panels/timeline/components/SidebarSingleInsightSet.ts | fieldMismatchNotice": {
-    "message": "There are many reasons why local and field metrics [may not match](https://web.dev/articles/lab-and-field-data-differences). Adjust [throttling settings and device emulation](https://developer.chrome.com/docs/devtools/device-mode) to analyze traces more similar to the average user's environment."
+    "message": "ସ୍ଥାନୀୟ ଏବଂ ଫିଲ୍ଡ ମେଟ୍ରିକ୍ସ କାହିଁକି [ମେଳ ହେଉନାହିଁ](https://web.dev/articles/lab-and-field-data-differences) ତାହାର ଅନେକ କାରଣ ଅଛି। ହାରାହାରି ୟୁଜରଙ୍କ ପରିବେଶ ସହିତ ସମାନ ଟ୍ରେସ ବିଶ୍ଳେଷଣ କରିବାକୁ [ଥ୍ରଟଲିଂ ସେଟିଂସ ଏବଂ ଡିଭାଇସ ଏମ୍ୟୁଲେସନ](https://developer.chrome.com/docs/devtools/device-mode)କୁ ଆଡଜଷ୍ଟ କରନ୍ତୁ।"
   },
   "panels/timeline/components/SidebarSingleInsightSet.ts | fieldMismatchTitle": {
-    "message": "Field & local metrics mismatch"
+    "message": "ଫିଲ୍ଡ ଏବଂ ସ୍ଥାନୀୟ ମେଟ୍ରିକ୍ସ ଅମେଳ ଅଛି"
   },
   "panels/timeline/components/SidebarSingleInsightSet.ts | fieldScoreLabel": {
-    "message": "Field ({PH1})"
+    "message": "ଫିଲ୍ଡ ({PH1})"
   },
   "panels/timeline/components/SidebarSingleInsightSet.ts | metricScore": {
     "message": "{PH1}: {PH2} {PH3} ସ୍କୋର"
@@ -15885,7 +15840,7 @@
     "message": "ଏହି କ୍ରମରେ ସଜାନ୍ତୁ"
   },
   "ui/legacy/components/data_grid/DataGrid.ts | sortableColumn": {
-    "message": "Sortable column. Press enter to apply sorting filter"
+    "message": "ସର୍ଟ କରିହେଉଥିବା ସ୍ତମ୍ଭ। ସର୍ଟିଂ ଫିଲ୍ଟର ଲାଗୁ କରିବାକୁ ଏଣ୍ଟର ଦବାନ୍ତୁ"
   },
   "ui/legacy/components/data_grid/ShowMoreDataGridNode.ts | showAllD": {
     "message": "ସବୁ {PH1} ଦେଖାନ୍ତୁ"
@@ -16221,10 +16176,10 @@
     "message": "ଖୋଜନ୍ତୁ"
   },
   "ui/legacy/components/source_frame/PreviewFactory.ts | failedToLoadData": {
-    "message": "Failed to load data"
+    "message": "ଡାଟା ଲୋଡ ହେବାରେ ବିଫଳ ହୋଇଛି"
   },
   "ui/legacy/components/source_frame/PreviewFactory.ts | nothingToPreview": {
-    "message": "Nothing to preview"
+    "message": "ପ୍ରିଭ୍ୟୁ କରିବାକୁ କିଛି ନାହିଁ"
   },
   "ui/legacy/components/source_frame/ResourceSourceFrame.ts | find": {
     "message": "ଖୋଜନ୍ତୁ"
