--- a/front_end/core/i18n/locales/ru.json
+++ b/front_end/core/i18n/locales/ru.json
@@ -105,7 +105,7 @@
     "message": "Панель \"Сеть\""
   },
   "core/common/Revealer.ts | securityPanel": {
-    "message": "Security panel"
+    "message": "Панель безопасности"
   },
   "core/common/Revealer.ts | sourcesPanel": {
     "message": "Панель \"Источники\""
@@ -2798,9 +2798,6 @@
   "panels/application/BackgroundServiceView.ts | clear": {
     "message": "Сбросить"
   },
-  "panels/application/BackgroundServiceView.ts | clickTheRecordButtonSOrHitSTo": {
-    "message": "Чтобы начать запись, нажмите кнопку \"{PH1}\" или {PH2}."
-  },
   "panels/application/BackgroundServiceView.ts | devtoolsWillRecordAllSActivity": {
     "message": "Все объекты activity {PH1} за последние 3 дня записываются, даже если инструменты разработчика закрыты."
   },
@@ -2812,9 +2809,6 @@
   },
   "panels/application/BackgroundServiceView.ts | instanceId": {
     "message": "Идентификатор экземпляра"
-  },
-  "panels/application/BackgroundServiceView.ts | learnMore": {
-    "message": "Подробнее…"
   },
   "panels/application/BackgroundServiceView.ts | noMetadataForThisEvent": {
     "message": "Для этого события нет метаданных."
@@ -2947,9 +2941,6 @@
   },
   "panels/application/IndexedDBViews.ts | objectStores": {
     "message": "Хранилища объектов"
-  },
-  "panels/application/IndexedDBViews.ts | pleaseConfirmDeleteOfSDatabase": {
-    "message": "Подтвердите удаление базы данных \"{PH1}\"."
   },
   "panels/application/IndexedDBViews.ts | primaryKey": {
     "message": "Первичный ключ"
@@ -3236,12 +3227,6 @@
   "panels/application/SharedStorageEventsView.ts | clickToDisplayBody": {
     "message": "Чтобы посмотреть параметры события, нажмите на любое событие общего хранилища."
   },
-  "panels/application/SharedStorageItemsView.ts | key": {
-    "message": "Ключ"
-  },
-  "panels/application/SharedStorageItemsView.ts | selectAValueToPreview": {
-    "message": "Выберите значение для просмотра"
-  },
   "panels/application/SharedStorageItemsView.ts | sharedStorage": {
     "message": "Общее хранилище"
   },
@@ -3257,17 +3242,8 @@
   "panels/application/SharedStorageItemsView.ts | sharedStorageItemEdited": {
     "message": "Элемент хранилища был изменен."
   },
-  "panels/application/SharedStorageItemsView.ts | sharedStorageItems": {
-    "message": "Элементы общего хранилища"
-  },
   "panels/application/SharedStorageItemsView.ts | sharedStorageItemsCleared": {
     "message": "Все элементы общего хранилища удалены"
-  },
-  "panels/application/SharedStorageItemsView.ts | sharedStorageNumberEntries": {
-    "message": "Записей в таблице: {PH1}"
-  },
-  "panels/application/SharedStorageItemsView.ts | value": {
-    "message": "Значение"
   },
   "panels/application/SharedStorageListTreeElement.ts | sharedStorage": {
     "message": "Общее хранилище"
@@ -4262,9 +4238,6 @@
   "panels/application/components/TrustTokensView.ts | issuer": {
     "message": "Издатель"
   },
-  "panels/application/components/TrustTokensView.ts | noTrustTokensStored": {
-    "message": "Нет сохраненных личных токенов состояния."
-  },
   "panels/application/components/TrustTokensView.ts | storedTokenCount": {
     "message": "Число сохраненных токенов"
   },
@@ -4950,7 +4923,7 @@
     "message": "Список точек останова DOM"
   },
   "panels/browser_debugger/DOMBreakpointsSidebarPane.ts | noBreakpoints": {
-    "message": "No DOM breakpoints set"
+    "message": "Точек останова DOM не установлено"
   },
   "panels/browser_debugger/DOMBreakpointsSidebarPane.ts | nodeRemoved": {
     "message": "Узел удален"
@@ -5067,19 +5040,19 @@
     "message": "{PH1} (из карты исходного кода)"
   },
   "panels/changes/ChangesView.ts | binaryDataDescription": {
-    "message": "The changes tab doesn't show binary data changes"
+    "message": "На вкладке \"Изменения\" не показываются изменения в данных исполняемого файла."
   },
   "panels/changes/ChangesView.ts | changesViewDescription": {
-    "message": "On this page you can track code changes made within DevTools."
+    "message": "На этой странице вы можете отслеживать изменения, внесенные в код с помощью инструментов разработчика."
   },
   "panels/changes/ChangesView.ts | copy": {
     "message": "Копировать"
   },
   "panels/changes/ChangesView.ts | noChanges": {
-    "message": "No changes yet"
+    "message": "Изменений пока нет."
   },
   "panels/changes/ChangesView.ts | noTextualDiff": {
-    "message": "No textual diff available"
+    "message": "Текстовых различий нет."
   },
   "panels/changes/ChangesView.ts | sDeletions": {
     "message": "{n,plural, =1{# удаление (-)}one{# удаление (-)}few{# удаления (-)}many{# удалений (-)}other{# удаления (-)}}"
@@ -5298,7 +5271,7 @@
     "message": " M<XX>"
   },
   "panels/console/ConsoleViewMessage.ts | SeeIssueInCookieReport": {
-    "message": "Click to open privacy and security panel and show third-party cookie report"
+    "message": "Нажмите, чтобы открыть панель безопасности и конфиденциальности и посмотреть отчет о сторонних файлах cookie"
   },
   "panels/console/ConsoleViewMessage.ts | assertionFailed": {
     "message": "Ошибка подтверждения: "
@@ -6747,7 +6720,7 @@
     "message": "Трассировка стека"
   },
   "panels/explain/components/ConsoleInsight.ts | timedOut": {
-    "message": "Generating a response took too long. Please try again."
+    "message": "Генерация ответа заняла слишком много времени. Повторите попытку."
   },
   "panels/explain/components/ConsoleInsight.ts | turnOnInSettings": {
     "message": "Включите функцию {PH1}, чтобы получать помощь ИИ при анализе и устранении предупреждений и ошибок консоли."
@@ -7911,7 +7884,7 @@
     "message": "Добавить {PH1}"
   },
   "panels/mobile_throttling/ThrottlingManager.ts | calibrate": {
-    "message": "Calibrate…"
+    "message": "Начните калибровку."
   },
   "panels/mobile_throttling/ThrottlingManager.ts | cpuThrottling": {
     "message": "Ограничение производительности ЦП"
@@ -7935,7 +7908,7 @@
     "message": "Офлайн"
   },
   "panels/mobile_throttling/ThrottlingManager.ts | recalibrate": {
-    "message": "Recalibrate…"
+    "message": "Повторите калибровку."
   },
   "panels/mobile_throttling/ThrottlingManager.ts | recommendedThrottling": {
     "message": "{PH1} – рекомендуется"
@@ -8895,7 +8868,7 @@
     "message": "У этого запроса нет файлов cookie."
   },
   "panels/network/RequestInitiatorView.ts | noInitiator": {
-    "message": "No initiator data"
+    "message": "Данных об инициаторе нет."
   },
   "panels/network/RequestInitiatorView.ts | requestCallStack": {
     "message": "Запросить стек вызовов"
@@ -8961,10 +8934,10 @@
     "message": "Не удалось загрузить данные ответа"
   },
   "panels/network/RequestResponseView.ts | noPreview": {
-    "message": "Nothing to preview"
+    "message": "Нет объектов для предварительного просмотра."
   },
   "panels/network/RequestResponseView.ts | thisRequestHasNoResponseData": {
-    "message": "This request has no response data available"
+    "message": "По этому запросу нет данных ответа."
   },
   "panels/network/RequestTimingView.ts | cacheStorageCacheNameS": {
     "message": "Имя хранилища кеша: {PH1}"
@@ -10139,9 +10112,6 @@
   "panels/profiler/ProfilesPanel.ts | cantLoadProfileWhileAnother": {
     "message": "Не удалось загрузить профиль. Идет запись другого профиля."
   },
-  "panels/profiler/ProfilesPanel.ts | profileLoadingFailedS": {
-    "message": "Не удалось загрузить профиль: {PH1}."
-  },
   "panels/profiler/ProfilesPanel.ts | profiles": {
     "message": "Профили"
   },
@@ -10251,7 +10221,7 @@
     "message": "Сохранить"
   },
   "panels/protocol_monitor/ProtocolMonitor.ts | selectAMessageToView": {
-    "message": "Select a message to see its details"
+    "message": "Чтобы посмотреть сведения о сообщении, выберите его."
   },
   "panels/protocol_monitor/ProtocolMonitor.ts | selectTarget": {
     "message": "Выбор цели"
@@ -10290,7 +10260,7 @@
     "message": "Копировать запись или выбранный шаг"
   },
   "panels/recorder/RecorderController.ts | createRecording": {
-    "message": "Create recording"
+    "message": "Создать запись"
   },
   "panels/recorder/RecorderController.ts | deleteRecording": {
     "message": "Удалить запись"
@@ -10308,13 +10278,13 @@
     "message": "Показать расширения"
   },
   "panels/recorder/RecorderController.ts | header": {
-    "message": "Nothing recorded yet"
+    "message": "Записей пока нет"
   },
   "panels/recorder/RecorderController.ts | importRecording": {
     "message": "Импортировать запись"
   },
   "panels/recorder/RecorderController.ts | learnMore": {
-    "message": "Learn more"
+    "message": "Подробнее…"
   },
   "panels/recorder/RecorderController.ts | noRecordings": {
     "message": "Записей нет"
@@ -10323,7 +10293,7 @@
     "message": "запис."
   },
   "panels/recorder/RecorderController.ts | recordingDescription": {
-    "message": "Use recordings to create automated end-to-end tests or performance traces."
+    "message": "С помощью записей можно создавать автоматические сквозные тесты и трассировки производительности."
   },
   "panels/recorder/RecorderController.ts | replayRecording": {
     "message": "Воспроизвести запись"
@@ -11496,7 +11466,7 @@
     "message": "Сообщение консоли и связанные с ним трассировка стека, исходный код и сетевые заголовки отправляются в Google для генерации интерпретаций. Наши специалисты могут просматривать такие данные, чтобы улучшать эту функцию."
   },
   "panels/settings/AISettingsTab.ts | consoleInsightsSendsDataNoLogging": {
-    "message": "The console message, associated stack trace, related source code, and the associated network headers are sent to Google to generate explanations. This data will not be used to improve Google’s AI models."
+    "message": "Сообщение консоли и связанные с ним данные (трассировка стека, исходный код и сетевые заголовки) передаются в Google для генерации интерпретаций. Google не использует эти данные для улучшения ИИ-моделей."
   },
   "panels/settings/AISettingsTab.ts | dataCollection": {
     "message": "Google может не собирать данные в некоторых регионах."
@@ -11532,7 +11502,7 @@
     "message": "Любые данные, к которым проверяемая страница обращается через веб-API, сетевые запросы, файлы и трассировку производительности, отправляются в Google для генерации объяснений. Наши специалисты могут просматривать такие данные, чтобы улучшать эту функцию. Не указывайте на страницах личную и конфиденциальную информацию."
   },
   "panels/settings/AISettingsTab.ts | freestylerSendsDataNoLogging": {
-    "message": "Any data the inspected page can access via Web APIs, network requests, files, and performance traces are sent to Google to generate explanations. This data will not be used to improve Google’s AI models."
+    "message": "Любые данные, к которым проверяемая страница обращается через Web API (сетевые запросы, файлы и трассировки производительности), передаются в Google для генерации интерпретаций. Google не использует эти данные для улучшения ИИ-моделей."
   },
   "panels/settings/AISettingsTab.ts | helpUnderstandConsole": {
     "message": "Эта функция поможет вам понять консольные предупреждения и ошибки, а также устранить проблемы."
@@ -12259,15 +12229,6 @@
   },
   "panels/sources/NavigatorView.ts | actionCannotBeUndone": {
     "message": "Это действие нельзя отменить."
-  },
-  "panels/sources/NavigatorView.ts | areYouSureYouWantToDeleteFolder": {
-    "message": "Удалить эту папку и ее содержимое?"
-  },
-  "panels/sources/NavigatorView.ts | areYouSureYouWantToDeleteThis": {
-    "message": "Удалить этот файл?"
-  },
-  "panels/sources/NavigatorView.ts | areYouSureYouWantToExcludeThis": {
-    "message": "Исключить эту папку?"
   },
   "panels/sources/NavigatorView.ts | areYouSureYouWantToRemoveThis": {
     "message": "Удалить папку \"{PH1}\" из рабочей области?"
@@ -13041,7 +13002,7 @@
     "message": "Здесь показаны временные метки, полученные из заголовков сетевых ответов Server-Timing. Время начала для каждой из них может быть неточным."
   },
   "panels/timeline/ThirdPartyTreeView.ts | firstOrThirdPartyName": {
-    "message": "1st / 3rd party"
+    "message": "Собственные или сторонние объекты"
   },
   "panels/timeline/ThirdPartyTreeView.ts | selfTime": {
     "message": "Собственное время"
@@ -13254,7 +13215,7 @@
     "message": "Описание"
   },
   "panels/timeline/TimelinePanel.ts | dimThirdParties": {
-    "message": "Dim 3rd parties"
+    "message": "Уменьшить видимость стороннего контента"
   },
   "panels/timeline/TimelinePanel.ts | disableJavascriptSamples": {
     "message": "Отключить образцы JavaScript"
@@ -13374,7 +13335,7 @@
     "message": "Остановка хронологии…"
   },
   "panels/timeline/TimelinePanel.ts | thirdPartiesByThirdPartyWeb": {
-    "message": "3rd parties classified by third-party-web"
+    "message": "Сторонний контент классифицируется сторонними сайтами."
   },
   "panels/timeline/TimelinePanel.ts | time": {
     "message": "Время"
@@ -13653,7 +13614,7 @@
     "message": "{PH1}"
   },
   "panels/timeline/TimelineUIUtils.ts | entity": {
-    "message": "Third party"
+    "message": "Сторонний объект"
   },
   "panels/timeline/TimelineUIUtils.ts | entryIsHidden": {
     "message": "(запись скрыта)"
@@ -13817,9 +13778,6 @@
   "panels/timeline/TimelineUIUtils.ts | selectorStatsTitle": {
     "message": "Статистика селекторов"
   },
-  "panels/timeline/TimelineUIUtils.ts | selfTime": {
-    "message": "Собственное время"
-  },
   "panels/timeline/TimelineUIUtils.ts | size": {
     "message": "Размер"
   },
@@ -13833,7 +13791,7 @@
     "message": "URL таблицы стилей"
   },
   "panels/timeline/TimelineUIUtils.ts | thirdPartyTable": {
-    "message": "1st / 3rd party table"
+    "message": "Собственная или сторонняя таблица"
   },
   "panels/timeline/TimelineUIUtils.ts | timeSpentInRendering": {
     "message": "Время отрисовки"
@@ -13849,9 +13807,6 @@
   },
   "panels/timeline/TimelineUIUtils.ts | timestamp": {
     "message": "Временная метка"
-  },
-  "panels/timeline/TimelineUIUtils.ts | totalTime": {
-    "message": "Общее время"
   },
   "panels/timeline/TimelineUIUtils.ts | traceEvent": {
     "message": "Событие трассировки"
@@ -13920,7 +13875,7 @@
     "message": "Удалить дочерние строки навигации"
   },
   "panels/timeline/components/CPUThrottlingSelector.ts | calibrate": {
-    "message": "Calibrate…"
+    "message": "Начните калибровку."
   },
   "panels/timeline/components/CPUThrottlingSelector.ts | cpu": {
     "message": "ЦП: {PH1}"
@@ -13932,7 +13887,7 @@
     "message": "Откалиброванные наборы настроек"
   },
   "panels/timeline/components/CPUThrottlingSelector.ts | recalibrate": {
-    "message": "Recalibrate…"
+    "message": "Повторите калибровку."
   },
   "panels/timeline/components/CPUThrottlingSelector.ts | recommendedThrottling": {
     "message": "{PH1} – рекомендуется"
@@ -14424,7 +14379,7 @@
     "message": "Данные в кодировке"
   },
   "panels/timeline/components/NetworkRequestDetails.ts | entity": {
-    "message": "Third party"
+    "message": "Сторонний объект"
   },
   "panels/timeline/components/NetworkRequestDetails.ts | fromCache": {
     "message": "Из кеша"
@@ -14568,16 +14523,16 @@
     "message": "Подсказки – это экспериментальная функция. Ваши отзывы помогут нам улучшить ее."
   },
   "panels/timeline/components/SidebarSingleInsightSet.ts | dismissTitle": {
-    "message": "Dismiss"
+    "message": "Закрыть"
   },
   "panels/timeline/components/SidebarSingleInsightSet.ts | fieldMismatchNotice": {
-    "message": "There are many reasons why local and field metrics [may not match](https://web.dev/articles/lab-and-field-data-differences). Adjust [throttling settings and device emulation](https://developer.chrome.com/docs/devtools/device-mode) to analyze traces more similar to the average user's environment."
+    "message": "Локальные и реальные показатели [могут не совпадать](https://web.dev/articles/lab-and-field-data-differences) по различным причинам. Чтобы приблизить трассировки, которые вы анализируете, к показателям среднестатистической среды, скорректируйте [настройки ограничений и эмуляцию устройства](https://developer.chrome.com/docs/devtools/device-mode)."
   },
   "panels/timeline/components/SidebarSingleInsightSet.ts | fieldMismatchTitle": {
-    "message": "Field & local metrics mismatch"
+    "message": "Реальные и локальные показатели не совпадают"
   },
   "panels/timeline/components/SidebarSingleInsightSet.ts | fieldScoreLabel": {
-    "message": "Field ({PH1})"
+    "message": "Поле ({PH1})"
   },
   "panels/timeline/components/SidebarSingleInsightSet.ts | metricScore": {
     "message": "{PH1}: {PH2}, оценка – {PH3}"
@@ -15885,7 +15840,7 @@
     "message": "Сортировать"
   },
   "ui/legacy/components/data_grid/DataGrid.ts | sortableColumn": {
-    "message": "Sortable column. Press enter to apply sorting filter"
+    "message": "Сортируемый столбец Чтобы применить фильтр для сортировки, нажмите Ввод."
   },
   "ui/legacy/components/data_grid/ShowMoreDataGridNode.ts | showAllD": {
     "message": "Показать все {PH1}"
@@ -16221,10 +16176,10 @@
     "message": "Найти"
   },
   "ui/legacy/components/source_frame/PreviewFactory.ts | failedToLoadData": {
-    "message": "Failed to load data"
+    "message": "Не удалось загрузить данные."
   },
   "ui/legacy/components/source_frame/PreviewFactory.ts | nothingToPreview": {
-    "message": "Nothing to preview"
+    "message": "Нет объектов для предварительного просмотра."
   },
   "ui/legacy/components/source_frame/ResourceSourceFrame.ts | find": {
     "message": "Найти"
