--- a/front_end/core/i18n/locales/sk.json
+++ b/front_end/core/i18n/locales/sk.json
@@ -105,7 +105,7 @@
     "message": "Panel siete"
   },
   "core/common/Revealer.ts | securityPanel": {
-    "message": "Security panel"
+    "message": "Panel zabezpečenia"
   },
   "core/common/Revealer.ts | sourcesPanel": {
     "message": "Panel zdrojov"
@@ -2798,9 +2798,6 @@
   "panels/application/BackgroundServiceView.ts | clear": {
     "message": "Vymazať"
   },
-  "panels/application/BackgroundServiceView.ts | clickTheRecordButtonSOrHitSTo": {
-    "message": "Kliknite na tlačidlo zaznamenávania {PH1} alebo stlačením klávesa {PH2} spustite zaznamenávanie."
-  },
   "panels/application/BackgroundServiceView.ts | devtoolsWillRecordAllSActivity": {
     "message": "Nástroje pre vývojárov budú nahrávať všetku aktivitu {PH1} maximálne tri dni, aj keď budú zavreté."
   },
@@ -2812,9 +2809,6 @@
   },
   "panels/application/BackgroundServiceView.ts | instanceId": {
     "message": "Identifikátor inštancie"
-  },
-  "panels/application/BackgroundServiceView.ts | learnMore": {
-    "message": "Ďalšie informácie"
   },
   "panels/application/BackgroundServiceView.ts | noMetadataForThisEvent": {
     "message": "Žiadne metadáta pre túto udalosť"
@@ -2947,9 +2941,6 @@
   },
   "panels/application/IndexedDBViews.ts | objectStores": {
     "message": "Obchody objektu"
-  },
-  "panels/application/IndexedDBViews.ts | pleaseConfirmDeleteOfSDatabase": {
-    "message": "Potvrďte odstránenie databázy {PH1}."
   },
   "panels/application/IndexedDBViews.ts | primaryKey": {
     "message": "Primárny kľúč"
@@ -3236,12 +3227,6 @@
   "panels/application/SharedStorageEventsView.ts | clickToDisplayBody": {
     "message": "Kliknutím na ľubovoľnú udalosť zdieľaného ukladacieho priestoru zobrazte jej parametre."
   },
-  "panels/application/SharedStorageItemsView.ts | key": {
-    "message": "Kľúč"
-  },
-  "panels/application/SharedStorageItemsView.ts | selectAValueToPreview": {
-    "message": "Vyberte hodnotu, ktorej ukážku chcete zobraziť"
-  },
   "panels/application/SharedStorageItemsView.ts | sharedStorage": {
     "message": "Zdieľaný ukladací priestor"
   },
@@ -3257,17 +3242,8 @@
   "panels/application/SharedStorageItemsView.ts | sharedStorageItemEdited": {
     "message": "Položka priestoru bola upravená."
   },
-  "panels/application/SharedStorageItemsView.ts | sharedStorageItems": {
-    "message": "Položky zdieľaného ukladacieho priestoru"
-  },
   "panels/application/SharedStorageItemsView.ts | sharedStorageItemsCleared": {
     "message": "Položky zdieľaného ukladacieho priestoru boli vymazané"
-  },
-  "panels/application/SharedStorageItemsView.ts | sharedStorageNumberEntries": {
-    "message": "Počet záznamov zobrazených v tabuľke: {PH1}"
-  },
-  "panels/application/SharedStorageItemsView.ts | value": {
-    "message": "Hodnota"
   },
   "panels/application/SharedStorageListTreeElement.ts | sharedStorage": {
     "message": "Zdieľaný ukladací priestor"
@@ -4262,9 +4238,6 @@
   "panels/application/components/TrustTokensView.ts | issuer": {
     "message": "Vydavateľ"
   },
-  "panels/application/components/TrustTokensView.ts | noTrustTokensStored": {
-    "message": "Momentálne nie sú uložené žiadne tokeny súkromného stavu."
-  },
   "panels/application/components/TrustTokensView.ts | storedTokenCount": {
     "message": "Počet uložených tokenov"
   },
@@ -4950,7 +4923,7 @@
     "message": "Zoznam zlomových bodov DOM"
   },
   "panels/browser_debugger/DOMBreakpointsSidebarPane.ts | noBreakpoints": {
-    "message": "No DOM breakpoints set"
+    "message": "Nie sú nastavené žiadne zlomové body DOM"
   },
   "panels/browser_debugger/DOMBreakpointsSidebarPane.ts | nodeRemoved": {
     "message": "Uzol bol odstránený"
@@ -5067,19 +5040,19 @@
     "message": "{PH1} (z mapy zdroja)"
   },
   "panels/changes/ChangesView.ts | binaryDataDescription": {
-    "message": "The changes tab doesn't show binary data changes"
+    "message": "Na karte Zmeny sa nezobrazujú zmeny binárnych údajov"
   },
   "panels/changes/ChangesView.ts | changesViewDescription": {
-    "message": "On this page you can track code changes made within DevTools."
+    "message": "Na tejto stránke môžete sledovať zmeny kódu vykonané v nástrojoch pre vývojárov."
   },
   "panels/changes/ChangesView.ts | copy": {
     "message": "Kopírovať"
   },
   "panels/changes/ChangesView.ts | noChanges": {
-    "message": "No changes yet"
+    "message": "Zatiaľ žiadne zmeny"
   },
   "panels/changes/ChangesView.ts | noTextualDiff": {
-    "message": "No textual diff available"
+    "message": "Nie je k dispozícii žiadny textový rozdiel"
   },
   "panels/changes/ChangesView.ts | sDeletions": {
     "message": "{n,plural, =1{# odstránenie (-)}few{# odstránenia (-)}many{# odstránenia (-)}other{# odstránení (-)}}"
@@ -5298,7 +5271,7 @@
     "message": " M<XX>"
   },
   "panels/console/ConsoleViewMessage.ts | SeeIssueInCookieReport": {
-    "message": "Click to open privacy and security panel and show third-party cookie report"
+    "message": "Kliknutím otvoríte panel ochrany súkromia a zabezpečenia a zobrazíte report o súboroch cookie tretích strán"
   },
   "panels/console/ConsoleViewMessage.ts | assertionFailed": {
     "message": "Kontrolný výraz nebol úspešný: "
@@ -6747,7 +6720,7 @@
     "message": "Sledovanie zásobníka"
   },
   "panels/explain/components/ConsoleInsight.ts | timedOut": {
-    "message": "Generating a response took too long. Please try again."
+    "message": "Generovanie odpovede trvalo príliš dlho. Skúste to znova."
   },
   "panels/explain/components/ConsoleInsight.ts | turnOnInSettings": {
     "message": "Zapnite {PH1}, aby ste mohli využívať pomoc umelej inteligencie pri porozumení a riešení upozornení a chýb konzoly."
@@ -7911,7 +7884,7 @@
     "message": "Pridať {PH1}"
   },
   "panels/mobile_throttling/ThrottlingManager.ts | calibrate": {
-    "message": "Calibrate…"
+    "message": "Nakalibrujte…"
   },
   "panels/mobile_throttling/ThrottlingManager.ts | cpuThrottling": {
     "message": "Obmedzenie toku dát procesora"
@@ -7935,7 +7908,7 @@
     "message": "Offline"
   },
   "panels/mobile_throttling/ThrottlingManager.ts | recalibrate": {
-    "message": "Recalibrate…"
+    "message": "Znova nakalibrovať…"
   },
   "panels/mobile_throttling/ThrottlingManager.ts | recommendedThrottling": {
     "message": "{PH1} – odporúčané"
@@ -8895,7 +8868,7 @@
     "message": "Táto požiadavka nemá žiadne súbory cookie."
   },
   "panels/network/RequestInitiatorView.ts | noInitiator": {
-    "message": "No initiator data"
+    "message": "Žiadne údaje o pôvodcovi"
   },
   "panels/network/RequestInitiatorView.ts | requestCallStack": {
     "message": "Zásobník s požiadavkami o volanie"
@@ -8961,10 +8934,10 @@
     "message": "Nepodarilo sa načítať údaje odpovede"
   },
   "panels/network/RequestResponseView.ts | noPreview": {
-    "message": "Nothing to preview"
+    "message": "Žiadna ukážka na zobrazenie"
   },
   "panels/network/RequestResponseView.ts | thisRequestHasNoResponseData": {
-    "message": "This request has no response data available"
+    "message": "Táto požiadavka neobsahuje žiadne údaje odpovede"
   },
   "panels/network/RequestTimingView.ts | cacheStorageCacheNameS": {
     "message": "Názov priestoru vyrovnávacej pamäte: {PH1}"
@@ -10139,9 +10112,6 @@
   "panels/profiler/ProfilesPanel.ts | cantLoadProfileWhileAnother": {
     "message": "Profil nie je možné načítať, kým sa nahráva iný."
   },
-  "panels/profiler/ProfilesPanel.ts | profileLoadingFailedS": {
-    "message": "Profil sa nepodarilo načítať: {PH1}."
-  },
   "panels/profiler/ProfilesPanel.ts | profiles": {
     "message": "Profily"
   },
@@ -10251,7 +10221,7 @@
     "message": "Uložiť"
   },
   "panels/protocol_monitor/ProtocolMonitor.ts | selectAMessageToView": {
-    "message": "Select a message to see its details"
+    "message": "Výberom správy zobrazíte jej podrobnosti"
   },
   "panels/protocol_monitor/ProtocolMonitor.ts | selectTarget": {
     "message": "Vybrať cieľ"
@@ -10290,7 +10260,7 @@
     "message": "Kopírovanie nahrávky alebo vybraného kroku"
   },
   "panels/recorder/RecorderController.ts | createRecording": {
-    "message": "Create recording"
+    "message": "Vytvoriť záznam"
   },
   "panels/recorder/RecorderController.ts | deleteRecording": {
     "message": "Odstrániť záznam"
@@ -10308,13 +10278,13 @@
     "message": "Získať rozšírenia..."
   },
   "panels/recorder/RecorderController.ts | header": {
-    "message": "Nothing recorded yet"
+    "message": "Zatiaľ nebolo zaznamenané nič"
   },
   "panels/recorder/RecorderController.ts | importRecording": {
     "message": "Importovať záznam"
   },
   "panels/recorder/RecorderController.ts | learnMore": {
-    "message": "Learn more"
+    "message": "Ďalšie informácie"
   },
   "panels/recorder/RecorderController.ts | noRecordings": {
     "message": "Žiadne nahrávky"
@@ -10323,7 +10293,7 @@
     "message": "nahrávky"
   },
   "panels/recorder/RecorderController.ts | recordingDescription": {
-    "message": "Use recordings to create automated end-to-end tests or performance traces."
+    "message": "Pomocou záznamov môžete vytvárať automatické testy end‑to‑end alebo stopy výkonu."
   },
   "panels/recorder/RecorderController.ts | replayRecording": {
     "message": "Znova prehrať nahrávku"
@@ -11496,7 +11466,7 @@
     "message": "Správa konzoly, spojené sledovanie zásobníka, súvisiaci zdrojový kód a spojené hlavičky v sieti sa odosielajú Googlu, aby vygeneroval vysvetlenia. Tieto údaje môžu prezerať kontrolóri s cieľom zlepšiť túto funkciu."
   },
   "panels/settings/AISettingsTab.ts | consoleInsightsSendsDataNoLogging": {
-    "message": "The console message, associated stack trace, related source code, and the associated network headers are sent to Google to generate explanations. This data will not be used to improve Google’s AI models."
+    "message": "Správa konzoly, spojené sledovanie zásobníka, súvisiaci zdrojový kód a spojené hlavičky v sieti sa odosielajú Googlu, aby vygeneroval vysvetlenia. Pomocou týchto údajov sa nebudú zlepšovať modely umelej inteligencie od Googlu."
   },
   "panels/settings/AISettingsTab.ts | dataCollection": {
     "message": "V závislosti od vášho regiónu môže Google prestať zhromažďovať údaje"
@@ -11532,7 +11502,7 @@
     "message": "Akékoľvek údaje, ku ktorým má kontrolovaná stránka prístup prostredníctvom webových rozhraní API, žiadostí siete, súborov a stôp výkonu môžu byť odoslané Googlu na generovanie vysvetlení. Môžu ich prezerať kontrolóri s cieľom zlepšiť túto funkciu. Nepoužívajte na stránkach s osobnými alebo citlivými údajmi."
   },
   "panels/settings/AISettingsTab.ts | freestylerSendsDataNoLogging": {
-    "message": "Any data the inspected page can access via Web APIs, network requests, files, and performance traces are sent to Google to generate explanations. This data will not be used to improve Google’s AI models."
+    "message": "Akékoľvek údaje, ku ktorým má kontrolovaná stránka prístup prostredníctvom webových rozhraní API, žiadostí siete, súborov a stôp výkonu sa odosielajú Googlu, aby vygeneroval vysvetlenia. Pomocou týchto údajov sa nebudú zlepšovať modely umelej inteligencie od Googlu."
   },
   "panels/settings/AISettingsTab.ts | helpUnderstandConsole": {
     "message": "Pomôžu vám porozumieť upozorneniam a chybám konzoly a vyriešiť ich"
@@ -12259,15 +12229,6 @@
   },
   "panels/sources/NavigatorView.ts | actionCannotBeUndone": {
     "message": "Táto akcia sa nedá vrátiť späť."
-  },
-  "panels/sources/NavigatorView.ts | areYouSureYouWantToDeleteFolder": {
-    "message": "Naozaj chcete odstrániť tento priečinok a jeho obsah?"
-  },
-  "panels/sources/NavigatorView.ts | areYouSureYouWantToDeleteThis": {
-    "message": "Naozaj chcete odstrániť tento súbor?"
-  },
-  "panels/sources/NavigatorView.ts | areYouSureYouWantToExcludeThis": {
-    "message": "Naozaj chcete vylúčiť tento priečinok?"
   },
   "panels/sources/NavigatorView.ts | areYouSureYouWantToRemoveThis": {
     "message": "Chcete odstrániť {PH1} z nástroja Workspace?"
@@ -13041,7 +13002,7 @@
     "message": "Toto sledovanie obsahuje časovania prevzaté z hlavičiek odpovedí v sieti Server-Timing. Ich príslušné časy začatia sú len odhady a nemusia byť presné."
   },
   "panels/timeline/ThirdPartyTreeView.ts | firstOrThirdPartyName": {
-    "message": "1st / 3rd party"
+    "message": "Prvá alebo tretia strana"
   },
   "panels/timeline/ThirdPartyTreeView.ts | selfTime": {
     "message": "Individuálny čas"
@@ -13254,7 +13215,7 @@
     "message": "Popis"
   },
   "panels/timeline/TimelinePanel.ts | dimThirdParties": {
-    "message": "Dim 3rd parties"
+    "message": "Stmavenie tretích strán"
   },
   "panels/timeline/TimelinePanel.ts | disableJavascriptSamples": {
     "message": "Zakázať vzorky JavaScript"
@@ -13374,7 +13335,7 @@
     "message": "Zastavuje sa časová os…"
   },
   "panels/timeline/TimelinePanel.ts | thirdPartiesByThirdPartyWeb": {
-    "message": "3rd parties classified by third-party-web"
+    "message": "Tretie strany klasifikované webom tretej strany"
   },
   "panels/timeline/TimelinePanel.ts | time": {
     "message": "Čas"
@@ -13653,7 +13614,7 @@
     "message": "{PH1}"
   },
   "panels/timeline/TimelineUIUtils.ts | entity": {
-    "message": "Third party"
+    "message": "Tretia strana"
   },
   "panels/timeline/TimelineUIUtils.ts | entryIsHidden": {
     "message": "(záznam je skrytý)"
@@ -13817,9 +13778,6 @@
   "panels/timeline/TimelineUIUtils.ts | selectorStatsTitle": {
     "message": "Štatistiky selektora"
   },
-  "panels/timeline/TimelineUIUtils.ts | selfTime": {
-    "message": "Individuálny čas"
-  },
   "panels/timeline/TimelineUIUtils.ts | size": {
     "message": "Veľkosť"
   },
@@ -13833,7 +13791,7 @@
     "message": "Webová adresa šablóny so štýlmi"
   },
   "panels/timeline/TimelineUIUtils.ts | thirdPartyTable": {
-    "message": "1st / 3rd party table"
+    "message": "Tabuľka prvej / tretej strany"
   },
   "panels/timeline/TimelineUIUtils.ts | timeSpentInRendering": {
     "message": "Čas strávený vykresľovaním"
@@ -13849,9 +13807,6 @@
   },
   "panels/timeline/TimelineUIUtils.ts | timestamp": {
     "message": "Časová pečiatka"
-  },
-  "panels/timeline/TimelineUIUtils.ts | totalTime": {
-    "message": "Celkový čas"
   },
   "panels/timeline/TimelineUIUtils.ts | traceEvent": {
     "message": "Sledovať udalosť"
@@ -13920,7 +13875,7 @@
     "message": "Odstrániť podradené popisy cesty"
   },
   "panels/timeline/components/CPUThrottlingSelector.ts | calibrate": {
-    "message": "Calibrate…"
+    "message": "Nakalibrujte…"
   },
   "panels/timeline/components/CPUThrottlingSelector.ts | cpu": {
     "message": "Procesor: {PH1}"
@@ -13932,7 +13887,7 @@
     "message": "Nakalibrované predvoľby"
   },
   "panels/timeline/components/CPUThrottlingSelector.ts | recalibrate": {
-    "message": "Recalibrate…"
+    "message": "Znova nakalibrovať…"
   },
   "panels/timeline/components/CPUThrottlingSelector.ts | recommendedThrottling": {
     "message": "{PH1} – odporúčané"
@@ -14424,7 +14379,7 @@
     "message": "Kódované údaje"
   },
   "panels/timeline/components/NetworkRequestDetails.ts | entity": {
-    "message": "Third party"
+    "message": "Tretia strana"
   },
   "panels/timeline/components/NetworkRequestDetails.ts | fromCache": {
     "message": "Z vyrovnávacej pamäte"
@@ -14568,16 +14523,16 @@
     "message": "Insights je experimentálna funkcia. Spätná väzba nám ju pomôže zlepšovať."
   },
   "panels/timeline/components/SidebarSingleInsightSet.ts | dismissTitle": {
-    "message": "Dismiss"
+    "message": "Zavrieť"
   },
   "panels/timeline/components/SidebarSingleInsightSet.ts | fieldMismatchNotice": {
-    "message": "There are many reasons why local and field metrics [may not match](https://web.dev/articles/lab-and-field-data-differences). Adjust [throttling settings and device emulation](https://developer.chrome.com/docs/devtools/device-mode) to analyze traces more similar to the average user's environment."
+    "message": "Existuje mnoho dôvodov, prečo sa miestne metriky a metriky z terénu [nemusia zhodovať](https://web.dev/articles/lab-and-field-data-differences). Ak chcete analyzovať stopy, ktoré sa viac podobajú priemernému prostrediu používateľa, upravte [nastavenia obmedzenia toku dát a emuláciu zariadenia](https://developer.chrome.com/docs/devtools/device-mode)."
   },
   "panels/timeline/components/SidebarSingleInsightSet.ts | fieldMismatchTitle": {
-    "message": "Field & local metrics mismatch"
+    "message": "Nesúlad metrík z terénu a miestnych metrík"
   },
   "panels/timeline/components/SidebarSingleInsightSet.ts | fieldScoreLabel": {
-    "message": "Field ({PH1})"
+    "message": "Pole ({PH1})"
   },
   "panels/timeline/components/SidebarSingleInsightSet.ts | metricScore": {
     "message": "{PH1}: skóre – {PH2} {PH3}"
@@ -15885,7 +15840,7 @@
     "message": "Zoradiť podľa"
   },
   "ui/legacy/components/data_grid/DataGrid.ts | sortableColumn": {
-    "message": "Sortable column. Press enter to apply sorting filter"
+    "message": "Zoraditeľný stĺpec. Ak chcete použiť filter zoradenia, stlačte Enter."
   },
   "ui/legacy/components/data_grid/ShowMoreDataGridNode.ts | showAllD": {
     "message": "Zobraziť všetko ({PH1})"
@@ -16221,10 +16176,10 @@
     "message": "Nájsť"
   },
   "ui/legacy/components/source_frame/PreviewFactory.ts | failedToLoadData": {
-    "message": "Failed to load data"
+    "message": "Nepodarilo sa načítať údaje"
   },
   "ui/legacy/components/source_frame/PreviewFactory.ts | nothingToPreview": {
-    "message": "Nothing to preview"
+    "message": "Žiadna ukážka na zobrazenie"
   },
   "ui/legacy/components/source_frame/ResourceSourceFrame.ts | find": {
     "message": "Nájsť"
