--- a/front_end/core/i18n/locales/sl.json
+++ b/front_end/core/i18n/locales/sl.json
@@ -105,7 +105,7 @@
     "message": "Podokno za omrežje"
   },
   "core/common/Revealer.ts | securityPanel": {
-    "message": "Security panel"
+    "message": "Varnostna plošča"
   },
   "core/common/Revealer.ts | sourcesPanel": {
     "message": "Podokno z viri"
@@ -2798,9 +2798,6 @@
   "panels/application/BackgroundServiceView.ts | clear": {
     "message": "Izbriši"
   },
-  "panels/application/BackgroundServiceView.ts | clickTheRecordButtonSOrHitSTo": {
-    "message": "Kliknite gumb za snemanje {PH1} ali pritisnite {PH2}, če želite začeti snemati."
-  },
   "panels/application/BackgroundServiceView.ts | devtoolsWillRecordAllSActivity": {
     "message": "Orodja za razvijalce bodo zabeležila vso dejavnost za {PH1} do 3 dni, tudi ko je to zaprto."
   },
@@ -2812,9 +2809,6 @@
   },
   "panels/application/BackgroundServiceView.ts | instanceId": {
     "message": "ID primerka"
-  },
-  "panels/application/BackgroundServiceView.ts | learnMore": {
-    "message": "Več o tem"
   },
   "panels/application/BackgroundServiceView.ts | noMetadataForThisEvent": {
     "message": "Za ta dogodek ni metapodatkov"
@@ -2947,9 +2941,6 @@
   },
   "panels/application/IndexedDBViews.ts | objectStores": {
     "message": "Hrambe predmetov"
-  },
-  "panels/application/IndexedDBViews.ts | pleaseConfirmDeleteOfSDatabase": {
-    "message": "Potrdite brisanje zbirke podatkov »{PH1}«."
   },
   "panels/application/IndexedDBViews.ts | primaryKey": {
     "message": "Primarni ključ"
@@ -3236,12 +3227,6 @@
   "panels/application/SharedStorageEventsView.ts | clickToDisplayBody": {
     "message": "Kliknite poljubni dogodek deljene shrambe, če želite prikazati parametre dogodka."
   },
-  "panels/application/SharedStorageItemsView.ts | key": {
-    "message": "Ključ"
-  },
-  "panels/application/SharedStorageItemsView.ts | selectAValueToPreview": {
-    "message": "Izberite vrednost za predogled"
-  },
   "panels/application/SharedStorageItemsView.ts | sharedStorage": {
     "message": "Deljena shramba"
   },
@@ -3257,17 +3242,8 @@
   "panels/application/SharedStorageItemsView.ts | sharedStorageItemEdited": {
     "message": "Element shrambe je bil urejen."
   },
-  "panels/application/SharedStorageItemsView.ts | sharedStorageItems": {
-    "message": "Elementi deljene shrambe"
-  },
   "panels/application/SharedStorageItemsView.ts | sharedStorageItemsCleared": {
     "message": "Elementi deljene shrambe so počiščeni."
-  },
-  "panels/application/SharedStorageItemsView.ts | sharedStorageNumberEntries": {
-    "message": "Število vnosov, prikazanih v tabeli: {PH1}."
-  },
-  "panels/application/SharedStorageItemsView.ts | value": {
-    "message": "Vrednost"
   },
   "panels/application/SharedStorageListTreeElement.ts | sharedStorage": {
     "message": "Deljena shramba"
@@ -4262,9 +4238,6 @@
   "panels/application/components/TrustTokensView.ts | issuer": {
     "message": "Izdajatelj"
   },
-  "panels/application/components/TrustTokensView.ts | noTrustTokensStored": {
-    "message": "Trenutno ni shranjen noben zasebni žeton stanja."
-  },
   "panels/application/components/TrustTokensView.ts | storedTokenCount": {
     "message": "Število shranjenih žetonov"
   },
@@ -4950,7 +4923,7 @@
     "message": "Seznam prekinitvenih točk DOM"
   },
   "panels/browser_debugger/DOMBreakpointsSidebarPane.ts | noBreakpoints": {
-    "message": "No DOM breakpoints set"
+    "message": "Ni nastavljenih prekinitvenih točk DOM"
   },
   "panels/browser_debugger/DOMBreakpointsSidebarPane.ts | nodeRemoved": {
     "message": "Vozlišče je odstranjeno"
@@ -5067,19 +5040,19 @@
     "message": "{PH1} (iz zemljevida izvorne kode)"
   },
   "panels/changes/ChangesView.ts | binaryDataDescription": {
-    "message": "The changes tab doesn't show binary data changes"
+    "message": "Na zavihku Spremembe niso prikazane spremembe binarnih podatkov"
   },
   "panels/changes/ChangesView.ts | changesViewDescription": {
-    "message": "On this page you can track code changes made within DevTools."
+    "message": "Na tej strani lahko spremljate spremembe kode, ki so bile izvedene v Orodjih za razvijalce."
   },
   "panels/changes/ChangesView.ts | copy": {
     "message": "Kopiraj"
   },
   "panels/changes/ChangesView.ts | noChanges": {
-    "message": "No changes yet"
+    "message": "Ni še sprememb"
   },
   "panels/changes/ChangesView.ts | noTextualDiff": {
-    "message": "No textual diff available"
+    "message": "Ni besedilnih razlik"
   },
   "panels/changes/ChangesView.ts | sDeletions": {
     "message": "{n,plural, =1{# izbris (-)}one{# izbris (-)}two{# izbrisa (-)}few{# izbrisi (-)}other{# izbrisov (-)}}"
@@ -5298,7 +5271,7 @@
     "message": " M<XX>"
   },
   "panels/console/ConsoleViewMessage.ts | SeeIssueInCookieReport": {
-    "message": "Click to open privacy and security panel and show third-party cookie report"
+    "message": "Kliknite, če želite odpreti podokno za zasebnost in varnost ter prikazati poročilo o piškotkih tretjih oseb"
   },
   "panels/console/ConsoleViewMessage.ts | assertionFailed": {
     "message": "Izjava ni uspela: "
@@ -6747,7 +6720,7 @@
     "message": "Sled sklada"
   },
   "panels/explain/components/ConsoleInsight.ts | timedOut": {
-    "message": "Generating a response took too long. Please try again."
+    "message": "Generiranje odgovora je trajalo predolgo. Poskusite znova."
   },
   "panels/explain/components/ConsoleInsight.ts | turnOnInSettings": {
     "message": "Vklopite {PH1}, če želite prejemati pomoč s podporo UI pri razumevanju ter odpravljanju opozoril in napak v konzoli."
@@ -7911,7 +7884,7 @@
     "message": "Dodajanje: {PH1}"
   },
   "panels/mobile_throttling/ThrottlingManager.ts | calibrate": {
-    "message": "Calibrate…"
+    "message": "Umerite …"
   },
   "panels/mobile_throttling/ThrottlingManager.ts | cpuThrottling": {
     "message": "Zaviranje CPE-ja"
@@ -7935,7 +7908,7 @@
     "message": "Brez povezave"
   },
   "panels/mobile_throttling/ThrottlingManager.ts | recalibrate": {
-    "message": "Recalibrate…"
+    "message": "Znova umerite …"
   },
   "panels/mobile_throttling/ThrottlingManager.ts | recommendedThrottling": {
     "message": "{PH1} – priporočeno"
@@ -8895,7 +8868,7 @@
     "message": "Ta zahteva nima piškotkov."
   },
   "panels/network/RequestInitiatorView.ts | noInitiator": {
-    "message": "No initiator data"
+    "message": "Ni podatkov o pobudniku"
   },
   "panels/network/RequestInitiatorView.ts | requestCallStack": {
     "message": "Zahtevanje sklada klicev"
@@ -8961,10 +8934,10 @@
     "message": "Podatkov odziva ni bilo mogoče naložiti."
   },
   "panels/network/RequestResponseView.ts | noPreview": {
-    "message": "Nothing to preview"
+    "message": "Ni gradiva za predogled"
   },
   "panels/network/RequestResponseView.ts | thisRequestHasNoResponseData": {
-    "message": "This request has no response data available"
+    "message": "Ta zahteva nima razpoložljivih podatkov odzivov"
   },
   "panels/network/RequestTimingView.ts | cacheStorageCacheNameS": {
     "message": "Ime predpomnilnika shrambe predpomnilnika: {PH1}"
@@ -10139,9 +10112,6 @@
   "panels/profiler/ProfilesPanel.ts | cantLoadProfileWhileAnother": {
     "message": "Profila ni mogoče naložiti, če se ta čas beleži drug profil."
   },
-  "panels/profiler/ProfilesPanel.ts | profileLoadingFailedS": {
-    "message": "Nalaganje profila ni uspelo: {PH1}."
-  },
   "panels/profiler/ProfilesPanel.ts | profiles": {
     "message": "Profili"
   },
@@ -10251,7 +10221,7 @@
     "message": "Shrani"
   },
   "panels/protocol_monitor/ProtocolMonitor.ts | selectAMessageToView": {
-    "message": "Select a message to see its details"
+    "message": "Izberite sporočilo, da si ogledate njegove podrobnosti"
   },
   "panels/protocol_monitor/ProtocolMonitor.ts | selectTarget": {
     "message": "Izberite cilj"
@@ -10290,7 +10260,7 @@
     "message": "Kopiranje posnetka ali izbranega koraka"
   },
   "panels/recorder/RecorderController.ts | createRecording": {
-    "message": "Create recording"
+    "message": "Ustvarjanje posnetka"
   },
   "panels/recorder/RecorderController.ts | deleteRecording": {
     "message": "Izbriši posnetek"
@@ -10308,13 +10278,13 @@
     "message": "Prenesi razširitve …"
   },
   "panels/recorder/RecorderController.ts | header": {
-    "message": "Nothing recorded yet"
+    "message": "Nič ni posneto"
   },
   "panels/recorder/RecorderController.ts | importRecording": {
     "message": "Uvozi posnetek"
   },
   "panels/recorder/RecorderController.ts | learnMore": {
-    "message": "Learn more"
+    "message": "Več o tem"
   },
   "panels/recorder/RecorderController.ts | noRecordings": {
     "message": "Ni posnetkov"
@@ -10323,7 +10293,7 @@
     "message": "posnetki"
   },
   "panels/recorder/RecorderController.ts | recordingDescription": {
-    "message": "Use recordings to create automated end-to-end tests or performance traces."
+    "message": "S posnetki ustvarite samodejne celovite preizkuse ali sledi učinkovitosti delovanja."
   },
   "panels/recorder/RecorderController.ts | replayRecording": {
     "message": "Vnovično predvajanje posnetka"
@@ -11496,7 +11466,7 @@
     "message": "Sporočilo konzole, povezana sled sklada, povezana izvorna koda in povezane glave omrežja se pošljejo Googlu zaradi ustvarjanja pojasnil. Te podatke bodo morda videli pregledovalci zaradi izboljšanja te funkcije."
   },
   "panels/settings/AISettingsTab.ts | consoleInsightsSendsDataNoLogging": {
-    "message": "The console message, associated stack trace, related source code, and the associated network headers are sent to Google to generate explanations. This data will not be used to improve Google’s AI models."
+    "message": "Sporočilo konzole, povezana sled sklada, povezana izvorna koda in povezane glave omrežja se pošljejo Googlu zaradi ustvarjanja pojasnil. Ti podatki se ne bodo uporabljali za izboljšanje Googlovih modelov umetne inteligence."
   },
   "panels/settings/AISettingsTab.ts | dataCollection": {
     "message": "Google morda ne zbira podatkov, kar je odvisno od vaše regije"
@@ -11532,7 +11502,7 @@
     "message": "Vsi podatki, do katerih lahko pregledana stran dostopa prek spletnih API-jev, omrežnih zahtev, datotek in sledi zmogljivosti, bodo morda poslani Googlu zaradi ustvarjanja pojasnil. Te podatke bodo morda videli pregledovalci zaradi izboljšanja te funkcije. Ne uporabljajte na straneh z osebnimi ali občutljivimi podatki."
   },
   "panels/settings/AISettingsTab.ts | freestylerSendsDataNoLogging": {
-    "message": "Any data the inspected page can access via Web APIs, network requests, files, and performance traces are sent to Google to generate explanations. This data will not be used to improve Google’s AI models."
+    "message": "Vsi podatki, do katerih lahko pregledana stran dostopa prek spletnih API-jev, omrežnih zahtev, datotek in sledi zmogljivosti, bodo morda poslani Googlu zaradi ustvarjanja pojasnil. Ti podatki se ne bodo uporabljali za izboljšanje Googlovih modelov umetne inteligence."
   },
   "panels/settings/AISettingsTab.ts | helpUnderstandConsole": {
     "message": "Pomaga vam razumeti in odpraviti opozorila in napake v konzoli"
@@ -12259,15 +12229,6 @@
   },
   "panels/sources/NavigatorView.ts | actionCannotBeUndone": {
     "message": "Tega dejanja ni mogoče razveljaviti."
-  },
-  "panels/sources/NavigatorView.ts | areYouSureYouWantToDeleteFolder": {
-    "message": "Ali ste prepričani, da želite izbrisati to mapo in njeno vsebino?"
-  },
-  "panels/sources/NavigatorView.ts | areYouSureYouWantToDeleteThis": {
-    "message": "Ali ste prepričani, da želite izbrisati to datoteko?"
-  },
-  "panels/sources/NavigatorView.ts | areYouSureYouWantToExcludeThis": {
-    "message": "Ali ste prepričani, da želite izključiti to mapo?"
   },
   "panels/sources/NavigatorView.ts | areYouSureYouWantToRemoveThis": {
     "message": "Želite odstraniti »{PH1}« iz delovnega prostora?"
@@ -13041,7 +13002,7 @@
     "message": "Ta različica vsebuje čase, vzete iz glave omrežnega odziva strežnika. Ustrezni začetni časi so samo ocene in morda niso natančni."
   },
   "panels/timeline/ThirdPartyTreeView.ts | firstOrThirdPartyName": {
-    "message": "1st / 3rd party"
+    "message": "Prva/tretja oseba"
   },
   "panels/timeline/ThirdPartyTreeView.ts | selfTime": {
     "message": "Čas posameznega dejanja"
@@ -13254,7 +13215,7 @@
     "message": "Opis"
   },
   "panels/timeline/TimelinePanel.ts | dimThirdParties": {
-    "message": "Dim 3rd parties"
+    "message": "Zatemnitev tretjih oseb"
   },
   "panels/timeline/TimelinePanel.ts | disableJavascriptSamples": {
     "message": "Onemogoči vzorce JavaScripta"
@@ -13374,7 +13335,7 @@
     "message": "Ustavljanje časovne osi …"
   },
   "panels/timeline/TimelinePanel.ts | thirdPartiesByThirdPartyWeb": {
-    "message": "3rd parties classified by third-party-web"
+    "message": "Tretje osebe, razvrščene glede na spletne strani tretjih oseb"
   },
   "panels/timeline/TimelinePanel.ts | time": {
     "message": "Čas"
@@ -13653,7 +13614,7 @@
     "message": "{PH1}"
   },
   "panels/timeline/TimelineUIUtils.ts | entity": {
-    "message": "Third party"
+    "message": "Tretja oseba"
   },
   "panels/timeline/TimelineUIUtils.ts | entryIsHidden": {
     "message": "(vnos je skrit)"
@@ -13817,9 +13778,6 @@
   "panels/timeline/TimelineUIUtils.ts | selectorStatsTitle": {
     "message": "Statistični podatki izbirnika"
   },
-  "panels/timeline/TimelineUIUtils.ts | selfTime": {
-    "message": "Čas posameznega dejanja"
-  },
   "panels/timeline/TimelineUIUtils.ts | size": {
     "message": "Velikost"
   },
@@ -13833,7 +13791,7 @@
     "message": "URL datoteke s slogi"
   },
   "panels/timeline/TimelineUIUtils.ts | thirdPartyTable": {
-    "message": "1st / 3rd party table"
+    "message": "Tabela za prvo/tretjo osebo"
   },
   "panels/timeline/TimelineUIUtils.ts | timeSpentInRendering": {
     "message": "Porabljeni čas za upodabljanje"
@@ -13849,9 +13807,6 @@
   },
   "panels/timeline/TimelineUIUtils.ts | timestamp": {
     "message": "Časovni žig"
-  },
-  "panels/timeline/TimelineUIUtils.ts | totalTime": {
-    "message": "Skupni čas"
   },
   "panels/timeline/TimelineUIUtils.ts | traceEvent": {
     "message": "Sledenje dogodku"
@@ -13920,7 +13875,7 @@
     "message": "Odstrani podrejene poti"
   },
   "panels/timeline/components/CPUThrottlingSelector.ts | calibrate": {
-    "message": "Calibrate…"
+    "message": "Umerite …"
   },
   "panels/timeline/components/CPUThrottlingSelector.ts | cpu": {
     "message": "CPE: {PH1}"
@@ -13932,7 +13887,7 @@
     "message": "Umerjene prednastavitve"
   },
   "panels/timeline/components/CPUThrottlingSelector.ts | recalibrate": {
-    "message": "Recalibrate…"
+    "message": "Znova umerite …"
   },
   "panels/timeline/components/CPUThrottlingSelector.ts | recommendedThrottling": {
     "message": "{PH1} – priporočeno"
@@ -14424,7 +14379,7 @@
     "message": "Kodirani podatki"
   },
   "panels/timeline/components/NetworkRequestDetails.ts | entity": {
-    "message": "Third party"
+    "message": "Tretja oseba"
   },
   "panels/timeline/components/NetworkRequestDetails.ts | fromCache": {
     "message": "Iz predpomnilnika"
@@ -14568,16 +14523,16 @@
     "message": "Vpogledi so preizkusna funkcija. Vaše povratne informacije nam bodo pomagale izboljšati izkušnjo."
   },
   "panels/timeline/components/SidebarSingleInsightSet.ts | dismissTitle": {
-    "message": "Dismiss"
+    "message": "Opusti"
   },
   "panels/timeline/components/SidebarSingleInsightSet.ts | fieldMismatchNotice": {
-    "message": "There are many reasons why local and field metrics [may not match](https://web.dev/articles/lab-and-field-data-differences). Adjust [throttling settings and device emulation](https://developer.chrome.com/docs/devtools/device-mode) to analyze traces more similar to the average user's environment."
+    "message": "Razlogov, zakaj se lokalna in terenska meritev [ne ujemata](https://web.dev/articles/lab-and-field-data-differences), je več. Prilagodite [nastavitve zaviranja in emulacijo naprave](https://developer.chrome.com/docs/devtools/device-mode), če želite analizirati sledi, ki so podobnejše okolju povprečnega uporabnika."
   },
   "panels/timeline/components/SidebarSingleInsightSet.ts | fieldMismatchTitle": {
-    "message": "Field & local metrics mismatch"
+    "message": "Neujemanje terenskih in lokalnih meritev"
   },
   "panels/timeline/components/SidebarSingleInsightSet.ts | fieldScoreLabel": {
-    "message": "Field ({PH1})"
+    "message": "Polje ({PH1})"
   },
   "panels/timeline/components/SidebarSingleInsightSet.ts | metricScore": {
     "message": "{PH1}: {PH2}, rezultat: {PH3}"
@@ -15885,7 +15840,7 @@
     "message": "Razvrsti po"
   },
   "ui/legacy/components/data_grid/DataGrid.ts | sortableColumn": {
-    "message": "Sortable column. Press enter to apply sorting filter"
+    "message": "Stolpec, ki ga je mogoče razvrstiti. Pritisnite Enter, če želite uporabiti filter za razvrščanje."
   },
   "ui/legacy/components/data_grid/ShowMoreDataGridNode.ts | showAllD": {
     "message": "Pokaži vse: {PH1}"
@@ -16221,10 +16176,10 @@
     "message": "Najdi"
   },
   "ui/legacy/components/source_frame/PreviewFactory.ts | failedToLoadData": {
-    "message": "Failed to load data"
+    "message": "Podatkov ni bilo mogoče naložiti"
   },
   "ui/legacy/components/source_frame/PreviewFactory.ts | nothingToPreview": {
-    "message": "Nothing to preview"
+    "message": "Ni gradiva za predogled"
   },
   "ui/legacy/components/source_frame/ResourceSourceFrame.ts | find": {
     "message": "Najdi"
