--- a/front_end/core/i18n/locales/sr.json
+++ b/front_end/core/i18n/locales/sr.json
@@ -105,7 +105,7 @@
     "message": "Окно мреже"
   },
   "core/common/Revealer.ts | securityPanel": {
-    "message": "Security panel"
+    "message": "Безбедносно окно"
   },
   "core/common/Revealer.ts | sourcesPanel": {
     "message": "Окно извора"
@@ -2798,9 +2798,6 @@
   "panels/application/BackgroundServiceView.ts | clear": {
     "message": "Обриши"
   },
-  "panels/application/BackgroundServiceView.ts | clickTheRecordButtonSOrHitSTo": {
-    "message": "Кликните на дугме за снимање {PH1} или притисните {PH2} да бисте започели снимање."
-  },
   "panels/application/BackgroundServiceView.ts | devtoolsWillRecordAllSActivity": {
     "message": "Алатке за програмере ће снимити све активности ({PH1}) до 3 дана, чак и када су затворене."
   },
@@ -2812,9 +2809,6 @@
   },
   "panels/application/BackgroundServiceView.ts | instanceId": {
     "message": "ИД инстанце"
-  },
-  "panels/application/BackgroundServiceView.ts | learnMore": {
-    "message": "Сазнајте више"
   },
   "panels/application/BackgroundServiceView.ts | noMetadataForThisEvent": {
     "message": "Нема метаподатака за овај догађај"
@@ -2947,9 +2941,6 @@
   },
   "panels/application/IndexedDBViews.ts | objectStores": {
     "message": "Продавнице објеката"
-  },
-  "panels/application/IndexedDBViews.ts | pleaseConfirmDeleteOfSDatabase": {
-    "message": "Потврдите брисање базе података {PH1}."
   },
   "panels/application/IndexedDBViews.ts | primaryKey": {
     "message": "Примарни кључ"
@@ -3236,12 +3227,6 @@
   "panels/application/SharedStorageEventsView.ts | clickToDisplayBody": {
     "message": "Кликните на било који догађај дељеног меморијског простора да бисте приказали параметре догађаја."
   },
-  "panels/application/SharedStorageItemsView.ts | key": {
-    "message": "Кључ"
-  },
-  "panels/application/SharedStorageItemsView.ts | selectAValueToPreview": {
-    "message": "Изаберите вредност ради прегледа."
-  },
   "panels/application/SharedStorageItemsView.ts | sharedStorage": {
     "message": "Дељени меморијски простор"
   },
@@ -3257,17 +3242,8 @@
   "panels/application/SharedStorageItemsView.ts | sharedStorageItemEdited": {
     "message": "Ставка меморијског простора је измењена."
   },
-  "panels/application/SharedStorageItemsView.ts | sharedStorageItems": {
-    "message": "Ставке дељеног меморијског простора"
-  },
   "panels/application/SharedStorageItemsView.ts | sharedStorageItemsCleared": {
     "message": "Ставке дељеног меморијског простора су обрисане"
-  },
-  "panels/application/SharedStorageItemsView.ts | sharedStorageNumberEntries": {
-    "message": "Број уноса који се приказују у табели: {PH1}"
-  },
-  "panels/application/SharedStorageItemsView.ts | value": {
-    "message": "Вредност"
   },
   "panels/application/SharedStorageListTreeElement.ts | sharedStorage": {
     "message": "Дељени меморијски простор"
@@ -4262,9 +4238,6 @@
   "panels/application/components/TrustTokensView.ts | issuer": {
     "message": "Издавалац"
   },
-  "panels/application/components/TrustTokensView.ts | noTrustTokensStored": {
-    "message": "Тренутно нема сачуваних приватних токена за стање."
-  },
   "panels/application/components/TrustTokensView.ts | storedTokenCount": {
     "message": "Број сачуваних токена"
   },
@@ -4950,7 +4923,7 @@
     "message": "DOM листа преломних тачака"
   },
   "panels/browser_debugger/DOMBreakpointsSidebarPane.ts | noBreakpoints": {
-    "message": "No DOM breakpoints set"
+    "message": "Није подешена ниједна DOM преломна тачка"
   },
   "panels/browser_debugger/DOMBreakpointsSidebarPane.ts | nodeRemoved": {
     "message": "Чвор је уклоњен"
@@ -5067,19 +5040,19 @@
     "message": "{PH1} (са мапе извора)"
   },
   "panels/changes/ChangesView.ts | binaryDataDescription": {
-    "message": "The changes tab doesn't show binary data changes"
+    "message": "Картица Промене не приказује промене бинарних података"
   },
   "panels/changes/ChangesView.ts | changesViewDescription": {
-    "message": "On this page you can track code changes made within DevTools."
+    "message": "На овој страници можете да пратите промене кôда у Алаткама за програмере."
   },
   "panels/changes/ChangesView.ts | copy": {
     "message": "Копирај"
   },
   "panels/changes/ChangesView.ts | noChanges": {
-    "message": "No changes yet"
+    "message": "Још увек нема промена"
   },
   "panels/changes/ChangesView.ts | noTextualDiff": {
-    "message": "No textual diff available"
+    "message": "Нема доступних разлика у тексту"
   },
   "panels/changes/ChangesView.ts | sDeletions": {
     "message": "{n,plural, =1{# брисање (-)}one{# брисање (-)}few{# брисања (-)}other{# брисања (-)}}"
@@ -5298,7 +5271,7 @@
     "message": " М<XX>"
   },
   "panels/console/ConsoleViewMessage.ts | SeeIssueInCookieReport": {
-    "message": "Click to open privacy and security panel and show third-party cookie report"
+    "message": "Кликните да бисте отворили окно за приватност и безбедност и приказали извештај о колачићима треће стране"
   },
   "panels/console/ConsoleViewMessage.ts | assertionFailed": {
     "message": "Тврдња није успела: "
@@ -6747,7 +6720,7 @@
     "message": "Стање стека"
   },
   "panels/explain/components/ConsoleInsight.ts | timedOut": {
-    "message": "Generating a response took too long. Please try again."
+    "message": "Генерисање одговора је предуго трајало. Пробајте поново."
   },
   "panels/explain/components/ConsoleInsight.ts | turnOnInSettings": {
     "message": "Укључите {PH1} да бисте добијали помоћ вештачке интелигенције за разумевање и решавање упозорења и грешака у конзоли."
@@ -7911,7 +7884,7 @@
     "message": "Додајте опцију {PH1}"
   },
   "panels/mobile_throttling/ThrottlingManager.ts | calibrate": {
-    "message": "Calibrate…"
+    "message": "Калибришите…"
   },
   "panels/mobile_throttling/ThrottlingManager.ts | cpuThrottling": {
     "message": "Ограничавање процесора"
@@ -7935,7 +7908,7 @@
     "message": "Офлајн"
   },
   "panels/mobile_throttling/ThrottlingManager.ts | recalibrate": {
-    "message": "Recalibrate…"
+    "message": "Поново калибришите…"
   },
   "panels/mobile_throttling/ThrottlingManager.ts | recommendedThrottling": {
     "message": "{PH1} – препоручено"
@@ -8895,7 +8868,7 @@
     "message": "Овај захтев нема колачиће."
   },
   "panels/network/RequestInitiatorView.ts | noInitiator": {
-    "message": "No initiator data"
+    "message": "Нема података о покретачу"
   },
   "panels/network/RequestInitiatorView.ts | requestCallStack": {
     "message": "Затражите групу позива"
@@ -8961,10 +8934,10 @@
     "message": "Учитавање података о одговору није успело"
   },
   "panels/network/RequestResponseView.ts | noPreview": {
-    "message": "Nothing to preview"
+    "message": "Нема садржаја за преглед"
   },
   "panels/network/RequestResponseView.ts | thisRequestHasNoResponseData": {
-    "message": "This request has no response data available"
+    "message": "Нема доступних података одговора за овај захтев"
   },
   "panels/network/RequestTimingView.ts | cacheStorageCacheNameS": {
     "message": "Назив кеша за меморијски простор: {PH1}"
@@ -10139,9 +10112,6 @@
   "panels/profiler/ProfilesPanel.ts | cantLoadProfileWhileAnother": {
     "message": "Не можете да учитате профил када се други профил снима."
   },
-  "panels/profiler/ProfilesPanel.ts | profileLoadingFailedS": {
-    "message": "Учитавање профила није успело: {PH1}."
-  },
   "panels/profiler/ProfilesPanel.ts | profiles": {
     "message": "Профили"
   },
@@ -10251,7 +10221,7 @@
     "message": "Сачувај"
   },
   "panels/protocol_monitor/ProtocolMonitor.ts | selectAMessageToView": {
-    "message": "Select a message to see its details"
+    "message": "Изаберите поруку да бисте видели детаље о њој"
   },
   "panels/protocol_monitor/ProtocolMonitor.ts | selectTarget": {
     "message": "Изаберите циљ"
@@ -10290,7 +10260,7 @@
     "message": "Копирај снимак или изабрани корак"
   },
   "panels/recorder/RecorderController.ts | createRecording": {
-    "message": "Create recording"
+    "message": "Направи снимак"
   },
   "panels/recorder/RecorderController.ts | deleteRecording": {
     "message": "Избриши снимак"
@@ -10308,13 +10278,13 @@
     "message": "Преузми додатке…"
   },
   "panels/recorder/RecorderController.ts | header": {
-    "message": "Nothing recorded yet"
+    "message": "Још увек ништа није снимљено"
   },
   "panels/recorder/RecorderController.ts | importRecording": {
     "message": "Увези снимак"
   },
   "panels/recorder/RecorderController.ts | learnMore": {
-    "message": "Learn more"
+    "message": "Сазнајте више"
   },
   "panels/recorder/RecorderController.ts | noRecordings": {
     "message": "Нема снимака"
@@ -10323,7 +10293,7 @@
     "message": "снимак/а"
   },
   "panels/recorder/RecorderController.ts | recordingDescription": {
-    "message": "Use recordings to create automated end-to-end tests or performance traces."
+    "message": "Користите снимке да бисте правили аутоматизоване тестове „са краја на крај“ или трагове учинка."
   },
   "panels/recorder/RecorderController.ts | replayRecording": {
     "message": "Пусти снимак опет"
@@ -11496,7 +11466,7 @@
     "message": "Порука конзоле, повезано стање стека и повезани изворни кôд и повезана заглавља мреже се шаљу Google-у да би се генерисала објашњења. Особе које прегледају могу да виде те податке ради побољшања ове функције."
   },
   "panels/settings/AISettingsTab.ts | consoleInsightsSendsDataNoLogging": {
-    "message": "The console message, associated stack trace, related source code, and the associated network headers are sent to Google to generate explanations. This data will not be used to improve Google’s AI models."
+    "message": "Порука конзоле, повезано стање стека и повезани изворни кôд и повезана заглавља мреже се шаљу Google-у да би се генерисала објашњења. Ти подаци се неће користити за побољшање  модела Google вештачке интелигенције."
   },
   "panels/settings/AISettingsTab.ts | dataCollection": {
     "message": "Google може да одустане од прикупљања података у зависности од региона"
@@ -11532,7 +11502,7 @@
     "message": "Сви подаци којима прегледана страница може да приступи преко Web API-ја, захтеви мреже, фајлови и трагови учинка шаљу се Google-у да би се генерисала објашњења. Особе које прегледају могу да виде те податке ради побољшања ове функције. Немојте да је користите на страницама са личним или осетљивим информацијама."
   },
   "panels/settings/AISettingsTab.ts | freestylerSendsDataNoLogging": {
-    "message": "Any data the inspected page can access via Web APIs, network requests, files, and performance traces are sent to Google to generate explanations. This data will not be used to improve Google’s AI models."
+    "message": "Сви подаци којима прегледана страница може да приступи преко Web API-ја, захтеви мреже, фајлови и трагови учинка шаљу се Google-у да би се генерисала објашњења. Ти подаци се неће користити за побољшање  модела Google вештачке интелигенције."
   },
   "panels/settings/AISettingsTab.ts | helpUnderstandConsole": {
     "message": "Помаже вам да разумете и решите упозорења и грешке у конзоли"
@@ -12259,15 +12229,6 @@
   },
   "panels/sources/NavigatorView.ts | actionCannotBeUndone": {
     "message": "Ова радња не може да се опозове."
-  },
-  "panels/sources/NavigatorView.ts | areYouSureYouWantToDeleteFolder": {
-    "message": "Желите ли стварно да избришете овај фолдер и његов садржај?"
-  },
-  "panels/sources/NavigatorView.ts | areYouSureYouWantToDeleteThis": {
-    "message": "Желите ли стварно да избришете овај фајл?"
-  },
-  "panels/sources/NavigatorView.ts | areYouSureYouWantToExcludeThis": {
-    "message": "Желите ли стварно да изузмете овај фолдер?"
   },
   "panels/sources/NavigatorView.ts | areYouSureYouWantToRemoveThis": {
     "message": "Желите да уклоните „{PH1}“ из радног простора?"
@@ -13041,7 +13002,7 @@
     "message": "Ова верзија садржи времена преузета из заглавља одговора мреже Server-Time. Одговарајућа времена почетка су само процене и можда нису тачна."
   },
   "panels/timeline/ThirdPartyTreeView.ts | firstOrThirdPartyName": {
-    "message": "1st / 3rd party"
+    "message": "Прва или трећа страна"
   },
   "panels/timeline/ThirdPartyTreeView.ts | selfTime": {
     "message": "Време појединачне активности"
@@ -13254,7 +13215,7 @@
     "message": "Опис"
   },
   "panels/timeline/TimelinePanel.ts | dimThirdParties": {
-    "message": "Dim 3rd parties"
+    "message": "Затамни треће стране"
   },
   "panels/timeline/TimelinePanel.ts | disableJavascriptSamples": {
     "message": "Онемогући узорке JavaScript-а"
@@ -13374,7 +13335,7 @@
     "message": "Зауставља се хронологија…"
   },
   "panels/timeline/TimelinePanel.ts | thirdPartiesByThirdPartyWeb": {
-    "message": "3rd parties classified by third-party-web"
+    "message": "Треће стране су класификоване према независном вебу"
   },
   "panels/timeline/TimelinePanel.ts | time": {
     "message": "Време"
@@ -13653,7 +13614,7 @@
     "message": "{PH1}"
   },
   "panels/timeline/TimelineUIUtils.ts | entity": {
-    "message": "Third party"
+    "message": "Трећа страна"
   },
   "panels/timeline/TimelineUIUtils.ts | entryIsHidden": {
     "message": "(унос је скривен)"
@@ -13817,9 +13778,6 @@
   "panels/timeline/TimelineUIUtils.ts | selectorStatsTitle": {
     "message": "Статистика бирача"
   },
-  "panels/timeline/TimelineUIUtils.ts | selfTime": {
-    "message": "Време појединачне активности"
-  },
   "panels/timeline/TimelineUIUtils.ts | size": {
     "message": "Величина"
   },
@@ -13833,7 +13791,7 @@
     "message": "URL описа стила"
   },
   "panels/timeline/TimelineUIUtils.ts | thirdPartyTable": {
-    "message": "1st / 3rd party table"
+    "message": "Табела прве или треће стране"
   },
   "panels/timeline/TimelineUIUtils.ts | timeSpentInRendering": {
     "message": "Време проведено у рендеровању"
@@ -13849,9 +13807,6 @@
   },
   "panels/timeline/TimelineUIUtils.ts | timestamp": {
     "message": "Временска ознака"
-  },
-  "panels/timeline/TimelineUIUtils.ts | totalTime": {
-    "message": "Укупно време"
   },
   "panels/timeline/TimelineUIUtils.ts | traceEvent": {
     "message": "Догађај трага"
@@ -13920,7 +13875,7 @@
     "message": "Уклони подређене путање"
   },
   "panels/timeline/components/CPUThrottlingSelector.ts | calibrate": {
-    "message": "Calibrate…"
+    "message": "Калибришите…"
   },
   "panels/timeline/components/CPUThrottlingSelector.ts | cpu": {
     "message": "Процесор: {PH1}"
@@ -13932,7 +13887,7 @@
     "message": "Калибрисана задата подешавања"
   },
   "panels/timeline/components/CPUThrottlingSelector.ts | recalibrate": {
-    "message": "Recalibrate…"
+    "message": "Поново калибришите…"
   },
   "panels/timeline/components/CPUThrottlingSelector.ts | recommendedThrottling": {
     "message": "{PH1} – препоручено"
@@ -14424,7 +14379,7 @@
     "message": "Кодирани подаци"
   },
   "panels/timeline/components/NetworkRequestDetails.ts | entity": {
-    "message": "Third party"
+    "message": "Трећа страна"
   },
   "panels/timeline/components/NetworkRequestDetails.ts | fromCache": {
     "message": "Из кеша"
@@ -14568,16 +14523,16 @@
     "message": "Увид је експериментална функција. Ваше повратне информације ће нам помоћи да га побољшамо."
   },
   "panels/timeline/components/SidebarSingleInsightSet.ts | dismissTitle": {
-    "message": "Dismiss"
+    "message": "Одбаци"
   },
   "panels/timeline/components/SidebarSingleInsightSet.ts | fieldMismatchNotice": {
-    "message": "There are many reasons why local and field metrics [may not match](https://web.dev/articles/lab-and-field-data-differences). Adjust [throttling settings and device emulation](https://developer.chrome.com/docs/devtools/device-mode) to analyze traces more similar to the average user's environment."
+    "message": "Постоји много разлога због којих се локални и теренски показатељи [можда не подударају](https://web.dev/articles/lab-and-field-data-differences). Прилагодите [подешавања ограничавања и емулацију уређаја](https://developer.chrome.com/docs/devtools/device-mode) да бисте анализирали трагове који су сличнији окружењу просечног корисника."
   },
   "panels/timeline/components/SidebarSingleInsightSet.ts | fieldMismatchTitle": {
-    "message": "Field & local metrics mismatch"
+    "message": "Неподударање теренских и локалних показатеља"
   },
   "panels/timeline/components/SidebarSingleInsightSet.ts | fieldScoreLabel": {
-    "message": "Field ({PH1})"
+    "message": "Терен ({PH1})"
   },
   "panels/timeline/components/SidebarSingleInsightSet.ts | metricScore": {
     "message": "{PH1}: {PH3} резултат од {PH2}"
@@ -15885,7 +15840,7 @@
     "message": "Сортирај према"
   },
   "ui/legacy/components/data_grid/DataGrid.ts | sortableColumn": {
-    "message": "Sortable column. Press enter to apply sorting filter"
+    "message": "Колона која може да се сортира. Притисните Enter да бисте применили филтер за сортирање"
   },
   "ui/legacy/components/data_grid/ShowMoreDataGridNode.ts | showAllD": {
     "message": "Прикажи све: {PH1}"
@@ -16221,10 +16176,10 @@
     "message": "Пронађи"
   },
   "ui/legacy/components/source_frame/PreviewFactory.ts | failedToLoadData": {
-    "message": "Failed to load data"
+    "message": "Учитавање података није успело"
   },
   "ui/legacy/components/source_frame/PreviewFactory.ts | nothingToPreview": {
-    "message": "Nothing to preview"
+    "message": "Нема садржаја за преглед"
   },
   "ui/legacy/components/source_frame/ResourceSourceFrame.ts | find": {
     "message": "Пронађи"
