--- a/front_end/core/i18n/locales/sw.json
+++ b/front_end/core/i18n/locales/sw.json
@@ -105,7 +105,7 @@
     "message": "Dashibodi ya mtandao"
   },
   "core/common/Revealer.ts | securityPanel": {
-    "message": "Security panel"
+    "message": "Kidirisha cha usalama"
   },
   "core/common/Revealer.ts | sourcesPanel": {
     "message": "Kidirisha cha vyanzo"
@@ -2798,9 +2798,6 @@
   "panels/application/BackgroundServiceView.ts | clear": {
     "message": "Futa"
   },
-  "panels/application/BackgroundServiceView.ts | clickTheRecordButtonSOrHitSTo": {
-    "message": "Bofya kitufe cha kurekodi {PH1} au ubonyeze {PH2} ili uanze kurekodi."
-  },
   "panels/application/BackgroundServiceView.ts | devtoolsWillRecordAllSActivity": {
     "message": "DevTools itarekodi shughuli zote za {PH1} kwa hadi siku 3, hata wakati imefungwa."
   },
@@ -2812,9 +2809,6 @@
   },
   "panels/application/BackgroundServiceView.ts | instanceId": {
     "message": "Kitambulisho cha Tukio"
-  },
-  "panels/application/BackgroundServiceView.ts | learnMore": {
-    "message": "Pata maelezo zaidi"
   },
   "panels/application/BackgroundServiceView.ts | noMetadataForThisEvent": {
     "message": "Hamna metadata ya tukio hili"
@@ -2947,9 +2941,6 @@
   },
   "panels/application/IndexedDBViews.ts | objectStores": {
     "message": "Hifadhi za vipengee"
-  },
-  "panels/application/IndexedDBViews.ts | pleaseConfirmDeleteOfSDatabase": {
-    "message": "Tafadhali thibitisha ufutaji wa hifadhidata ya \"{PH1}\"."
   },
   "panels/application/IndexedDBViews.ts | primaryKey": {
     "message": "Ufunguo msingi"
@@ -3236,12 +3227,6 @@
   "panels/application/SharedStorageEventsView.ts | clickToDisplayBody": {
     "message": "Bofya tukio lolote la hifadhi inayoshirikiwa ili kuonyesha vigezo vya tukio."
   },
-  "panels/application/SharedStorageItemsView.ts | key": {
-    "message": "Ufunguo"
-  },
-  "panels/application/SharedStorageItemsView.ts | selectAValueToPreview": {
-    "message": "Chagua thamani ya kukagua kwanza"
-  },
   "panels/application/SharedStorageItemsView.ts | sharedStorage": {
     "message": "Hifadhi inayoshirikiwa"
   },
@@ -3257,17 +3242,8 @@
   "panels/application/SharedStorageItemsView.ts | sharedStorageItemEdited": {
     "message": "Kipengee cha nafasi ya hifadhi kimebadilishwa."
   },
-  "panels/application/SharedStorageItemsView.ts | sharedStorageItems": {
-    "message": "Vipengee vya Hifadhi Inayoshirikiwa"
-  },
   "panels/application/SharedStorageItemsView.ts | sharedStorageItemsCleared": {
     "message": "Vipengee vya Hifadhi Inayoshirikiwa vimeondolewa"
-  },
-  "panels/application/SharedStorageItemsView.ts | sharedStorageNumberEntries": {
-    "message": "Idadi ya vipengee iliyoonyeshwa kwenye jedwali: {PH1}"
-  },
-  "panels/application/SharedStorageItemsView.ts | value": {
-    "message": "Thamani"
   },
   "panels/application/SharedStorageListTreeElement.ts | sharedStorage": {
     "message": "Hifadhi inayoshirikiwa"
@@ -4262,9 +4238,6 @@
   "panels/application/components/TrustTokensView.ts | issuer": {
     "message": "Mtoaji"
   },
-  "panels/application/components/TrustTokensView.ts | noTrustTokensStored": {
-    "message": "Hakuna tokeni za hali ya faragha zilizohifadhiwa kwa sasa."
-  },
   "panels/application/components/TrustTokensView.ts | storedTokenCount": {
     "message": "Idadi ya tokeni zilizohifadhiwa"
   },
@@ -4950,7 +4923,7 @@
     "message": "Orodha ya Sehemu za Kudhibiti DOM"
   },
   "panels/browser_debugger/DOMBreakpointsSidebarPane.ts | noBreakpoints": {
-    "message": "No DOM breakpoints set"
+    "message": "Hakuna sehemu ya kusitisha utekelezaji wa msimbo kwa ajili ya utatuzi wa DOM zilizowekwa"
   },
   "panels/browser_debugger/DOMBreakpointsSidebarPane.ts | nodeRemoved": {
     "message": "Kituo kimeondolewa"
@@ -5067,19 +5040,19 @@
     "message": "{PH1} (kutoka ramani chanzo)"
   },
   "panels/changes/ChangesView.ts | binaryDataDescription": {
-    "message": "The changes tab doesn't show binary data changes"
+    "message": "Kichupo cha mabadiliko hakionyeshi mabadiliko ya data ya mfumo wa jozi"
   },
   "panels/changes/ChangesView.ts | changesViewDescription": {
-    "message": "On this page you can track code changes made within DevTools."
+    "message": "Kwenye ukurasa huu unaweza kufuatilia mabadiliko ya msimbo yaliyofanyika kwenye Zana za Wasanidi Programu."
   },
   "panels/changes/ChangesView.ts | copy": {
     "message": "Nakili"
   },
   "panels/changes/ChangesView.ts | noChanges": {
-    "message": "No changes yet"
+    "message": "Bado hakuna mabadiliko"
   },
   "panels/changes/ChangesView.ts | noTextualDiff": {
-    "message": "No textual diff available"
+    "message": "Hakuna utofauti wa maandishi"
   },
   "panels/changes/ChangesView.ts | sDeletions": {
     "message": "{n,plural, =1{Tukio # la ufutaji (-)}other{Matukio # ya ufutaji (-)}}"
@@ -5298,7 +5271,7 @@
     "message": " M<XX>"
   },
   "panels/console/ConsoleViewMessage.ts | SeeIssueInCookieReport": {
-    "message": "Click to open privacy and security panel and show third-party cookie report"
+    "message": "Bofya ili ufungue kidirisha cha usalama na uonyeshe ripoti ya vidakuzi vya mshirika mwingine"
   },
   "panels/console/ConsoleViewMessage.ts | assertionFailed": {
     "message": "Kauli ya ukweli haijatimizwa: "
@@ -6747,7 +6720,7 @@
     "message": "Ufuatiliaji wa rafu"
   },
   "panels/explain/components/ConsoleInsight.ts | timedOut": {
-    "message": "Generating a response took too long. Please try again."
+    "message": "Imechukua muda mrefu zaidi kutayarisha jibu. Tafadhali jaribu tena."
   },
   "panels/explain/components/ConsoleInsight.ts | turnOnInSettings": {
     "message": "Washa {PH1} ili upokee usaidizi wa AI ili kuelewa na kushughulikia hitilafu na tahadhari za dashibodi."
@@ -7911,7 +7884,7 @@
     "message": "Weka {PH1}"
   },
   "panels/mobile_throttling/ThrottlingManager.ts | calibrate": {
-    "message": "Calibrate…"
+    "message": "Rekebisha…"
   },
   "panels/mobile_throttling/ThrottlingManager.ts | cpuThrottling": {
     "message": "Kupunguza kasi ya kiini cha kompyuta (CPU)"
@@ -7935,7 +7908,7 @@
     "message": "Nje ya mtandao"
   },
   "panels/mobile_throttling/ThrottlingManager.ts | recalibrate": {
-    "message": "Recalibrate…"
+    "message": "Rekebisha tena…"
   },
   "panels/mobile_throttling/ThrottlingManager.ts | recommendedThrottling": {
     "message": "{PH1} – inapendekezwa"
@@ -8895,7 +8868,7 @@
     "message": "Ombi hili halina vidakuzi."
   },
   "panels/network/RequestInitiatorView.ts | noInitiator": {
-    "message": "No initiator data"
+    "message": "Hakuna data ya kianzishi"
   },
   "panels/network/RequestInitiatorView.ts | requestCallStack": {
     "message": "Rafu ya maombi ya kutekeleza"
@@ -8961,10 +8934,10 @@
     "message": "Imeshindwa kupakia data ya jibu"
   },
   "panels/network/RequestResponseView.ts | noPreview": {
-    "message": "Nothing to preview"
+    "message": "Hakuna data ya kukagua"
   },
   "panels/network/RequestResponseView.ts | thisRequestHasNoResponseData": {
-    "message": "This request has no response data available"
+    "message": "Ombi hili halina data ya jibu inayopatikana"
   },
   "panels/network/RequestTimingView.ts | cacheStorageCacheNameS": {
     "message": "Jina la akiba ya hifadhi ya akiba: {PH1}"
@@ -10139,9 +10112,6 @@
   "panels/profiler/ProfilesPanel.ts | cantLoadProfileWhileAnother": {
     "message": "Haiwezi kupakia wasifu wakati wasifu mwingine unarekodiwa."
   },
-  "panels/profiler/ProfilesPanel.ts | profileLoadingFailedS": {
-    "message": "Imeshindwa kupakia wasifu: {PH1}."
-  },
   "panels/profiler/ProfilesPanel.ts | profiles": {
     "message": "Wasifu"
   },
@@ -10251,7 +10221,7 @@
     "message": "Hifadhi"
   },
   "panels/protocol_monitor/ProtocolMonitor.ts | selectAMessageToView": {
-    "message": "Select a message to see its details"
+    "message": "Chagua ujumbe ili uone maelezo yake"
   },
   "panels/protocol_monitor/ProtocolMonitor.ts | selectTarget": {
     "message": "Chagua lengo"
@@ -10290,7 +10260,7 @@
     "message": "Nakili rekodi au hatua iliyochaguliwa"
   },
   "panels/recorder/RecorderController.ts | createRecording": {
-    "message": "Create recording"
+    "message": "Tayarisha rekodi"
   },
   "panels/recorder/RecorderController.ts | deleteRecording": {
     "message": "Futa rekodi"
@@ -10308,13 +10278,13 @@
     "message": "Pata viendelezi..."
   },
   "panels/recorder/RecorderController.ts | header": {
-    "message": "Nothing recorded yet"
+    "message": "Bado hakuna rekodi"
   },
   "panels/recorder/RecorderController.ts | importRecording": {
     "message": "Pakia rekodi ya sauti"
   },
   "panels/recorder/RecorderController.ts | learnMore": {
-    "message": "Learn more"
+    "message": "Pata maelezo zaidi"
   },
   "panels/recorder/RecorderController.ts | noRecordings": {
     "message": "Hakuna rekodi"
@@ -10323,7 +10293,7 @@
     "message": "rekodi"
   },
   "panels/recorder/RecorderController.ts | recordingDescription": {
-    "message": "Use recordings to create automated end-to-end tests or performance traces."
+    "message": "Tumia rekodi kutayarisha historia za shughuli ya utendaji au majaribio ya kiotomatiki ya mwanzo hadi mwisho."
   },
   "panels/recorder/RecorderController.ts | replayRecording": {
     "message": "Cheza tena rekodi"
@@ -11496,7 +11466,7 @@
     "message": "Ujumbe wa dashibodi, ufuatiliaji wa rafu unaohusishwa, msimbo wa tovuti unaohusiana na vichwa vya mtandao unaohusishwa hutumwa kwa Google ili kutayarisha ufafanuzi. Huenda data hii ikaonwa na wahakiki wanadamu ili kuboresha kipengele hiki."
   },
   "panels/settings/AISettingsTab.ts | consoleInsightsSendsDataNoLogging": {
-    "message": "The console message, associated stack trace, related source code, and the associated network headers are sent to Google to generate explanations. This data will not be used to improve Google’s AI models."
+    "message": "Ujumbe wa dashibodi, ufuatiliaji wa rafu unaohusishwa, msimbo wa tovuti unaohusiana na vichwa vya mtandao vinavyohusishwa hutumwa kwenda Google ili kutayarisha ufafanuzi. Data hii haitatumika kuboresha mifumo ya Google AI."
   },
   "panels/settings/AISettingsTab.ts | dataCollection": {
     "message": "Kulingana na eneo uliko, huenda Google isikusanye data"
@@ -11532,7 +11502,7 @@
     "message": "Data yoyote ambayo ukurasa uliokaguliwa unaweza kufikia kupitia API za Wavuti, maombi ya mtandao, faili na ufuatiliaji wa utendaji hutumwa kwenda Google ili kutayarisha ufafanuzi. Huenda wahakiki wanadamu wakaona data ili kuboresha kipengele hiki. Usiitumie kwenye kurasa zilizo na taarifa binafsi au nyeti."
   },
   "panels/settings/AISettingsTab.ts | freestylerSendsDataNoLogging": {
-    "message": "Any data the inspected page can access via Web APIs, network requests, files, and performance traces are sent to Google to generate explanations. This data will not be used to improve Google’s AI models."
+    "message": "Data yoyote ambayo ukurasa uliokaguliwa unaweza kufikia kupitia API za Wavuti, maombi ya mtandao, faili na ufuatiliaji wa utendaji hutumwa kwenda Google ili kutayarisha ufafanuzi. Data hii haitatumika kuboresha mifumo ya Google AI."
   },
   "panels/settings/AISettingsTab.ts | helpUnderstandConsole": {
     "message": "Hukusaidia kuelewa na kurekebisha hitilafu na tahadhari za dashibodi"
@@ -12259,15 +12229,6 @@
   },
   "panels/sources/NavigatorView.ts | actionCannotBeUndone": {
     "message": "Kitendo hiki hakiwezi kutenduliwa."
-  },
-  "panels/sources/NavigatorView.ts | areYouSureYouWantToDeleteFolder": {
-    "message": "Je, una uhakika ungependa kufuta folda hii na maudhui yake?"
-  },
-  "panels/sources/NavigatorView.ts | areYouSureYouWantToDeleteThis": {
-    "message": "Una uhakika unataka kufuta faili hii?"
-  },
-  "panels/sources/NavigatorView.ts | areYouSureYouWantToExcludeThis": {
-    "message": "Je, una uhakika unataka kuondoa folda hii?"
   },
   "panels/sources/NavigatorView.ts | areYouSureYouWantToRemoveThis": {
     "message": "Ungependa kuondoa ‘{PH1}’ kwenye Workspace?"
@@ -13041,7 +13002,7 @@
     "message": "Kikundi hiki kinajumuisha muda uliotumika kwenye vichwa vya majibu ya mtandao wa Server-Timing. Muda husika wa kuanza hukadiriwa tu na huenda usiwe sahihi."
   },
   "panels/timeline/ThirdPartyTreeView.ts | firstOrThirdPartyName": {
-    "message": "1st / 3rd party"
+    "message": "Asasi ya kwanza / Asasi nyingine"
   },
   "panels/timeline/ThirdPartyTreeView.ts | selfTime": {
     "message": "Muda wa shughuli mahususi"
@@ -13254,7 +13215,7 @@
     "message": "Maelezo"
   },
   "panels/timeline/TimelinePanel.ts | dimThirdParties": {
-    "message": "Dim 3rd parties"
+    "message": "Punguza uonekanaji wa maudhui ya wengine"
   },
   "panels/timeline/TimelinePanel.ts | disableJavascriptSamples": {
     "message": "Zima sampuli za JavaScript"
@@ -13374,7 +13335,7 @@
     "message": "Inakomesha rekodi ya matukio…"
   },
   "panels/timeline/TimelinePanel.ts | thirdPartiesByThirdPartyWeb": {
-    "message": "3rd parties classified by third-party-web"
+    "message": "Washirika wengine wameainishwa na wavuti wa mshirika mwingine"
   },
   "panels/timeline/TimelinePanel.ts | time": {
     "message": "Saa"
@@ -13653,7 +13614,7 @@
     "message": "{PH1}"
   },
   "panels/timeline/TimelineUIUtils.ts | entity": {
-    "message": "Third party"
+    "message": "Asasi nyingine"
   },
   "panels/timeline/TimelineUIUtils.ts | entryIsHidden": {
     "message": "(kipengee kimefichwa)"
@@ -13817,9 +13778,6 @@
   "panels/timeline/TimelineUIUtils.ts | selectorStatsTitle": {
     "message": "Takwimu za kiteuzi"
   },
-  "panels/timeline/TimelineUIUtils.ts | selfTime": {
-    "message": "Muda wa shughuli mahususi"
-  },
   "panels/timeline/TimelineUIUtils.ts | size": {
     "message": "Ukubwa"
   },
@@ -13833,7 +13791,7 @@
     "message": "URL ya Laha ya Muundo"
   },
   "panels/timeline/TimelineUIUtils.ts | thirdPartyTable": {
-    "message": "1st / 3rd party table"
+    "message": "Jedwali la washirika wa kwanza na washirika wengine"
   },
   "panels/timeline/TimelineUIUtils.ts | timeSpentInRendering": {
     "message": "Muda uliotumika katika utekelezaji"
@@ -13849,9 +13807,6 @@
   },
   "panels/timeline/TimelineUIUtils.ts | timestamp": {
     "message": "Muhuri wa wakati"
-  },
-  "panels/timeline/TimelineUIUtils.ts | totalTime": {
-    "message": "Muda wote"
   },
   "panels/timeline/TimelineUIUtils.ts | traceEvent": {
     "message": "Tukio la ufuatiliaji"
@@ -13920,7 +13875,7 @@
     "message": "Ondoa daraja za kurasa tegemezi"
   },
   "panels/timeline/components/CPUThrottlingSelector.ts | calibrate": {
-    "message": "Calibrate…"
+    "message": "Rekebisha…"
   },
   "panels/timeline/components/CPUThrottlingSelector.ts | cpu": {
     "message": "Kiini cha kompyuta (CPU): {PH1}"
@@ -13932,7 +13887,7 @@
     "message": "Mipangilio iliyowekwa mapema iliyorekebishwa"
   },
   "panels/timeline/components/CPUThrottlingSelector.ts | recalibrate": {
-    "message": "Recalibrate…"
+    "message": "Rekebisha tena…"
   },
   "panels/timeline/components/CPUThrottlingSelector.ts | recommendedThrottling": {
     "message": "{PH1} – inapendekezwa"
@@ -14424,7 +14379,7 @@
     "message": "Data iliyosimbwa"
   },
   "panels/timeline/components/NetworkRequestDetails.ts | entity": {
-    "message": "Third party"
+    "message": "Asasi nyingine"
   },
   "panels/timeline/components/NetworkRequestDetails.ts | fromCache": {
     "message": "Kutoka kwenye akiba"
@@ -14568,16 +14523,16 @@
     "message": "Maarifa ni kipengele cha majaribio. Maoni yako yatatusaidia kukiboresha."
   },
   "panels/timeline/components/SidebarSingleInsightSet.ts | dismissTitle": {
-    "message": "Dismiss"
+    "message": "Ondoa"
   },
   "panels/timeline/components/SidebarSingleInsightSet.ts | fieldMismatchNotice": {
-    "message": "There are many reasons why local and field metrics [may not match](https://web.dev/articles/lab-and-field-data-differences). Adjust [throttling settings and device emulation](https://developer.chrome.com/docs/devtools/device-mode) to analyze traces more similar to the average user's environment."
+    "message": "Kuna sababu nyingi zinazoweza kupelekea vipimo vya vifaa na vya watumiaji halisi [visilingane](https://web.dev/articles/lab-and-field-data-differences). Rekebisha [mipangilio ya kupunguza kasi na uigaji wa kifaa](https://developer.chrome.com/docs/devtools/device-mode) ili uchanganue historia ya shughuli zinazolingana zaidi na wastani wa mazingira ya mtumiaji."
   },
   "panels/timeline/components/SidebarSingleInsightSet.ts | fieldMismatchTitle": {
-    "message": "Field & local metrics mismatch"
+    "message": "Vipimo vya watumiaji halisi na vya vifaa havilingani"
   },
   "panels/timeline/components/SidebarSingleInsightSet.ts | fieldScoreLabel": {
-    "message": "Field ({PH1})"
+    "message": "Sehemu ya ({PH1})"
   },
   "panels/timeline/components/SidebarSingleInsightSet.ts | metricScore": {
     "message": "{PH1}: Alama {PH2} {PH3}"
@@ -15885,7 +15840,7 @@
     "message": "Panga Kulingana na"
   },
   "ui/legacy/components/data_grid/DataGrid.ts | sortableColumn": {
-    "message": "Sortable column. Press enter to apply sorting filter"
+    "message": "Safu wima inayoweza kupangwa. Bonyeza 'enter' ili utumie kichujio cha kupanga"
   },
   "ui/legacy/components/data_grid/ShowMoreDataGridNode.ts | showAllD": {
     "message": "Onyesha zote {PH1}"
@@ -16221,10 +16176,10 @@
     "message": "Tafuta"
   },
   "ui/legacy/components/source_frame/PreviewFactory.ts | failedToLoadData": {
-    "message": "Failed to load data"
+    "message": "Imeshindwa kupakia data"
   },
   "ui/legacy/components/source_frame/PreviewFactory.ts | nothingToPreview": {
-    "message": "Nothing to preview"
+    "message": "Hakuna data ya kukagua"
   },
   "ui/legacy/components/source_frame/ResourceSourceFrame.ts | find": {
     "message": "Tafuta"
