--- a/front_end/core/i18n/locales/ta.json
+++ b/front_end/core/i18n/locales/ta.json
@@ -105,7 +105,7 @@
     "message": "நெட்வொர்க் பேனல்"
   },
   "core/common/Revealer.ts | securityPanel": {
-    "message": "Security panel"
+    "message": "பாதுகாப்புப் பேனல்"
   },
   "core/common/Revealer.ts | sourcesPanel": {
     "message": "ஆதாரங்கள் பேனல்"
@@ -2798,9 +2798,6 @@
   "panels/application/BackgroundServiceView.ts | clear": {
     "message": "அழி"
   },
-  "panels/application/BackgroundServiceView.ts | clickTheRecordButtonSOrHitSTo": {
-    "message": "{PH1} செய்ய ரெக்கார்டு பட்டனைக் கிளிக் செய்யவும் அல்லது ரெக்கார்டிங்கைத் தொடங்க {PH2} விசைகளை அழுத்தவும்."
-  },
   "panels/application/BackgroundServiceView.ts | devtoolsWillRecordAllSActivity": {
     "message": "அனைத்து {PH1} செயல்பாடுகளையும் மூடப்பட்டிருக்கும்போது கூட 3 நாட்கள் வரை DevTools ரெக்கார்டு செய்யும்."
   },
@@ -2812,9 +2809,6 @@
   },
   "panels/application/BackgroundServiceView.ts | instanceId": {
     "message": "நேர்வு ID"
-  },
-  "panels/application/BackgroundServiceView.ts | learnMore": {
-    "message": "மேலும் அறிக"
   },
   "panels/application/BackgroundServiceView.ts | noMetadataForThisEvent": {
     "message": "இந்த நிகழ்விற்குத் தரவுத்தகவல் இல்லை"
@@ -2947,9 +2941,6 @@
   },
   "panels/application/IndexedDBViews.ts | objectStores": {
     "message": "ஆப்ஜெக்ட் சேமிப்பு"
-  },
-  "panels/application/IndexedDBViews.ts | pleaseConfirmDeleteOfSDatabase": {
-    "message": "\"{PH1}\" தரவுத்தளம் நீக்கப்பட்டதை உறுதிப்படுத்தவும்."
   },
   "panels/application/IndexedDBViews.ts | primaryKey": {
     "message": "முதன்மை விசை"
@@ -3236,12 +3227,6 @@
   "panels/application/SharedStorageEventsView.ts | clickToDisplayBody": {
     "message": "நிகழ்வு அளவுருக்களைக் காட்ட ஏதேனும் ஒரு பகிர்ந்த சேமிப்பக நிகழ்வைக் கிளிக் செய்யலாம்."
   },
-  "panels/application/SharedStorageItemsView.ts | key": {
-    "message": "குறியீடு"
-  },
-  "panels/application/SharedStorageItemsView.ts | selectAValueToPreview": {
-    "message": "மாதிரிக்காட்சியைப் பார்க்க ஒரு மதிப்பைத் தேர்ந்தெடுக்கவும்"
-  },
   "panels/application/SharedStorageItemsView.ts | sharedStorage": {
     "message": "பகிர்ந்த சேமிப்பகம்"
   },
@@ -3257,17 +3242,8 @@
   "panels/application/SharedStorageItemsView.ts | sharedStorageItemEdited": {
     "message": "சேமிப்பக மதிப்பு திருத்தப்பட்டது."
   },
-  "panels/application/SharedStorageItemsView.ts | sharedStorageItems": {
-    "message": "பகிர்ந்த சேமிப்பக மதிப்புகள்"
-  },
   "panels/application/SharedStorageItemsView.ts | sharedStorageItemsCleared": {
     "message": "பகிர்ந்த சேமிப்பக மதிப்புகள் அழிக்கப்பட்டன"
-  },
-  "panels/application/SharedStorageItemsView.ts | sharedStorageNumberEntries": {
-    "message": "இந்த அட்டவணையில் காட்டப்படும் உள்ளீடுகளின் எண்ணிக்கை: {PH1}"
-  },
-  "panels/application/SharedStorageItemsView.ts | value": {
-    "message": "மதிப்பு"
   },
   "panels/application/SharedStorageListTreeElement.ts | sharedStorage": {
     "message": "பகிர்ந்த சேமிப்பகம்"
@@ -4262,9 +4238,6 @@
   "panels/application/components/TrustTokensView.ts | issuer": {
     "message": "வழங்குபவர்"
   },
-  "panels/application/components/TrustTokensView.ts | noTrustTokensStored": {
-    "message": "தனிப்பட்ட நிலை டோக்கன்கள் எதுவும் தற்போது சேமிக்கப்படவில்லை."
-  },
   "panels/application/components/TrustTokensView.ts | storedTokenCount": {
     "message": "சேமிக்கப்பட்ட டோக்கன்களின் எண்ணிக்கை"
   },
@@ -4950,7 +4923,7 @@
     "message": "DOM பிரேக்பாயிண்ட்டுகள் பட்டியல்"
   },
   "panels/browser_debugger/DOMBreakpointsSidebarPane.ts | noBreakpoints": {
-    "message": "No DOM breakpoints set"
+    "message": "DOM பிரேக்பாயிண்ட்டுகள் அமைக்கப்படவில்லை"
   },
   "panels/browser_debugger/DOMBreakpointsSidebarPane.ts | nodeRemoved": {
     "message": "கணு அகற்றப்பட்டது"
@@ -5067,19 +5040,19 @@
     "message": "{PH1} (சோர்ஸ் மேப்பில் இருந்து)"
   },
   "panels/changes/ChangesView.ts | binaryDataDescription": {
-    "message": "The changes tab doesn't show binary data changes"
+    "message": "'மாற்றங்கள் பக்கம்' பைனரி தரவு மாற்றங்களைக் காட்டாது"
   },
   "panels/changes/ChangesView.ts | changesViewDescription": {
-    "message": "On this page you can track code changes made within DevTools."
+    "message": "டெவெலப்பர் கருவிகளில் செய்யப்பட்ட குறியீட்டு மாற்றங்களை இந்தப் பக்கத்தில் கண்காணிக்கலாம்."
   },
   "panels/changes/ChangesView.ts | copy": {
     "message": "நகலெடு"
   },
   "panels/changes/ChangesView.ts | noChanges": {
-    "message": "No changes yet"
+    "message": "தற்போது மாற்றங்கள் எதுவுமில்லை"
   },
   "panels/changes/ChangesView.ts | noTextualDiff": {
-    "message": "No textual diff available"
+    "message": "வார்த்தை வித்தியாசம் எதுவுமில்லை"
   },
   "panels/changes/ChangesView.ts | sDeletions": {
     "message": "{n,plural, =1{# நீக்குதல் (-)}other{# நீக்குதல்கள் (-)}}"
@@ -5298,7 +5271,7 @@
     "message": " M<XX>"
   },
   "panels/console/ConsoleViewMessage.ts | SeeIssueInCookieReport": {
-    "message": "Click to open privacy and security panel and show third-party cookie report"
+    "message": "தனியுரிமை மற்றும் பாதுகாப்பு பேனலைத் திறந்து மூன்றாம் தரப்புக் குக்கீ அறிக்கையைப் பார்க்க கிளிக் செய்யவும்"
   },
   "panels/console/ConsoleViewMessage.ts | assertionFailed": {
     "message": "அசர்ஷென் தோல்வியுற்றது: "
@@ -6747,7 +6720,7 @@
     "message": "ஸ்டாக் டிரேஸ்:"
   },
   "panels/explain/components/ConsoleInsight.ts | timedOut": {
-    "message": "Generating a response took too long. Please try again."
+    "message": "பதிலை உருவாக்க மிக அதிக நேரம் ஆகிவிட்டது. மீண்டும் முயலவும்."
   },
   "panels/explain/components/ConsoleInsight.ts | turnOnInSettings": {
     "message": "கன்சோல் எச்சரிக்கைகளையும் பிழைகளையும் புரிந்துகொண்டு அவற்றைச் சரிசெய்வதற்காக AI உதவிபெற {PH1} அம்சத்தை இயக்குங்கள்."
@@ -7911,7 +7884,7 @@
     "message": "{PH1} ஐச் சேர்க்கும்"
   },
   "panels/mobile_throttling/ThrottlingManager.ts | calibrate": {
-    "message": "Calibrate…"
+    "message": "சீராக்குங்கள்…"
   },
   "panels/mobile_throttling/ThrottlingManager.ts | cpuThrottling": {
     "message": "CPU த்ராட்லிங்"
@@ -7935,7 +7908,7 @@
     "message": "ஆஃப்லைன்"
   },
   "panels/mobile_throttling/ThrottlingManager.ts | recalibrate": {
-    "message": "Recalibrate…"
+    "message": "மீண்டும் சீரமையுங்கள்…"
   },
   "panels/mobile_throttling/ThrottlingManager.ts | recommendedThrottling": {
     "message": "{PH1} – பரிந்துரைக்கப்படுகிறது"
@@ -8895,7 +8868,7 @@
     "message": "இந்தக் கோரிக்கையில் குக்கீகள் இல்லை."
   },
   "panels/network/RequestInitiatorView.ts | noInitiator": {
-    "message": "No initiator data"
+    "message": "இனிஷியேட்டர் தரவு எதுவுமில்லை"
   },
   "panels/network/RequestInitiatorView.ts | requestCallStack": {
     "message": "கோரிக்கைக்கான கால் ஸ்டாக்"
@@ -8961,10 +8934,10 @@
     "message": "பதில் தரவை ஏற்ற முடியவில்லை"
   },
   "panels/network/RequestResponseView.ts | noPreview": {
-    "message": "Nothing to preview"
+    "message": "மாதிரிக்காட்சி எதுவுமில்லை"
   },
   "panels/network/RequestResponseView.ts | thisRequestHasNoResponseData": {
-    "message": "This request has no response data available"
+    "message": "இந்தக் கோரிக்கைக்கு பதில் தரவு எதுவுமில்லை"
   },
   "panels/network/RequestTimingView.ts | cacheStorageCacheNameS": {
     "message": "தற்காலிக நினைவகச் சேமிப்பகத்தின் பெயர்: {PH1}"
@@ -10139,9 +10112,6 @@
   "panels/profiler/ProfilesPanel.ts | cantLoadProfileWhileAnother": {
     "message": "வேறொரு ப்ரொஃபைல் ரெக்கார்டு செய்யப்படும்போது இந்த ப்ரொஃபைலை ஏற்ற முடியாது."
   },
-  "panels/profiler/ProfilesPanel.ts | profileLoadingFailedS": {
-    "message": "சுயவிவரத்தை ஏற்ற முடியவில்லை {PH1}."
-  },
   "panels/profiler/ProfilesPanel.ts | profiles": {
     "message": "சுயவிவரங்கள்"
   },
@@ -10251,7 +10221,7 @@
     "message": "சேமி"
   },
   "panels/protocol_monitor/ProtocolMonitor.ts | selectAMessageToView": {
-    "message": "Select a message to see its details"
+    "message": "ஒரு மெசேஜின் விவரங்களைப் பார்க்க அதனைத் தேர்ந்தெடுக்கவும்"
   },
   "panels/protocol_monitor/ProtocolMonitor.ts | selectTarget": {
     "message": "இலக்கைத் தேர்ந்தெடுக்கவும்"
@@ -10290,7 +10260,7 @@
     "message": "ரெக்கார்டிங் அல்லது தேர்ந்தெடுத்த படியை நகலெடுத்தல்"
   },
   "panels/recorder/RecorderController.ts | createRecording": {
-    "message": "Create recording"
+    "message": "ரெக்கார்டிங்கை உருவாக்கு"
   },
   "panels/recorder/RecorderController.ts | deleteRecording": {
     "message": "ரெக்கார்டிங்கை நீக்கு"
@@ -10308,13 +10278,13 @@
     "message": "நீட்டிப்புகளைப் பெறுக…"
   },
   "panels/recorder/RecorderController.ts | header": {
-    "message": "Nothing recorded yet"
+    "message": "இன்னும் எதுவும் ரெக்கார்டு செய்யப்படவில்லை"
   },
   "panels/recorder/RecorderController.ts | importRecording": {
     "message": "ரெக்கார்டிங்கைப் பதிவேற்று"
   },
   "panels/recorder/RecorderController.ts | learnMore": {
-    "message": "Learn more"
+    "message": "மேலும் அறிக"
   },
   "panels/recorder/RecorderController.ts | noRecordings": {
     "message": "ரெக்கார்டிங்குகள் எதுவுமில்லை"
@@ -10323,7 +10293,7 @@
     "message": "ரெக்கார்டிங்குகள்"
   },
   "panels/recorder/RecorderController.ts | recordingDescription": {
-    "message": "Use recordings to create automated end-to-end tests or performance traces."
+    "message": "தானாக இயங்கும் முழுமையான பரிசோதனைகள் அல்லது செயல்திறன் டிரேஸ்களை உருவாக்க ரெக்கார்டிங்குகளைப் பயன்படுத்தலாம்."
   },
   "panels/recorder/RecorderController.ts | replayRecording": {
     "message": "ரெக்கார்டிங்கை மீண்டும் பிளே செய்"
@@ -11496,7 +11466,7 @@
     "message": "கன்சோல் மெசேஜ், இணைக்கப்பட்டுள்ள ஸ்டாக் டிரேஸ், தொடர்புடைய மூலக் குறியீடு, இணைக்கப்பட்டுள்ள நெட்வொர்க் தலைப்புகள் ஆகியவை விளக்கங்களை உருவாக்குவதற்காக Googleளுக்கு அனுப்பப்படும். இந்த அம்சத்தை மேம்படுத்துவதற்காக இந்தத் தரவு மதிப்பாய்வாளர்களுக்குக் காட்டப்படலாம்."
   },
   "panels/settings/AISettingsTab.ts | consoleInsightsSendsDataNoLogging": {
-    "message": "The console message, associated stack trace, related source code, and the associated network headers are sent to Google to generate explanations. This data will not be used to improve Google’s AI models."
+    "message": "கன்சோல் மெசேஜ், இணைக்கப்பட்டுள்ள ஸ்டாக் டிரேஸ், தொடர்புடைய மூலக் குறியீடு, இணைக்கப்பட்டுள்ள நெட்வொர்க் தலைப்புகள் ஆகியவை விளக்கங்களை உருவாக்குவதற்காக Googleளுக்கு அனுப்பப்படும். இந்தத் தரவு Google AI மாடல்களை மேம்படுத்தப் பயன்படுத்தப்படாது."
   },
   "panels/settings/AISettingsTab.ts | dataCollection": {
     "message": "உங்கள் பிராந்தியத்தைப் பொறுத்து தரவுச் சேகரிப்பை Google தவிர்க்கக்கூடும்"
@@ -11532,7 +11502,7 @@
     "message": "பரிசோதனை செய்யப்பட்ட பக்கம் Web APIகள், நெட்வொர்க் கோரிக்கைகள், ஃபைல்கள், செயல்திறன் டிரேஸ்கள் ஆகியவற்றின் வழியாக அணுகக்கூடிய எந்தத் தரவும் விளக்கங்களை உருவாக்குவதற்காக Googleளுக்கு அனுப்பப்படுகிறது. இந்த அம்சத்தை மேம்படுத்துவதற்காக இந்தத் தரவு மதிப்பாய்வாளர்களுக்குக் காட்டப்படலாம். தனிப்பட்ட அல்லது பாதுகாக்கவேண்டிய தகவல் இருக்கும் பக்கங்களில் பயன்படுத்த வேண்டாம்."
   },
   "panels/settings/AISettingsTab.ts | freestylerSendsDataNoLogging": {
-    "message": "Any data the inspected page can access via Web APIs, network requests, files, and performance traces are sent to Google to generate explanations. This data will not be used to improve Google’s AI models."
+    "message": "Web APIகள், நெட்வொர்க் கோரிக்கைகள், ஃபைல்கள், செயல்திறன் டிரேஸ்கள் ஆகியவற்றின் மூலம், பரிசோதனை செய்யப்பட்ட பக்கம் அணுகக்கூடிய எந்தத் தரவும் விளக்கங்களை உருவாக்குவதற்காக Googleளுக்கு அனுப்பப்படுகிறது. இந்தத் தரவு Google AI மாடல்களை மேம்படுத்தப் பயன்படுத்தப்படாது."
   },
   "panels/settings/AISettingsTab.ts | helpUnderstandConsole": {
     "message": "கன்சோல் எச்சரிக்கைகள் மற்றும் பிழைகளைப் புரிந்துகொண்டு சரிசெய்ய உதவும்"
@@ -12259,15 +12229,6 @@
   },
   "panels/sources/NavigatorView.ts | actionCannotBeUndone": {
     "message": "இதைச் செயல்தவிர்க்க முடியாது."
-  },
-  "panels/sources/NavigatorView.ts | areYouSureYouWantToDeleteFolder": {
-    "message": "இந்த ஃபோல்டரையும் அதில் உள்ளவற்றையும் நிச்சயமாக நீக்கவா?"
-  },
-  "panels/sources/NavigatorView.ts | areYouSureYouWantToDeleteThis": {
-    "message": "இந்த ஃபைலை நீக்க விரும்புகிறீர்களா?"
-  },
-  "panels/sources/NavigatorView.ts | areYouSureYouWantToExcludeThis": {
-    "message": "இந்த ஃபோல்டரை நிச்சயமாக விலக்க விரும்புகிறீர்களா?"
   },
   "panels/sources/NavigatorView.ts | areYouSureYouWantToRemoveThis": {
     "message": "வொர்க்ஸ்பேஸில் இருந்து ‘{PH1}’ ஐ அகற்றவா?"
@@ -13041,7 +13002,7 @@
     "message": "இந்த டிராக்கில் சேவையக நேர நெட்வொர்க் ரெஸ்பான்ஸ் தலைப்புகளில் இருந்து எடுக்கப்பட்ட நேரங்கள் உள்ளன. அவற்றின் தொடக்க நேரங்கள் மட்டுமே கணக்கிடப்படுகின்றன, அவை துல்லியமற்றதாக இருக்கக்கூடும்."
   },
   "panels/timeline/ThirdPartyTreeView.ts | firstOrThirdPartyName": {
-    "message": "1st / 3rd party"
+    "message": "முதல்/மூன்றாம் தரப்பு"
   },
   "panels/timeline/ThirdPartyTreeView.ts | selfTime": {
     "message": "செயல்பாட்டின் கால அளவு"
@@ -13254,7 +13215,7 @@
     "message": "விளக்கம்"
   },
   "panels/timeline/TimelinePanel.ts | dimThirdParties": {
-    "message": "Dim 3rd parties"
+    "message": "மூன்றாம் தரப்புகளைக் காட்டுவதைக் குறை"
   },
   "panels/timeline/TimelinePanel.ts | disableJavascriptSamples": {
     "message": "JavaScript மாதிரிகளை முடக்கு"
@@ -13374,7 +13335,7 @@
     "message": "காலப்பதிவை நிறுத்துகிறது…"
   },
   "panels/timeline/TimelinePanel.ts | thirdPartiesByThirdPartyWeb": {
-    "message": "3rd parties classified by third-party-web"
+    "message": "மூன்றாம் தரப்பு இணையத்தால் வகைப்படுத்தப்பட்ட மூன்றாம் தரப்பினர்"
   },
   "panels/timeline/TimelinePanel.ts | time": {
     "message": "நேரம்"
@@ -13653,7 +13614,7 @@
     "message": "{PH1}"
   },
   "panels/timeline/TimelineUIUtils.ts | entity": {
-    "message": "Third party"
+    "message": "மூன்றாம் தரப்பு"
   },
   "panels/timeline/TimelineUIUtils.ts | entryIsHidden": {
     "message": "(உள்ளீடு மறைக்கப்பட்டுள்ளது)"
@@ -13817,9 +13778,6 @@
   "panels/timeline/TimelineUIUtils.ts | selectorStatsTitle": {
     "message": "தேர்விக்கான புள்ளிவிவரங்கள்"
   },
-  "panels/timeline/TimelineUIUtils.ts | selfTime": {
-    "message": "செயல்பாட்டின் கால அளவு"
-  },
   "panels/timeline/TimelineUIUtils.ts | size": {
     "message": "அளவு"
   },
@@ -13833,7 +13791,7 @@
     "message": "ஸ்டைல்ஷீட் URL"
   },
   "panels/timeline/TimelineUIUtils.ts | thirdPartyTable": {
-    "message": "1st / 3rd party table"
+    "message": "முதல்/மூன்றாம் தரப்பு அட்டவணை"
   },
   "panels/timeline/TimelineUIUtils.ts | timeSpentInRendering": {
     "message": "ரெண்டரிங்கில் செலவிட்ட நேரம்"
@@ -13849,9 +13807,6 @@
   },
   "panels/timeline/TimelineUIUtils.ts | timestamp": {
     "message": "நேரமுத்திரை"
-  },
-  "panels/timeline/TimelineUIUtils.ts | totalTime": {
-    "message": "மொத்த நேரம்"
   },
   "panels/timeline/TimelineUIUtils.ts | traceEvent": {
     "message": "டிரேஸ் நிகழ்வு"
@@ -13920,7 +13875,7 @@
     "message": "உபநிலைப் பாதைகளை அகற்று"
   },
   "panels/timeline/components/CPUThrottlingSelector.ts | calibrate": {
-    "message": "Calibrate…"
+    "message": "சீராக்குங்கள்…"
   },
   "panels/timeline/components/CPUThrottlingSelector.ts | cpu": {
     "message": "CPU: {PH1}"
@@ -13932,7 +13887,7 @@
     "message": "சீராக்கப்பட்ட முன்னமைவுகள்"
   },
   "panels/timeline/components/CPUThrottlingSelector.ts | recalibrate": {
-    "message": "Recalibrate…"
+    "message": "மீண்டும் சீரமையுங்கள்…"
   },
   "panels/timeline/components/CPUThrottlingSelector.ts | recommendedThrottling": {
     "message": "{PH1} – பரிந்துரைக்கப்படுகிறது"
@@ -14424,7 +14379,7 @@
     "message": "என்கோடிங் செய்த தரவு"
   },
   "panels/timeline/components/NetworkRequestDetails.ts | entity": {
-    "message": "Third party"
+    "message": "மூன்றாம் தரப்பு"
   },
   "panels/timeline/components/NetworkRequestDetails.ts | fromCache": {
     "message": "தற்காலிகச் சேமிப்பிலிருந்து"
@@ -14568,16 +14523,16 @@
     "message": "நுண்தகவல் என்பது பரிசோதனை நிலையில் உள்ள அம்சம் ஆகும். இதை மேம்படுத்த உங்கள் கருத்து உதவும்."
   },
   "panels/timeline/components/SidebarSingleInsightSet.ts | dismissTitle": {
-    "message": "Dismiss"
+    "message": "மூடுக"
   },
   "panels/timeline/components/SidebarSingleInsightSet.ts | fieldMismatchNotice": {
-    "message": "There are many reasons why local and field metrics [may not match](https://web.dev/articles/lab-and-field-data-differences). Adjust [throttling settings and device emulation](https://developer.chrome.com/docs/devtools/device-mode) to analyze traces more similar to the average user's environment."
+    "message": "லோக்கல் மற்றும் புல அளவீடுகள் [பொருந்தாமல் போவதற்குப்](https://web.dev/articles/lab-and-field-data-differences) பல காரணங்கள் உள்ளன. பொதுவான பயனர் சூழலுடன் மிகவும் பொருந்தும் டிரேஸ்களைப் பகுப்பாய்வு செய்ய, [த்ராட்லிங் அமைப்புகள் மற்றும் சாதனத்தின் மாதிரி இயக்கத்தைச்](https://developer.chrome.com/docs/devtools/device-mode) சரிசெய்யவும்."
   },
   "panels/timeline/components/SidebarSingleInsightSet.ts | fieldMismatchTitle": {
-    "message": "Field & local metrics mismatch"
+    "message": "புலம் மற்றும் லோக்கல் அளவீடுகள் பொருந்தவில்லை"
   },
   "panels/timeline/components/SidebarSingleInsightSet.ts | fieldScoreLabel": {
-    "message": "Field ({PH1})"
+    "message": "புலம் ({PH1})"
   },
   "panels/timeline/components/SidebarSingleInsightSet.ts | metricScore": {
     "message": "{PH1}: {PH2} {PH3} ஸ்கோர்"
@@ -15885,7 +15840,7 @@
     "message": "இதன்படி வரிசைப்படுத்து"
   },
   "ui/legacy/components/data_grid/DataGrid.ts | sortableColumn": {
-    "message": "Sortable column. Press enter to apply sorting filter"
+    "message": "வரிசைப்படுத்தக்கூடிய நெடுவரிசை. வரிசைப்படுத்துதல் ஃபில்டரைப் பயன்படுத்த Enter அழுத்தவும்"
   },
   "ui/legacy/components/data_grid/ShowMoreDataGridNode.ts | showAllD": {
     "message": "அனைத்தையும் ({PH1}) காட்டு"
@@ -16221,10 +16176,10 @@
     "message": "தேடு"
   },
   "ui/legacy/components/source_frame/PreviewFactory.ts | failedToLoadData": {
-    "message": "Failed to load data"
+    "message": "தரவைக் காட்ட முடியவில்லை"
   },
   "ui/legacy/components/source_frame/PreviewFactory.ts | nothingToPreview": {
-    "message": "Nothing to preview"
+    "message": "மாதிரிக்காட்சி எதுவுமில்லை"
   },
   "ui/legacy/components/source_frame/ResourceSourceFrame.ts | find": {
     "message": "தேடு"
