--- a/front_end/core/i18n/locales/uz.json
+++ b/front_end/core/i18n/locales/uz.json
@@ -105,7 +105,7 @@
     "message": "Tarmoq paneli"
   },
   "core/common/Revealer.ts | securityPanel": {
-    "message": "Security panel"
+    "message": "Xavfsizlik paneli"
   },
   "core/common/Revealer.ts | sourcesPanel": {
     "message": "Manbalar paneli"
@@ -2798,9 +2798,6 @@
   "panels/application/BackgroundServiceView.ts | clear": {
     "message": "Tozalash"
   },
-  "panels/application/BackgroundServiceView.ts | clickTheRecordButtonSOrHitSTo": {
-    "message": "Yozib olishni boshlash uchun {PH1} ustiga yoki {PH2} tugmalarini bosing."
-  },
   "panels/application/BackgroundServiceView.ts | devtoolsWillRecordAllSActivity": {
     "message": "DevTools barcha {PH1} harakatlarini 3 kungacha saqlaydi (hatto yopilganda ham)."
   },
@@ -2812,9 +2809,6 @@
   },
   "panels/application/BackgroundServiceView.ts | instanceId": {
     "message": "Namuna identifikatori"
-  },
-  "panels/application/BackgroundServiceView.ts | learnMore": {
-    "message": "Batafsil"
   },
   "panels/application/BackgroundServiceView.ts | noMetadataForThisEvent": {
     "message": "Bu hodisa uchun meta-axborot mavjud emas"
@@ -2947,9 +2941,6 @@
   },
   "panels/application/IndexedDBViews.ts | objectStores": {
     "message": "Obyektlar ombori"
-  },
-  "panels/application/IndexedDBViews.ts | pleaseConfirmDeleteOfSDatabase": {
-    "message": "“{PH1}” axborot ombori oʻchirilishini tasdiqlang."
   },
   "panels/application/IndexedDBViews.ts | primaryKey": {
     "message": "Asosiy kalit"
@@ -3236,12 +3227,6 @@
   "panels/application/SharedStorageEventsView.ts | clickToDisplayBody": {
     "message": "Hodisa parametrlarini ochish uchun istalgan umumiy xotira hodisasi ustiga bosing."
   },
-  "panels/application/SharedStorageItemsView.ts | key": {
-    "message": "Kalit"
-  },
-  "panels/application/SharedStorageItemsView.ts | selectAValueToPreview": {
-    "message": "Razm solish uchun qiymatni tanlang"
-  },
   "panels/application/SharedStorageItemsView.ts | sharedStorage": {
     "message": "Umumiy xotira"
   },
@@ -3257,17 +3242,8 @@
   "panels/application/SharedStorageItemsView.ts | sharedStorageItemEdited": {
     "message": "Xotira elementi tahrirlandi."
   },
-  "panels/application/SharedStorageItemsView.ts | sharedStorageItems": {
-    "message": "Umumiy xotira elementlari"
-  },
   "panels/application/SharedStorageItemsView.ts | sharedStorageItemsCleared": {
     "message": "Umumiy xotira elementlari tozalandi"
-  },
-  "panels/application/SharedStorageItemsView.ts | sharedStorageNumberEntries": {
-    "message": "Jadvalda chiqarilgan qaydlar soni: {PH1}"
-  },
-  "panels/application/SharedStorageItemsView.ts | value": {
-    "message": "Qiymat"
   },
   "panels/application/SharedStorageListTreeElement.ts | sharedStorage": {
     "message": "Umumiy xotira"
@@ -4262,9 +4238,6 @@
   "panels/application/components/TrustTokensView.ts | issuer": {
     "message": "Noshir"
   },
-  "panels/application/components/TrustTokensView.ts | noTrustTokensStored": {
-    "message": "Ishonch tokenlari saqlanmagan."
-  },
   "panels/application/components/TrustTokensView.ts | storedTokenCount": {
     "message": "Saqlangan tokenlar soni"
   },
@@ -4950,7 +4923,7 @@
     "message": "DOM uzilish nuqtalari roʻyxati"
   },
   "panels/browser_debugger/DOMBreakpointsSidebarPane.ts | noBreakpoints": {
-    "message": "No DOM breakpoints set"
+    "message": "DOM uzilish nuqtalari sozlanmagan"
   },
   "panels/browser_debugger/DOMBreakpointsSidebarPane.ts | nodeRemoved": {
     "message": "Node olib tashlandi"
@@ -5067,19 +5040,19 @@
     "message": "{PH1} (manba xaritasidan)"
   },
   "panels/changes/ChangesView.ts | binaryDataDescription": {
-    "message": "The changes tab doesn't show binary data changes"
+    "message": "Oʻzgarishlar sahifasida ishga tushirilgan fayldagi oʻzgarishlar chiqmaydi"
   },
   "panels/changes/ChangesView.ts | changesViewDescription": {
-    "message": "On this page you can track code changes made within DevTools."
+    "message": "Bu sahifada Dasturchi vositalari orqali kodga kiritilgan oʻzgarishlarni kuzatish mumkin."
   },
   "panels/changes/ChangesView.ts | copy": {
     "message": "Nusxa olish"
   },
   "panels/changes/ChangesView.ts | noChanges": {
-    "message": "No changes yet"
+    "message": "Oʻzgarishlarsiz"
   },
   "panels/changes/ChangesView.ts | noTextualDiff": {
-    "message": "No textual diff available"
+    "message": "Matnli farq mavjud emas"
   },
   "panels/changes/ChangesView.ts | sDeletions": {
     "message": "{n,plural, =1{# ta oʻchirish (-)}other{# ta oʻchirish (-)}}"
@@ -5298,7 +5271,7 @@
     "message": " M<XX>"
   },
   "panels/console/ConsoleViewMessage.ts | SeeIssueInCookieReport": {
-    "message": "Click to open privacy and security panel and show third-party cookie report"
+    "message": "Maxfiylik va xavfsizlik panelini ochish va tashqi cookie fayllari haqidagi hisobotni koʻrish uchun bosing"
   },
   "panels/console/ConsoleViewMessage.ts | assertionFailed": {
     "message": "Bajarilmadi: "
@@ -6747,7 +6720,7 @@
     "message": "Stek trassirovkasi"
   },
   "panels/explain/components/ConsoleInsight.ts | timedOut": {
-    "message": "Generating a response took too long. Please try again."
+    "message": "Javob yaratilishi uzoq vaqt oldi. Qayta urining."
   },
   "panels/explain/components/ConsoleInsight.ts | turnOnInSettings": {
     "message": "Konsoldagi ogohlantiruv va xatolarni AI yordamida tushunish va bartaraf etish uchun {PH1} funksiyasini yoqing."
@@ -7911,7 +7884,7 @@
     "message": "{PH1} kiritish"
   },
   "panels/mobile_throttling/ThrottlingManager.ts | calibrate": {
-    "message": "Calibrate…"
+    "message": "Kalibrlanmoqda…"
   },
   "panels/mobile_throttling/ThrottlingManager.ts | cpuThrottling": {
     "message": "CPU qotishi"
@@ -7935,7 +7908,7 @@
     "message": "Oflayn"
   },
   "panels/mobile_throttling/ThrottlingManager.ts | recalibrate": {
-    "message": "Recalibrate…"
+    "message": "Qayta kaliblanmoqda…"
   },
   "panels/mobile_throttling/ThrottlingManager.ts | recommendedThrottling": {
     "message": "{PH1} - tavsiya etiladi"
@@ -8895,7 +8868,7 @@
     "message": "Bu soʻrov cookie fayllarisiz."
   },
   "panels/network/RequestInitiatorView.ts | noInitiator": {
-    "message": "No initiator data"
+    "message": "Tashabbuskor maʼlumotlari yoʻq"
   },
   "panels/network/RequestInitiatorView.ts | requestCallStack": {
     "message": "Chaqiruvlar stekini talab qilish"
@@ -8961,10 +8934,10 @@
     "message": "Javob axboroti yuklanmadi"
   },
   "panels/network/RequestResponseView.ts | noPreview": {
-    "message": "Nothing to preview"
+    "message": "Razm solish uchun obyektlar yoʻq"
   },
   "panels/network/RequestResponseView.ts | thisRequestHasNoResponseData": {
-    "message": "This request has no response data available"
+    "message": "Bu soʻrov yuzasidan javob maʼlumotlari mavjud emas."
   },
   "panels/network/RequestTimingView.ts | cacheStorageCacheNameS": {
     "message": "Xotira keshi nomi: {PH1}"
@@ -10139,9 +10112,6 @@
   "panels/profiler/ProfilesPanel.ts | cantLoadProfileWhileAnother": {
     "message": "Bir profil yozilayotganda boshqasi yuklanmaydi."
   },
-  "panels/profiler/ProfilesPanel.ts | profileLoadingFailedS": {
-    "message": "Profil yuklanmadi: {PH1}."
-  },
   "panels/profiler/ProfilesPanel.ts | profiles": {
     "message": "Profillar"
   },
@@ -10251,7 +10221,7 @@
     "message": "Saqlash"
   },
   "panels/protocol_monitor/ProtocolMonitor.ts | selectAMessageToView": {
-    "message": "Select a message to see its details"
+    "message": "Tafsilotlarini koʻrish uchun xabar tanlang"
   },
   "panels/protocol_monitor/ProtocolMonitor.ts | selectTarget": {
     "message": "Maqsadni tanlang"
@@ -10290,7 +10260,7 @@
     "message": "Yozuvdan yoki tanlangan qadamdan nusxa olish"
   },
   "panels/recorder/RecorderController.ts | createRecording": {
-    "message": "Create recording"
+    "message": "Yozuv yaratish"
   },
   "panels/recorder/RecorderController.ts | deleteRecording": {
     "message": "Yozuvni oʻchirish"
@@ -10308,13 +10278,13 @@
     "message": "Kengaytmalarni koʻrsatish…"
   },
   "panels/recorder/RecorderController.ts | header": {
-    "message": "Nothing recorded yet"
+    "message": "Hech nima yozilmagan"
   },
   "panels/recorder/RecorderController.ts | importRecording": {
     "message": "Yozuvni import qilish"
   },
   "panels/recorder/RecorderController.ts | learnMore": {
-    "message": "Learn more"
+    "message": "Batafsil"
   },
   "panels/recorder/RecorderController.ts | noRecordings": {
     "message": "Yozuvlarsiz"
@@ -10323,7 +10293,7 @@
     "message": "ta yozuv"
   },
   "panels/recorder/RecorderController.ts | recordingDescription": {
-    "message": "Use recordings to create automated end-to-end tests or performance traces."
+    "message": "Yozuvlar yordamida oraliq sinovlarni yoki unumdorlik trassirovkasini avtomatik yaratish mumkin."
   },
   "panels/recorder/RecorderController.ts | replayRecording": {
     "message": "Yozuvni qayta ijro qilish"
@@ -11496,7 +11466,7 @@
     "message": "Izoh yaratish maqsadida konsol xabari, tegishli stek trassirovkasi, tegishli manba kodi va tegishli tarmoq soʻrovi sarlavhalari Googlega yuboriladi. Xodimlarimiz bu funksiyani yaxshilash maqsadida mazkur maʼlumotlarni koʻrishi mumkin."
   },
   "panels/settings/AISettingsTab.ts | consoleInsightsSendsDataNoLogging": {
-    "message": "The console message, associated stack trace, related source code, and the associated network headers are sent to Google to generate explanations. This data will not be used to improve Google’s AI models."
+    "message": "Izoh yaratish maqsadida konsol xabari, tegishli stek trassirovkasi, tegishli manba kodi va tegishli tarmoq soʻrovi sarlavhalari Googlega yuboriladi. Bu maʼlumotlar Google AI modellarini yaxshilashda ishlatilmaydi."
   },
   "panels/settings/AISettingsTab.ts | dataCollection": {
     "message": "Mintaqangizga qarab, Google maʼlumotlarni olishdan voz kechishi mumkin"
@@ -11532,7 +11502,7 @@
     "message": "Tekshiruvdagi sahifa Veb API, tarmoq soʻrovi, fayl va unumdorlik trassirovkasi orqali murojaat qiladigan har qanday maʼlumotlar izoh tuzish maqsadida Googlega yuboriladi. Xodimlarimiz bu funksiyani yaxshilash maqsadida mazkur maʼlumotlarni koʻrishi mumkin. Sahifalarda shaxisy yoki qaltis axborot kiritmang."
   },
   "panels/settings/AISettingsTab.ts | freestylerSendsDataNoLogging": {
-    "message": "Any data the inspected page can access via Web APIs, network requests, files, and performance traces are sent to Google to generate explanations. This data will not be used to improve Google’s AI models."
+    "message": "Tekshiruvdagi sahifa Veb API, tarmoq soʻrovi, fayl va unumdorlik trassirovkasi orqali murojaat qiladigan har qanday maʼlumotlar izoh tuzish maqsadida Googlega yuboriladi. Bu maʼlumotlar Google AI modellarini yaxshilashda ishlatilmaydi."
   },
   "panels/settings/AISettingsTab.ts | helpUnderstandConsole": {
     "message": "Konsoldagi ogohlantirish va xatolarni tushunish va tuzatishga yordam beradi"
@@ -12259,15 +12229,6 @@
   },
   "panels/sources/NavigatorView.ts | actionCannotBeUndone": {
     "message": "Bu amal bekor qilinmaydi."
-  },
-  "panels/sources/NavigatorView.ts | areYouSureYouWantToDeleteFolder": {
-    "message": "Bu jild va uning tarkibi oʻchirilsinmi?"
-  },
-  "panels/sources/NavigatorView.ts | areYouSureYouWantToDeleteThis": {
-    "message": "Bu fayl aniq oʻchirilsinmi?"
-  },
-  "panels/sources/NavigatorView.ts | areYouSureYouWantToExcludeThis": {
-    "message": "Bu jild aniq istisno qilinsinmi?"
   },
   "panels/sources/NavigatorView.ts | areYouSureYouWantToRemoveThis": {
     "message": "{PH1} ishchi maydondan olib tashlansinmi?"
@@ -13041,7 +13002,7 @@
     "message": "Bu yerda Server-Timing tarmoq javob sarlavhalaridan olingan vaqt belgilari mavjud. Ularning boshlash vaqti ehtimoliy hisoblangan va aniq boʻlmasligi mumkin."
   },
   "panels/timeline/ThirdPartyTreeView.ts | firstOrThirdPartyName": {
-    "message": "1st / 3rd party"
+    "message": "Xususiy yoki tashqi obyektlar"
   },
   "panels/timeline/ThirdPartyTreeView.ts | selfTime": {
     "message": "Mustaqil vaqt"
@@ -13254,7 +13215,7 @@
     "message": "Tavsif"
   },
   "panels/timeline/TimelinePanel.ts | dimThirdParties": {
-    "message": "Dim 3rd parties"
+    "message": "Tashqi kontent chiqishini kamaytirish"
   },
   "panels/timeline/TimelinePanel.ts | disableJavascriptSamples": {
     "message": "JavaScript namunalarini faolsizlantirish"
@@ -13374,7 +13335,7 @@
     "message": "Yilnoma toʻxtatilmoqda…"
   },
   "panels/timeline/TimelinePanel.ts | thirdPartiesByThirdPartyWeb": {
-    "message": "3rd parties classified by third-party-web"
+    "message": "Tashqi saytlar tasnifidagi tashqi kontent"
   },
   "panels/timeline/TimelinePanel.ts | time": {
     "message": "Vaqt"
@@ -13653,7 +13614,7 @@
     "message": "{PH1}"
   },
   "panels/timeline/TimelineUIUtils.ts | entity": {
-    "message": "Third party"
+    "message": "Tashqi obyekt"
   },
   "panels/timeline/TimelineUIUtils.ts | entryIsHidden": {
     "message": "(qayd berkitilgan)"
@@ -13817,9 +13778,6 @@
   "panels/timeline/TimelineUIUtils.ts | selectorStatsTitle": {
     "message": "Selektorlar statistikasi"
   },
-  "panels/timeline/TimelineUIUtils.ts | selfTime": {
-    "message": "Mustaqil vaqt"
-  },
   "panels/timeline/TimelineUIUtils.ts | size": {
     "message": "Hajmi"
   },
@@ -13833,7 +13791,7 @@
     "message": "Stylesheet URL manzili"
   },
   "panels/timeline/TimelineUIUtils.ts | thirdPartyTable": {
-    "message": "1st / 3rd party table"
+    "message": "Xususiy yoki tashqi jadval"
   },
   "panels/timeline/TimelineUIUtils.ts | timeSpentInRendering": {
     "message": "Renderlashga sarflangan vaqt"
@@ -13849,9 +13807,6 @@
   },
   "panels/timeline/TimelineUIUtils.ts | timestamp": {
     "message": "Vaqt belgisi"
-  },
-  "panels/timeline/TimelineUIUtils.ts | totalTime": {
-    "message": "Umumiy vaqt"
   },
   "panels/timeline/TimelineUIUtils.ts | traceEvent": {
     "message": "Trassirovka hodisasi"
@@ -13920,7 +13875,7 @@
     "message": "Quyi sahifalar zanjirini olib tashlash"
   },
   "panels/timeline/components/CPUThrottlingSelector.ts | calibrate": {
-    "message": "Calibrate…"
+    "message": "Kalibrlanmoqda…"
   },
   "panels/timeline/components/CPUThrottlingSelector.ts | cpu": {
     "message": "CPU: {PH1}"
@@ -13932,7 +13887,7 @@
     "message": "Kalibrlangan andozalar"
   },
   "panels/timeline/components/CPUThrottlingSelector.ts | recalibrate": {
-    "message": "Recalibrate…"
+    "message": "Qayta kaliblanmoqda…"
   },
   "panels/timeline/components/CPUThrottlingSelector.ts | recommendedThrottling": {
     "message": "{PH1} - tavsiya etiladi"
@@ -14424,7 +14379,7 @@
     "message": "Kodlangan axborot"
   },
   "panels/timeline/components/NetworkRequestDetails.ts | entity": {
-    "message": "Third party"
+    "message": "Tashqi obyekt"
   },
   "panels/timeline/components/NetworkRequestDetails.ts | fromCache": {
     "message": "Keshdan"
@@ -14568,16 +14523,16 @@
     "message": "Statistika — tajribaviy funksiya. Fikr-mulohazalaringiz uni yaxshilashga yordam beradi."
   },
   "panels/timeline/components/SidebarSingleInsightSet.ts | dismissTitle": {
-    "message": "Dismiss"
+    "message": "Yopish"
   },
   "panels/timeline/components/SidebarSingleInsightSet.ts | fieldMismatchNotice": {
-    "message": "There are many reasons why local and field metrics [may not match](https://web.dev/articles/lab-and-field-data-differences). Adjust [throttling settings and device emulation](https://developer.chrome.com/docs/devtools/device-mode) to analyze traces more similar to the average user's environment."
+    "message": "Qurilmadagi va kuzatuvdagi axborot koʻrsatkichlari [mos kelmasligi mumkin](https://web.dev/articles/lab-and-field-data-differences) va buning sabablari bir qancha. Kuzatuvdagi trassirovkani oʻrtacha muhit koʻrsatkichlariga yaqinlashtirish uchun [qotirish sozlamalari va qurilma emulyatsiyasini](https://developer.chrome.com/docs/devtools/device-mode) tuzating."
   },
   "panels/timeline/components/SidebarSingleInsightSet.ts | fieldMismatchTitle": {
-    "message": "Field & local metrics mismatch"
+    "message": "Qurilmadagi va kuzatuvdagi axborot koʻrsatkichlari mos emas"
   },
   "panels/timeline/components/SidebarSingleInsightSet.ts | fieldScoreLabel": {
-    "message": "Field ({PH1})"
+    "message": "Maydon ({PH1})"
   },
   "panels/timeline/components/SidebarSingleInsightSet.ts | metricScore": {
     "message": "{PH1}: {PH2} {PH3} baho"
@@ -15885,7 +15840,7 @@
     "message": "Saralash"
   },
   "ui/legacy/components/data_grid/DataGrid.ts | sortableColumn": {
-    "message": "Sortable column. Press enter to apply sorting filter"
+    "message": "Saralanadigan ustun. Saralash filtrini ishlatish uchun Enter tugmasini bosing"
   },
   "ui/legacy/components/data_grid/ShowMoreDataGridNode.ts | showAllD": {
     "message": "Hammasi ({PH1})"
@@ -16221,10 +16176,10 @@
     "message": "Qidirish"
   },
   "ui/legacy/components/source_frame/PreviewFactory.ts | failedToLoadData": {
-    "message": "Failed to load data"
+    "message": "Maʼlumotlar yuklanmadi."
   },
   "ui/legacy/components/source_frame/PreviewFactory.ts | nothingToPreview": {
-    "message": "Nothing to preview"
+    "message": "Razm solish uchun obyektlar yoʻq"
   },
   "ui/legacy/components/source_frame/ResourceSourceFrame.ts | find": {
     "message": "Qidirish"
